@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2024 the original author or authors.
+ * Copyright 2002-2019 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,46 +16,31 @@
 
 package org.springframework.beans;
 
-import java.beans.PropertyEditorSupport;
-import java.math.BigDecimal;
-import java.math.BigInteger;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collection;
-import java.util.Collections;
-import java.util.HashMap;
-import java.util.HashSet;
-import java.util.List;
-import java.util.Map;
-import java.util.Properties;
-import java.util.Set;
-import java.util.SortedMap;
-import java.util.SortedSet;
-import java.util.TreeMap;
-import java.util.TreeSet;
-
+import org.apache.commons.logging.LogFactory;
 import org.junit.jupiter.api.Test;
-
 import org.springframework.beans.factory.annotation.Autowire;
+import org.springframework.beans.propertyeditors.CustomNumberEditor;
 import org.springframework.beans.propertyeditors.StringArrayPropertyEditor;
 import org.springframework.beans.propertyeditors.StringTrimmerEditor;
 import org.springframework.beans.support.DerivedFromProtectedBaseBean;
-import org.springframework.beans.testfixture.beans.BooleanTestBean;
-import org.springframework.beans.testfixture.beans.ITestBean;
-import org.springframework.beans.testfixture.beans.IndexedTestBean;
-import org.springframework.beans.testfixture.beans.NumberTestBean;
-import org.springframework.beans.testfixture.beans.TestBean;
 import org.springframework.core.convert.ConversionFailedException;
 import org.springframework.core.convert.TypeDescriptor;
 import org.springframework.core.convert.support.DefaultConversionService;
 import org.springframework.core.convert.support.GenericConversionService;
 import org.springframework.lang.Nullable;
+import org.springframework.tests.Assume;
+import org.springframework.tests.EnabledForTestGroups;
+import org.springframework.tests.sample.beans.*;
+import org.springframework.util.StopWatch;
 import org.springframework.util.StringUtils;
 
-import static org.assertj.core.api.Assertions.assertThat;
-import static org.assertj.core.api.Assertions.assertThatExceptionOfType;
-import static org.assertj.core.api.Assertions.assertThatIllegalArgumentException;
-import static org.assertj.core.api.Assertions.within;
+import java.beans.PropertyEditorSupport;
+import java.math.BigDecimal;
+import java.math.BigInteger;
+import java.util.*;
+
+import static org.assertj.core.api.Assertions.*;
+import static org.springframework.tests.TestGroup.PERFORMANCE;
 
 /**
  * Shared tests for property accessors.
@@ -68,25 +53,25 @@ import static org.assertj.core.api.Assertions.within;
  * @author Dave Syer
  * @author Stephane Nicoll
  */
-abstract class AbstractPropertyAccessorTests {
+public abstract class AbstractPropertyAccessorTests {
 
 	protected abstract AbstractPropertyAccessor createAccessor(Object target);
 
 
 	@Test
-	void createWithNullTarget() {
+	public void createWithNullTarget() {
 		assertThatIllegalArgumentException().isThrownBy(() -> createAccessor(null));
 	}
 
 	@Test
-	void isReadableProperty() {
+	public void isReadableProperty() {
 		AbstractPropertyAccessor accessor = createAccessor(new Simple("John", 2));
 
 		assertThat(accessor.isReadableProperty("name")).isTrue();
 	}
 
 	@Test
-	void isReadablePropertyNotReadable() {
+	public void isReadablePropertyNotReadable() {
 		AbstractPropertyAccessor accessor = createAccessor(new NoRead());
 
 		assertThat(accessor.isReadableProperty("age")).isFalse();
@@ -96,42 +81,42 @@ abstract class AbstractPropertyAccessorTests {
 	 * Shouldn't throw an exception: should just return false
 	 */
 	@Test
-	void isReadablePropertyNoSuchProperty() {
+	public void isReadablePropertyNoSuchProperty() {
 		AbstractPropertyAccessor accessor = createAccessor(new NoRead());
 
 		assertThat(accessor.isReadableProperty("xxxxx")).isFalse();
 	}
 
 	@Test
-	void isReadablePropertyNull() {
+	public void isReadablePropertyNull() {
 		AbstractPropertyAccessor accessor = createAccessor(new NoRead());
 
 		assertThatIllegalArgumentException().isThrownBy(() -> accessor.isReadableProperty(null));
 	}
 
 	@Test
-	void isWritableProperty() {
+	public void isWritableProperty() {
 		AbstractPropertyAccessor accessor = createAccessor(new Simple("John", 2));
 
 		assertThat(accessor.isWritableProperty("name")).isTrue();
 	}
 
 	@Test
-	void isWritablePropertyNull() {
+	public void isWritablePropertyNull() {
 		AbstractPropertyAccessor accessor = createAccessor(new NoRead());
 
 		assertThatIllegalArgumentException().isThrownBy(() -> accessor.isWritableProperty(null));
 	}
 
 	@Test
-	void isWritablePropertyNoSuchProperty() {
+	public void isWritablePropertyNoSuchProperty() {
 		AbstractPropertyAccessor accessor = createAccessor(new NoRead());
 
 		assertThat(accessor.isWritableProperty("xxxxx")).isFalse();
 	}
 
 	@Test
-	void isReadableWritableForIndexedProperties() {
+	public void isReadableWritableForIndexedProperties() {
 		IndexedTestBean target = new IndexedTestBean();
 		AbstractPropertyAccessor accessor = createAccessor(target);
 
@@ -139,14 +124,12 @@ abstract class AbstractPropertyAccessorTests {
 		assertThat(accessor.isReadableProperty("list")).isTrue();
 		assertThat(accessor.isReadableProperty("set")).isTrue();
 		assertThat(accessor.isReadableProperty("map")).isTrue();
-		assertThat(accessor.isReadableProperty("myTestBeans")).isTrue();
 		assertThat(accessor.isReadableProperty("xxx")).isFalse();
 
 		assertThat(accessor.isWritableProperty("array")).isTrue();
 		assertThat(accessor.isWritableProperty("list")).isTrue();
 		assertThat(accessor.isWritableProperty("set")).isTrue();
 		assertThat(accessor.isWritableProperty("map")).isTrue();
-		assertThat(accessor.isWritableProperty("myTestBeans")).isTrue();
 		assertThat(accessor.isWritableProperty("xxx")).isFalse();
 
 		assertThat(accessor.isReadableProperty("array[0]")).isTrue();
@@ -161,8 +144,6 @@ abstract class AbstractPropertyAccessorTests {
 		assertThat(accessor.isReadableProperty("map[key4][0].name")).isTrue();
 		assertThat(accessor.isReadableProperty("map[key4][1]")).isTrue();
 		assertThat(accessor.isReadableProperty("map[key4][1].name")).isTrue();
-		assertThat(accessor.isReadableProperty("myTestBeans[0]")).isTrue();
-		assertThat(accessor.isReadableProperty("myTestBeans[1]")).isFalse();
 		assertThat(accessor.isReadableProperty("array[key1]")).isFalse();
 
 		assertThat(accessor.isWritableProperty("array[0]")).isTrue();
@@ -177,49 +158,47 @@ abstract class AbstractPropertyAccessorTests {
 		assertThat(accessor.isWritableProperty("map[key4][0].name")).isTrue();
 		assertThat(accessor.isWritableProperty("map[key4][1]")).isTrue();
 		assertThat(accessor.isWritableProperty("map[key4][1].name")).isTrue();
-		assertThat(accessor.isReadableProperty("myTestBeans[0]")).isTrue();
-		assertThat(accessor.isReadableProperty("myTestBeans[1]")).isFalse();
 		assertThat(accessor.isWritableProperty("array[key1]")).isFalse();
 	}
 
 	@Test
-	void getSimpleProperty() {
+	public void getSimpleProperty() {
 		Simple target = new Simple("John", 2);
 		AbstractPropertyAccessor accessor = createAccessor(target);
 		assertThat(accessor.getPropertyValue("name")).isEqualTo("John");
 	}
 
 	@Test
-	void getNestedProperty() {
+	public void getNestedProperty() {
 		Person target = createPerson("John", "London", "UK");
 		AbstractPropertyAccessor accessor = createAccessor(target);
 		assertThat(accessor.getPropertyValue("address.city")).isEqualTo("London");
 	}
 
 	@Test
-	void getNestedDeepProperty() {
+	public void getNestedDeepProperty() {
 		Person target = createPerson("John", "London", "UK");
 		AbstractPropertyAccessor accessor = createAccessor(target);
 		assertThat(accessor.getPropertyValue("address.country.name")).isEqualTo("UK");
 	}
 
 	@Test
-	void getAnotherNestedDeepProperty() {
+	public void getAnotherNestedDeepProperty() {
 		ITestBean target = new TestBean("rod", 31);
 		ITestBean kerry = new TestBean("kerry", 35);
 		target.setSpouse(kerry);
 		kerry.setSpouse(target);
 		AbstractPropertyAccessor accessor = createAccessor(target);
 		Integer KA = (Integer) accessor.getPropertyValue("spouse.age");
-		assertThat(KA).as("kerry is 35").isEqualTo(35);
+		assertThat(KA == 35).as("kerry is 35").isTrue();
 		Integer RA = (Integer) accessor.getPropertyValue("spouse.spouse.age");
-		assertThat(RA).as("rod is 31, not" + RA).isEqualTo(31);
+		assertThat(RA == 31).as("rod is 31, not" + RA).isTrue();
 		ITestBean spousesSpouse = (ITestBean) accessor.getPropertyValue("spouse.spouse");
-		assertThat(target).as("spousesSpouse = initial point").isSameAs(spousesSpouse);
+		assertThat(target == spousesSpouse).as("spousesSpouse = initial point").isTrue();
 	}
 
 	@Test
-	void getPropertyIntermediatePropertyIsNull() {
+	public void getPropertyIntermediatePropertyIsNull() {
 		Person target = createPerson("John", "London", "UK");
 		target.address = null;
 		AbstractPropertyAccessor accessor = createAccessor(target);
@@ -232,7 +211,7 @@ abstract class AbstractPropertyAccessorTests {
 	}
 
 	@Test
-	void getPropertyIntermediatePropertyIsNullWithAutoGrow() {
+	public void getPropertyIntermediatePropertyIsNullWithAutoGrow() {
 		Person target = createPerson("John", "London", "UK");
 		target.address = null;
 		AbstractPropertyAccessor accessor = createAccessor(target);
@@ -242,18 +221,17 @@ abstract class AbstractPropertyAccessorTests {
 	}
 
 	@Test
-	@SuppressWarnings("unchecked")
-	void getPropertyIntermediateMapEntryIsNullWithAutoGrow() {
+	public void getPropertyIntermediateMapEntryIsNullWithAutoGrow() {
 		Foo target = new Foo();
 		AbstractPropertyAccessor accessor = createAccessor(target);
 		accessor.setConversionService(new DefaultConversionService());
 		accessor.setAutoGrowNestedPaths(true);
 		accessor.setPropertyValue("listOfMaps[0]['luckyNumber']", "9");
-		assertThat(target.listOfMaps.get(0)).containsEntry("luckyNumber", "9");
+		assertThat(target.listOfMaps.get(0).get("luckyNumber")).isEqualTo("9");
 	}
 
 	@Test
-	void getUnknownProperty() {
+	public void getUnknownProperty() {
 		Simple target = new Simple("John", 2);
 		AbstractPropertyAccessor accessor = createAccessor(target);
 		assertThatExceptionOfType(NotReadablePropertyException.class).isThrownBy(() ->
@@ -265,7 +243,7 @@ abstract class AbstractPropertyAccessorTests {
 	}
 
 	@Test
-	void getUnknownNestedProperty() {
+	public void getUnknownNestedProperty() {
 		Person target = createPerson("John", "London", "UK");
 		AbstractPropertyAccessor accessor = createAccessor(target);
 
@@ -274,7 +252,7 @@ abstract class AbstractPropertyAccessorTests {
 	}
 
 	@Test
-	void setSimpleProperty() {
+	public void setSimpleProperty() {
 		Simple target = new Simple("John", 2);
 		AbstractPropertyAccessor accessor = createAccessor(target);
 
@@ -285,7 +263,7 @@ abstract class AbstractPropertyAccessorTests {
 	}
 
 	@Test
-	void setNestedProperty() {
+	public void setNestedProperty() {
 		Person target = createPerson("John", "Paris", "FR");
 		AbstractPropertyAccessor accessor = createAccessor(target);
 
@@ -294,49 +272,48 @@ abstract class AbstractPropertyAccessorTests {
 	}
 
 	@Test
-	void setNestedPropertyPolymorphic() {
+	public void setNestedPropertyPolymorphic() throws Exception {
 		ITestBean target = new TestBean("rod", 31);
 		ITestBean kerry = new Employee();
 
 		AbstractPropertyAccessor accessor = createAccessor(target);
 		accessor.setPropertyValue("spouse", kerry);
-		accessor.setPropertyValue("spouse.age", 35);
+		accessor.setPropertyValue("spouse.age", new Integer(35));
 		accessor.setPropertyValue("spouse.name", "Kerry");
 		accessor.setPropertyValue("spouse.company", "Lewisham");
-		assertThat(kerry.getName()).as("kerry name is Kerry").isEqualTo("Kerry");
+		assertThat(kerry.getName().equals("Kerry")).as("kerry name is Kerry").isTrue();
 
-		assertThat(target.getSpouse()).as("nested set worked").isSameAs(kerry);
-		assertThat(kerry.getSpouse()).as("no back relation").isNull();
+		assertThat(target.getSpouse() == kerry).as("nested set worked").isTrue();
+		assertThat(kerry.getSpouse() == null).as("no back relation").isTrue();
 		accessor.setPropertyValue(new PropertyValue("spouse.spouse", target));
-		assertThat(kerry.getSpouse()).as("nested set worked").isSameAs(target);
+		assertThat(kerry.getSpouse() == target).as("nested set worked").isTrue();
 
 		AbstractPropertyAccessor kerryAccessor = createAccessor(kerry);
-		assertThat(kerryAccessor.getPropertyValue("spouse.spouse.spouse.spouse.company")).as("spouse.spouse.spouse.spouse.company=Lewisham")
-				.isEqualTo("Lewisham");
+		assertThat("Lewisham".equals(kerryAccessor.getPropertyValue("spouse.spouse.spouse.spouse.company"))).as("spouse.spouse.spouse.spouse.company=Lewisham").isTrue();
 	}
 
 	@Test
-	void setAnotherNestedProperty() {
+	public void setAnotherNestedProperty() throws Exception {
 		ITestBean target = new TestBean("rod", 31);
 		ITestBean kerry = new TestBean("kerry", 0);
 
 		AbstractPropertyAccessor accessor = createAccessor(target);
 		accessor.setPropertyValue("spouse", kerry);
 
-		assertThat(target.getSpouse()).as("nested set worked").isSameAs(kerry);
-		assertThat(kerry.getSpouse()).as("no back relation").isNull();
+		assertThat(target.getSpouse() == kerry).as("nested set worked").isTrue();
+		assertThat(kerry.getSpouse() == null).as("no back relation").isTrue();
 		accessor.setPropertyValue(new PropertyValue("spouse.spouse", target));
-		assertThat(kerry.getSpouse()).as("nested set worked").isSameAs(target);
-		assertThat(kerry.getAge()).as("kerry age not set").isEqualTo(0);
+		assertThat(kerry.getSpouse() == target).as("nested set worked").isTrue();
+		assertThat(kerry.getAge() == 0).as("kerry age not set").isTrue();
 		accessor.setPropertyValue(new PropertyValue("spouse.age", 35));
-		assertThat(kerry.getAge()).as("Set primitive on spouse").isEqualTo(35);
+		assertThat(kerry.getAge() == 35).as("Set primitive on spouse").isTrue();
 
 		assertThat(accessor.getPropertyValue("spouse")).isEqualTo(kerry);
 		assertThat(accessor.getPropertyValue("spouse.spouse")).isEqualTo(target);
 	}
 
 	@Test
-	void setYetAnotherNestedProperties() {
+	public void setYetAnotherNestedProperties() {
 		String doctorCompany = "";
 		String lawyerCompany = "Dr. Sueem";
 		TestBean target = new TestBean();
@@ -348,7 +325,7 @@ abstract class AbstractPropertyAccessorTests {
 	}
 
 	@Test
-	void setNestedDeepProperty() {
+	public void setNestedDeepProperty() {
 		Person target = createPerson("John", "Paris", "FR");
 		AbstractPropertyAccessor accessor = createAccessor(target);
 
@@ -357,7 +334,7 @@ abstract class AbstractPropertyAccessorTests {
 	}
 
 	@Test
-	void testErrorMessageOfNestedProperty() {
+	public void testErrorMessageOfNestedProperty() {
 		ITestBean target = new TestBean();
 		ITestBean child = new DifferentTestBean();
 		child.setName("test");
@@ -367,12 +344,12 @@ abstract class AbstractPropertyAccessorTests {
 			accessor.getPropertyValue("spouse.bla");
 		}
 		catch (NotReadablePropertyException ex) {
-			assertThat(ex.getMessage()).contains(TestBean.class.getName());
+			assertThat(ex.getMessage().contains(TestBean.class.getName())).isTrue();
 		}
 	}
 
 	@Test
-	void setPropertyIntermediatePropertyIsNull() {
+	public void setPropertyIntermediatePropertyIsNull() {
 		Person target = createPerson("John", "Paris", "FR");
 		target.address.country = null;
 		AbstractPropertyAccessor accessor = createAccessor(target);
@@ -386,16 +363,16 @@ abstract class AbstractPropertyAccessorTests {
 	}
 
 	@Test
-	void setAnotherPropertyIntermediatePropertyIsNull() {
+	public void setAnotherPropertyIntermediatePropertyIsNull() throws Exception {
 		ITestBean target = new TestBean("rod", 31);
 		AbstractPropertyAccessor accessor = createAccessor(target);
 		assertThatExceptionOfType(NullValueInNestedPathException.class).isThrownBy(() ->
-				accessor.setPropertyValue("spouse.age", 31))
+						accessor.setPropertyValue("spouse.age", new Integer(31)))
 			.satisfies(ex -> assertThat(ex.getPropertyName()).isEqualTo("spouse"));
 	}
 
 	@Test
-	void setPropertyIntermediatePropertyIsNullWithAutoGrow() {
+	public void setPropertyIntermediatePropertyIsNullWithAutoGrow() {
 		Person target = createPerson("John", "Paris", "FR");
 		target.address.country = null;
 		AbstractPropertyAccessor accessor = createAccessor(target);
@@ -406,7 +383,7 @@ abstract class AbstractPropertyAccessorTests {
 	}
 
 	@Test
-	void setPropertyIntermediateListIsNullWithAutoGrow() {
+	public void setPropertyIntermediateListIsNullWithAutoGrow() {
 		Foo target = new Foo();
 		AbstractPropertyAccessor accessor = createAccessor(target);
 		accessor.setConversionService(new DefaultConversionService());
@@ -414,11 +391,11 @@ abstract class AbstractPropertyAccessorTests {
 		Map<String, String> map = new HashMap<>();
 		map.put("favoriteNumber", "9");
 		accessor.setPropertyValue("list[0]", map);
-		assertThat(target.list).element(0).isEqualTo(map);
+		assertThat(target.list.get(0)).isEqualTo(map);
 	}
 
 	@Test
-	void setPropertyIntermediateListIsNullWithNoConversionService() {
+	public void setPropertyIntermediateListIsNullWithNoConversionService() {
 		Foo target = new Foo();
 		AbstractPropertyAccessor accessor = createAccessor(target);
 		accessor.setAutoGrowNestedPaths(true);
@@ -427,7 +404,7 @@ abstract class AbstractPropertyAccessorTests {
 	}
 
 	@Test
-	void setPropertyIntermediateListIsNullWithBadConversionService() {
+	public void setPropertyIntermediateListIsNullWithBadConversionService() {
 		Foo target = new Foo();
 		AbstractPropertyAccessor accessor = createAccessor(target);
 		accessor.setConversionService(new GenericConversionService() {
@@ -443,24 +420,24 @@ abstract class AbstractPropertyAccessorTests {
 
 
 	@Test
-	void setEmptyPropertyValues() {
+	public void setEmptyPropertyValues() {
 		TestBean target = new TestBean();
 		int age = 50;
 		String name = "Tony";
 		target.setAge(age);
 		target.setName(name);
 		AbstractPropertyAccessor accessor = createAccessor(target);
-		assertThat(target.getAge()).as("age is OK").isEqualTo(age);
-		assertThat(name).as("name is OK").isEqualTo(target.getName());
+		assertThat(target.getAge() == age).as("age is OK").isTrue();
+		assertThat(name.equals(target.getName())).as("name is OK").isTrue();
 		accessor.setPropertyValues(new MutablePropertyValues());
 		// Check its unchanged
-		assertThat(target.getAge()).as("age is OK").isEqualTo(age);
-		assertThat(name).as("name is OK").isEqualTo(target.getName());
+		assertThat(target.getAge() == age).as("age is OK").isTrue();
+		assertThat(name.equals(target.getName())).as("name is OK").isTrue();
 	}
 
 
 	@Test
-	void setValidPropertyValues() {
+	public void setValidPropertyValues() {
 		TestBean target = new TestBean();
 		String newName = "tony";
 		int newAge = 65;
@@ -471,54 +448,54 @@ abstract class AbstractPropertyAccessorTests {
 		pvs.addPropertyValue(new PropertyValue("name", newName));
 		pvs.addPropertyValue(new PropertyValue("touchy", newTouchy));
 		accessor.setPropertyValues(pvs);
-		assertThat(target.getName()).as("Name property should have changed").isEqualTo(newName);
-		assertThat(target.getTouchy()).as("Touchy property should have changed").isEqualTo(newTouchy);
-		assertThat(target.getAge()).as("Age property should have changed").isEqualTo(newAge);
+		assertThat(target.getName().equals(newName)).as("Name property should have changed").isTrue();
+		assertThat(target.getTouchy().equals(newTouchy)).as("Touchy property should have changed").isTrue();
+		assertThat(target.getAge() == newAge).as("Age property should have changed").isTrue();
 	}
 
 	@Test
-	void setIndividualValidPropertyValues() {
+	public void setIndividualValidPropertyValues() {
 		TestBean target = new TestBean();
 		String newName = "tony";
 		int newAge = 65;
 		String newTouchy = "valid";
 		AbstractPropertyAccessor accessor = createAccessor(target);
-		accessor.setPropertyValue("age", newAge);
+		accessor.setPropertyValue("age", new Integer(newAge));
 		accessor.setPropertyValue(new PropertyValue("name", newName));
 		accessor.setPropertyValue(new PropertyValue("touchy", newTouchy));
-		assertThat(target.getName()).as("Name property should have changed").isEqualTo(newName);
-		assertThat(target.getTouchy()).as("Touchy property should have changed").isEqualTo(newTouchy);
-		assertThat(target.getAge()).as("Age property should have changed").isEqualTo(newAge);
+		assertThat(target.getName().equals(newName)).as("Name property should have changed").isTrue();
+		assertThat(target.getTouchy().equals(newTouchy)).as("Touchy property should have changed").isTrue();
+		assertThat(target.getAge() == newAge).as("Age property should have changed").isTrue();
 	}
 
 	@Test
-	void setPropertyIsReflectedImmediately() {
+	public void setPropertyIsReflectedImmediately() {
 		TestBean target = new TestBean();
 		int newAge = 33;
 		AbstractPropertyAccessor accessor = createAccessor(target);
 		target.setAge(newAge);
 		Object bwAge = accessor.getPropertyValue("age");
-		assertThat(bwAge).as("Age is an integer").isInstanceOf(Integer.class);
+		assertThat(bwAge instanceof Integer).as("Age is an integer").isTrue();
 		assertThat(bwAge).as("Bean wrapper must pick up changes").isEqualTo(newAge);
 	}
 
 	@Test
-	void setPropertyToNull() {
+	public void setPropertyToNull() {
 		TestBean target = new TestBean();
 		target.setName("Frank");    // we need to change it back
 		target.setSpouse(target);
 		AbstractPropertyAccessor accessor = createAccessor(target);
-		assertThat(target.getName()).as("name is not null to start off").isNotNull();
+		assertThat(target.getName() != null).as("name is not null to start off").isTrue();
 		accessor.setPropertyValue("name", null);
-		assertThat(target.getName()).as("name is now null").isNull();
+		assertThat(target.getName() == null).as("name is now null").isTrue();
 		// now test with non-string
-		assertThat(target.getSpouse()).as("spouse is not null to start off").isNotNull();
+		assertThat(target.getSpouse() != null).as("spouse is not null to start off").isTrue();
 		accessor.setPropertyValue("spouse", null);
-		assertThat(target.getSpouse()).as("spouse is now null").isNull();
+		assertThat(target.getSpouse() == null).as("spouse is now null").isTrue();
 	}
 
 	@Test
-	void setIndexedPropertyIgnored() {
+	public void setIndexedPropertyIgnored() {
 		MutablePropertyValues values = new MutablePropertyValues();
 		values.add("toBeIgnored[0]", 42);
 		AbstractPropertyAccessor accessor = createAccessor(new Object());
@@ -526,7 +503,7 @@ abstract class AbstractPropertyAccessorTests {
 	}
 
 	@Test
-	void setPropertyWithPrimitiveConversion() {
+	public void setPropertyWithPrimitiveConversion() {
 		MutablePropertyValues values = new MutablePropertyValues();
 		values.add("name", 42);
 		TestBean target = new TestBean();
@@ -536,7 +513,7 @@ abstract class AbstractPropertyAccessorTests {
 	}
 
 	@Test
-	void setPropertyWithCustomEditor() {
+	public void setPropertyWithCustomEditor() {
 		MutablePropertyValues values = new MutablePropertyValues();
 		values.add("name", Integer.class);
 		TestBean target = new TestBean();
@@ -552,7 +529,7 @@ abstract class AbstractPropertyAccessorTests {
 	}
 
 	@Test
-	void setStringPropertyWithCustomEditor() {
+	public void setStringPropertyWithCustomEditor() throws Exception {
 		TestBean target = new TestBean();
 		AbstractPropertyAccessor accessor = createAccessor(target);
 		accessor.registerCustomEditor(String.class, "name", new PropertyEditorSupport() {
@@ -567,15 +544,15 @@ abstract class AbstractPropertyAccessorTests {
 			}
 		});
 		accessor.setPropertyValue("name", new String[] {});
-		assertThat(target.getName()).isEmpty();
+		assertThat(target.getName()).isEqualTo("");
 		accessor.setPropertyValue("name", new String[] {"a1", "b2"});
 		assertThat(target.getName()).isEqualTo("a1-b2");
 		accessor.setPropertyValue("name", null);
-		assertThat(target.getName()).isEmpty();
+		assertThat(target.getName()).isEqualTo("");
 	}
 
 	@Test
-	void setBooleanProperty() {
+	public void setBooleanProperty() {
 		BooleanTestBean target = new BooleanTestBean();
 		AbstractPropertyAccessor accessor = createAccessor(target);
 
@@ -585,11 +562,11 @@ abstract class AbstractPropertyAccessorTests {
 
 		accessor.setPropertyValue("bool2", "false");
 		assertThat(Boolean.FALSE.equals(accessor.getPropertyValue("bool2"))).as("Correct bool2 value").isTrue();
-		assertThat(target.getBool2()).as("Correct bool2 value").isFalse();
+		assertThat(!target.getBool2()).as("Correct bool2 value").isTrue();
 	}
 
 	@Test
-	void setNumberProperties() {
+	public void setNumberProperties() {
 		NumberTestBean target = new NumberTestBean();
 		AbstractPropertyAccessor accessor = createAccessor(target);
 		accessor.setPropertyValue("short2", "2");
@@ -599,51 +576,51 @@ abstract class AbstractPropertyAccessorTests {
 		accessor.setPropertyValue("float2", "8.1");
 		accessor.setPropertyValue("double2", "6.1");
 		accessor.setPropertyValue("bigDecimal", "4.0");
-		assertThat(Short.valueOf("2")).as("Correct short2 value").isEqualTo(accessor.getPropertyValue("short2"));
-		assertThat(Short.valueOf("2")).as("Correct short2 value").isEqualTo(target.getShort2());
-		assertThat(Integer.valueOf("8")).as("Correct int2 value").isEqualTo(accessor.getPropertyValue("int2"));
-		assertThat(Integer.valueOf("8")).as("Correct int2 value").isEqualTo(target.getInt2());
-		assertThat(Long.valueOf("6")).as("Correct long2 value").isEqualTo(accessor.getPropertyValue("long2"));
-		assertThat(Long.valueOf("6")).as("Correct long2 value").isEqualTo(target.getLong2());
-		assertThat(new BigInteger("3")).as("Correct bigInteger value").isEqualTo(accessor.getPropertyValue("bigInteger"));
-		assertThat(new BigInteger("3")).as("Correct bigInteger value").isEqualTo(target.getBigInteger());
-		assertThat(Float.valueOf("8.1")).as("Correct float2 value").isEqualTo(accessor.getPropertyValue("float2"));
-		assertThat(Float.valueOf("8.1")).as("Correct float2 value").isEqualTo(target.getFloat2());
-		assertThat(Double.valueOf("6.1").equals(accessor.getPropertyValue("double2"))).as("Correct double2 value").isTrue();
-		assertThat(Double.valueOf("6.1")).as("Correct double2 value").isEqualTo(target.getDouble2());
-		assertThat(new BigDecimal("4.0")).as("Correct bigDecimal value").isEqualTo(accessor.getPropertyValue("bigDecimal"));
-		assertThat(new BigDecimal("4.0")).as("Correct bigDecimal value").isEqualTo(target.getBigDecimal());
+		assertThat(new Short("2").equals(accessor.getPropertyValue("short2"))).as("Correct short2 value").isTrue();
+		assertThat(new Short("2").equals(target.getShort2())).as("Correct short2 value").isTrue();
+		assertThat(new Integer("8").equals(accessor.getPropertyValue("int2"))).as("Correct int2 value").isTrue();
+		assertThat(new Integer("8").equals(target.getInt2())).as("Correct int2 value").isTrue();
+		assertThat(new Long("6").equals(accessor.getPropertyValue("long2"))).as("Correct long2 value").isTrue();
+		assertThat(new Long("6").equals(target.getLong2())).as("Correct long2 value").isTrue();
+		assertThat(new BigInteger("3").equals(accessor.getPropertyValue("bigInteger"))).as("Correct bigInteger value").isTrue();
+		assertThat(new BigInteger("3").equals(target.getBigInteger())).as("Correct bigInteger value").isTrue();
+		assertThat(new Float("8.1").equals(accessor.getPropertyValue("float2"))).as("Correct float2 value").isTrue();
+		assertThat(new Float("8.1").equals(target.getFloat2())).as("Correct float2 value").isTrue();
+		assertThat(new Double("6.1").equals(accessor.getPropertyValue("double2"))).as("Correct double2 value").isTrue();
+		assertThat(new Double("6.1").equals(target.getDouble2())).as("Correct double2 value").isTrue();
+		assertThat(new BigDecimal("4.0").equals(accessor.getPropertyValue("bigDecimal"))).as("Correct bigDecimal value").isTrue();
+		assertThat(new BigDecimal("4.0").equals(target.getBigDecimal())).as("Correct bigDecimal value").isTrue();
 	}
 
 	@Test
-	void setNumberPropertiesWithCoercion() {
+	public void setNumberPropertiesWithCoercion() {
 		NumberTestBean target = new NumberTestBean();
 		AbstractPropertyAccessor accessor = createAccessor(target);
-		accessor.setPropertyValue("short2", 2);
-		accessor.setPropertyValue("int2", 8L);
+		accessor.setPropertyValue("short2", new Integer(2));
+		accessor.setPropertyValue("int2", new Long(8));
 		accessor.setPropertyValue("long2", new BigInteger("6"));
-		accessor.setPropertyValue("bigInteger", 3L);
-		accessor.setPropertyValue("float2", 8.1D);
-		accessor.setPropertyValue("double2", new BigDecimal("6.1"));
-		accessor.setPropertyValue("bigDecimal", 4.0F);
-		assertThat(Short.valueOf("2")).as("Correct short2 value").isEqualTo(accessor.getPropertyValue("short2"));
-		assertThat(Short.valueOf("2")).as("Correct short2 value").isEqualTo(target.getShort2());
-		assertThat(Integer.valueOf("8")).as("Correct int2 value").isEqualTo(accessor.getPropertyValue("int2"));
-		assertThat(Integer.valueOf("8")).as("Correct int2 value").isEqualTo(target.getInt2());
-		assertThat(Long.valueOf("6")).as("Correct long2 value").isEqualTo(accessor.getPropertyValue("long2"));
-		assertThat(Long.valueOf("6")).as("Correct long2 value").isEqualTo(target.getLong2());
+		accessor.setPropertyValue("bigInteger", new Integer(3));
+		accessor.setPropertyValue("float2", new Double(8.1));
+		accessor.setPropertyValue("double2", new BigDecimal(6.1));
+		accessor.setPropertyValue("bigDecimal", new Float(4.0));
+		assertThat(new Short("2").equals(accessor.getPropertyValue("short2"))).as("Correct short2 value").isTrue();
+		assertThat(new Short("2").equals(target.getShort2())).as("Correct short2 value").isTrue();
+		assertThat(new Integer("8").equals(accessor.getPropertyValue("int2"))).as("Correct int2 value").isTrue();
+		assertThat(new Integer("8").equals(target.getInt2())).as("Correct int2 value").isTrue();
+		assertThat(new Long("6").equals(accessor.getPropertyValue("long2"))).as("Correct long2 value").isTrue();
+		assertThat(new Long("6").equals(target.getLong2())).as("Correct long2 value").isTrue();
 		assertThat(new BigInteger("3").equals(accessor.getPropertyValue("bigInteger"))).as("Correct bigInteger value").isTrue();
-		assertThat(new BigInteger("3")).as("Correct bigInteger value").isEqualTo(target.getBigInteger());
-		assertThat(Float.valueOf("8.1")).as("Correct float2 value").isEqualTo(accessor.getPropertyValue("float2"));
-		assertThat(Float.valueOf("8.1")).as("Correct float2 value").isEqualTo(target.getFloat2());
-		assertThat(Double.valueOf("6.1")).as("Correct double2 value").isEqualTo(accessor.getPropertyValue("double2"));
-		assertThat(Double.valueOf("6.1")).as("Correct double2 value").isEqualTo(target.getDouble2());
-		assertThat(new BigDecimal("4.0")).as("Correct bigDecimal value").isEqualTo(accessor.getPropertyValue("bigDecimal"));
-		assertThat(new BigDecimal("4.0")).as("Correct bigDecimal value").isEqualTo(target.getBigDecimal());
+		assertThat(new BigInteger("3").equals(target.getBigInteger())).as("Correct bigInteger value").isTrue();
+		assertThat(new Float("8.1").equals(accessor.getPropertyValue("float2"))).as("Correct float2 value").isTrue();
+		assertThat(new Float("8.1").equals(target.getFloat2())).as("Correct float2 value").isTrue();
+		assertThat(new Double("6.1").equals(accessor.getPropertyValue("double2"))).as("Correct double2 value").isTrue();
+		assertThat(new Double("6.1").equals(target.getDouble2())).as("Correct double2 value").isTrue();
+		assertThat(new BigDecimal("4.0").equals(accessor.getPropertyValue("bigDecimal"))).as("Correct bigDecimal value").isTrue();
+		assertThat(new BigDecimal("4.0").equals(target.getBigDecimal())).as("Correct bigDecimal value").isTrue();
 	}
 
 	@Test
-	void setPrimitiveProperties() {
+	public void setPrimitiveProperties() {
 		NumberPropertyBean target = new NumberPropertyBean();
 		AbstractPropertyAccessor accessor = createAccessor(target);
 
@@ -673,26 +650,26 @@ abstract class AbstractPropertyAccessorTests {
 		accessor.setPropertyValue("myDouble", doubleValue);
 
 		assertThat(target.getMyPrimitiveByte()).isEqualTo(Byte.MAX_VALUE);
-		assertThat(target.getMyByte()).isEqualTo(Byte.MAX_VALUE);
+		assertThat(target.getMyByte().byteValue()).isEqualTo(Byte.MAX_VALUE);
 
 		assertThat(target.getMyPrimitiveShort()).isEqualTo(Short.MAX_VALUE);
-		assertThat(target.getMyShort()).isEqualTo(Short.MAX_VALUE);
+		assertThat(target.getMyShort().shortValue()).isEqualTo(Short.MAX_VALUE);
 
 		assertThat(target.getMyPrimitiveInt()).isEqualTo(Integer.MAX_VALUE);
-		assertThat(target.getMyInteger()).isEqualTo(Integer.MAX_VALUE);
+		assertThat(target.getMyInteger().intValue()).isEqualTo(Integer.MAX_VALUE);
 
 		assertThat(target.getMyPrimitiveLong()).isEqualTo(Long.MAX_VALUE);
-		assertThat(target.getMyLong()).isEqualTo(Long.MAX_VALUE);
+		assertThat(target.getMyLong().longValue()).isEqualTo(Long.MAX_VALUE);
 
 		assertThat((double) target.getMyPrimitiveFloat()).isCloseTo(Float.MAX_VALUE, within(0.001));
-		assertThat((double) target.getMyFloat()).isCloseTo(Float.MAX_VALUE, within(0.001));
+		assertThat((double) target.getMyFloat().floatValue()).isCloseTo(Float.MAX_VALUE, within(0.001));
 
 		assertThat(target.getMyPrimitiveDouble()).isCloseTo(Double.MAX_VALUE, within(0.001));
-		assertThat(target.getMyDouble()).isCloseTo(Double.MAX_VALUE, within(0.001));
+		assertThat(target.getMyDouble().doubleValue()).isCloseTo(Double.MAX_VALUE, within(0.001));
 	}
 
 	@Test
-	void setEnumProperty() {
+	public void setEnumProperty() {
 		EnumTester target = new EnumTester();
 		AbstractPropertyAccessor accessor = createAccessor(target);
 
@@ -707,7 +684,7 @@ abstract class AbstractPropertyAccessorTests {
 	}
 
 	@Test
-	void setGenericEnumProperty() {
+	public void setGenericEnumProperty() {
 		EnumConsumer target = new EnumConsumer();
 		AbstractPropertyAccessor accessor = createAccessor(target);
 		accessor.setPropertyValue("enumValue", TestEnum.class.getName() + ".TEST_VALUE");
@@ -715,7 +692,7 @@ abstract class AbstractPropertyAccessorTests {
 	}
 
 	@Test
-	void setWildcardEnumProperty() {
+	public void setWildcardEnumProperty() {
 		WildcardEnumConsumer target = new WildcardEnumConsumer();
 		AbstractPropertyAccessor accessor = createAccessor(target);
 		accessor.setPropertyValue("enumValue", TestEnum.class.getName() + ".TEST_VALUE");
@@ -723,7 +700,7 @@ abstract class AbstractPropertyAccessorTests {
 	}
 
 	@Test
-	void setPropertiesProperty() {
+	public void setPropertiesProperty() throws Exception {
 		PropsTester target = new PropsTester();
 		AbstractPropertyAccessor accessor = createAccessor(target);
 		accessor.setPropertyValue("name", "ptest");
@@ -732,41 +709,53 @@ abstract class AbstractPropertyAccessorTests {
 		String ps = "peace=war\nfreedom=slavery";
 		accessor.setPropertyValue("properties", ps);
 
-		assertThat(target.name).as("name was set").isEqualTo("ptest");
-		assertThat(target.properties).as("properties non null").isNotNull();
+		assertThat(target.name.equals("ptest")).as("name was set").isTrue();
+		assertThat(target.properties != null).as("properties non null").isTrue();
 		String freedomVal = target.properties.getProperty("freedom");
 		String peaceVal = target.properties.getProperty("peace");
-		assertThat(peaceVal).as("peace==war").isEqualTo("war");
-		assertThat(freedomVal).as("Freedom==slavery").isEqualTo("slavery");
+		assertThat(peaceVal.equals("war")).as("peace==war").isTrue();
+		assertThat(freedomVal.equals("slavery")).as("Freedom==slavery").isTrue();
 	}
 
 	@Test
-	void setStringArrayProperty() {
+	public void setStringArrayProperty() throws Exception {
 		PropsTester target = new PropsTester();
 		AbstractPropertyAccessor accessor = createAccessor(target);
 
-		accessor.setPropertyValue("stringArray", new String[]{"foo", "fi", "fi", "fum"});
-		assertThat(target.stringArray).containsExactly("foo", "fi", "fi", "fum");
+		accessor.setPropertyValue("stringArray", new String[] {"foo", "fi", "fi", "fum"});
+		assertThat(target.stringArray.length == 4).as("stringArray length = 4").isTrue();
+		assertThat(target.stringArray[0].equals("foo") && target.stringArray[1].equals("fi") &&
+		target.stringArray[2].equals("fi") && target.stringArray[3].equals("fum")).as("correct values").isTrue();
 
-		accessor.setPropertyValue("stringArray", Arrays.asList("foo", "fi", "fi", "fum"));
-		assertThat(target.stringArray).containsExactly("foo", "fi", "fi", "fum");
+		List<String> list = new ArrayList<>();
+		list.add("foo");
+		list.add("fi");
+		list.add("fi");
+		list.add("fum");
+		accessor.setPropertyValue("stringArray", list);
+		assertThat(target.stringArray.length == 4).as("stringArray length = 4").isTrue();
+		assertThat(target.stringArray[0].equals("foo") && target.stringArray[1].equals("fi") &&
+		target.stringArray[2].equals("fi") && target.stringArray[3].equals("fum")).as("correct values").isTrue();
 
 		Set<String> set = new HashSet<>();
 		set.add("foo");
 		set.add("fi");
 		set.add("fum");
 		accessor.setPropertyValue("stringArray", set);
-		assertThat(target.stringArray).containsExactlyInAnyOrder("foo", "fi", "fum");
+		assertThat(target.stringArray.length == 3).as("stringArray length = 3").isTrue();
+		List<String> result = Arrays.asList(target.stringArray);
+		assertThat(result.contains("foo") && result.contains("fi") && result.contains("fum")).as("correct values").isTrue();
 
 		accessor.setPropertyValue("stringArray", "one");
-		assertThat(target.stringArray).containsExactly("one");
+		assertThat(target.stringArray.length == 1).as("stringArray length = 1").isTrue();
+		assertThat(target.stringArray[0].equals("one")).as("stringArray elt is ok").isTrue();
 
 		accessor.setPropertyValue("stringArray", null);
-		assertThat(target.stringArray).as("stringArray is null").isNull();
+		assertThat(target.stringArray == null).as("stringArray is null").isTrue();
 	}
 
 	@Test
-	void setStringArrayPropertyWithCustomStringEditor() {
+	public void setStringArrayPropertyWithCustomStringEditor() throws Exception {
 		PropsTester target = new PropsTester();
 		AbstractPropertyAccessor accessor = createAccessor(target);
 		accessor.registerCustomEditor(String.class, "stringArray", new PropertyEditorSupport() {
@@ -777,194 +766,306 @@ abstract class AbstractPropertyAccessorTests {
 		});
 
 		accessor.setPropertyValue("stringArray", new String[] {"4foo", "7fi", "6fi", "5fum"});
-		assertThat(target.stringArray).containsExactly("foo", "fi", "fi", "fum");
+		assertThat(target.stringArray.length == 4).as("stringArray length = 4").isTrue();
+		assertThat(target.stringArray[0].equals("foo") && target.stringArray[1].equals("fi") &&
+		target.stringArray[2].equals("fi") && target.stringArray[3].equals("fum")).as("correct values").isTrue();
 
-		List<String> list = Arrays.asList("4foo", "7fi", "6fi", "5fum");
+		List<String> list = new ArrayList<>();
+		list.add("4foo");
+		list.add("7fi");
+		list.add("6fi");
+		list.add("5fum");
 		accessor.setPropertyValue("stringArray", list);
-		assertThat(target.stringArray).containsExactly("foo", "fi", "fi", "fum");
+		assertThat(target.stringArray.length == 4).as("stringArray length = 4").isTrue();
+		assertThat(target.stringArray[0].equals("foo") && target.stringArray[1].equals("fi") &&
+		target.stringArray[2].equals("fi") && target.stringArray[3].equals("fum")).as("correct values").isTrue();
 
 		Set<String> set = new HashSet<>();
 		set.add("4foo");
 		set.add("7fi");
 		set.add("6fum");
 		accessor.setPropertyValue("stringArray", set);
-		assertThat(target.stringArray).containsExactlyInAnyOrder("foo", "fi", "fum");
+		assertThat(target.stringArray.length == 3).as("stringArray length = 3").isTrue();
+		List<String> result = Arrays.asList(target.stringArray);
+		assertThat(result.contains("foo") && result.contains("fi") && result.contains("fum")).as("correct values").isTrue();
 
 		accessor.setPropertyValue("stringArray", "8one");
-		assertThat(target.stringArray).containsExactly("one");
+		assertThat(target.stringArray.length == 1).as("stringArray length = 1").isTrue();
+		assertThat(target.stringArray[0].equals("one")).as("correct values").isTrue();
 	}
 
 	@Test
-	void setStringArrayPropertyWithStringSplitting() {
+	public void setStringArrayPropertyWithStringSplitting() throws Exception {
 		PropsTester target = new PropsTester();
 		AbstractPropertyAccessor accessor = createAccessor(target);
 		accessor.useConfigValueEditors();
 		accessor.setPropertyValue("stringArray", "a1,b2");
-		assertThat(target.stringArray).containsExactly("a1", "b2");
+		assertThat(target.stringArray.length == 2).as("stringArray length = 2").isTrue();
+		assertThat(target.stringArray[0].equals("a1") && target.stringArray[1].equals("b2")).as("correct values").isTrue();
 	}
 
 	@Test
-	void setStringArrayPropertyWithCustomStringDelimiter() {
+	public void setStringArrayPropertyWithCustomStringDelimiter() throws Exception {
 		PropsTester target = new PropsTester();
 		AbstractPropertyAccessor accessor = createAccessor(target);
 		accessor.registerCustomEditor(String[].class, "stringArray", new StringArrayPropertyEditor("-"));
 		accessor.setPropertyValue("stringArray", "a1-b2");
-		assertThat(target.stringArray).containsExactly("a1", "b2");
+		assertThat(target.stringArray.length == 2).as("stringArray length = 2").isTrue();
+		assertThat(target.stringArray[0].equals("a1") && target.stringArray[1].equals("b2")).as("correct values").isTrue();
 	}
 
 	@Test
-	void setStringArrayWithAutoGrow() {
+	public void setStringArrayWithAutoGrow() throws Exception {
 		StringArrayBean target = new StringArrayBean();
 		AbstractPropertyAccessor accessor = createAccessor(target);
 		accessor.setAutoGrowNestedPaths(true);
 
 		accessor.setPropertyValue("array[0]", "Test0");
-		assertThat(target.getArray()).containsExactly("Test0");
+		assertThat(target.getArray().length).isEqualTo(1);
 
 		accessor.setPropertyValue("array[2]", "Test2");
-		assertThat(target.getArray()).containsExactly("Test0", null, "Test2");
+		assertThat(target.getArray().length).isEqualTo(3);
+		assertThat(target.getArray()[0].equals("Test0") && target.getArray()[1] == null &&
+		target.getArray()[2].equals("Test2")).as("correct values").isTrue();
 	}
 
 	@Test
-	void setIntArrayProperty() {
+	public void setIntArrayProperty() {
 		PropsTester target = new PropsTester();
 		AbstractPropertyAccessor accessor = createAccessor(target);
 
 		accessor.setPropertyValue("intArray", new int[] {4, 5, 2, 3});
-		assertThat(target.intArray).containsExactly(4, 5, 2, 3);
+		assertThat(target.intArray.length == 4).as("intArray length = 4").isTrue();
+		assertThat(target.intArray[0] == 4 && target.intArray[1] == 5 &&
+		target.intArray[2] == 2 && target.intArray[3] == 3).as("correct values").isTrue();
 
 		accessor.setPropertyValue("intArray", new String[] {"4", "5", "2", "3"});
-		assertThat(target.intArray).containsExactly(4, 5, 2, 3);
+		assertThat(target.intArray.length == 4).as("intArray length = 4").isTrue();
+		assertThat(target.intArray[0] == 4 && target.intArray[1] == 5 &&
+		target.intArray[2] == 2 && target.intArray[3] == 3).as("correct values").isTrue();
 
-		accessor.setPropertyValue("intArray", Arrays.asList(4, "5", 2, "3"));
-		assertThat(target.intArray).containsExactly(4, 5, 2, 3);
+		List<Object> list = new ArrayList<>();
+		list.add(4);
+		list.add("5");
+		list.add(2);
+		list.add("3");
+		accessor.setPropertyValue("intArray", list);
+		assertThat(target.intArray.length == 4).as("intArray length = 4").isTrue();
+		assertThat(target.intArray[0] == 4 && target.intArray[1] == 5 &&
+		target.intArray[2] == 2 && target.intArray[3] == 3).as("correct values").isTrue();
 
 		Set<Object> set = new HashSet<>();
 		set.add("4");
 		set.add(5);
 		set.add("3");
 		accessor.setPropertyValue("intArray", set);
-		assertThat(target.intArray).containsExactlyInAnyOrder(4, 5, 3);
+		assertThat(target.intArray.length == 3).as("intArray length = 3").isTrue();
+		List<Integer> result = new ArrayList<>();
+		result.add(target.intArray[0]);
+		result.add(target.intArray[1]);
+		result.add(target.intArray[2]);
+		assertThat(result.contains(new Integer(4)) && result.contains(new Integer(5)) &&
+				result.contains(new Integer(3))).as("correct values").isTrue();
 
-		accessor.setPropertyValue("intArray", new Integer[] {1});
-		assertThat(target.intArray).containsExactly(1);
+		accessor.setPropertyValue("intArray", new Integer[]{1});
+		assertThat(target.intArray.length == 1).as("intArray length = 4").isTrue();
+		assertThat(target.intArray[0] == 1).as("correct values").isTrue();
 
-		accessor.setPropertyValue("intArray", 1);
-		assertThat(target.intArray).containsExactly(1);
+		accessor.setPropertyValue("intArray", new Integer(1));
+		assertThat(target.intArray.length == 1).as("intArray length = 4").isTrue();
+		assertThat(target.intArray[0] == 1).as("correct values").isTrue();
 
-		accessor.setPropertyValue("intArray", new String[] {"1"});
-		assertThat(target.intArray).containsExactly(1);
+		accessor.setPropertyValue("intArray", new String[]{"1"});
+		assertThat(target.intArray.length == 1).as("intArray length = 4").isTrue();
+		assertThat(target.intArray[0] == 1).as("correct values").isTrue();
 
 		accessor.setPropertyValue("intArray", "1");
-		assertThat(target.intArray).containsExactly(1);
+		assertThat(target.intArray.length == 1).as("intArray length = 4").isTrue();
+		assertThat(target.intArray[0] == 1).as("correct values").isTrue();
 	}
 
 	@Test
-	void setIntArrayPropertyWithCustomEditor() {
+	public void setIntArrayPropertyWithCustomEditor() {
 		PropsTester target = new PropsTester();
 		AbstractPropertyAccessor accessor = createAccessor(target);
 		accessor.registerCustomEditor(int.class, new PropertyEditorSupport() {
 			@Override
 			public void setAsText(String text) {
-				setValue(Integer.parseInt(text) + 1);
+				setValue(new Integer(Integer.parseInt(text) + 1));
 			}
 		});
 
 		accessor.setPropertyValue("intArray", new int[] {4, 5, 2, 3});
-		assertThat(target.intArray).containsExactly(4, 5, 2, 3);
+		assertThat(target.intArray.length == 4).as("intArray length = 4").isTrue();
+		assertThat(target.intArray[0] == 4 && target.intArray[1] == 5 &&
+		target.intArray[2] == 2 && target.intArray[3] == 3).as("correct values").isTrue();
 
 		accessor.setPropertyValue("intArray", new String[] {"3", "4", "1", "2"});
-		assertThat(target.intArray).containsExactly(4, 5, 2, 3);
+		assertThat(target.intArray.length == 4).as("intArray length = 4").isTrue();
+		assertThat(target.intArray[0] == 4 && target.intArray[1] == 5 &&
+		target.intArray[2] == 2 && target.intArray[3] == 3).as("correct values").isTrue();
 
-		accessor.setPropertyValue("intArray", 1);
-		assertThat(target.intArray).containsExactly(1);
+		accessor.setPropertyValue("intArray", new Integer(1));
+		assertThat(target.intArray.length == 1).as("intArray length = 4").isTrue();
+		assertThat(target.intArray[0] == 1).as("correct values").isTrue();
 
-		accessor.setPropertyValue("intArray", new String[]{"0"});
-		assertThat(target.intArray).containsExactly(1);
+		accessor.setPropertyValue("intArray", new String[] {"0"});
+		assertThat(target.intArray.length == 1).as("intArray length = 4").isTrue();
+		assertThat(target.intArray[0] == 1).as("correct values").isTrue();
 
 		accessor.setPropertyValue("intArray", "0");
-		assertThat(target.intArray).containsExactly(1);
+		assertThat(target.intArray.length == 1).as("intArray length = 4").isTrue();
+		assertThat(target.intArray[0] == 1).as("correct values").isTrue();
 	}
 
 	@Test
-	void setIntArrayPropertyWithStringSplitting() {
+	public void setIntArrayPropertyWithStringSplitting() throws Exception {
 		PropsTester target = new PropsTester();
 		AbstractPropertyAccessor accessor = createAccessor(target);
 		accessor.useConfigValueEditors();
 		accessor.setPropertyValue("intArray", "4,5");
-		assertThat(target.intArray).containsExactly(4, 5);
+		assertThat(target.intArray.length == 2).as("intArray length = 2").isTrue();
+		assertThat(target.intArray[0] == 4 && target.intArray[1] == 5).as("correct values").isTrue();
 	}
 
 	@Test
-	void setPrimitiveArrayProperty() {
+	public void setPrimitiveArrayProperty() {
 		PrimitiveArrayBean target = new PrimitiveArrayBean();
 		AbstractPropertyAccessor accessor = createAccessor(target);
-		accessor.setPropertyValue("array", new String[]{"1", "2"});
-		assertThat(target.getArray()).containsExactly(1, 2);
+		accessor.setPropertyValue("array", new String[] {"1", "2"});
+		assertThat(target.getArray().length).isEqualTo(2);
+		assertThat(target.getArray()[0]).isEqualTo(1);
+		assertThat(target.getArray()[1]).isEqualTo(2);
 	}
 
 	@Test
-	void setPrimitiveArrayPropertyLargeMatchingWithSpecificEditor() {
+	@EnabledForTestGroups(PERFORMANCE)
+	public void setPrimitiveArrayPropertyLargeMatching() {
+		Assume.notLogging(LogFactory.getLog(AbstractPropertyAccessorTests.class));
+
+		PrimitiveArrayBean target = new PrimitiveArrayBean();
+		AbstractPropertyAccessor accessor = createAccessor(target);
+		int[] input = new int[1024];
+		StopWatch sw = new StopWatch();
+		sw.start("array1");
+		for (int i = 0; i < 1000; i++) {
+			accessor.setPropertyValue("array", input);
+		}
+		sw.stop();
+		assertThat(target.getArray().length).isEqualTo(1024);
+		assertThat(target.getArray()[0]).isEqualTo(0);
+		long time1 = sw.getLastTaskTimeMillis();
+		assertThat(sw.getLastTaskTimeMillis() < 100).as("Took too long").isTrue();
+
+		accessor.registerCustomEditor(String.class, new StringTrimmerEditor(false));
+		sw.start("array2");
+		for (int i = 0; i < 1000; i++) {
+			accessor.setPropertyValue("array", input);
+		}
+		sw.stop();
+		assertThat(sw.getLastTaskTimeMillis() < 125).as("Took too long").isTrue();
+
+		accessor.registerCustomEditor(int.class, "array.somePath", new CustomNumberEditor(Integer.class, false));
+		sw.start("array3");
+		for (int i = 0; i < 1000; i++) {
+			accessor.setPropertyValue("array", input);
+		}
+		sw.stop();
+		assertThat(sw.getLastTaskTimeMillis() < 100).as("Took too long").isTrue();
+
+		accessor.registerCustomEditor(int.class, "array[0].somePath", new CustomNumberEditor(Integer.class, false));
+		sw.start("array3");
+		for (int i = 0; i < 1000; i++) {
+			accessor.setPropertyValue("array", input);
+		}
+		sw.stop();
+		assertThat(sw.getLastTaskTimeMillis() < 100).as("Took too long").isTrue();
+
+		accessor.registerCustomEditor(int.class, new CustomNumberEditor(Integer.class, false));
+		sw.start("array4");
+		for (int i = 0; i < 100; i++) {
+			accessor.setPropertyValue("array", input);
+		}
+		sw.stop();
+		assertThat(target.getArray().length).isEqualTo(1024);
+		assertThat(target.getArray()[0]).isEqualTo(0);
+		assertThat(sw.getLastTaskTimeMillis() > time1).as("Took too long").isTrue();
+	}
+
+	@Test
+	public void setPrimitiveArrayPropertyLargeMatchingWithSpecificEditor() {
 		PrimitiveArrayBean target = new PrimitiveArrayBean();
 		AbstractPropertyAccessor accessor = createAccessor(target);
 		accessor.registerCustomEditor(int.class, "array", new PropertyEditorSupport() {
 			@Override
 			public void setValue(Object value) {
 				if (value instanceof Integer) {
-					super.setValue((Integer) value + 1);
+					super.setValue(new Integer((Integer) value + 1));
 				}
 			}
 		});
-		int[] input = new int[10];
+		int[] input = new int[1024];
 		accessor.setPropertyValue("array", input);
-		assertThat(target.getArray()).hasSize(10);
-		assertThat(Arrays.stream(target.getArray())).allMatch(n -> n == 1);
+		assertThat(target.getArray().length).isEqualTo(1024);
+		assertThat(target.getArray()[0]).isEqualTo(1);
+		assertThat(target.getArray()[1]).isEqualTo(1);
 	}
 
 	@Test
-	void setPrimitiveArrayPropertyLargeMatchingWithIndexSpecificEditor() {
+	public void setPrimitiveArrayPropertyLargeMatchingWithIndexSpecificEditor() {
 		PrimitiveArrayBean target = new PrimitiveArrayBean();
 		AbstractPropertyAccessor accessor = createAccessor(target);
 		accessor.registerCustomEditor(int.class, "array[1]", new PropertyEditorSupport() {
 			@Override
 			public void setValue(Object value) {
 				if (value instanceof Integer) {
-					super.setValue((Integer) value + 1);
+					super.setValue(new Integer((Integer) value + 1));
 				}
 			}
 		});
-		int[] input = new int[10];
+		int[] input = new int[1024];
 		accessor.setPropertyValue("array", input);
-		assertThat(target.getArray()).hasSize(10);
-		assertThat(target.getArray()[0]).isZero();
+		assertThat(target.getArray().length).isEqualTo(1024);
+		assertThat(target.getArray()[0]).isEqualTo(0);
 		assertThat(target.getArray()[1]).isEqualTo(1);
-		assertThat(Arrays.stream(target.getArray()).skip(2)).allMatch(n -> n == 0);
 	}
 
 	@Test
-	void setPrimitiveArrayPropertyWithAutoGrow() {
+	public void setPrimitiveArrayPropertyWithAutoGrow() throws Exception {
 		PrimitiveArrayBean target = new PrimitiveArrayBean();
 		AbstractPropertyAccessor accessor = createAccessor(target);
 		accessor.setAutoGrowNestedPaths(true);
 
 		accessor.setPropertyValue("array[0]", 1);
-		assertThat(target.getArray()).containsExactly(1);
+		assertThat(target.getArray().length).isEqualTo(1);
 
 		accessor.setPropertyValue("array[2]", 3);
-		assertThat(target.getArray()).containsExactly(1, 0, 3);
+		assertThat(target.getArray().length).isEqualTo(3);
+		assertThat(target.getArray()[0] == 1 && target.getArray()[1] == 0 &&
+		target.getArray()[2] == 3).as("correct values").isTrue();
 	}
 
 	@Test
-	void setGenericArrayProperty() {
-		@SuppressWarnings("rawtypes")
+	@SuppressWarnings("rawtypes")
+	public void setGenericArrayProperty() {
 		SkipReaderStub target = new SkipReaderStub();
 		AbstractPropertyAccessor accessor = createAccessor(target);
-		accessor.setPropertyValue("items", Arrays.asList("1", "2", "3", "4"));
-		assertThat(target.items).containsExactly("1", "2", "3", "4");
+		List<String> values = new LinkedList<>();
+		values.add("1");
+		values.add("2");
+		values.add("3");
+		values.add("4");
+		accessor.setPropertyValue("items", values);
+		Object[] result = target.items;
+		assertThat(result.length).isEqualTo(4);
+		assertThat(result[0]).isEqualTo("1");
+		assertThat(result[1]).isEqualTo("2");
+		assertThat(result[2]).isEqualTo("3");
+		assertThat(result[3]).isEqualTo("4");
 	}
 
 	@Test
-	void setArrayPropertyToObject() {
+	public void setArrayPropertyToObject() {
 		ArrayToObject target = new ArrayToObject();
 		AbstractPropertyAccessor accessor = createAccessor(target);
 
@@ -978,7 +1079,7 @@ abstract class AbstractPropertyAccessorTests {
 	}
 
 	@Test
-	void setCollectionProperty() {
+	public void setCollectionProperty() {
 		IndexedTestBean target = new IndexedTestBean();
 		AbstractPropertyAccessor accessor = createAccessor(target);
 		Collection<String> coll = new HashSet<>();
@@ -990,7 +1091,7 @@ abstract class AbstractPropertyAccessorTests {
 		SortedSet<String> sortedSet = new TreeSet<>();
 		sortedSet.add("sortedSet1");
 		accessor.setPropertyValue("sortedSet", sortedSet);
-		List<String> list = new ArrayList<>();
+		List<String> list = new LinkedList<>();
 		list.add("list1");
 		accessor.setPropertyValue("list", list);
 		assertThat(target.getCollection()).isSameAs(coll);
@@ -999,15 +1100,15 @@ abstract class AbstractPropertyAccessorTests {
 		assertThat((List<?>) target.getList()).isSameAs(list);
 	}
 
-	@Test
 	@SuppressWarnings("unchecked") // list cannot be properly parameterized as it breaks other tests
-	void setCollectionPropertyNonMatchingType() {
+	@Test
+	public void setCollectionPropertyNonMatchingType() {
 		IndexedTestBean target = new IndexedTestBean();
 		AbstractPropertyAccessor accessor = createAccessor(target);
 		Collection<String> coll = new ArrayList<>();
 		coll.add("coll1");
 		accessor.setPropertyValue("collection", coll);
-		List<String> set = new ArrayList<>();
+		List<String> set = new LinkedList<>();
 		set.add("set1");
 		accessor.setPropertyValue("set", set);
 		List<String> sortedSet = new ArrayList<>();
@@ -1016,25 +1117,25 @@ abstract class AbstractPropertyAccessorTests {
 		Set<String> list = new HashSet<>();
 		list.add("list1");
 		accessor.setPropertyValue("list", list);
-		assertThat(target.getCollection()).hasSize(1);
+		assertThat(target.getCollection().size()).isEqualTo(1);
 		assertThat(target.getCollection().containsAll(coll)).isTrue();
-		assertThat(target.getSet()).hasSize(1);
+		assertThat(target.getSet().size()).isEqualTo(1);
 		assertThat(target.getSet().containsAll(set)).isTrue();
-		assertThat(target.getSortedSet()).hasSize(1);
+		assertThat(target.getSortedSet().size()).isEqualTo(1);
 		assertThat(target.getSortedSet().containsAll(sortedSet)).isTrue();
-		assertThat(target.getList()).hasSize(1);
+		assertThat(target.getList().size()).isEqualTo(1);
 		assertThat(target.getList().containsAll(list)).isTrue();
 	}
 
-	@Test
 	@SuppressWarnings("unchecked") // list cannot be properly parameterized as it breaks other tests
-	void setCollectionPropertyWithArrayValue() {
+	@Test
+	public void setCollectionPropertyWithArrayValue() {
 		IndexedTestBean target = new IndexedTestBean();
 		AbstractPropertyAccessor accessor = createAccessor(target);
 		Collection<String> coll = new HashSet<>();
 		coll.add("coll1");
 		accessor.setPropertyValue("collection", coll.toArray());
-		List<String> set = new ArrayList<>();
+		List<String> set = new LinkedList<>();
 		set.add("set1");
 		accessor.setPropertyValue("set", set.toArray());
 		List<String> sortedSet = new ArrayList<>();
@@ -1043,76 +1144,76 @@ abstract class AbstractPropertyAccessorTests {
 		Set<String> list = new HashSet<>();
 		list.add("list1");
 		accessor.setPropertyValue("list", list.toArray());
-		assertThat(target.getCollection()).hasSize(1);
+		assertThat(target.getCollection().size()).isEqualTo(1);
 		assertThat(target.getCollection().containsAll(coll)).isTrue();
-		assertThat(target.getSet()).hasSize(1);
+		assertThat(target.getSet().size()).isEqualTo(1);
 		assertThat(target.getSet().containsAll(set)).isTrue();
-		assertThat(target.getSortedSet()).hasSize(1);
+		assertThat(target.getSortedSet().size()).isEqualTo(1);
 		assertThat(target.getSortedSet().containsAll(sortedSet)).isTrue();
-		assertThat(target.getList()).hasSize(1);
+		assertThat(target.getList().size()).isEqualTo(1);
 		assertThat(target.getList().containsAll(list)).isTrue();
 	}
 
-	@Test
 	@SuppressWarnings("unchecked") // list cannot be properly parameterized as it breaks other tests
-	void setCollectionPropertyWithIntArrayValue() {
+	@Test
+	public void setCollectionPropertyWithIntArrayValue() {
 		IndexedTestBean target = new IndexedTestBean();
 		AbstractPropertyAccessor accessor = createAccessor(target);
 		Collection<Integer> coll = new HashSet<>();
 		coll.add(0);
-		accessor.setPropertyValue("collection", new int[]{0});
-		List<Integer> set = new ArrayList<>();
+		accessor.setPropertyValue("collection", new int[] {0});
+		List<Integer> set = new LinkedList<>();
 		set.add(1);
-		accessor.setPropertyValue("set", new int[]{1});
+		accessor.setPropertyValue("set", new int[] {1});
 		List<Integer> sortedSet = new ArrayList<>();
 		sortedSet.add(2);
-		accessor.setPropertyValue("sortedSet", new int[]{2});
+		accessor.setPropertyValue("sortedSet", new int[] {2});
 		Set<Integer> list = new HashSet<>();
 		list.add(3);
-		accessor.setPropertyValue("list", new int[]{3});
-		assertThat(target.getCollection()).hasSize(1);
+		accessor.setPropertyValue("list", new int[] {3});
+		assertThat(target.getCollection().size()).isEqualTo(1);
 		assertThat(target.getCollection().containsAll(coll)).isTrue();
-		assertThat(target.getSet()).hasSize(1);
+		assertThat(target.getSet().size()).isEqualTo(1);
 		assertThat(target.getSet().containsAll(set)).isTrue();
-		assertThat(target.getSortedSet()).hasSize(1);
+		assertThat(target.getSortedSet().size()).isEqualTo(1);
 		assertThat(target.getSortedSet().containsAll(sortedSet)).isTrue();
-		assertThat(target.getList()).hasSize(1);
+		assertThat(target.getList().size()).isEqualTo(1);
 		assertThat(target.getList().containsAll(list)).isTrue();
 	}
 
-	@Test
 	@SuppressWarnings("unchecked") // list cannot be properly parameterized as it breaks other tests
-	void setCollectionPropertyWithIntegerValue() {
+	@Test
+	public void setCollectionPropertyWithIntegerValue() {
 		IndexedTestBean target = new IndexedTestBean();
 		AbstractPropertyAccessor accessor = createAccessor(target);
 		Collection<Integer> coll = new HashSet<>();
 		coll.add(0);
-		accessor.setPropertyValue("collection", 0);
-		List<Integer> set = new ArrayList<>();
+		accessor.setPropertyValue("collection", new Integer(0));
+		List<Integer> set = new LinkedList<>();
 		set.add(1);
-		accessor.setPropertyValue("set", 1);
+		accessor.setPropertyValue("set", new Integer(1));
 		List<Integer> sortedSet = new ArrayList<>();
 		sortedSet.add(2);
-		accessor.setPropertyValue("sortedSet", 2);
+		accessor.setPropertyValue("sortedSet", new Integer(2));
 		Set<Integer> list = new HashSet<>();
 		list.add(3);
-		accessor.setPropertyValue("list", 3);
-		assertThat(target.getCollection()).hasSize(1);
+		accessor.setPropertyValue("list", new Integer(3));
+		assertThat(target.getCollection().size()).isEqualTo(1);
 		assertThat(target.getCollection().containsAll(coll)).isTrue();
-		assertThat(target.getSet()).hasSize(1);
+		assertThat(target.getSet().size()).isEqualTo(1);
 		assertThat(target.getSet().containsAll(set)).isTrue();
-		assertThat(target.getSortedSet()).hasSize(1);
+		assertThat(target.getSortedSet().size()).isEqualTo(1);
 		assertThat(target.getSortedSet().containsAll(sortedSet)).isTrue();
-		assertThat(target.getList()).hasSize(1);
+		assertThat(target.getList().size()).isEqualTo(1);
 		assertThat(target.getList().containsAll(list)).isTrue();
 	}
 
-	@Test
 	@SuppressWarnings("unchecked") // list cannot be properly parameterized as it breaks other tests
-	void setCollectionPropertyWithStringValue() {
+	@Test
+	public void setCollectionPropertyWithStringValue() {
 		IndexedTestBean target = new IndexedTestBean();
 		AbstractPropertyAccessor accessor = createAccessor(target);
-		List<String> set = new ArrayList<>();
+		List<String> set = new LinkedList<>();
 		set.add("set1");
 		accessor.setPropertyValue("set", "set1");
 		List<String> sortedSet = new ArrayList<>();
@@ -1121,17 +1222,16 @@ abstract class AbstractPropertyAccessorTests {
 		Set<String> list = new HashSet<>();
 		list.add("list1");
 		accessor.setPropertyValue("list", "list1");
-		assertThat(target.getSet()).hasSize(1);
+		assertThat(target.getSet().size()).isEqualTo(1);
 		assertThat(target.getSet().containsAll(set)).isTrue();
-		assertThat(target.getSortedSet()).hasSize(1);
+		assertThat(target.getSortedSet().size()).isEqualTo(1);
 		assertThat(target.getSortedSet().containsAll(sortedSet)).isTrue();
-		assertThat(target.getList()).hasSize(1);
+		assertThat(target.getList().size()).isEqualTo(1);
 		assertThat(target.getList().containsAll(list)).isTrue();
 	}
 
 	@Test
-	@SuppressWarnings("unchecked")
-	void setCollectionPropertyWithStringValueAndCustomEditor() {
+	public void setCollectionPropertyWithStringValueAndCustomEditor() {
 		IndexedTestBean target = new IndexedTestBean();
 		AbstractPropertyAccessor accessor = createAccessor(target);
 		accessor.registerCustomEditor(String.class, "set", new StringTrimmerEditor(false));
@@ -1140,19 +1240,19 @@ abstract class AbstractPropertyAccessorTests {
 		accessor.setPropertyValue("set", "set1 ");
 		accessor.setPropertyValue("sortedSet", "sortedSet1");
 		accessor.setPropertyValue("list", "list1 ");
-		assertThat(target.getSet()).hasSize(1);
+		assertThat(target.getSet().size()).isEqualTo(1);
 		assertThat(target.getSet().contains("set1")).isTrue();
-		assertThat(target.getSortedSet()).hasSize(1);
-		assertThat(target.getSortedSet()).contains("sortedSet1");
-		assertThat(target.getList()).hasSize(1);
-		assertThat(target.getList()).contains("list1");
+		assertThat(target.getSortedSet().size()).isEqualTo(1);
+		assertThat(target.getSortedSet().contains("sortedSet1")).isTrue();
+		assertThat(target.getList().size()).isEqualTo(1);
+		assertThat(target.getList().contains("list1")).isTrue();
 
 		accessor.setPropertyValue("list", Collections.singletonList("list1 "));
-		assertThat(target.getList()).contains("list1");
+		assertThat(target.getList().contains("list1")).isTrue();
 	}
 
 	@Test
-	void setMapProperty() {
+	public void setMapProperty() {
 		IndexedTestBean target = new IndexedTestBean();
 		AbstractPropertyAccessor accessor = createAccessor(target);
 		Map<String, String> map = new HashMap<>();
@@ -1166,8 +1266,7 @@ abstract class AbstractPropertyAccessorTests {
 	}
 
 	@Test
-	@SuppressWarnings("unchecked")
-	void setMapPropertyNonMatchingType() {
+	public void setMapPropertyNonMatchingType() {
 		IndexedTestBean target = new IndexedTestBean();
 		AbstractPropertyAccessor accessor = createAccessor(target);
 		Map<String, String> map = new TreeMap<>();
@@ -1176,14 +1275,14 @@ abstract class AbstractPropertyAccessorTests {
 		Map<String, String> sortedMap = new TreeMap<>();
 		sortedMap.put("sortedKey", "sortedValue");
 		accessor.setPropertyValue("sortedMap", sortedMap);
-		assertThat(target.getMap()).hasSize(1);
+		assertThat(target.getMap().size()).isEqualTo(1);
 		assertThat(target.getMap().get("key")).isEqualTo("value");
-		assertThat(target.getSortedMap()).hasSize(1);
+		assertThat(target.getSortedMap().size()).isEqualTo(1);
 		assertThat(target.getSortedMap().get("sortedKey")).isEqualTo("sortedValue");
 	}
 
 	@Test
-	void setMapPropertyWithTypeConversion() {
+	public void setMapPropertyWithTypeConversion() {
 		IndexedTestBean target = new IndexedTestBean();
 		AbstractPropertyAccessor accessor = createAccessor(target);
 		accessor.registerCustomEditor(TestBean.class, new PropertyEditorSupport() {
@@ -1212,7 +1311,7 @@ abstract class AbstractPropertyAccessorTests {
 	}
 
 	@Test
-	void setMapPropertyWithUnmodifiableMap() {
+	public void setMapPropertyWithUnmodifiableMap() {
 		IndexedTestBean target = new IndexedTestBean();
 		AbstractPropertyAccessor accessor = createAccessor(target);
 		accessor.registerCustomEditor(TestBean.class, "map", new PropertyEditorSupport() {
@@ -1236,7 +1335,7 @@ abstract class AbstractPropertyAccessorTests {
 	}
 
 	@Test
-	void setMapPropertyWithCustomUnmodifiableMap() {
+	public void setMapPropertyWithCustomUnmodifiableMap() {
 		IndexedTestBean target = new IndexedTestBean();
 		AbstractPropertyAccessor accessor = createAccessor(target);
 		accessor.registerCustomEditor(TestBean.class, "map", new PropertyEditorSupport() {
@@ -1259,9 +1358,9 @@ abstract class AbstractPropertyAccessorTests {
 		assertThat(((TestBean) target.getMap().get(2)).getName()).isEqualTo("rob");
 	}
 
-	@Test
 	@SuppressWarnings({ "unchecked", "rawtypes" }) // must work with raw map in this test
-	void setRawMapPropertyWithNoEditorRegistered() {
+	@Test
+	public void setRawMapPropertyWithNoEditorRegistered() {
 		IndexedTestBean target = new IndexedTestBean();
 		AbstractPropertyAccessor accessor = createAccessor(target);
 		Map inputMap = new HashMap();
@@ -1276,7 +1375,7 @@ abstract class AbstractPropertyAccessorTests {
 	}
 
 	@Test
-	void setUnknownProperty() {
+	public void setUnknownProperty() {
 		Simple target = new Simple("John", 2);
 		AbstractPropertyAccessor accessor = createAccessor(target);
 		assertThatExceptionOfType(NotWritablePropertyException.class).isThrownBy(() ->
@@ -1289,7 +1388,7 @@ abstract class AbstractPropertyAccessorTests {
 	}
 
 	@Test
-	void setUnknownPropertyWithPossibleMatches() {
+	public void setUnknownPropertyWithPossibleMatches() {
 		Simple target = new Simple("John", 2);
 		AbstractPropertyAccessor accessor = createAccessor(target);
 		assertThatExceptionOfType(NotWritablePropertyException.class).isThrownBy(() ->
@@ -1301,7 +1400,7 @@ abstract class AbstractPropertyAccessorTests {
 	}
 
 	@Test
-	void setUnknownOptionalProperty() {
+	public void setUnknownOptionalProperty() {
 		Simple target = new Simple("John", 2);
 		AbstractPropertyAccessor accessor = createAccessor(target);
 		PropertyValue value = new PropertyValue("foo", "value");
@@ -1310,7 +1409,7 @@ abstract class AbstractPropertyAccessorTests {
 	}
 
 	@Test
-	void setPropertyInProtectedBaseBean() {
+	public void setPropertyInProtectedBaseBean() {
 		DerivedFromProtectedBaseBean target = new DerivedFromProtectedBaseBean();
 		AbstractPropertyAccessor accessor = createAccessor(target);
 		accessor.setPropertyValue("someProperty", "someValue");
@@ -1319,7 +1418,7 @@ abstract class AbstractPropertyAccessorTests {
 	}
 
 	@Test
-	void setPropertyTypeMismatch() {
+	public void setPropertyTypeMismatch() {
 		TestBean target = new TestBean();
 		AbstractPropertyAccessor accessor = createAccessor(target);
 		assertThatExceptionOfType(TypeMismatchException.class).isThrownBy(() ->
@@ -1327,7 +1426,7 @@ abstract class AbstractPropertyAccessorTests {
 	}
 
 	@Test
-	void setEmptyValueForPrimitiveProperty() {
+	public void setEmptyValueForPrimitiveProperty() {
 		TestBean target = new TestBean();
 		AbstractPropertyAccessor accessor = createAccessor(target);
 		assertThatExceptionOfType(TypeMismatchException.class).isThrownBy(() ->
@@ -1335,7 +1434,7 @@ abstract class AbstractPropertyAccessorTests {
 	}
 
 	@Test
-	void setUnknownNestedProperty() {
+	public void setUnknownNestedProperty() {
 		Person target = createPerson("John", "Paris", "FR");
 		AbstractPropertyAccessor accessor = createAccessor(target);
 
@@ -1344,7 +1443,7 @@ abstract class AbstractPropertyAccessorTests {
 	}
 
 	@Test
-	void setPropertyValuesIgnoresInvalidNestedOnRequest() {
+	public void setPropertyValuesIgnoresInvalidNestedOnRequest() {
 		ITestBean target = new TestBean();
 		MutablePropertyValues pvs = new MutablePropertyValues();
 		pvs.addPropertyValue(new PropertyValue("name", "rod"));
@@ -1352,13 +1451,13 @@ abstract class AbstractPropertyAccessorTests {
 		pvs.addPropertyValue(new PropertyValue("more.garbage", new Object()));
 		AbstractPropertyAccessor accessor = createAccessor(target);
 		accessor.setPropertyValues(pvs, true);
-		assertThat(target.getName()).as("Set valid and ignored invalid").isEqualTo("rod");
+		assertThat(target.getName().equals("rod")).as("Set valid and ignored invalid").isTrue();
 		assertThatExceptionOfType(NotWritablePropertyException.class).isThrownBy(() ->
 				accessor.setPropertyValues(pvs, false)); // Don't ignore: should fail
 	}
 
 	@Test
-	void getAndSetIndexedProperties() {
+	public void getAndSetIndexedProperties() {
 		IndexedTestBean target = new IndexedTestBean();
 		AbstractPropertyAccessor accessor = createAccessor(target);
 		TestBean tb0 = target.getArray()[0];
@@ -1394,7 +1493,6 @@ abstract class AbstractPropertyAccessorTests {
 		assertThat(accessor.getPropertyValue("map[key5[foo]].name")).isEqualTo("name8");
 		assertThat(accessor.getPropertyValue("map['key5[foo]'].name")).isEqualTo("name8");
 		assertThat(accessor.getPropertyValue("map[\"key5[foo]\"].name")).isEqualTo("name8");
-		assertThat(accessor.getPropertyValue("myTestBeans[0].name")).isEqualTo("nameZ");
 
 		MutablePropertyValues pvs = new MutablePropertyValues();
 		pvs.add("array[0].name", "name5");
@@ -1408,7 +1506,6 @@ abstract class AbstractPropertyAccessorTests {
 		pvs.add("map[key4][0].name", "nameA");
 		pvs.add("map[key4][1].name", "nameB");
 		pvs.add("map[key5[foo]].name", "name10");
-		pvs.add("myTestBeans[0].name", "nameZZ");
 		accessor.setPropertyValues(pvs);
 		assertThat(tb0.getName()).isEqualTo("name5");
 		assertThat(tb1.getName()).isEqualTo("name4");
@@ -1427,11 +1524,10 @@ abstract class AbstractPropertyAccessorTests {
 		assertThat(accessor.getPropertyValue("map[key4][0].name")).isEqualTo("nameA");
 		assertThat(accessor.getPropertyValue("map[key4][1].name")).isEqualTo("nameB");
 		assertThat(accessor.getPropertyValue("map[key5[foo]].name")).isEqualTo("name10");
-		assertThat(accessor.getPropertyValue("myTestBeans[0].name")).isEqualTo("nameZZ");
 	}
 
 	@Test
-	void getAndSetIndexedPropertiesWithDirectAccess() {
+	public void getAndSetIndexedPropertiesWithDirectAccess() {
 		IndexedTestBean target = new IndexedTestBean();
 		AbstractPropertyAccessor accessor = createAccessor(target);
 		TestBean tb0 = target.getArray()[0];
@@ -1470,7 +1566,7 @@ abstract class AbstractPropertyAccessorTests {
 		assertThat((target.getList().get(0))).isEqualTo(tb3);
 		assertThat((target.getList().get(1))).isEqualTo(tb2);
 		assertThat((target.getList().get(2))).isEqualTo(tb0);
-		assertThat((target.getList().get(3))).isNull();
+		assertThat((target.getList().get(3))).isEqualTo(null);
 		assertThat((target.getList().get(4))).isEqualTo(tb1);
 		assertThat((target.getMap().get("key1"))).isEqualTo(tb1);
 		assertThat((target.getMap().get("key2"))).isEqualTo(tb0);
@@ -1481,7 +1577,7 @@ abstract class AbstractPropertyAccessorTests {
 		assertThat(accessor.getPropertyValue("list[0]")).isEqualTo(tb3);
 		assertThat(accessor.getPropertyValue("list[1]")).isEqualTo(tb2);
 		assertThat(accessor.getPropertyValue("list[2]")).isEqualTo(tb0);
-		assertThat(accessor.getPropertyValue("list[3]")).isNull();
+		assertThat(accessor.getPropertyValue("list[3]")).isEqualTo(null);
 		assertThat(accessor.getPropertyValue("list[4]")).isEqualTo(tb1);
 		assertThat(accessor.getPropertyValue("map[\"key1\"]")).isEqualTo(tb1);
 		assertThat(accessor.getPropertyValue("map['key2']")).isEqualTo(tb0);
@@ -1490,7 +1586,7 @@ abstract class AbstractPropertyAccessorTests {
 	}
 
 	@Test
-	void propertyType() {
+	public void propertyType() {
 		Person target = createPerson("John", "Paris", "FR");
 		AbstractPropertyAccessor accessor = createAccessor(target);
 
@@ -1498,7 +1594,7 @@ abstract class AbstractPropertyAccessorTests {
 	}
 
 	@Test
-	void propertyTypeUnknownProperty() {
+	public void propertyTypeUnknownProperty() {
 		Simple target = new Simple("John", 2);
 		AbstractPropertyAccessor accessor = createAccessor(target);
 
@@ -1506,7 +1602,7 @@ abstract class AbstractPropertyAccessorTests {
 	}
 
 	@Test
-	void propertyTypeDescriptor() {
+	public void propertyTypeDescriptor() {
 		Person target = createPerson("John", "Paris", "FR");
 		AbstractPropertyAccessor accessor = createAccessor(target);
 
@@ -1514,7 +1610,7 @@ abstract class AbstractPropertyAccessorTests {
 	}
 
 	@Test
-	void propertyTypeDescriptorUnknownProperty() {
+	public void propertyTypeDescriptorUnknownProperty() {
 		Simple target = new Simple("John", 2);
 		AbstractPropertyAccessor accessor = createAccessor(target);
 
@@ -1522,10 +1618,10 @@ abstract class AbstractPropertyAccessorTests {
 	}
 
 	@Test
-	void propertyTypeIndexedProperty() {
+	public void propertyTypeIndexedProperty() {
 		IndexedTestBean target = new IndexedTestBean();
 		AbstractPropertyAccessor accessor = createAccessor(target);
-		assertThat(accessor.getPropertyType("map[key0]")).isNull();
+		assertThat(accessor.getPropertyType("map[key0]")).isEqualTo(null);
 
 		accessor = createAccessor(target);
 		accessor.setPropertyValue("map[key0]", "my String");
@@ -1537,7 +1633,7 @@ abstract class AbstractPropertyAccessorTests {
 	}
 
 	@Test
-	void cornerSpr10115() {
+	public void cornerSpr10115() {
 		Spr10115Bean target = new Spr10115Bean();
 		AbstractPropertyAccessor accessor = createAccessor(target);
 		accessor.setPropertyValue("prop1", "val1");
@@ -1545,7 +1641,7 @@ abstract class AbstractPropertyAccessorTests {
 	}
 
 	@Test
-	void cornerSpr13837() {
+	public void cornerSpr13837() {
 		Spr13837Bean target = new Spr13837Bean();
 		AbstractPropertyAccessor accessor = createAccessor(target);
 		accessor.setPropertyValue("something", 42);
@@ -2003,7 +2099,6 @@ abstract class AbstractPropertyAccessorTests {
 
 	}
 
-	@SuppressWarnings("unchecked")
 	static class Spr13837Bean implements Spr13837 {
 
 		protected Integer something;
@@ -2014,6 +2109,7 @@ abstract class AbstractPropertyAccessorTests {
 		}
 
 		@Override
+		@SuppressWarnings("unchecked")
 		public Spr13837Bean setSomething(final Integer something) {
 			this.something = something;
 			return this;
