@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2024 the original author or authors.
+ * Copyright 2002-2019 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,30 +16,18 @@
 
 package org.springframework.beans;
 
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collection;
-import java.util.Collections;
-import java.util.HashMap;
-import java.util.HashSet;
-import java.util.List;
-import java.util.Map;
-import java.util.Properties;
-import java.util.Set;
-
 import org.junit.jupiter.api.Test;
-
 import org.springframework.beans.propertyeditors.CustomNumberEditor;
 import org.springframework.beans.propertyeditors.StringTrimmerEditor;
-import org.springframework.beans.testfixture.beans.GenericBean;
-import org.springframework.beans.testfixture.beans.GenericIntegerBean;
-import org.springframework.beans.testfixture.beans.GenericSetOfIntegerBean;
-import org.springframework.beans.testfixture.beans.TestBean;
 import org.springframework.core.io.UrlResource;
-import org.springframework.util.LinkedMultiValueMap;
-import org.springframework.util.MultiValueMap;
+import org.springframework.tests.sample.beans.GenericBean;
+import org.springframework.tests.sample.beans.GenericIntegerBean;
+import org.springframework.tests.sample.beans.GenericSetOfIntegerBean;
+import org.springframework.tests.sample.beans.TestBean;
 
-import static java.util.Map.entry;
+import java.net.MalformedURLException;
+import java.util.*;
+
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatExceptionOfType;
 
@@ -48,22 +36,22 @@ import static org.assertj.core.api.Assertions.assertThatExceptionOfType;
  * @author Chris Beams
  * @since 18.01.2006
  */
-class BeanWrapperGenericsTests {
+public class BeanWrapperGenericsTests {
 
 	@Test
-	void testGenericSet() {
+	public void testGenericSet() {
 		GenericBean<?> gb = new GenericBean<>();
 		BeanWrapper bw = new BeanWrapperImpl(gb);
 		Set<String> input = new HashSet<>();
 		input.add("4");
 		input.add("5");
 		bw.setPropertyValue("integerSet", input);
-		assertThat(gb.getIntegerSet()).contains(4);
-		assertThat(gb.getIntegerSet()).contains(5);
+		assertThat(gb.getIntegerSet().contains(new Integer(4))).isTrue();
+		assertThat(gb.getIntegerSet().contains(new Integer(5))).isTrue();
 	}
 
 	@Test
-	void testGenericLowerBoundedSet() {
+	public void testGenericLowerBoundedSet() {
 		GenericBean<?> gb = new GenericBean<>();
 		BeanWrapper bw = new BeanWrapperImpl(gb);
 		bw.registerCustomEditor(Number.class, new CustomNumberEditor(Integer.class, true));
@@ -71,156 +59,159 @@ class BeanWrapperGenericsTests {
 		input.add("4");
 		input.add("5");
 		bw.setPropertyValue("numberSet", input);
-		assertThat(gb.getNumberSet().contains(4)).isTrue();
-		assertThat(gb.getNumberSet().contains(5)).isTrue();
+		assertThat(gb.getNumberSet().contains(new Integer(4))).isTrue();
+		assertThat(gb.getNumberSet().contains(new Integer(5))).isTrue();
 	}
 
 	@Test
-	void testGenericSetWithConversionFailure() {
+	public void testGenericSetWithConversionFailure() {
 		GenericBean<?> gb = new GenericBean<>();
 		BeanWrapper bw = new BeanWrapperImpl(gb);
 		Set<TestBean> input = new HashSet<>();
 		input.add(new TestBean());
-		assertThatExceptionOfType(TypeMismatchException.class)
-				.isThrownBy(() -> bw.setPropertyValue("integerSet", input))
-				.withMessageContaining("java.lang.Integer");
+		assertThatExceptionOfType(TypeMismatchException.class).isThrownBy(() ->
+				bw.setPropertyValue("integerSet", input))
+			.withMessageContaining("java.lang.Integer");
 	}
 
 	@Test
-	void testGenericList() throws Exception {
+	public void testGenericList() throws MalformedURLException {
 		GenericBean<?> gb = new GenericBean<>();
 		BeanWrapper bw = new BeanWrapperImpl(gb);
 		List<String> input = new ArrayList<>();
 		input.add("http://localhost:8080");
 		input.add("http://localhost:9090");
 		bw.setPropertyValue("resourceList", input);
-		assertThat(gb.getResourceList()).containsExactly(new UrlResource("http://localhost:8080"),
-				new UrlResource("http://localhost:9090"));
+		assertThat(gb.getResourceList().get(0)).isEqualTo(new UrlResource("http://localhost:8080"));
+		assertThat(gb.getResourceList().get(1)).isEqualTo(new UrlResource("http://localhost:9090"));
 	}
 
 	@Test
-	void testGenericListElement() throws Exception {
+	public void testGenericListElement() throws MalformedURLException {
 		GenericBean<?> gb = new GenericBean<>();
 		gb.setResourceList(new ArrayList<>());
 		BeanWrapper bw = new BeanWrapperImpl(gb);
 		bw.setPropertyValue("resourceList[0]", "http://localhost:8080");
-		assertThat(gb.getResourceList()).containsExactly(new UrlResource("http://localhost:8080"));
+		assertThat(gb.getResourceList().get(0)).isEqualTo(new UrlResource("http://localhost:8080"));
 	}
 
 	@Test
-	void testGenericMap() {
+	public void testGenericMap() {
 		GenericBean<?> gb = new GenericBean<>();
 		BeanWrapper bw = new BeanWrapperImpl(gb);
 		Map<String, String> input = new HashMap<>();
 		input.put("4", "5");
 		input.put("6", "7");
 		bw.setPropertyValue("shortMap", input);
-		assertThat(gb.getShortMap().get(Short.valueOf("4"))).isEqualTo(5);
-		assertThat(gb.getShortMap().get(Short.valueOf("6"))).isEqualTo(7);
+		assertThat(gb.getShortMap().get(new Short("4"))).isEqualTo(new Integer(5));
+		assertThat(gb.getShortMap().get(new Short("6"))).isEqualTo(new Integer(7));
 	}
 
 	@Test
-	void testGenericMapElement() {
+	public void testGenericMapElement() {
 		GenericBean<?> gb = new GenericBean<>();
 		gb.setShortMap(new HashMap<>());
 		BeanWrapper bw = new BeanWrapperImpl(gb);
 		bw.setPropertyValue("shortMap[4]", "5");
-		assertThat(bw.getPropertyValue("shortMap[4]")).isEqualTo(5);
-		assertThat(gb.getShortMap().get(Short.valueOf("4"))).isEqualTo(5);
+		assertThat(bw.getPropertyValue("shortMap[4]")).isEqualTo(new Integer(5));
+		assertThat(gb.getShortMap().get(new Short("4"))).isEqualTo(new Integer(5));
 	}
 
 	@Test
-	void testGenericMapWithKeyType() {
+	public void testGenericMapWithKeyType() {
 		GenericBean<?> gb = new GenericBean<>();
 		BeanWrapper bw = new BeanWrapperImpl(gb);
 		Map<String, String> input = new HashMap<>();
 		input.put("4", "5");
 		input.put("6", "7");
 		bw.setPropertyValue("longMap", input);
-		assertThat(gb.getLongMap().get(4L)).isEqualTo("5");
-		assertThat(gb.getLongMap().get(6L)).isEqualTo("7");
+		assertThat(gb.getLongMap().get(new Long("4"))).isEqualTo("5");
+		assertThat(gb.getLongMap().get(new Long("6"))).isEqualTo("7");
 	}
 
 	@Test
-	void testGenericMapElementWithKeyType() {
+	public void testGenericMapElementWithKeyType() {
 		GenericBean<?> gb = new GenericBean<>();
 		gb.setLongMap(new HashMap<Long, Integer>());
 		BeanWrapper bw = new BeanWrapperImpl(gb);
 		bw.setPropertyValue("longMap[4]", "5");
-		assertThat(gb.getLongMap().get(Long.valueOf("4"))).isEqualTo("5");
+		assertThat(gb.getLongMap().get(new Long("4"))).isEqualTo("5");
 		assertThat(bw.getPropertyValue("longMap[4]")).isEqualTo("5");
 	}
 
 	@Test
-	void testGenericMapWithCollectionValue() {
+	public void testGenericMapWithCollectionValue() {
 		GenericBean<?> gb = new GenericBean<>();
 		BeanWrapper bw = new BeanWrapperImpl(gb);
 		bw.registerCustomEditor(Number.class, new CustomNumberEditor(Integer.class, false));
 		Map<String, Collection<?>> input = new HashMap<>();
 		HashSet<Integer> value1 = new HashSet<>();
-		value1.add(1);
+		value1.add(new Integer(1));
 		input.put("1", value1);
 		ArrayList<Boolean> value2 = new ArrayList<>();
 		value2.add(Boolean.TRUE);
 		input.put("2", value2);
 		bw.setPropertyValue("collectionMap", input);
-		assertThat(gb.getCollectionMap().get(1)).isInstanceOf(HashSet.class);
-		assertThat(gb.getCollectionMap().get(2)).isInstanceOf(ArrayList.class);
+		boolean condition1 = gb.getCollectionMap().get(new Integer(1)) instanceof HashSet;
+		assertThat(condition1).isTrue();
+		boolean condition = gb.getCollectionMap().get(new Integer(2)) instanceof ArrayList;
+		assertThat(condition).isTrue();
 	}
 
 	@Test
-	void testGenericMapElementWithCollectionValue() {
+	public void testGenericMapElementWithCollectionValue() {
 		GenericBean<?> gb = new GenericBean<>();
 		gb.setCollectionMap(new HashMap<>());
 		BeanWrapper bw = new BeanWrapperImpl(gb);
 		bw.registerCustomEditor(Number.class, new CustomNumberEditor(Integer.class, false));
 		HashSet<Integer> value1 = new HashSet<>();
-		value1.add(1);
+		value1.add(new Integer(1));
 		bw.setPropertyValue("collectionMap[1]", value1);
-		assertThat(gb.getCollectionMap().get(1)).isInstanceOf(HashSet.class);
+		boolean condition = gb.getCollectionMap().get(new Integer(1)) instanceof HashSet;
+		assertThat(condition).isTrue();
 	}
 
 	@Test
-	void testGenericMapFromProperties() {
+	public void testGenericMapFromProperties() {
 		GenericBean<?> gb = new GenericBean<>();
 		BeanWrapper bw = new BeanWrapperImpl(gb);
 		Properties input = new Properties();
 		input.setProperty("4", "5");
 		input.setProperty("6", "7");
 		bw.setPropertyValue("shortMap", input);
-		assertThat(gb.getShortMap().get(Short.valueOf("4"))).isEqualTo(5);
-		assertThat(gb.getShortMap().get(Short.valueOf("6"))).isEqualTo(7);
+		assertThat(gb.getShortMap().get(new Short("4"))).isEqualTo(new Integer(5));
+		assertThat(gb.getShortMap().get(new Short("6"))).isEqualTo(new Integer(7));
 	}
 
 	@Test
-	void testGenericListOfLists() {
+	public void testGenericListOfLists() throws MalformedURLException {
 		GenericBean<String> gb = new GenericBean<>();
-		List<List<Integer>> list = new ArrayList<>();
-		list.add(new ArrayList<>());
+		List<List<Integer>> list = new LinkedList<>();
+		list.add(new LinkedList<>());
 		gb.setListOfLists(list);
 		BeanWrapper bw = new BeanWrapperImpl(gb);
-		bw.setPropertyValue("listOfLists[0][0]", 5);
-		assertThat(bw.getPropertyValue("listOfLists[0][0]")).isEqualTo(5);
-		assertThat(gb.getListOfLists()).singleElement().asList().containsExactly(5);
+		bw.setPropertyValue("listOfLists[0][0]", new Integer(5));
+		assertThat(bw.getPropertyValue("listOfLists[0][0]")).isEqualTo(new Integer(5));
+		assertThat(gb.getListOfLists().get(0).get(0)).isEqualTo(new Integer(5));
 	}
 
 	@Test
-	void testGenericListOfListsWithElementConversion() {
+	public void testGenericListOfListsWithElementConversion() throws MalformedURLException {
 		GenericBean<String> gb = new GenericBean<>();
-		List<List<Integer>> list = new ArrayList<>();
-		list.add(new ArrayList<>());
+		List<List<Integer>> list = new LinkedList<>();
+		list.add(new LinkedList<>());
 		gb.setListOfLists(list);
 		BeanWrapper bw = new BeanWrapperImpl(gb);
 		bw.setPropertyValue("listOfLists[0][0]", "5");
-		assertThat(bw.getPropertyValue("listOfLists[0][0]")).isEqualTo(5);
-		assertThat(gb.getListOfLists()).singleElement().asList().containsExactly(5);
+		assertThat(bw.getPropertyValue("listOfLists[0][0]")).isEqualTo(new Integer(5));
+		assertThat(gb.getListOfLists().get(0).get(0)).isEqualTo(new Integer(5));
 	}
 
 	@Test
-	void testGenericListOfArrays() {
+	public void testGenericListOfArrays() throws MalformedURLException {
 		GenericBean<String> gb = new GenericBean<>();
 		ArrayList<String[]> list = new ArrayList<>();
-		list.add(new String[] {"str1", "str2"});
+		list.add(new String[]{"str1", "str2"});
 		gb.setListOfArrays(list);
 		BeanWrapper bw = new BeanWrapperImpl(gb);
 		bw.setPropertyValue("listOfArrays[0][1]", "str3 ");
@@ -229,10 +220,10 @@ class BeanWrapperGenericsTests {
 	}
 
 	@Test
-	void testGenericListOfArraysWithElementConversion() {
+	public void testGenericListOfArraysWithElementConversion() throws MalformedURLException {
 		GenericBean<String> gb = new GenericBean<>();
 		ArrayList<String[]> list = new ArrayList<>();
-		list.add(new String[] {"str1", "str2"});
+		list.add(new String[]{"str1", "str2"});
 		gb.setListOfArrays(list);
 		BeanWrapper bw = new BeanWrapperImpl(gb);
 		bw.registerCustomEditor(String.class, new StringTrimmerEditor(false));
@@ -242,79 +233,79 @@ class BeanWrapperGenericsTests {
 	}
 
 	@Test
-	void testGenericListOfMaps() {
+	public void testGenericListOfMaps() throws MalformedURLException {
 		GenericBean<String> gb = new GenericBean<>();
-		List<Map<Integer, Long>> list = new ArrayList<>();
+		List<Map<Integer, Long>> list = new LinkedList<>();
 		list.add(new HashMap<>());
 		gb.setListOfMaps(list);
 		BeanWrapper bw = new BeanWrapperImpl(gb);
-		bw.setPropertyValue("listOfMaps[0][10]", 5L);
-		assertThat(bw.getPropertyValue("listOfMaps[0][10]")).isEqualTo(5L);
-		assertThat(gb.getListOfMaps().get(0).get(10)).isEqualTo(Long.valueOf(5));
+		bw.setPropertyValue("listOfMaps[0][10]", new Long(5));
+		assertThat(bw.getPropertyValue("listOfMaps[0][10]")).isEqualTo(new Long(5));
+		assertThat(gb.getListOfMaps().get(0).get(10)).isEqualTo(new Long(5));
 	}
 
 	@Test
-	void testGenericListOfMapsWithElementConversion() {
+	public void testGenericListOfMapsWithElementConversion() throws MalformedURLException {
 		GenericBean<String> gb = new GenericBean<>();
-		List<Map<Integer, Long>> list = new ArrayList<>();
+		List<Map<Integer, Long>> list = new LinkedList<>();
 		list.add(new HashMap<>());
 		gb.setListOfMaps(list);
 		BeanWrapper bw = new BeanWrapperImpl(gb);
 		bw.setPropertyValue("listOfMaps[0][10]", "5");
-		assertThat(bw.getPropertyValue("listOfMaps[0][10]")).isEqualTo(5L);
-		assertThat(gb.getListOfMaps().get(0).get(10)).isEqualTo(Long.valueOf(5));
+		assertThat(bw.getPropertyValue("listOfMaps[0][10]")).isEqualTo(new Long(5));
+		assertThat(gb.getListOfMaps().get(0).get(10)).isEqualTo(new Long(5));
 	}
 
 	@Test
-	void testGenericMapOfMaps() {
+	public void testGenericMapOfMaps() throws MalformedURLException {
 		GenericBean<String> gb = new GenericBean<>();
 		Map<String, Map<Integer, Long>> map = new HashMap<>();
 		map.put("mykey", new HashMap<>());
 		gb.setMapOfMaps(map);
 		BeanWrapper bw = new BeanWrapperImpl(gb);
-		bw.setPropertyValue("mapOfMaps[mykey][10]", 5L);
-		assertThat(bw.getPropertyValue("mapOfMaps[mykey][10]")).isEqualTo(5L);
-		assertThat(gb.getMapOfMaps().get("mykey").get(10)).isEqualTo(Long.valueOf(5));
+		bw.setPropertyValue("mapOfMaps[mykey][10]", new Long(5));
+		assertThat(bw.getPropertyValue("mapOfMaps[mykey][10]")).isEqualTo(new Long(5));
+		assertThat(gb.getMapOfMaps().get("mykey").get(10)).isEqualTo(new Long(5));
 	}
 
 	@Test
-	void testGenericMapOfMapsWithElementConversion() {
+	public void testGenericMapOfMapsWithElementConversion() throws MalformedURLException {
 		GenericBean<String> gb = new GenericBean<>();
 		Map<String, Map<Integer, Long>> map = new HashMap<>();
 		map.put("mykey", new HashMap<>());
 		gb.setMapOfMaps(map);
 		BeanWrapper bw = new BeanWrapperImpl(gb);
 		bw.setPropertyValue("mapOfMaps[mykey][10]", "5");
-		assertThat(bw.getPropertyValue("mapOfMaps[mykey][10]")).isEqualTo(5L);
-		assertThat(gb.getMapOfMaps().get("mykey").get(10)).isEqualTo(Long.valueOf(5));
+		assertThat(bw.getPropertyValue("mapOfMaps[mykey][10]")).isEqualTo(new Long(5));
+		assertThat(gb.getMapOfMaps().get("mykey").get(10)).isEqualTo(new Long(5));
 	}
 
 	@Test
-	void testGenericMapOfLists() {
+	public void testGenericMapOfLists() throws MalformedURLException {
 		GenericBean<String> gb = new GenericBean<>();
 		Map<Integer, List<Integer>> map = new HashMap<>();
-		map.put(1, new ArrayList<>());
+		map.put(new Integer(1), new LinkedList<>());
 		gb.setMapOfLists(map);
 		BeanWrapper bw = new BeanWrapperImpl(gb);
-		bw.setPropertyValue("mapOfLists[1][0]", 5);
-		assertThat(bw.getPropertyValue("mapOfLists[1][0]")).isEqualTo(5);
-		assertThat(gb.getMapOfLists().get(1)).containsExactly(5);
+		bw.setPropertyValue("mapOfLists[1][0]", new Integer(5));
+		assertThat(bw.getPropertyValue("mapOfLists[1][0]")).isEqualTo(new Integer(5));
+		assertThat(gb.getMapOfLists().get(new Integer(1)).get(0)).isEqualTo(new Integer(5));
 	}
 
 	@Test
-	void testGenericMapOfListsWithElementConversion() {
+	public void testGenericMapOfListsWithElementConversion() throws MalformedURLException {
 		GenericBean<String> gb = new GenericBean<>();
 		Map<Integer, List<Integer>> map = new HashMap<>();
-		map.put(1, new ArrayList<>());
+		map.put(new Integer(1), new LinkedList<>());
 		gb.setMapOfLists(map);
 		BeanWrapper bw = new BeanWrapperImpl(gb);
 		bw.setPropertyValue("mapOfLists[1][0]", "5");
-		assertThat(bw.getPropertyValue("mapOfLists[1][0]")).isEqualTo(5);
-		assertThat(gb.getMapOfLists().get(1)).containsExactly(5);
+		assertThat(bw.getPropertyValue("mapOfLists[1][0]")).isEqualTo(new Integer(5));
+		assertThat(gb.getMapOfLists().get(new Integer(1)).get(0)).isEqualTo(new Integer(5));
 	}
 
 	@Test
-	void testGenericTypeNestingMapOfInteger() {
+	public void testGenericTypeNestingMapOfInteger() throws Exception {
 		Map<String, String> map = new HashMap<>();
 		map.put("testKey", "100");
 
@@ -323,13 +314,14 @@ class BeanWrapperGenericsTests {
 		bw.setPropertyValue("mapOfInteger", map);
 
 		Object obj = gb.getMapOfInteger().get("testKey");
-		assertThat(obj).isInstanceOf(Integer.class);
+		boolean condition = obj instanceof Integer;
+		assertThat(condition).isTrue();
 	}
 
 	@Test
-	void testGenericTypeNestingMapOfListOfInteger() {
+	public void testGenericTypeNestingMapOfListOfInteger() throws Exception {
 		Map<String, List<String>> map = new HashMap<>();
-		List<String> list = Arrays.asList("1", "2", "3");
+		List<String> list = Arrays.asList(new String[]{"1", "2", "3"});
 		map.put("testKey", list);
 
 		NestedGenericCollectionBean gb = new NestedGenericCollectionBean();
@@ -337,13 +329,14 @@ class BeanWrapperGenericsTests {
 		bw.setPropertyValue("mapOfListOfInteger", map);
 
 		Object obj = gb.getMapOfListOfInteger().get("testKey").get(0);
-		assertThat(obj).isInstanceOf(Integer.class);
-		assertThat(obj).isEqualTo(1);
+		boolean condition = obj instanceof Integer;
+		assertThat(condition).isTrue();
+		assertThat(((Integer) obj).intValue()).isEqualTo(1);
 	}
 
 	@Test
-	void testGenericTypeNestingListOfMapOfInteger() {
-		List<Map<String, String>> list = new ArrayList<>();
+	public void testGenericTypeNestingListOfMapOfInteger() throws Exception {
+		List<Map<String, String>> list = new LinkedList<>();
 		Map<String, String> map = new HashMap<>();
 		map.put("testKey", "5");
 		list.add(map);
@@ -353,14 +346,15 @@ class BeanWrapperGenericsTests {
 		bw.setPropertyValue("listOfMapOfInteger", list);
 
 		Object obj = gb.getListOfMapOfInteger().get(0).get("testKey");
-		assertThat(obj).isInstanceOf(Integer.class);
-		assertThat(obj).isEqualTo(5);
+		boolean condition = obj instanceof Integer;
+		assertThat(condition).isTrue();
+		assertThat(((Integer) obj).intValue()).isEqualTo(5);
 	}
 
 	@Test
-	void testGenericTypeNestingMapOfListOfListOfInteger() {
+	public void testGenericTypeNestingMapOfListOfListOfInteger() throws Exception {
 		Map<String, List<List<String>>> map = new HashMap<>();
-		List<String> list = Arrays.asList("1", "2", "3");
+		List<String> list = Arrays.asList(new String[]{"1", "2", "3"});
 		map.put("testKey", Collections.singletonList(list));
 
 		NestedGenericCollectionBean gb = new NestedGenericCollectionBean();
@@ -368,16 +362,17 @@ class BeanWrapperGenericsTests {
 		bw.setPropertyValue("mapOfListOfListOfInteger", map);
 
 		Object obj = gb.getMapOfListOfListOfInteger().get("testKey").get(0).get(0);
-		assertThat(obj).isInstanceOf(Integer.class);
-		assertThat(obj).isEqualTo(1);
+		boolean condition = obj instanceof Integer;
+		assertThat(condition).isTrue();
+		assertThat(((Integer) obj).intValue()).isEqualTo(1);
 	}
 
 	@Test
-	void testComplexGenericMap() {
+	public void testComplexGenericMap() {
 		Map<List<String>, List<String>> inputMap = new HashMap<>();
-		List<String> inputKey = new ArrayList<>();
+		List<String> inputKey = new LinkedList<>();
 		inputKey.add("1");
-		List<String> inputValue = new ArrayList<>();
+		List<String> inputValue = new LinkedList<>();
 		inputValue.add("10");
 		inputMap.put(inputKey, inputValue);
 
@@ -385,11 +380,12 @@ class BeanWrapperGenericsTests {
 		BeanWrapper bw = new BeanWrapperImpl(holder);
 		bw.setPropertyValue("genericMap", inputMap);
 
-		assertThat(holder.getGenericMap()).containsOnly(entry(List.of(1), List.of(10L)));
+		assertThat(holder.getGenericMap().keySet().iterator().next().get(0)).isEqualTo(new Integer(1));
+		assertThat(holder.getGenericMap().values().iterator().next().get(0)).isEqualTo(new Long(10));
 	}
 
 	@Test
-	void testComplexGenericMapWithCollectionConversion() {
+	public void testComplexGenericMapWithCollectionConversion() {
 		Map<Set<String>, Set<String>> inputMap = new HashMap<>();
 		Set<String> inputKey = new HashSet<>();
 		inputKey.add("1");
@@ -401,23 +397,25 @@ class BeanWrapperGenericsTests {
 		BeanWrapper bw = new BeanWrapperImpl(holder);
 		bw.setPropertyValue("genericMap", inputMap);
 
-		assertThat(holder.getGenericMap()).containsOnly(entry(List.of(1), List.of(10L)));
+		assertThat(holder.getGenericMap().keySet().iterator().next().get(0)).isEqualTo(new Integer(1));
+		assertThat(holder.getGenericMap().values().iterator().next().get(0)).isEqualTo(new Long(10));
 	}
 
 	@Test
-	void testComplexGenericIndexedMapEntry() {
-		List<String> inputValue = new ArrayList<>();
+	public void testComplexGenericIndexedMapEntry() {
+		List<String> inputValue = new LinkedList<>();
 		inputValue.add("10");
 
 		ComplexMapHolder holder = new ComplexMapHolder();
 		BeanWrapper bw = new BeanWrapperImpl(holder);
 		bw.setPropertyValue("genericIndexedMap[1]", inputValue);
 
-		assertThat(holder.getGenericIndexedMap()).containsOnly(entry(1, List.of(10L)));
+		assertThat(holder.getGenericIndexedMap().keySet().iterator().next()).isEqualTo(new Integer(1));
+		assertThat(holder.getGenericIndexedMap().values().iterator().next().get(0)).isEqualTo(new Long(10));
 	}
 
 	@Test
-	void testComplexGenericIndexedMapEntryWithCollectionConversion() {
+	public void testComplexGenericIndexedMapEntryWithCollectionConversion() {
 		Set<String> inputValue = new HashSet<>();
 		inputValue.add("10");
 
@@ -425,34 +423,25 @@ class BeanWrapperGenericsTests {
 		BeanWrapper bw = new BeanWrapperImpl(holder);
 		bw.setPropertyValue("genericIndexedMap[1]", inputValue);
 
-		assertThat(holder.getGenericIndexedMap()).containsOnly(entry(1, List.of(10L)));
+		assertThat(holder.getGenericIndexedMap().keySet().iterator().next()).isEqualTo(new Integer(1));
+		assertThat(holder.getGenericIndexedMap().values().iterator().next().get(0)).isEqualTo(new Long(10));
 	}
 
 	@Test
-	void testComplexGenericIndexedMapEntryWithPlainValue() {
-		String inputValue = "10";
-
-		ComplexMapHolder holder = new ComplexMapHolder();
-		BeanWrapper bw = new BeanWrapperImpl(holder);
-		bw.setPropertyValue("genericIndexedMap[1]", inputValue);
-
-		assertThat(holder.getGenericIndexedMap()).containsOnly(entry(1, List.of(10L)));
-	}
-
-	@Test
-	void testComplexDerivedIndexedMapEntry() {
-		List<String> inputValue = new ArrayList<>();
+	public void testComplexDerivedIndexedMapEntry() {
+		List<String> inputValue = new LinkedList<>();
 		inputValue.add("10");
 
 		ComplexMapHolder holder = new ComplexMapHolder();
 		BeanWrapper bw = new BeanWrapperImpl(holder);
 		bw.setPropertyValue("derivedIndexedMap[1]", inputValue);
 
-		assertThat(holder.getDerivedIndexedMap()).containsOnly(entry(1, List.of(10L)));
+		assertThat(holder.getDerivedIndexedMap().keySet().iterator().next()).isEqualTo(new Integer(1));
+		assertThat(holder.getDerivedIndexedMap().values().iterator().next().get(0)).isEqualTo(new Long(10));
 	}
 
 	@Test
-	void testComplexDerivedIndexedMapEntryWithCollectionConversion() {
+	public void testComplexDerivedIndexedMapEntryWithCollectionConversion() {
 		Set<String> inputValue = new HashSet<>();
 		inputValue.add("10");
 
@@ -460,94 +449,50 @@ class BeanWrapperGenericsTests {
 		BeanWrapper bw = new BeanWrapperImpl(holder);
 		bw.setPropertyValue("derivedIndexedMap[1]", inputValue);
 
-		assertThat(holder.getDerivedIndexedMap()).containsOnly(entry(1, List.of(10L)));
+		assertThat(holder.getDerivedIndexedMap().keySet().iterator().next()).isEqualTo(new Integer(1));
+		assertThat(holder.getDerivedIndexedMap().values().iterator().next().get(0)).isEqualTo(new Long(10));
 	}
 
 	@Test
-	void testComplexDerivedIndexedMapEntryWithPlainValue() {
-		String inputValue = "10";
-
-		ComplexMapHolder holder = new ComplexMapHolder();
-		BeanWrapper bw = new BeanWrapperImpl(holder);
-		bw.setPropertyValue("derivedIndexedMap[1]", inputValue);
-
-		assertThat(holder.getDerivedIndexedMap()).containsOnly(entry(1, List.of(10L)));
-	}
-
-	@Test
-	void testComplexMultiValueMapEntry() {
-		List<String> inputValue = new ArrayList<>();
-		inputValue.add("10");
-
-		ComplexMapHolder holder = new ComplexMapHolder();
-		BeanWrapper bw = new BeanWrapperImpl(holder);
-		bw.setPropertyValue("multiValueMap[1]", inputValue);
-
-		assertThat(holder.getMultiValueMap()).containsOnly(entry(1, List.of(10L)));
-	}
-
-	@Test
-	void testComplexMultiValueMapEntryWithCollectionConversion() {
-		Set<String> inputValue = new HashSet<>();
-		inputValue.add("10");
-
-		ComplexMapHolder holder = new ComplexMapHolder();
-		BeanWrapper bw = new BeanWrapperImpl(holder);
-		bw.setPropertyValue("multiValueMap[1]", inputValue);
-
-		assertThat(holder.getMultiValueMap()).containsOnly(entry(1, List.of(10L)));
-	}
-
-	@Test
-	void testComplexMultiValueMapEntryWithPlainValue() {
-		String inputValue = "10";
-
-		ComplexMapHolder holder = new ComplexMapHolder();
-		BeanWrapper bw = new BeanWrapperImpl(holder);
-		bw.setPropertyValue("multiValueMap[1]", inputValue);
-
-		assertThat(holder.getMultiValueMap()).containsOnly(entry(1, List.of(10L)));
-	}
-
-	@Test
-	void testGenericallyTypedIntegerBean() {
+	public void testGenericallyTypedIntegerBean() throws Exception {
 		GenericIntegerBean gb = new GenericIntegerBean();
 		BeanWrapper bw = new BeanWrapperImpl(gb);
 		bw.setPropertyValue("genericProperty", "10");
-		bw.setPropertyValue("genericListProperty", new String[] {"20", "30"});
-		assertThat(gb.getGenericProperty()).isEqualTo(10);
-		assertThat(gb.getGenericListProperty()).containsExactly(20, 30);
+		bw.setPropertyValue("genericListProperty", new String[]{"20", "30"});
+		assertThat(gb.getGenericProperty()).isEqualTo(new Integer(10));
+		assertThat(gb.getGenericListProperty().get(0)).isEqualTo(new Integer(20));
+		assertThat(gb.getGenericListProperty().get(1)).isEqualTo(new Integer(30));
 	}
 
 	@Test
-	void testGenericallyTypedSetOfIntegerBean() {
+	public void testGenericallyTypedSetOfIntegerBean() throws Exception {
 		GenericSetOfIntegerBean gb = new GenericSetOfIntegerBean();
 		BeanWrapper bw = new BeanWrapperImpl(gb);
 		bw.setPropertyValue("genericProperty", "10");
-		bw.setPropertyValue("genericListProperty", new String[] {"20", "30"});
-		assertThat(gb.getGenericProperty()).containsExactly(10);
-		assertThat(gb.getGenericListProperty().get(0)).containsExactly(20);
-		assertThat(gb.getGenericListProperty().get(1)).containsExactly(30);
+		bw.setPropertyValue("genericListProperty", new String[]{"20", "30"});
+		assertThat(gb.getGenericProperty().iterator().next()).isEqualTo(new Integer(10));
+		assertThat(gb.getGenericListProperty().get(0).iterator().next()).isEqualTo(new Integer(20));
+		assertThat(gb.getGenericListProperty().get(1).iterator().next()).isEqualTo(new Integer(30));
 	}
 
 	@Test
-	void testSettingGenericPropertyWithReadOnlyInterface() {
+	public void testSettingGenericPropertyWithReadOnlyInterface() {
 		Bar bar = new Bar();
 		BeanWrapper bw = new BeanWrapperImpl(bar);
 		bw.setPropertyValue("version", "10");
-		assertThat(bar.getVersion()).isEqualTo(Double.valueOf(10.0));
+		assertThat(bar.getVersion()).isEqualTo(new Double(10.0));
 	}
 
 	@Test
-	void testSettingLongPropertyWithGenericInterface() {
+	public void testSettingLongPropertyWithGenericInterface() {
 		Promotion bean = new Promotion();
 		BeanWrapper bw = new BeanWrapperImpl(bean);
 		bw.setPropertyValue("id", "10");
-		assertThat(bean.getId()).isEqualTo(Long.valueOf(10));
+		assertThat(bean.getId()).isEqualTo(new Long(10));
 	}
 
 	@Test
-	void testUntypedPropertyWithMapAtRuntime() {
+	public void testUntypedPropertyWithMapAtRuntime() {
 		class Holder<D> {
 			private final D data;
 			public Holder(D data) {
@@ -571,7 +516,7 @@ class BeanWrapperGenericsTests {
 	}
 
 
-	private abstract static class BaseGenericCollectionBean {
+	private static abstract class BaseGenericCollectionBean {
 
 		public abstract Object getMapOfInteger();
 
@@ -638,8 +583,6 @@ class BeanWrapperGenericsTests {
 
 		private DerivedMap derivedIndexedMap = new DerivedMap();
 
-		private MultiValueMap<Integer, Long> multiValueMap = new LinkedMultiValueMap<>();
-
 		public void setGenericMap(Map<List<Integer>, List<Long>> genericMap) {
 			this.genericMap = genericMap;
 		}
@@ -662,14 +605,6 @@ class BeanWrapperGenericsTests {
 
 		public DerivedMap getDerivedIndexedMap() {
 			return derivedIndexedMap;
-		}
-
-		public void setMultiValueMap(MultiValueMap<Integer, Long> multiValueMap) {
-			this.multiValueMap = multiValueMap;
-		}
-
-		public MultiValueMap<Integer, Long> getMultiValueMap() {
-			return multiValueMap;
 		}
 	}
 
