@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2024 the original author or authors.
+ * Copyright 2002-2019 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,23 +16,9 @@
 
 package org.springframework.context.annotation;
 
-import java.io.FileNotFoundException;
-import java.io.IOException;
-import java.lang.annotation.ElementType;
-import java.lang.annotation.Retention;
-import java.lang.annotation.RetentionPolicy;
-import java.lang.annotation.Target;
-import java.util.Map;
-import java.util.Properties;
-
-import jakarta.inject.Inject;
 import org.junit.jupiter.api.Test;
-
 import org.springframework.beans.factory.BeanDefinitionStoreException;
 import org.springframework.beans.factory.FactoryBean;
-import org.springframework.beans.testfixture.beans.TestBean;
-import org.springframework.context.ApplicationContext;
-import org.springframework.context.ConfigurableApplicationContext;
 import org.springframework.core.annotation.AliasFor;
 import org.springframework.core.env.Environment;
 import org.springframework.core.env.MapPropertySource;
@@ -40,7 +26,16 @@ import org.springframework.core.env.MutablePropertySources;
 import org.springframework.core.io.support.EncodedResource;
 import org.springframework.core.io.support.PropertiesLoaderUtils;
 import org.springframework.core.io.support.PropertySourceFactory;
-import org.springframework.util.PlaceholderResolutionException;
+import org.springframework.tests.sample.beans.TestBean;
+
+import javax.inject.Inject;
+import java.io.FileNotFoundException;
+import java.io.IOException;
+import java.lang.annotation.Retention;
+import java.lang.annotation.RetentionPolicy;
+import java.util.Collections;
+import java.util.Iterator;
+import java.util.Properties;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatExceptionOfType;
@@ -50,55 +45,61 @@ import static org.assertj.core.api.Assertions.assertThatExceptionOfType;
  *
  * @author Chris Beams
  * @author Phillip Webb
- * @author Sam Brannen
  * @since 3.1
  */
-class PropertySourceAnnotationTests {
+public class PropertySourceAnnotationTests {
+
 
 	@Test
-	void withExplicitName() {
-		AnnotationConfigApplicationContext ctx = new AnnotationConfigApplicationContext(ConfigWithExplicitName.class);
+	public void withExplicitName() {
+		AnnotationConfigApplicationContext ctx = new AnnotationConfigApplicationContext();
+		ctx.register(ConfigWithExplicitName.class);
+		ctx.refresh();
 		assertThat(ctx.getEnvironment().getPropertySources().contains("p1")).as("property source p1 was not added").isTrue();
 		assertThat(ctx.getBean(TestBean.class).getName()).isEqualTo("p1TestBean");
 
 		// assert that the property source was added last to the set of sources
+		String name;
 		MutablePropertySources sources = ctx.getEnvironment().getPropertySources();
-		String name = sources.stream().toList().get(sources.size() - 1).getName();
+		Iterator<org.springframework.core.env.PropertySource<?>> iterator = sources.iterator();
+		do {
+			name = iterator.next().getName();
+		}
+		while (iterator.hasNext());
+
 		assertThat(name).isEqualTo("p1");
-		ctx.close();
 	}
 
 	@Test
-	void withImplicitName() {
-		AnnotationConfigApplicationContext ctx = new AnnotationConfigApplicationContext(ConfigWithImplicitName.class);
-		String name = "class path resource [org/springframework/context/annotation/p1.properties]";
-		assertThat(ctx.getEnvironment().getPropertySources().contains(name))
-				.as("property source p1 was not added").isTrue();
+	public void withImplicitName() {
+		AnnotationConfigApplicationContext ctx = new AnnotationConfigApplicationContext();
+		ctx.register(ConfigWithImplicitName.class);
+		ctx.refresh();
+		assertThat(ctx.getEnvironment().getPropertySources().contains("class path resource [org/springframework/context/annotation/p1.properties]")).as("property source p1 was not added").isTrue();
 		assertThat(ctx.getBean(TestBean.class).getName()).isEqualTo("p1TestBean");
-		ctx.close();
 	}
 
 	@Test
-	void withTestProfileBeans() {
-		AnnotationConfigApplicationContext ctx = new AnnotationConfigApplicationContext(ConfigWithTestProfileBeans.class);
+	public void withTestProfileBeans() {
+		AnnotationConfigApplicationContext ctx = new AnnotationConfigApplicationContext();
+		ctx.register(ConfigWithTestProfileBeans.class);
+		ctx.refresh();
 		assertThat(ctx.containsBean("testBean")).isTrue();
 		assertThat(ctx.containsBean("testProfileBean")).isTrue();
-		ctx.close();
 	}
 
 	/**
-	 * Tests the LIFO behavior of @PropertySource annotations.
-	 * <p>The last one registered should 'win'.
+	 * Tests the LIFO behavior of @PropertySource annotaitons.
+	 * The last one registered should 'win'.
 	 */
 	@Test
-	void orderingIsLifo() {
+	public void orderingIsLifo() {
 		{
 			AnnotationConfigApplicationContext ctx = new AnnotationConfigApplicationContext();
 			ctx.register(ConfigWithImplicitName.class, P2Config.class);
 			ctx.refresh();
 			// p2 should 'win' as it was registered last
 			assertThat(ctx.getBean(TestBean.class).getName()).isEqualTo("p2TestBean");
-			ctx.close();
 		}
 
 		{
@@ -107,262 +108,207 @@ class PropertySourceAnnotationTests {
 			ctx.refresh();
 			// p1 should 'win' as it was registered last
 			assertThat(ctx.getBean(TestBean.class).getName()).isEqualTo("p1TestBean");
-			ctx.close();
 		}
 	}
 
 	@Test
-	void withCustomFactory() {
+	public void withCustomFactory() {
 		AnnotationConfigApplicationContext ctx = new AnnotationConfigApplicationContext();
 		ctx.register(ConfigWithImplicitName.class, WithCustomFactory.class);
 		ctx.refresh();
 		assertThat(ctx.getBean(TestBean.class).getName()).isEqualTo("P2TESTBEAN");
-		ctx.close();
 	}
 
 	@Test
-	void withCustomFactoryAsMeta() {
+	public void withCustomFactoryAsMeta() {
 		AnnotationConfigApplicationContext ctx = new AnnotationConfigApplicationContext();
 		ctx.register(ConfigWithImplicitName.class, WithCustomFactoryAsMeta.class);
 		ctx.refresh();
 		assertThat(ctx.getBean(TestBean.class).getName()).isEqualTo("P2TESTBEAN");
-		ctx.close();
 	}
 
 	@Test
-	void withUnresolvablePlaceholder() {
-		assertThatExceptionOfType(BeanDefinitionStoreException.class)
-				.isThrownBy(() -> new AnnotationConfigApplicationContext(ConfigWithUnresolvablePlaceholder.class))
-				.withCauseInstanceOf(PlaceholderResolutionException.class);
+	public void withUnresolvablePlaceholder() {
+		AnnotationConfigApplicationContext ctx = new AnnotationConfigApplicationContext();
+		ctx.register(ConfigWithUnresolvablePlaceholder.class);
+		try {
+			ctx.refresh();
+		}
+		catch (BeanDefinitionStoreException ex) {
+			assertThat(ex.getCause() instanceof IllegalArgumentException).isTrue();
+		}
 	}
 
 	@Test
-	void withUnresolvablePlaceholderAndDefault() {
-		AnnotationConfigApplicationContext ctx = new AnnotationConfigApplicationContext(ConfigWithUnresolvablePlaceholderAndDefault.class);
+	public void withUnresolvablePlaceholderAndDefault() {
+		AnnotationConfigApplicationContext ctx = new AnnotationConfigApplicationContext();
+		ctx.register(ConfigWithUnresolvablePlaceholderAndDefault.class);
+		ctx.refresh();
 		assertThat(ctx.getBean(TestBean.class).getName()).isEqualTo("p1TestBean");
-		ctx.close();
 	}
 
 	@Test
-	void withResolvablePlaceholder() {
+	public void withResolvablePlaceholder() {
+		AnnotationConfigApplicationContext ctx = new AnnotationConfigApplicationContext();
+		ctx.register(ConfigWithResolvablePlaceholder.class);
 		System.setProperty("path.to.properties", "org/springframework/context/annotation");
-		AnnotationConfigApplicationContext ctx = new AnnotationConfigApplicationContext(ConfigWithResolvablePlaceholder.class);
+		ctx.refresh();
 		assertThat(ctx.getBean(TestBean.class).getName()).isEqualTo("p1TestBean");
 		System.clearProperty("path.to.properties");
-		ctx.close();
 	}
 
 	@Test
-	void withResolvablePlaceholderAndFactoryBean() {
+	public void withResolvablePlaceholderAndFactoryBean() {
+		AnnotationConfigApplicationContext ctx = new AnnotationConfigApplicationContext();
+		ctx.register(ConfigWithResolvablePlaceholderAndFactoryBean.class);
 		System.setProperty("path.to.properties", "org/springframework/context/annotation");
-		AnnotationConfigApplicationContext ctx = new AnnotationConfigApplicationContext(ConfigWithResolvablePlaceholderAndFactoryBean.class);
+		ctx.refresh();
 		assertThat(ctx.getBean(TestBean.class).getName()).isEqualTo("p1TestBean");
 		System.clearProperty("path.to.properties");
-		ctx.close();
 	}
 
 	@Test
-	void withEmptyResourceLocations() {
-		assertThatExceptionOfType(BeanDefinitionStoreException.class)
-				.isThrownBy(() -> new AnnotationConfigApplicationContext(ConfigWithEmptyResourceLocations.class))
-				.withCauseInstanceOf(IllegalArgumentException.class);
+	public void withEmptyResourceLocations() {
+		AnnotationConfigApplicationContext ctx = new AnnotationConfigApplicationContext();
+		ctx.register(ConfigWithEmptyResourceLocations.class);
+		try {
+			ctx.refresh();
+		}
+		catch (BeanDefinitionStoreException ex) {
+			assertThat(ex.getCause() instanceof IllegalArgumentException).isTrue();
+		}
 	}
 
 	@Test
-	void withNameAndMultipleResourceLocations() {
+	public void withNameAndMultipleResourceLocations() {
 		AnnotationConfigApplicationContext ctx = new AnnotationConfigApplicationContext(ConfigWithNameAndMultipleResourceLocations.class);
-		assertEnvironmentContainsProperties(ctx, "from.p1", "from.p2");
+		assertThat(ctx.getEnvironment().containsProperty("from.p1")).isTrue();
+		assertThat(ctx.getEnvironment().containsProperty("from.p2")).isTrue();
 		// p2 should 'win' as it was registered last
-		assertEnvironmentProperty(ctx, "testbean.name", "p2TestBean");
-		ctx.close();
+		assertThat(ctx.getEnvironment().getProperty("testbean.name")).isEqualTo("p2TestBean");
 	}
 
 	@Test
-	void withMultipleResourceLocations() {
+	public void withMultipleResourceLocations() {
 		AnnotationConfigApplicationContext ctx = new AnnotationConfigApplicationContext(ConfigWithMultipleResourceLocations.class);
-		assertEnvironmentContainsProperties(ctx, "from.p1", "from.p2");
+		assertThat(ctx.getEnvironment().containsProperty("from.p1")).isTrue();
+		assertThat(ctx.getEnvironment().containsProperty("from.p2")).isTrue();
 		// p2 should 'win' as it was registered last
-		assertEnvironmentProperty(ctx, "testbean.name", "p2TestBean");
-		ctx.close();
+		assertThat(ctx.getEnvironment().getProperty("testbean.name")).isEqualTo("p2TestBean");
 	}
 
 	@Test
-	void withRepeatedPropertySourcesInContainerAnnotation() {
+	public void withPropertySources() {
 		AnnotationConfigApplicationContext ctx = new AnnotationConfigApplicationContext(ConfigWithPropertySources.class);
-		assertEnvironmentContainsProperties(ctx, "from.p1", "from.p2");
+		assertThat(ctx.getEnvironment().containsProperty("from.p1")).isTrue();
+		assertThat(ctx.getEnvironment().containsProperty("from.p2")).isTrue();
 		// p2 should 'win' as it was registered last
-		assertEnvironmentProperty(ctx, "testbean.name", "p2TestBean");
-		ctx.close();
+		assertThat(ctx.getEnvironment().getProperty("testbean.name")).isEqualTo("p2TestBean");
 	}
 
 	@Test
-	void withRepeatedPropertySources() {
-		try (AnnotationConfigApplicationContext ctx = new AnnotationConfigApplicationContext(ConfigWithRepeatedPropertySourceAnnotations.class)) {
-			assertEnvironmentContainsProperties(ctx, "from.p1", "from.p2");
-			// p2 should 'win' as it was registered last
-			assertEnvironmentProperty(ctx, "testbean.name", "p2TestBean");
-		}
-	}
-
-	@Test
-	void withRepeatedPropertySourcesOnComposedAnnotation() {
-		Class<?> configClass = ConfigWithRepeatedPropertySourceAnnotationsOnComposedAnnotation.class;
-		String key = "custom.config.package";
-
-		System.clearProperty(key);
-		try (ConfigurableApplicationContext ctx = new AnnotationConfigApplicationContext(configClass)) {
-			assertEnvironmentContainsProperties(ctx, "from.p1", "from.p2");
-			// p2 should 'win' as it was registered last
-			assertEnvironmentProperty(ctx, "testbean.name", "p2TestBean");
-		}
-
-		System.setProperty(key, "org/springframework/context/annotation");
-		try (ConfigurableApplicationContext ctx = new AnnotationConfigApplicationContext(configClass)) {
-			assertEnvironmentContainsProperties(ctx, "from.p1", "from.p2", "from.p3");
-			// p3 should 'win' as it was registered last
-			assertEnvironmentProperty(ctx, "testbean.name", "p3TestBean");
-		}
-		finally {
-			System.clearProperty(key);
-		}
-	}
-
-	@Test
-	void multipleComposedPropertySourceAnnotations() {  // gh-30941
-		ConfigurableApplicationContext ctx = new AnnotationConfigApplicationContext(MultipleComposedAnnotationsConfig.class);
-		ctx.getBean(MultipleComposedAnnotationsConfig.class);
-		assertEnvironmentContainsProperties(ctx, "from.p1", "from.p2", "from.p3", "from.p4", "from.p5");
-		// p5 should 'win' as it is registered via the last "locally declared" direct annotation
-		assertEnvironmentProperty(ctx, "testbean.name", "p5TestBean");
-		ctx.close();
-	}
-
-	@Test
-	void multipleResourcesFromPropertySourcePattern() {  // gh-21325
-		ConfigurableApplicationContext ctx = new AnnotationConfigApplicationContext(ResourcePatternConfig.class);
-		ctx.getBean(ResourcePatternConfig.class);
-		assertEnvironmentContainsProperties(ctx, "from.p1", "from.p2", "from.p3", "from.p4", "from.p5");
-		ctx.close();
-	}
-
-	@Test
-	void withNamedPropertySources() {
+	public void withNamedPropertySources() {
 		AnnotationConfigApplicationContext ctx = new AnnotationConfigApplicationContext(ConfigWithNamedPropertySources.class);
-		assertEnvironmentContainsProperties(ctx, "from.p1", "from.p2");
+		assertThat(ctx.getEnvironment().containsProperty("from.p1")).isTrue();
+		assertThat(ctx.getEnvironment().containsProperty("from.p2")).isTrue();
 		// p2 should 'win' as it was registered last
-		assertEnvironmentProperty(ctx, "testbean.name", "p2TestBean");
-		ctx.close();
+		assertThat(ctx.getEnvironment().getProperty("testbean.name")).isEqualTo("p2TestBean");
 	}
 
 	@Test
-	void withMissingPropertySource() {
-		assertThatExceptionOfType(BeanDefinitionStoreException.class)
-				.isThrownBy(() -> new AnnotationConfigApplicationContext(ConfigWithMissingPropertySource.class))
-				.withCauseInstanceOf(FileNotFoundException.class);
+	public void withMissingPropertySource() {
+		assertThatExceptionOfType(BeanDefinitionStoreException.class).isThrownBy(() ->
+				new AnnotationConfigApplicationContext(ConfigWithMissingPropertySource.class))
+			.withCauseInstanceOf(FileNotFoundException.class);
 	}
 
 	@Test
-	void withIgnoredPropertySource() {
+	public void withIgnoredPropertySource() {
 		AnnotationConfigApplicationContext ctx = new AnnotationConfigApplicationContext(ConfigWithIgnoredPropertySource.class);
-		assertEnvironmentContainsProperties(ctx, "from.p1", "from.p2");
-		ctx.close();
+		assertThat(ctx.getEnvironment().containsProperty("from.p1")).isTrue();
+		assertThat(ctx.getEnvironment().containsProperty("from.p2")).isTrue();
 	}
 
 	@Test
-	void withSameSourceImportedInDifferentOrder() {
+	public void withSameSourceImportedInDifferentOrder() {
 		AnnotationConfigApplicationContext ctx = new AnnotationConfigApplicationContext(ConfigWithSameSourceImportedInDifferentOrder.class);
-		assertEnvironmentContainsProperties(ctx, "from.p1", "from.p2");
-		assertEnvironmentProperty(ctx, "testbean.name", "p2TestBean");
-		ctx.close();
+		assertThat(ctx.getEnvironment().containsProperty("from.p1")).isTrue();
+		assertThat(ctx.getEnvironment().containsProperty("from.p2")).isTrue();
+		assertThat(ctx.getEnvironment().getProperty("testbean.name")).isEqualTo("p2TestBean");
 	}
 
 	@Test
-	void orderingWithAndWithoutNameAndMultipleResourceLocations() {
+	public void orderingWithAndWithoutNameAndMultipleResourceLocations() {
 		// SPR-10820: p2 should 'win' as it was registered last
 		AnnotationConfigApplicationContext ctxWithName = new AnnotationConfigApplicationContext(ConfigWithNameAndMultipleResourceLocations.class);
 		AnnotationConfigApplicationContext ctxWithoutName = new AnnotationConfigApplicationContext(ConfigWithMultipleResourceLocations.class);
-		assertEnvironmentProperty(ctxWithName, "testbean.name", "p2TestBean");
-		assertEnvironmentProperty(ctxWithoutName, "testbean.name", "p2TestBean");
-		ctxWithName.close();
-		ctxWithoutName.close();
+		assertThat(ctxWithoutName.getEnvironment().getProperty("testbean.name")).isEqualTo("p2TestBean");
+		assertThat(ctxWithName.getEnvironment().getProperty("testbean.name")).isEqualTo("p2TestBean");
 	}
 
 	@Test
-	void orderingWithFourResourceLocations() {
+	public void orderingWithAndWithoutNameAndFourResourceLocations() {
 		// SPR-12198: p4 should 'win' as it was registered last
-		AnnotationConfigApplicationContext ctx = new AnnotationConfigApplicationContext(ConfigWithFourResourceLocations.class);
-		assertEnvironmentProperty(ctx, "testbean.name", "p4TestBean");
-		ctx.close();
+		AnnotationConfigApplicationContext ctxWithoutName = new AnnotationConfigApplicationContext(ConfigWithFourResourceLocations.class);
+		assertThat(ctxWithoutName.getEnvironment().getProperty("testbean.name")).isEqualTo("p4TestBean");
 	}
 
 	@Test
-	void orderingDoesntReplaceExisting() {
+	public void orderingDoesntReplaceExisting() throws Exception {
 		// SPR-12198: mySource should 'win' as it was registered manually
 		AnnotationConfigApplicationContext ctxWithoutName = new AnnotationConfigApplicationContext();
-		MapPropertySource mySource = new MapPropertySource("mine", Map.of("testbean.name", "myTestBean"));
+		MapPropertySource mySource = new MapPropertySource("mine", Collections.singletonMap("testbean.name", "myTestBean"));
 		ctxWithoutName.getEnvironment().getPropertySources().addLast(mySource);
 		ctxWithoutName.register(ConfigWithFourResourceLocations.class);
 		ctxWithoutName.refresh();
-		assertEnvironmentProperty(ctxWithoutName, "testbean.name", "myTestBean");
-		ctxWithoutName.close();
+		assertThat(ctxWithoutName.getEnvironment().getProperty("testbean.name")).isEqualTo("myTestBean");
+
 	}
-
-
-	private static void assertEnvironmentContainsProperties(ApplicationContext ctx, String... names) {
-		for (String name : names) {
-			assertThat(ctx.getEnvironment().containsProperty(name)).as("environment contains property '%s'", name).isTrue();
-		}
-	}
-
-	private static void assertEnvironmentProperty(ApplicationContext ctx, String name, Object value) {
-		assertThat(ctx.getEnvironment().getProperty(name)).as("environment property '%s'", name).isEqualTo(value);
-	}
-
 
 	@Configuration
-	@PropertySource("classpath:${unresolvable}/p1.properties")
+	@PropertySource(value="classpath:${unresolvable}/p1.properties")
 	static class ConfigWithUnresolvablePlaceholder {
 	}
 
 
 	@Configuration
-	@PropertySource("classpath:${unresolvable:org/springframework/context/annotation}/p1.properties")
+	@PropertySource(value="classpath:${unresolvable:org/springframework/context/annotation}/p1.properties")
 	static class ConfigWithUnresolvablePlaceholderAndDefault {
 
 		@Inject Environment env;
 
 		@Bean
-		TestBean testBean() {
+		public TestBean testBean() {
 			return new TestBean(env.getProperty("testbean.name"));
 		}
 	}
 
 
 	@Configuration
-	@PropertySource("classpath:${path.to.properties}/p1.properties")
+	@PropertySource(value="classpath:${path.to.properties}/p1.properties")
 	static class ConfigWithResolvablePlaceholder {
 
 		@Inject Environment env;
 
 		@Bean
-		TestBean testBean() {
+		public TestBean testBean() {
 			return new TestBean(env.getProperty("testbean.name"));
 		}
 	}
 
 
 	@Configuration
-	@PropertySource("classpath:${path.to.properties}/p1.properties")
+	@PropertySource(value="classpath:${path.to.properties}/p1.properties")
 	static class ConfigWithResolvablePlaceholderAndFactoryBean {
 
 		@Inject Environment env;
 
 		@Bean
-		FactoryBean<TestBean> testBean() {
+		public FactoryBean testBean() {
 			final String name = env.getProperty("testbean.name");
-			return new FactoryBean<>() {
+			return new FactoryBean() {
 				@Override
-				public TestBean getObject() {
+				public Object getObject() {
 					return new TestBean(name);
 				}
 				@Override
@@ -385,7 +331,7 @@ class PropertySourceAnnotationTests {
 		@Inject Environment env;
 
 		@Bean
-		TestBean testBean() {
+		public TestBean testBean() {
 			return new TestBean(env.getProperty("testbean.name"));
 		}
 	}
@@ -398,7 +344,7 @@ class PropertySourceAnnotationTests {
 		@Inject Environment env;
 
 		@Bean
-		TestBean testBean() {
+		public TestBean testBean() {
 			return new TestBean(env.getProperty("testbean.name"));
 		}
 	}
@@ -412,7 +358,7 @@ class PropertySourceAnnotationTests {
 		@Inject Environment env;
 
 		@Bean @Profile("test")
-		TestBean testBean() {
+		public TestBean testBean() {
 			return new TestBean(env.getProperty("testbean.name"));
 		}
 	}
@@ -431,26 +377,26 @@ class PropertySourceAnnotationTests {
 
 
 	@Configuration
-	@MyPropertySource("classpath:org/springframework/context/annotation/p2.properties")
+	@MyPropertySource(value = "classpath:org/springframework/context/annotation/p2.properties")
 	static class WithCustomFactoryAsMeta {
 	}
 
 
 	@Retention(RetentionPolicy.RUNTIME)
 	@PropertySource(value = {}, factory = MyCustomFactory.class)
-	@interface MyPropertySource {
+	public @interface MyPropertySource {
 
 		@AliasFor(annotation = PropertySource.class)
 		String value();
 	}
 
 
-	static class MyCustomFactory implements PropertySourceFactory {
+	public static class MyCustomFactory implements PropertySourceFactory {
 
 		@Override
 		public org.springframework.core.env.PropertySource<?> createPropertySource(String name, EncodedResource resource) throws IOException {
 			Properties props = PropertiesLoaderUtils.loadProperties(resource);
-			return new org.springframework.core.env.PropertySource<>("my" + name, props) {
+			return new org.springframework.core.env.PropertySource<Properties>("my" + name, props) {
 				@Override
 				public Object getProperty(String name) {
 					String value = props.getProperty(name);
@@ -473,10 +419,11 @@ class PropertySourceAnnotationTests {
 
 
 	@Configuration
-	@PropertySource({
-		"classpath:org/springframework/context/annotation/p1.properties",
-		"classpath:org/springframework/context/annotation/p2.properties"
-	})
+	@PropertySource(
+			value = {
+					"classpath:org/springframework/context/annotation/p1.properties",
+					"classpath:org/springframework/context/annotation/p2.properties"
+			})
 	static class ConfigWithMultipleResourceLocations {
 	}
 
@@ -484,58 +431,9 @@ class PropertySourceAnnotationTests {
 	@Configuration
 	@PropertySources({
 		@PropertySource("classpath:org/springframework/context/annotation/p1.properties"),
-		@PropertySource("classpath:${base.package}/p2.properties")
+		@PropertySource("classpath:${base.package}/p2.properties"),
 	})
 	static class ConfigWithPropertySources {
-	}
-
-
-	@Configuration
-	@PropertySource("classpath:org/springframework/context/annotation/p1.properties")
-	@PropertySource(value = "classpath:${base.package}/p2.properties", ignoreResourceNotFound = true)
-	static class ConfigWithRepeatedPropertySourceAnnotations {
-	}
-
-
-	@Target(ElementType.TYPE)
-	@Retention(RetentionPolicy.RUNTIME)
-	@Configuration
-	@PropertySource("classpath:org/springframework/context/annotation/p1.properties")
-	@PropertySource(value = "classpath:${base.package}/p2.properties", ignoreResourceNotFound = true)
-	@PropertySource(value = "classpath:${custom.config.package:bogus/config}/p3.properties", ignoreResourceNotFound = true)
-	@interface ComposedConfiguration {
-	}
-
-	@ComposedConfiguration
-	static class ConfigWithRepeatedPropertySourceAnnotationsOnComposedAnnotation {
-	}
-
-	@Retention(RetentionPolicy.RUNTIME)
-	@PropertySource("classpath:org/springframework/context/annotation/p1.properties")
-	@interface PropertySource1 {
-	}
-
-	@Retention(RetentionPolicy.RUNTIME)
-	@PropertySource("classpath:org/springframework/context/annotation/p2.properties")
-	@PropertySources({
-		@PropertySource("classpath:org/springframework/context/annotation/p3.properties"),
-	})
-	@interface PropertySource23 {
-	}
-
-	@Configuration
-	@PropertySource1
-	@PropertySource23
-	@PropertySources({
-		@PropertySource("classpath:org/springframework/context/annotation/p4.properties")
-	})
-	@PropertySource("classpath:org/springframework/context/annotation/p5.properties")
-	static class MultipleComposedAnnotationsConfig {
-	}
-
-
-	@PropertySource("classpath*:org/springframework/context/annotation/p?.properties")
-	static class ResourcePatternConfig {
 	}
 
 
@@ -570,7 +468,7 @@ class PropertySourceAnnotationTests {
 
 
 	@Configuration
-	@PropertySource({})
+	@PropertySource(value = {})
 	static class ConfigWithEmptyResourceLocations {
 	}
 
@@ -581,7 +479,8 @@ class PropertySourceAnnotationTests {
 		@PropertySource("classpath:org/springframework/context/annotation/p2.properties")
 	})
 	@Configuration
-	static class ConfigWithSameSourceImportedInDifferentOrder {
+	public static class ConfigWithSameSourceImportedInDifferentOrder {
+
 	}
 
 
@@ -590,17 +489,18 @@ class PropertySourceAnnotationTests {
 		@PropertySource("classpath:org/springframework/context/annotation/p2.properties"),
 		@PropertySource("classpath:org/springframework/context/annotation/p1.properties")
 	})
-	static class ConfigImportedWithSameSourceImportedInDifferentOrder {
+	public static class ConfigImportedWithSameSourceImportedInDifferentOrder {
 	}
 
 
 	@Configuration
-	@PropertySource({
-		"classpath:org/springframework/context/annotation/p1.properties",
-		"classpath:org/springframework/context/annotation/p2.properties",
-		"classpath:org/springframework/context/annotation/p3.properties",
-		"classpath:org/springframework/context/annotation/p4.properties"
-	})
+	@PropertySource(
+			value = {
+					"classpath:org/springframework/context/annotation/p1.properties",
+					"classpath:org/springframework/context/annotation/p2.properties",
+					"classpath:org/springframework/context/annotation/p3.properties",
+					"classpath:org/springframework/context/annotation/p4.properties"
+			})
 	static class ConfigWithFourResourceLocations {
 	}
 
