@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2024 the original author or authors.
+ * Copyright 2002-2019 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,44 +16,11 @@
 
 package org.springframework.validation;
 
-import java.beans.PropertyEditor;
-import java.beans.PropertyEditorSupport;
-import java.io.ByteArrayInputStream;
-import java.io.ByteArrayOutputStream;
-import java.io.ObjectInputStream;
-import java.io.ObjectOutputStream;
-import java.text.ParseException;
-import java.util.AbstractList;
-import java.util.ArrayList;
-import java.util.Collection;
-import java.util.HashMap;
-import java.util.Iterator;
-import java.util.List;
-import java.util.ListIterator;
-import java.util.Locale;
-import java.util.Map;
-import java.util.Optional;
-import java.util.Set;
-import java.util.TreeSet;
-
-import org.assertj.core.api.IntegerAssert;
 import org.junit.jupiter.api.Test;
-
-import org.springframework.beans.BeanWrapper;
-import org.springframework.beans.InvalidPropertyException;
-import org.springframework.beans.MethodInvocationException;
-import org.springframework.beans.MutablePropertyValues;
-import org.springframework.beans.NotWritablePropertyException;
-import org.springframework.beans.NullValueInNestedPathException;
-import org.springframework.beans.TypeMismatchException;
+import org.springframework.beans.*;
 import org.springframework.beans.propertyeditors.CustomCollectionEditor;
 import org.springframework.beans.propertyeditors.CustomNumberEditor;
 import org.springframework.beans.propertyeditors.StringTrimmerEditor;
-import org.springframework.beans.testfixture.beans.DerivedTestBean;
-import org.springframework.beans.testfixture.beans.ITestBean;
-import org.springframework.beans.testfixture.beans.IndexedTestBean;
-import org.springframework.beans.testfixture.beans.SerializablePerson;
-import org.springframework.beans.testfixture.beans.TestBean;
 import org.springframework.context.i18n.LocaleContextHolder;
 import org.springframework.context.support.ResourceBundleMessageSource;
 import org.springframework.context.support.StaticMessageSource;
@@ -64,39 +31,31 @@ import org.springframework.format.number.NumberStyleFormatter;
 import org.springframework.format.support.DefaultFormattingConversionService;
 import org.springframework.format.support.FormattingConversionService;
 import org.springframework.lang.Nullable;
-import org.springframework.tests.sample.beans.BeanWithObjectProperty;
+import org.springframework.tests.sample.beans.*;
+import org.springframework.util.ObjectUtils;
 import org.springframework.util.StringUtils;
 
-import static org.assertj.core.api.Assertions.assertThat;
-import static org.assertj.core.api.Assertions.assertThatExceptionOfType;
-import static org.assertj.core.api.Assertions.assertThatIllegalStateException;
-import static org.assertj.core.api.Assertions.entry;
+import java.beans.PropertyEditor;
+import java.beans.PropertyEditorSupport;
+import java.io.ByteArrayInputStream;
+import java.io.ByteArrayOutputStream;
+import java.io.ObjectInputStream;
+import java.io.ObjectOutputStream;
+import java.text.ParseException;
+import java.util.*;
+
+import static org.assertj.core.api.Assertions.*;
 
 /**
- * Tests for {@link DataBinder}.
- *
  * @author Rod Johnson
  * @author Juergen Hoeller
  * @author Rob Harrop
  * @author Kazuki Shimizu
- * @author Sam Brannen
- * @author Arjen Poutsma
  */
-class DataBinderTests {
-
-	private final Validator spouseValidator = Validator.forInstanceOf(TestBean.class, (tb, errors) -> {
-				if (tb == null || "XXX".equals(tb.getName())) {
-					errors.rejectValue("", "SPOUSE_NOT_AVAILABLE");
-					return;
-				}
-				if (tb.getAge() < 32) {
-					errors.rejectValue("age", "TOO_YOUNG", "simply too young");
-				}
-			});
-
+public class DataBinderTests {
 
 	@Test
-	void bindingNoErrors() throws BindException {
+	public void testBindingNoErrors() throws BindException {
 		TestBean rod = new TestBean();
 		DataBinder binder = new DataBinder(rod, "person");
 		assertThat(binder.isIgnoreUnknownFields()).isTrue();
@@ -108,15 +67,15 @@ class DataBinderTests {
 		binder.bind(pvs);
 		binder.close();
 
-		assertThat(rod.getName()).as("changed name correctly").isEqualTo("Rod");
-		assertThat(rod.getAge()).as("changed age correctly").isEqualTo(32);
+		assertThat(rod.getName().equals("Rod")).as("changed name correctly").isTrue();
+		assertThat(rod.getAge() == 32).as("changed age correctly").isTrue();
 
 		Map<?, ?> map = binder.getBindingResult().getModel();
-		assertThat(map).as("There is one element in map").hasSize(2);
+		assertThat(map.size() == 2).as("There is one element in map").isTrue();
 		TestBean tb = (TestBean) map.get("person");
 		assertThat(tb.equals(rod)).as("Same object").isTrue();
 
-		BindingResult other = new DataBinder(rod, "person").getBindingResult();
+		BindingResult other = new BeanPropertyBindingResult(rod, "person");
 		assertThat(binder.getBindingResult()).isEqualTo(other);
 		assertThat(other).isEqualTo(binder.getBindingResult());
 		BindException ex = new BindException(other);
@@ -126,11 +85,12 @@ class DataBinderTests {
 		assertThat(ex).isEqualTo(binder.getBindingResult());
 
 		other.reject("xxx");
-		assertThat(other).isNotEqualTo(binder.getBindingResult());
+		boolean condition = !other.equals(binder.getBindingResult());
+		assertThat(condition).isTrue();
 	}
 
 	@Test
-	void bindingWithDefaultConversionNoErrors() throws BindException {
+	public void testBindingWithDefaultConversionNoErrors() throws BindException {
 		TestBean rod = new TestBean();
 		DataBinder binder = new DataBinder(rod, "person");
 		assertThat(binder.isIgnoreUnknownFields()).isTrue();
@@ -146,7 +106,7 @@ class DataBinderTests {
 	}
 
 	@Test
-	void nestedBindingWithDefaultConversionNoErrors() throws BindException {
+	public void testNestedBindingWithDefaultConversionNoErrors() throws BindException {
 		TestBean rod = new TestBean(new TestBean());
 		DataBinder binder = new DataBinder(rod, "person");
 		assertThat(binder.isIgnoreUnknownFields()).isTrue();
@@ -162,7 +122,7 @@ class DataBinderTests {
 	}
 
 	@Test
-	void bindingNoErrorsNotIgnoreUnknown() {
+	public void testBindingNoErrorsNotIgnoreUnknown() {
 		TestBean rod = new TestBean();
 		DataBinder binder = new DataBinder(rod, "person");
 		binder.setIgnoreUnknownFields(false);
@@ -170,25 +130,23 @@ class DataBinderTests {
 		pvs.add("name", "Rod");
 		pvs.add("age", 32);
 		pvs.add("nonExisting", "someValue");
-
-		assertThatExceptionOfType(NotWritablePropertyException.class)
-				.isThrownBy(() -> binder.bind(pvs));
+		assertThatExceptionOfType(NotWritablePropertyException.class).isThrownBy(() ->
+				binder.bind(pvs));
 	}
 
 	@Test
-	void bindingNoErrorsWithInvalidField() {
+	public void testBindingNoErrorsWithInvalidField() {
 		TestBean rod = new TestBean();
 		DataBinder binder = new DataBinder(rod, "person");
 		MutablePropertyValues pvs = new MutablePropertyValues();
 		pvs.add("name", "Rod");
 		pvs.add("spouse.age", 32);
-
-		assertThatExceptionOfType(NullValueInNestedPathException.class)
-				.isThrownBy(() -> binder.bind(pvs));
+		assertThatExceptionOfType(NullValueInNestedPathException.class).isThrownBy(() ->
+				binder.bind(pvs));
 	}
 
 	@Test
-	void bindingNoErrorsWithIgnoreInvalid() throws BindException {
+	public void testBindingNoErrorsWithIgnoreInvalid() {
 		TestBean rod = new TestBean();
 		DataBinder binder = new DataBinder(rod, "person");
 		binder.setIgnoreInvalidFields(true);
@@ -197,14 +155,10 @@ class DataBinderTests {
 		pvs.add("spouse.age", 32);
 
 		binder.bind(pvs);
-		binder.close();
-
-		assertThat(rod.getName()).isEqualTo("Rod");
-		assertThat(rod.getSpouse()).isNull();
 	}
 
 	@Test
-	void bindingWithErrors() {
+	public void testBindingWithErrors() {
 		TestBean rod = new TestBean();
 		DataBinder binder = new DataBinder(rod, "person");
 		MutablePropertyValues pvs = new MutablePropertyValues();
@@ -212,81 +166,81 @@ class DataBinderTests {
 		pvs.add("age", "32x");
 		pvs.add("touchy", "m.y");
 		binder.bind(pvs);
+		assertThatExceptionOfType(BindException.class).isThrownBy(
+						binder::close)
+				.satisfies(ex -> {
+					assertThat(rod.getName()).isEqualTo("Rod");
+					Map<?, ?> map = binder.getBindingResult().getModel();
+					TestBean tb = (TestBean) map.get("person");
+					assertThat(tb).isSameAs(rod);
 
-		assertThatExceptionOfType(BindException.class).isThrownBy(binder::close).satisfies(ex -> {
-			assertThat(rod.getName()).isEqualTo("Rod");
-			Map<?, ?> map = binder.getBindingResult().getModel();
-			TestBean tb = (TestBean) map.get("person");
-			assertThat(tb).isSameAs(rod);
+					BindingResult br = (BindingResult) map.get(BindingResult.MODEL_KEY_PREFIX + "person");
+					assertThat(BindingResultUtils.getBindingResult(map, "person")).isEqualTo(br);
+					assertThat(BindingResultUtils.getRequiredBindingResult(map, "person")).isEqualTo(br);
 
-			BindingResult br = (BindingResult) map.get(BindingResult.MODEL_KEY_PREFIX + "person");
-			assertThat(BindingResultUtils.getBindingResult(map, "person")).isEqualTo(br);
-			assertThat(BindingResultUtils.getRequiredBindingResult(map, "person")).isEqualTo(br);
+					assertThat(BindingResultUtils.getBindingResult(map, "someOtherName")).isNull();
+				assertThatIllegalStateException().isThrownBy(() ->
+						BindingResultUtils.getRequiredBindingResult(map, "someOtherName"));
 
-			assertThat(BindingResultUtils.getBindingResult(map, "someOtherName")).isNull();
-			assertThatIllegalStateException().isThrownBy(() ->
-					BindingResultUtils.getRequiredBindingResult(map, "someOtherName"));
+				assertThat(binder.getBindingResult()).as("Added itself to map").isSameAs(br);
+				assertThat(br.hasErrors()).isTrue();
+				assertThat(br.getErrorCount()).isEqualTo(2);
 
-			assertThat(binder.getBindingResult()).as("Added itself to map").isSameAs(br);
-			assertThat(br.hasErrors()).isTrue();
-			assertThat(br.getErrorCount()).isEqualTo(2);
+				assertThat(br.hasFieldErrors("age")).isTrue();
+				assertThat(br.getFieldErrorCount("age")).isEqualTo(1);
+				assertThat(binder.getBindingResult().getFieldValue("age")).isEqualTo("32x");
+				FieldError ageError = binder.getBindingResult().getFieldError("age");
+				assertThat(ageError).isNotNull();
+				assertThat(ageError.getCode()).isEqualTo("typeMismatch");
+				assertThat(ageError.getRejectedValue()).isEqualTo("32x");
+				assertThat(ageError.contains(TypeMismatchException.class)).isTrue();
+				assertThat(ageError.contains(NumberFormatException.class)).isTrue();
+				assertThat(ageError.unwrap(NumberFormatException.class).getMessage()).contains("32x");
+				assertThat(tb.getAge()).isEqualTo(0);
 
-			assertThat(br.hasFieldErrors("age")).isTrue();
-			assertThat(br.getFieldErrorCount("age")).isEqualTo(1);
-			assertThat(binder.getBindingResult().getFieldValue("age")).isEqualTo("32x");
-			FieldError ageError = binder.getBindingResult().getFieldError("age");
-			assertThat(ageError).isNotNull();
-			assertThat(ageError.getCode()).isEqualTo("typeMismatch");
-			assertThat(ageError.getRejectedValue()).isEqualTo("32x");
-			assertThat(ageError.contains(TypeMismatchException.class)).isTrue();
-			assertThat(ageError.contains(NumberFormatException.class)).isTrue();
-			assertThat(ageError.unwrap(NumberFormatException.class).getMessage()).contains("32x");
-			assertThat(tb.getAge()).isEqualTo(0);
+				assertThat(br.hasFieldErrors("touchy")).isTrue();
+				assertThat(br.getFieldErrorCount("touchy")).isEqualTo(1);
+				assertThat(binder.getBindingResult().getFieldValue("touchy")).isEqualTo("m.y");
+				FieldError touchyError = binder.getBindingResult().getFieldError("touchy");
+				assertThat(touchyError).isNotNull();
+				assertThat(touchyError.getCode()).isEqualTo("methodInvocation");
+				assertThat(touchyError.getRejectedValue()).isEqualTo("m.y");
+				assertThat(touchyError.contains(MethodInvocationException.class)).isTrue();
+				assertThat(touchyError.unwrap(MethodInvocationException.class).getCause().getMessage()).contains("a .");
+				assertThat(tb.getTouchy()).isNull();
 
-			assertThat(br.hasFieldErrors("touchy")).isTrue();
-			assertThat(br.getFieldErrorCount("touchy")).isEqualTo(1);
-			assertThat(binder.getBindingResult().getFieldValue("touchy")).isEqualTo("m.y");
-			FieldError touchyError = binder.getBindingResult().getFieldError("touchy");
-			assertThat(touchyError).isNotNull();
-			assertThat(touchyError.getCode()).isEqualTo("methodInvocation");
-			assertThat(touchyError.getRejectedValue()).isEqualTo("m.y");
-			assertThat(touchyError.contains(MethodInvocationException.class)).isTrue();
-			assertThat(touchyError.unwrap(MethodInvocationException.class).getCause().getMessage()).contains("a .");
-			assertThat(tb.getTouchy()).isNull();
-
-			DataBinder binder2 = new DataBinder(new TestBean(), "person");
-			MutablePropertyValues pvs2 = new MutablePropertyValues();
-			pvs2.add("name", "Rod");
-			pvs2.add("age", "32x");
-			pvs2.add("touchy", "m.y");
-			binder2.bind(pvs2);
-			assertThat(ex.getBindingResult()).isEqualTo(binder2.getBindingResult());
-		});
+				DataBinder binder2 = new DataBinder(new TestBean(), "person");
+				MutablePropertyValues pvs2 = new MutablePropertyValues();
+				pvs2.add("name", "Rod");
+				pvs2.add("age", "32x");
+				pvs2.add("touchy", "m.y");
+				binder2.bind(pvs2);
+				assertThat(ex.getBindingResult()).isEqualTo(binder2.getBindingResult());
+			});
 	}
 
 	@Test
-	void bindingWithSystemFieldError() {
+	public void testBindingWithSystemFieldError() {
 		TestBean rod = new TestBean();
 		DataBinder binder = new DataBinder(rod, "person");
 		MutablePropertyValues pvs = new MutablePropertyValues();
 		pvs.add("class.classLoader.URLs[0]", "https://myserver");
 		binder.setIgnoreUnknownFields(false);
-
-		assertThatExceptionOfType(NotWritablePropertyException.class)
-				.isThrownBy(() -> binder.bind(pvs))
+		assertThatExceptionOfType(NotWritablePropertyException.class).isThrownBy(() ->
+						binder.bind(pvs))
 				.withMessageContaining("classLoader");
 	}
 
 	@Test
-	void bindingWithErrorsAndCustomEditors() {
+	public void testBindingWithErrorsAndCustomEditors() {
 		TestBean rod = new TestBean();
 		DataBinder binder = new DataBinder(rod, "person");
-
 		binder.registerCustomEditor(String.class, "touchy", new PropertyEditorSupport() {
 			@Override
 			public void setAsText(String text) throws IllegalArgumentException {
 				setValue("prefix_" + text);
 			}
+
 			@Override
 			public String getAsText() {
 				return getValue().toString().substring(7);
@@ -302,7 +256,6 @@ class DataBinderTests {
 				return ((TestBean) getValue()).getName();
 			}
 		});
-
 		MutablePropertyValues pvs = new MutablePropertyValues();
 		pvs.add("name", "Rod");
 		pvs.add("age", "32x");
@@ -310,54 +263,56 @@ class DataBinderTests {
 		pvs.add("spouse", "Kerry");
 		binder.bind(pvs);
 
-		assertThatExceptionOfType(BindException.class).isThrownBy(binder::close).satisfies(ex -> {
-			assertThat(rod.getName()).isEqualTo("Rod");
-			Map<?, ?> model = binder.getBindingResult().getModel();
-			TestBean tb = (TestBean) model.get("person");
-			assertThat(tb).isEqualTo(rod);
+		assertThatExceptionOfType(BindException.class).isThrownBy(
+				binder::close)
+			.satisfies(ex -> {
+				assertThat(rod.getName()).isEqualTo("Rod");
+				Map<?, ?> model = binder.getBindingResult().getModel();
+				TestBean tb = (TestBean) model.get("person");
+				assertThat(tb).isEqualTo(rod);
 
-			BindingResult br = (BindingResult) model.get(BindingResult.MODEL_KEY_PREFIX + "person");
-			assertThat(binder.getBindingResult()).isSameAs(br);
-			assertThat(br.hasErrors()).isTrue();
-			assertThat(br.getErrorCount()).isEqualTo(2);
+				BindingResult br = (BindingResult) model.get(BindingResult.MODEL_KEY_PREFIX + "person");
+				assertThat(binder.getBindingResult()).isSameAs(br);
+				assertThat(br.hasErrors()).isTrue();
+				assertThat(br.getErrorCount()).isEqualTo(2);
 
-			assertThat(br.hasFieldErrors("age")).isTrue();
-			assertThat(br.getFieldErrorCount("age")).isEqualTo(1);
-			assertThat(binder.getBindingResult().getFieldValue("age")).isEqualTo("32x");
-			FieldError ageError = binder.getBindingResult().getFieldError("age");
-			assertThat(ageError).isNotNull();
-			assertThat(ageError.getCode()).isEqualTo("typeMismatch");
-			assertThat(ageError.getRejectedValue()).isEqualTo("32x");
-			assertThat(tb.getAge()).isEqualTo(0);
+				assertThat(br.hasFieldErrors("age")).isTrue();
+				assertThat(br.getFieldErrorCount("age")).isEqualTo(1);
+				assertThat(binder.getBindingResult().getFieldValue("age")).isEqualTo("32x");
+				FieldError ageError = binder.getBindingResult().getFieldError("age");
+				assertThat(ageError).isNotNull();
+				assertThat(ageError.getCode()).isEqualTo("typeMismatch");
+				assertThat(ageError.getRejectedValue()).isEqualTo("32x");
+				assertThat(tb.getAge()).isEqualTo(0);
 
-			assertThat(br.hasFieldErrors("touchy")).isTrue();
-			assertThat(br.getFieldErrorCount("touchy")).isEqualTo(1);
-			assertThat(binder.getBindingResult().getFieldValue("touchy")).isEqualTo("m.y");
-			FieldError touchyError = binder.getBindingResult().getFieldError("touchy");
-			assertThat(touchyError).isNotNull();
-			assertThat(touchyError.getCode()).isEqualTo("methodInvocation");
-			assertThat(touchyError.getRejectedValue()).isEqualTo("m.y");
-			assertThat(tb.getTouchy()).isNull();
+				assertThat(br.hasFieldErrors("touchy")).isTrue();
+				assertThat(br.getFieldErrorCount("touchy")).isEqualTo(1);
+				assertThat(binder.getBindingResult().getFieldValue("touchy")).isEqualTo("m.y");
+				FieldError touchyError = binder.getBindingResult().getFieldError("touchy");
+				assertThat(touchyError).isNotNull();
+				assertThat(touchyError.getCode()).isEqualTo("methodInvocation");
+				assertThat(touchyError.getRejectedValue()).isEqualTo("m.y");
+				assertThat(tb.getTouchy()).isNull();
 
-			assertThat(br.hasFieldErrors("spouse")).isFalse();
-			assertThat(binder.getBindingResult().getFieldValue("spouse")).isEqualTo("Kerry");
-			assertThat(tb.getSpouse()).isNotNull();
-		});
+				assertThat(br.hasFieldErrors("spouse")).isFalse();
+				assertThat(binder.getBindingResult().getFieldValue("spouse")).isEqualTo("Kerry");
+				assertThat(tb.getSpouse()).isNotNull();
+			});
 	}
 
 	@Test
-	void bindingWithCustomEditorOnObjectField() {
+	public void testBindingWithCustomEditorOnObjectField() {
 		BeanWithObjectProperty tb = new BeanWithObjectProperty();
 		DataBinder binder = new DataBinder(tb);
 		binder.registerCustomEditor(Integer.class, "object", new CustomNumberEditor(Integer.class, true));
 		MutablePropertyValues pvs = new MutablePropertyValues();
 		pvs.add("object", "1");
 		binder.bind(pvs);
-		assertThat(tb.getObject()).isEqualTo(1);
+		assertThat(tb.getObject()).isEqualTo(new Integer(1));
 	}
 
 	@Test
-	void bindingWithFormatter() {
+	public void testBindingWithFormatter() {
 		TestBean tb = new TestBean();
 		DataBinder binder = new DataBinder(tb);
 		FormattingConversionService conversionService = new FormattingConversionService();
@@ -370,18 +325,18 @@ class DataBinderTests {
 		LocaleContextHolder.setLocale(Locale.GERMAN);
 		try {
 			binder.bind(pvs);
-			assertThat(tb.getMyFloat()).isEqualTo(Float.valueOf(1.2f));
+			assertThat(tb.getMyFloat()).isEqualTo(new Float(1.2));
 			assertThat(binder.getBindingResult().getFieldValue("myFloat")).isEqualTo("1,2");
 
 			PropertyEditor editor = binder.getBindingResult().findEditor("myFloat", Float.class);
 			assertThat(editor).isNotNull();
-			editor.setValue(1.4f);
+			editor.setValue(new Float(1.4));
 			assertThat(editor.getAsText()).isEqualTo("1,4");
 
 			editor = binder.getBindingResult().findEditor("myFloat", null);
 			assertThat(editor).isNotNull();
 			editor.setAsText("1,6");
-			assertThat(editor.getValue()).isEqualTo(1.6f);
+			assertThat(editor.getValue()).isEqualTo(new Float(1.6));
 		}
 		finally {
 			LocaleContextHolder.resetLocaleContext();
@@ -389,7 +344,7 @@ class DataBinderTests {
 	}
 
 	@Test
-	void bindingErrorWithFormatter() {
+	public void testBindingErrorWithFormatter() {
 		TestBean tb = new TestBean();
 		DataBinder binder = new DataBinder(tb);
 		FormattingConversionService conversionService = new FormattingConversionService();
@@ -402,7 +357,7 @@ class DataBinderTests {
 		LocaleContextHolder.setLocale(Locale.GERMAN);
 		try {
 			binder.bind(pvs);
-			assertThat(tb.getMyFloat()).isEqualTo(Float.valueOf(0.0f));
+			assertThat(tb.getMyFloat()).isEqualTo(new Float(0.0));
 			assertThat(binder.getBindingResult().getFieldValue("myFloat")).isEqualTo("1x2");
 			assertThat(binder.getBindingResult().hasFieldErrors("myFloat")).isTrue();
 		}
@@ -412,7 +367,7 @@ class DataBinderTests {
 	}
 
 	@Test
-	void bindingErrorWithParseExceptionFromFormatter() {
+	public void testBindingErrorWithParseExceptionFromFormatter() {
 		TestBean tb = new TestBean();
 		DataBinder binder = new DataBinder(tb);
 		FormattingConversionService conversionService = new FormattingConversionService();
@@ -440,7 +395,7 @@ class DataBinderTests {
 	}
 
 	@Test
-	void bindingErrorWithRuntimeExceptionFromFormatter() {
+	public void testBindingErrorWithRuntimeExceptionFromFormatter() {
 		TestBean tb = new TestBean();
 		DataBinder binder = new DataBinder(tb);
 		FormattingConversionService conversionService = new FormattingConversionService();
@@ -448,7 +403,7 @@ class DataBinderTests {
 
 		conversionService.addFormatter(new Formatter<String>() {
 			@Override
-			public String parse(String text, Locale locale) {
+			public String parse(String text, Locale locale) throws ParseException {
 				throw new RuntimeException(text);
 			}
 			@Override
@@ -468,7 +423,7 @@ class DataBinderTests {
 	}
 
 	@Test
-	void bindingWithFormatterAgainstList() {
+	public void testBindingWithFormatterAgainstList() {
 		BeanWithIntegerList tb = new BeanWithIntegerList();
 		DataBinder binder = new DataBinder(tb);
 		FormattingConversionService conversionService = new FormattingConversionService();
@@ -481,7 +436,7 @@ class DataBinderTests {
 		LocaleContextHolder.setLocale(Locale.GERMAN);
 		try {
 			binder.bind(pvs);
-			assertThat(tb.getIntegerList()).containsExactly(1);
+			assertThat(tb.getIntegerList().get(0)).isEqualTo(new Integer(1));
 			assertThat(binder.getBindingResult().getFieldValue("integerList[0]")).isEqualTo("1");
 		}
 		finally {
@@ -490,7 +445,7 @@ class DataBinderTests {
 	}
 
 	@Test
-	void bindingErrorWithFormatterAgainstList() {
+	public void testBindingErrorWithFormatterAgainstList() {
 		BeanWithIntegerList tb = new BeanWithIntegerList();
 		DataBinder binder = new DataBinder(tb);
 		FormattingConversionService conversionService = new FormattingConversionService();
@@ -503,7 +458,7 @@ class DataBinderTests {
 		LocaleContextHolder.setLocale(Locale.GERMAN);
 		try {
 			binder.bind(pvs);
-			assertThat(tb.getIntegerList()).isEmpty();
+			assertThat(tb.getIntegerList().isEmpty()).isTrue();
 			assertThat(binder.getBindingResult().getFieldValue("integerList[0]")).isEqualTo("1x2");
 			assertThat(binder.getBindingResult().hasFieldErrors("integerList[0]")).isTrue();
 		}
@@ -513,7 +468,7 @@ class DataBinderTests {
 	}
 
 	@Test
-	void bindingWithFormatterAgainstFields() {
+	public void testBindingWithFormatterAgainstFields() {
 		TestBean tb = new TestBean();
 		DataBinder binder = new DataBinder(tb);
 		FormattingConversionService conversionService = new FormattingConversionService();
@@ -527,18 +482,18 @@ class DataBinderTests {
 		LocaleContextHolder.setLocale(Locale.GERMAN);
 		try {
 			binder.bind(pvs);
-			assertThat(tb.getMyFloat()).isEqualTo(Float.valueOf(1.2f));
+			assertThat(tb.getMyFloat()).isEqualTo(new Float(1.2));
 			assertThat(binder.getBindingResult().getFieldValue("myFloat")).isEqualTo("1,2");
 
 			PropertyEditor editor = binder.getBindingResult().findEditor("myFloat", Float.class);
 			assertThat(editor).isNotNull();
-			editor.setValue(1.4f);
+			editor.setValue(new Float(1.4));
 			assertThat(editor.getAsText()).isEqualTo("1,4");
 
 			editor = binder.getBindingResult().findEditor("myFloat", null);
 			assertThat(editor).isNotNull();
 			editor.setAsText("1,6");
-			assertThat(editor.getValue()).isEqualTo(1.6f);
+			assertThat(editor.getValue()).isEqualTo(new Float(1.6));
 		}
 		finally {
 			LocaleContextHolder.resetLocaleContext();
@@ -546,7 +501,7 @@ class DataBinderTests {
 	}
 
 	@Test
-	void bindingErrorWithFormatterAgainstFields() {
+	public void testBindingErrorWithFormatterAgainstFields() {
 		TestBean tb = new TestBean();
 		DataBinder binder = new DataBinder(tb);
 		binder.initDirectFieldAccess();
@@ -560,7 +515,7 @@ class DataBinderTests {
 		LocaleContextHolder.setLocale(Locale.GERMAN);
 		try {
 			binder.bind(pvs);
-			assertThat(tb.getMyFloat()).isEqualTo(Float.valueOf(0.0f));
+			assertThat(tb.getMyFloat()).isEqualTo(new Float(0.0));
 			assertThat(binder.getBindingResult().getFieldValue("myFloat")).isEqualTo("1x2");
 			assertThat(binder.getBindingResult().hasFieldErrors("myFloat")).isTrue();
 		}
@@ -570,7 +525,7 @@ class DataBinderTests {
 	}
 
 	@Test
-	void bindingWithCustomFormatter() {
+	public void testBindingWithCustomFormatter() {
 		TestBean tb = new TestBean();
 		DataBinder binder = new DataBinder(tb);
 		binder.addCustomFormatter(new NumberStyleFormatter(), Float.class);
@@ -580,18 +535,18 @@ class DataBinderTests {
 		LocaleContextHolder.setLocale(Locale.GERMAN);
 		try {
 			binder.bind(pvs);
-			assertThat(tb.getMyFloat()).isEqualTo(Float.valueOf(1.2f));
+			assertThat(tb.getMyFloat()).isEqualTo(new Float(1.2));
 			assertThat(binder.getBindingResult().getFieldValue("myFloat")).isEqualTo("1,2");
 
 			PropertyEditor editor = binder.getBindingResult().findEditor("myFloat", Float.class);
 			assertThat(editor).isNotNull();
-			editor.setValue(1.4f);
+			editor.setValue(new Float(1.4));
 			assertThat(editor.getAsText()).isEqualTo("1,4");
 
 			editor = binder.getBindingResult().findEditor("myFloat", null);
 			assertThat(editor).isNotNull();
 			editor.setAsText("1,6");
-			assertThat(((Number) editor.getValue()).floatValue()).isEqualTo(1.6f);
+			assertThat(((Number) editor.getValue()).floatValue() == 1.6f).isTrue();
 		}
 		finally {
 			LocaleContextHolder.resetLocaleContext();
@@ -599,7 +554,7 @@ class DataBinderTests {
 	}
 
 	@Test
-	void bindingErrorWithCustomFormatter() {
+	public void testBindingErrorWithCustomFormatter() {
 		TestBean tb = new TestBean();
 		DataBinder binder = new DataBinder(tb);
 		binder.addCustomFormatter(new NumberStyleFormatter());
@@ -609,7 +564,7 @@ class DataBinderTests {
 		LocaleContextHolder.setLocale(Locale.GERMAN);
 		try {
 			binder.bind(pvs);
-			assertThat(tb.getMyFloat()).isEqualTo(Float.valueOf(0.0f));
+			assertThat(tb.getMyFloat()).isEqualTo(new Float(0.0));
 			assertThat(binder.getBindingResult().getFieldValue("myFloat")).isEqualTo("1x2");
 			assertThat(binder.getBindingResult().hasFieldErrors("myFloat")).isTrue();
 			assertThat(binder.getBindingResult().getFieldError("myFloat").getCode()).isEqualTo("typeMismatch");
@@ -620,7 +575,7 @@ class DataBinderTests {
 	}
 
 	@Test
-	void bindingErrorWithParseExceptionFromCustomFormatter() {
+	public void testBindingErrorWithParseExceptionFromCustomFormatter() {
 		TestBean tb = new TestBean();
 		DataBinder binder = new DataBinder(tb);
 
@@ -629,6 +584,7 @@ class DataBinderTests {
 			public String parse(String text, Locale locale) throws ParseException {
 				throw new ParseException(text, 0);
 			}
+
 			@Override
 			public String print(String object, Locale locale) {
 				return object;
@@ -645,15 +601,16 @@ class DataBinderTests {
 	}
 
 	@Test
-	void bindingErrorWithRuntimeExceptionFromCustomFormatter() {
+	public void testBindingErrorWithRuntimeExceptionFromCustomFormatter() {
 		TestBean tb = new TestBean();
 		DataBinder binder = new DataBinder(tb);
 
 		binder.addCustomFormatter(new Formatter<String>() {
 			@Override
-			public String parse(String text, Locale locale) {
+			public String parse(String text, Locale locale) throws ParseException {
 				throw new RuntimeException(text);
 			}
+
 			@Override
 			public String print(String object, Locale locale) {
 				return object;
@@ -670,7 +627,7 @@ class DataBinderTests {
 	}
 
 	@Test
-	void conversionWithInappropriateStringEditor() {
+	public void testConversionWithInappropriateStringEditor() {
 		DataBinder dataBinder = new DataBinder(null);
 		DefaultFormattingConversionService conversionService = new DefaultFormattingConversionService();
 		dataBinder.setConversionService(conversionService);
@@ -683,24 +640,7 @@ class DataBinderTests {
 	}
 
 	@Test
-	void bindingInDeclarativeMode() throws BindException {
-		TestBean rod = new TestBean();
-		DataBinder binder = new DataBinder(rod);
-		binder.setDeclarativeBinding(true);
-
-		MutablePropertyValues pvs = new MutablePropertyValues();
-		pvs.add("name", "Rod");
-		pvs.add("age", "32x");
-
-		binder.bind(pvs);
-		binder.close();
-
-		assertThat(rod.getName()).isNull();
-		assertThat(rod.getAge()).isEqualTo(0);
-	}
-
-	@Test
-	void bindingWithAllowedFields() throws BindException {
+	public void testBindingWithAllowedFields() throws BindException {
 		TestBean rod = new TestBean();
 		DataBinder binder = new DataBinder(rod);
 		binder.setAllowedFields("name", "myparam");
@@ -710,32 +650,30 @@ class DataBinderTests {
 
 		binder.bind(pvs);
 		binder.close();
-
-		assertThat(rod.getName()).as("changed name correctly").isEqualTo("Rod");
-		assertThat(rod.getAge()).as("did not change age").isZero();
+		assertThat(rod.getName().equals("Rod")).as("changed name correctly").isTrue();
+		assertThat(rod.getAge() == 0).as("did not change age").isTrue();
 	}
 
 	@Test
-	void bindingWithDisallowedFields() throws BindException {
+	public void testBindingWithDisallowedFields() throws BindException {
 		TestBean rod = new TestBean();
 		DataBinder binder = new DataBinder(rod);
-		binder.setDisallowedFields(" ", "\t", "favouriteColour", null, "age");
+		binder.setDisallowedFields("age");
 		MutablePropertyValues pvs = new MutablePropertyValues();
 		pvs.add("name", "Rod");
 		pvs.add("age", "32x");
-		pvs.add("favouriteColour", "BLUE");
 
 		binder.bind(pvs);
 		binder.close();
-
-		assertThat(rod.getName()).as("changed name correctly").isEqualTo("Rod");
-		assertThat(rod.getAge()).as("did not change age").isZero();
-		assertThat(rod.getFavouriteColour()).as("did not change favourite colour").isNull();
-		assertThat(binder.getBindingResult().getSuppressedFields()).containsExactlyInAnyOrder("age", "favouriteColour");
+		assertThat(rod.getName().equals("Rod")).as("changed name correctly").isTrue();
+		assertThat(rod.getAge() == 0).as("did not change age").isTrue();
+		String[] disallowedFields = binder.getBindingResult().getSuppressedFields();
+		assertThat(disallowedFields.length).isEqualTo(1);
+		assertThat(disallowedFields[0]).isEqualTo("age");
 	}
 
 	@Test
-	void bindingWithAllowedAndDisallowedFields() throws BindException {
+	public void testBindingWithAllowedAndDisallowedFields() throws BindException {
 		TestBean rod = new TestBean();
 		DataBinder binder = new DataBinder(rod);
 		binder.setAllowedFields("name", "myparam");
@@ -746,32 +684,34 @@ class DataBinderTests {
 
 		binder.bind(pvs);
 		binder.close();
-
-		assertThat(rod.getName()).as("changed name correctly").isEqualTo("Rod");
-		assertThat(rod.getAge()).as("did not change age").isZero();
-		assertThat(binder.getBindingResult().getSuppressedFields()).containsExactly("age");
+		assertThat(rod.getName().equals("Rod")).as("changed name correctly").isTrue();
+		assertThat(rod.getAge() == 0).as("did not change age").isTrue();
+		String[] disallowedFields = binder.getBindingResult().getSuppressedFields();
+		assertThat(disallowedFields.length).isEqualTo(1);
+		assertThat(disallowedFields[0]).isEqualTo("age");
 	}
 
 	@Test
-	void bindingWithOverlappingAllowedAndDisallowedFields() throws BindException {
+	public void testBindingWithOverlappingAllowedAndDisallowedFields() throws BindException {
 		TestBean rod = new TestBean();
 		DataBinder binder = new DataBinder(rod);
 		binder.setAllowedFields("name", "age");
-		binder.setDisallowedFields("AGE");
+		binder.setDisallowedFields("age");
 		MutablePropertyValues pvs = new MutablePropertyValues();
 		pvs.add("name", "Rod");
 		pvs.add("age", "32x");
 
 		binder.bind(pvs);
 		binder.close();
-
-		assertThat(rod.getName()).as("changed name correctly").isEqualTo("Rod");
-		assertThat(rod.getAge()).as("did not change age").isZero();
-		assertThat(binder.getBindingResult().getSuppressedFields()).containsExactly("age");
+		assertThat(rod.getName().equals("Rod")).as("changed name correctly").isTrue();
+		assertThat(rod.getAge() == 0).as("did not change age").isTrue();
+		String[] disallowedFields = binder.getBindingResult().getSuppressedFields();
+		assertThat(disallowedFields.length).isEqualTo(1);
+		assertThat(disallowedFields[0]).isEqualTo("age");
 	}
 
 	@Test
-	void bindingWithAllowedFieldsUsingAsterisks() throws BindException {
+	public void testBindingWithAllowedFieldsUsingAsterisks() throws BindException {
 		TestBean rod = new TestBean();
 		DataBinder binder = new DataBinder(rod, "person");
 		binder.setAllowedFields("nam*", "*ouchy");
@@ -784,25 +724,25 @@ class DataBinderTests {
 		binder.bind(pvs);
 		binder.close();
 
-		assertThat(rod.getName()).as("changed name correctly").isEqualTo("Rod");
-		assertThat(rod.getTouchy()).as("changed touchy correctly").isEqualTo("Rod");
-		assertThat(rod.getAge()).as("did not change age").isEqualTo(0);
+		assertThat("Rod".equals(rod.getName())).as("changed name correctly").isTrue();
+		assertThat("Rod".equals(rod.getTouchy())).as("changed touchy correctly").isTrue();
+		assertThat(rod.getAge() == 0).as("did not change age").isTrue();
 		String[] disallowedFields = binder.getBindingResult().getSuppressedFields();
-		assertThat(disallowedFields).hasSize(1);
+		assertThat(disallowedFields.length).isEqualTo(1);
 		assertThat(disallowedFields[0]).isEqualTo("age");
 
 		Map<?,?> m = binder.getBindingResult().getModel();
-		assertThat(m).as("There is one element in map").hasSize(2);
+		assertThat(m.size() == 2).as("There is one element in map").isTrue();
 		TestBean tb = (TestBean) m.get("person");
 		assertThat(tb.equals(rod)).as("Same object").isTrue();
 	}
 
 	@Test
-	void bindingWithAllowedAndDisallowedMapFields() throws BindException {
+	public void testBindingWithAllowedAndDisallowedMapFields() throws BindException {
 		TestBean rod = new TestBean();
 		DataBinder binder = new DataBinder(rod);
 		binder.setAllowedFields("someMap[key1]", "someMap[key2]");
-		binder.setDisallowedFields("someMap['KEY3']", "SomeMap[key4]");
+		binder.setDisallowedFields("someMap['key3']", "someMap[key4]");
 
 		MutablePropertyValues pvs = new MutablePropertyValues();
 		pvs.add("someMap[key1]", "value1");
@@ -812,18 +752,21 @@ class DataBinderTests {
 
 		binder.bind(pvs);
 		binder.close();
-
-		@SuppressWarnings("unchecked")
-		Map<String, String> someMap = (Map<String, String>) rod.getSomeMap();
-		assertThat(someMap).containsOnly(entry("key1", "value1"), entry("key2", "value2"));
-		assertThat(binder.getBindingResult().getSuppressedFields()).containsExactly("someMap[key3]", "someMap[key4]");
+		assertThat(rod.getSomeMap().get("key1")).isEqualTo("value1");
+		assertThat(rod.getSomeMap().get("key2")).isEqualTo("value2");
+		assertThat(rod.getSomeMap().get("key3")).isNull();
+		assertThat(rod.getSomeMap().get("key4")).isNull();
+		String[] disallowedFields = binder.getBindingResult().getSuppressedFields();
+		assertThat(disallowedFields.length).isEqualTo(2);
+		assertThat(ObjectUtils.containsElement(disallowedFields, "someMap[key3]")).isTrue();
+		assertThat(ObjectUtils.containsElement(disallowedFields, "someMap[key4]")).isTrue();
 	}
 
 	/**
 	 * Tests for required field, both null, non-existing and empty strings.
 	 */
 	@Test
-	void bindingWithRequiredFields() {
+	public void testBindingWithRequiredFields() {
 		TestBean tb = new TestBean();
 		tb.setSpouse(new TestBean());
 
@@ -854,7 +797,7 @@ class DataBinderTests {
 	}
 
 	@Test
-	void bindingWithRequiredMapFields() {
+	public void testBindingWithRequiredMapFields() {
 		TestBean tb = new TestBean();
 		tb.setSpouse(new TestBean());
 
@@ -874,7 +817,7 @@ class DataBinderTests {
 	}
 
 	@Test
-	void bindingWithNestedObjectCreation() {
+	public void testBindingWithNestedObjectCreation() {
 		TestBean tb = new TestBean();
 
 		DataBinder binder = new DataBinder(tb, "person");
@@ -895,7 +838,7 @@ class DataBinderTests {
 	}
 
 	@Test
-	void customEditorWithOldValueAccess() {
+	public void testCustomEditorWithOldValueAccess() {
 		TestBean tb = new TestBean();
 		DataBinder binder = new DataBinder(tb, "tb");
 
@@ -920,7 +863,7 @@ class DataBinderTests {
 	}
 
 	@Test
-	void customEditorForSingleProperty() {
+	public void testCustomEditorForSingleProperty() {
 		TestBean tb = new TestBean();
 		tb.setSpouse(new TestBean());
 		DataBinder binder = new DataBinder(tb, "tb");
@@ -930,6 +873,7 @@ class DataBinderTests {
 			public void setAsText(String text) throws IllegalArgumentException {
 				setValue("prefix" + text);
 			}
+
 			@Override
 			public String getAsText() {
 				return ((String) getValue()).substring(6);
@@ -946,7 +890,7 @@ class DataBinderTests {
 		binder.getBindingResult().rejectValue("touchy", "someCode", "someMessage");
 		binder.getBindingResult().rejectValue("spouse.name", "someCode", "someMessage");
 
-		assertThat(binder.getBindingResult().getNestedPath()).isEmpty();
+		assertThat(binder.getBindingResult().getNestedPath()).isEqualTo("");
 		assertThat(binder.getBindingResult().getFieldValue("name")).isEqualTo("value");
 		assertThat(binder.getBindingResult().getFieldError("name").getRejectedValue()).isEqualTo("prefixvalue");
 		assertThat(tb.getName()).isEqualTo("prefixvalue");
@@ -960,15 +904,16 @@ class DataBinderTests {
 	}
 
 	@Test
-	void customEditorForPrimitiveProperty() {
+	public void testCustomEditorForPrimitiveProperty() {
 		TestBean tb = new TestBean();
 		DataBinder binder = new DataBinder(tb, "tb");
 
 		binder.registerCustomEditor(int.class, "age", new PropertyEditorSupport() {
 			@Override
 			public void setAsText(String text) throws IllegalArgumentException {
-				setValue(99);
+				setValue(new Integer(99));
 			}
+
 			@Override
 			public String getAsText() {
 				return "argh";
@@ -984,7 +929,7 @@ class DataBinderTests {
 	}
 
 	@Test
-	void customEditorForAllStringProperties() {
+	public void testCustomEditorForAllStringProperties() {
 		TestBean tb = new TestBean();
 		DataBinder binder = new DataBinder(tb, "tb");
 
@@ -993,6 +938,7 @@ class DataBinderTests {
 			public void setAsText(String text) throws IllegalArgumentException {
 				setValue("prefix" + text);
 			}
+
 			@Override
 			public String getAsText() {
 				return ((String) getValue()).substring(6);
@@ -1016,16 +962,17 @@ class DataBinderTests {
 	}
 
 	@Test
-	void customFormatterForSingleProperty() {
+	public void testCustomFormatterForSingleProperty() {
 		TestBean tb = new TestBean();
 		tb.setSpouse(new TestBean());
 		DataBinder binder = new DataBinder(tb, "tb");
 
 		binder.addCustomFormatter(new Formatter<String>() {
 			@Override
-			public String parse(String text, Locale locale) {
+			public String parse(String text, Locale locale) throws ParseException {
 				return "prefix" + text;
 			}
+
 			@Override
 			public String print(String object, Locale locale) {
 				return object.substring(6);
@@ -1042,7 +989,7 @@ class DataBinderTests {
 		binder.getBindingResult().rejectValue("touchy", "someCode", "someMessage");
 		binder.getBindingResult().rejectValue("spouse.name", "someCode", "someMessage");
 
-		assertThat(binder.getBindingResult().getNestedPath()).isEmpty();
+		assertThat(binder.getBindingResult().getNestedPath()).isEqualTo("");
 		assertThat(binder.getBindingResult().getFieldValue("name")).isEqualTo("value");
 		assertThat(binder.getBindingResult().getFieldError("name").getRejectedValue()).isEqualTo("prefixvalue");
 		assertThat(tb.getName()).isEqualTo("prefixvalue");
@@ -1056,15 +1003,16 @@ class DataBinderTests {
 	}
 
 	@Test
-	void customFormatterForPrimitiveProperty() {
+	public void testCustomFormatterForPrimitiveProperty() {
 		TestBean tb = new TestBean();
 		DataBinder binder = new DataBinder(tb, "tb");
 
 		binder.addCustomFormatter(new Formatter<Integer>() {
 			@Override
-			public Integer parse(String text, Locale locale) {
+			public Integer parse(String text, Locale locale) throws ParseException {
 				return 99;
 			}
+
 			@Override
 			public String print(Integer object, Locale locale) {
 				return "argh";
@@ -1080,15 +1028,16 @@ class DataBinderTests {
 	}
 
 	@Test
-	void customFormatterForAllStringProperties() {
+	public void testCustomFormatterForAllStringProperties() {
 		TestBean tb = new TestBean();
 		DataBinder binder = new DataBinder(tb, "tb");
 
 		binder.addCustomFormatter(new Formatter<String>() {
 			@Override
-			public String parse(String text, Locale locale) {
+			public String parse(String text, Locale locale) throws ParseException {
 				return "prefix" + text;
 			}
+
 			@Override
 			public String print(String object, Locale locale) {
 				return object.substring(6);
@@ -1112,7 +1061,7 @@ class DataBinderTests {
 	}
 
 	@Test
-	void javaBeanPropertyConventions() {
+	public void testJavaBeanPropertyConventions() {
 		Book book = new Book();
 		DataBinder binder = new DataBinder(book);
 
@@ -1136,7 +1085,7 @@ class DataBinderTests {
 	}
 
 	@Test
-	void optionalProperty() {
+	public void testOptionalProperty() {
 		OptionalHolder bean = new OptionalHolder();
 		DataBinder binder = new DataBinder(bean);
 		binder.setConversionService(new DefaultConversionService());
@@ -1146,7 +1095,7 @@ class DataBinderTests {
 		pvs.add("name", null);
 		binder.bind(pvs);
 		assertThat(bean.getId()).isEqualTo("1");
-		assertThat(bean.getName()).isEmpty();
+		assertThat(bean.getName().isPresent()).isFalse();
 
 		pvs = new MutablePropertyValues();
 		pvs.add("id", "2");
@@ -1157,7 +1106,7 @@ class DataBinderTests {
 	}
 
 	@Test
-	void validatorNoErrors() throws Exception {
+	public void testValidatorNoErrors() throws Exception {
 		TestBean tb = new TestBean();
 		tb.setAge(33);
 		tb.setName("Rod");
@@ -1166,19 +1115,21 @@ class DataBinderTests {
 		tb2.setAge(34);
 		tb.setSpouse(tb2);
 		DataBinder db = new DataBinder(tb, "tb");
-		db.setValidator(new TestBeanValidator());
 		MutablePropertyValues pvs = new MutablePropertyValues();
 		pvs.add("spouse.age", "argh");
 		db.bind(pvs);
 		Errors errors = db.getBindingResult();
+		Validator testValidator = new TestBeanValidator();
+		testValidator.validate(tb, errors);
 
 		errors.setNestedPath("spouse");
 		assertThat(errors.getNestedPath()).isEqualTo("spouse.");
 		assertThat(errors.getFieldValue("age")).isEqualTo("argh");
+		Validator spouseValidator = new SpouseValidator();
 		spouseValidator.validate(tb.getSpouse(), errors);
 
 		errors.setNestedPath("");
-		assertThat(errors.getNestedPath()).isEmpty();
+		assertThat(errors.getNestedPath()).isEqualTo("");
 		errors.pushNestedPath("spouse");
 		assertThat(errors.getNestedPath()).isEqualTo("spouse.");
 		errors.pushNestedPath("spouse");
@@ -1186,7 +1137,7 @@ class DataBinderTests {
 		errors.popNestedPath();
 		assertThat(errors.getNestedPath()).isEqualTo("spouse.");
 		errors.popNestedPath();
-		assertThat(errors.getNestedPath()).isEmpty();
+		assertThat(errors.getNestedPath()).isEqualTo("");
 		try {
 			errors.popNestedPath();
 		}
@@ -1196,11 +1147,10 @@ class DataBinderTests {
 		errors.pushNestedPath("spouse");
 		assertThat(errors.getNestedPath()).isEqualTo("spouse.");
 		errors.setNestedPath("");
-		assertThat(errors.getNestedPath()).isEmpty();
+		assertThat(errors.getNestedPath()).isEqualTo("");
 		try {
 			errors.popNestedPath();
-		}
-		catch (IllegalStateException ex) {
+		} catch (IllegalStateException ex) {
 			// expected, because stack was reset by setNestedPath
 		}
 
@@ -1208,32 +1158,32 @@ class DataBinderTests {
 		assertThat(errors.getNestedPath()).isEqualTo("spouse.");
 
 		assertThat(errors.getErrorCount()).isEqualTo(1);
-		assertThat(errors.hasGlobalErrors()).isFalse();
+		boolean condition1 = !errors.hasGlobalErrors();
+		assertThat(condition1).isTrue();
 		assertThat(errors.getFieldErrorCount("age")).isEqualTo(1);
-		assertThat(errors.hasFieldErrors("name")).isFalse();
+		boolean condition = !errors.hasFieldErrors("name");
+		assertThat(condition).isTrue();
 	}
 
 	@Test
-	void validatorWithErrors() {
+	public void testValidatorWithErrors() {
 		TestBean tb = new TestBean();
 		tb.setSpouse(new TestBean());
-		Errors errors = new DataBinder(tb, "tb").getBindingResult();
+
+		Errors errors = new BeanPropertyBindingResult(tb, "tb");
 
 		Validator testValidator = new TestBeanValidator();
 		testValidator.validate(tb, errors);
 
 		errors.setNestedPath("spouse.");
 		assertThat(errors.getNestedPath()).isEqualTo("spouse.");
+		Validator spouseValidator = new SpouseValidator();
 		spouseValidator.validate(tb.getSpouse(), errors);
 
 		errors.setNestedPath("");
 		assertThat(errors.hasErrors()).isTrue();
 		assertThat(errors.getErrorCount()).isEqualTo(6);
-		assertThat(errors.getAllErrors())
-				.containsAll(errors.getGlobalErrors())
-				.containsAll(errors.getFieldErrors());
 
-		assertThat(errors.hasGlobalErrors()).isTrue();
 		assertThat(errors.getGlobalErrorCount()).isEqualTo(2);
 		assertThat(errors.getGlobalError().getCode()).isEqualTo("NAME_TOUCHY_MISMATCH");
 		assertThat((errors.getGlobalErrors().get(0)).getCode()).isEqualTo("NAME_TOUCHY_MISMATCH");
@@ -1264,7 +1214,7 @@ class DataBinderTests {
 		assertThat((errors.getFieldErrors("age").get(0)).getCode()).isEqualTo("TOO_YOUNG");
 		assertThat((errors.getFieldErrors("age").get(0)).getObjectName()).isEqualTo("tb");
 		assertThat((errors.getFieldErrors("age").get(0)).getField()).isEqualTo("age");
-		assertThat((errors.getFieldErrors("age").get(0)).getRejectedValue()).isEqualTo(0);
+		assertThat((errors.getFieldErrors("age").get(0)).getRejectedValue()).isEqualTo(new Integer(0));
 		assertThat((errors.getFieldErrors("age").get(1)).getCode()).isEqualTo("AGE_NOT_ODD");
 
 		assertThat(errors.hasFieldErrors("name")).isTrue();
@@ -1275,41 +1225,37 @@ class DataBinderTests {
 		assertThat(errors.getFieldError("name").getCodes()[2]).isEqualTo("NOT_ROD.java.lang.String");
 		assertThat(errors.getFieldError("name").getCodes()[3]).isEqualTo("NOT_ROD");
 		assertThat((errors.getFieldErrors("name").get(0)).getField()).isEqualTo("name");
-		assertThat((errors.getFieldErrors("name").get(0)).getRejectedValue()).isNull();
+		assertThat((errors.getFieldErrors("name").get(0)).getRejectedValue()).isEqualTo(null);
 
 		assertThat(errors.hasFieldErrors("spouse.age")).isTrue();
 		assertThat(errors.getFieldErrorCount("spouse.age")).isEqualTo(1);
 		assertThat(errors.getFieldError("spouse.age").getCode()).isEqualTo("TOO_YOUNG");
 		assertThat((errors.getFieldErrors("spouse.age").get(0)).getObjectName()).isEqualTo("tb");
-		assertThat((errors.getFieldErrors("spouse.age").get(0)).getRejectedValue()).isEqualTo(0);
+		assertThat((errors.getFieldErrors("spouse.age").get(0)).getRejectedValue()).isEqualTo(new Integer(0));
 	}
 
 	@Test
-	void validatorWithErrorsAndCodesPrefix() {
+	public void testValidatorWithErrorsAndCodesPrefix() {
 		TestBean tb = new TestBean();
 		tb.setSpouse(new TestBean());
 
-		DataBinder dataBinder = new DataBinder(tb, "tb");
+		BeanPropertyBindingResult errors = new BeanPropertyBindingResult(tb, "tb");
 		DefaultMessageCodesResolver codesResolver = new DefaultMessageCodesResolver();
 		codesResolver.setPrefix("validation.");
-		dataBinder.setMessageCodesResolver(codesResolver);
-		Errors errors = dataBinder.getBindingResult();
+		errors.setMessageCodesResolver(codesResolver);
 
 		Validator testValidator = new TestBeanValidator();
 		testValidator.validate(tb, errors);
 
 		errors.setNestedPath("spouse.");
 		assertThat(errors.getNestedPath()).isEqualTo("spouse.");
+		Validator spouseValidator = new SpouseValidator();
 		spouseValidator.validate(tb.getSpouse(), errors);
 
 		errors.setNestedPath("");
 		assertThat(errors.hasErrors()).isTrue();
 		assertThat(errors.getErrorCount()).isEqualTo(6);
-		assertThat(errors.getAllErrors())
-				.containsAll(errors.getGlobalErrors())
-				.containsAll(errors.getFieldErrors());
 
-		assertThat(errors.hasGlobalErrors()).isTrue();
 		assertThat(errors.getGlobalErrorCount()).isEqualTo(2);
 		assertThat(errors.getGlobalError().getCode()).isEqualTo("validation.NAME_TOUCHY_MISMATCH");
 		assertThat((errors.getGlobalErrors().get(0)).getCode()).isEqualTo("validation.NAME_TOUCHY_MISMATCH");
@@ -1340,7 +1286,7 @@ class DataBinderTests {
 		assertThat((errors.getFieldErrors("age").get(0)).getCode()).isEqualTo("validation.TOO_YOUNG");
 		assertThat((errors.getFieldErrors("age").get(0)).getObjectName()).isEqualTo("tb");
 		assertThat((errors.getFieldErrors("age").get(0)).getField()).isEqualTo("age");
-		assertThat((errors.getFieldErrors("age").get(0)).getRejectedValue()).isEqualTo(0);
+		assertThat((errors.getFieldErrors("age").get(0)).getRejectedValue()).isEqualTo(new Integer(0));
 		assertThat((errors.getFieldErrors("age").get(1)).getCode()).isEqualTo("validation.AGE_NOT_ODD");
 
 		assertThat(errors.hasFieldErrors("name")).isTrue();
@@ -1351,74 +1297,24 @@ class DataBinderTests {
 		assertThat(errors.getFieldError("name").getCodes()[2]).isEqualTo("validation.NOT_ROD.java.lang.String");
 		assertThat(errors.getFieldError("name").getCodes()[3]).isEqualTo("validation.NOT_ROD");
 		assertThat((errors.getFieldErrors("name").get(0)).getField()).isEqualTo("name");
-		assertThat((errors.getFieldErrors("name").get(0)).getRejectedValue()).isNull();
+		assertThat((errors.getFieldErrors("name").get(0)).getRejectedValue()).isEqualTo(null);
 
 		assertThat(errors.hasFieldErrors("spouse.age")).isTrue();
 		assertThat(errors.getFieldErrorCount("spouse.age")).isEqualTo(1);
 		assertThat(errors.getFieldError("spouse.age").getCode()).isEqualTo("validation.TOO_YOUNG");
 		assertThat((errors.getFieldErrors("spouse.age").get(0)).getObjectName()).isEqualTo("tb");
-		assertThat((errors.getFieldErrors("spouse.age").get(0)).getRejectedValue()).isEqualTo(0);
+		assertThat((errors.getFieldErrors("spouse.age").get(0)).getRejectedValue()).isEqualTo(new Integer(0));
 	}
 
 	@Test
-	void validateObjectWithErrors() {
+	public void testValidatorWithNestedObjectNull() {
 		TestBean tb = new TestBean();
-		Errors errors = new SimpleErrors(tb, "tb");
-
+		Errors errors = new BeanPropertyBindingResult(tb, "tb");
 		Validator testValidator = new TestBeanValidator();
 		testValidator.validate(tb, errors);
-
-		assertThat(errors.hasErrors()).isTrue();
-		assertThat(errors.getErrorCount()).isEqualTo(5);
-		assertThat(errors.getAllErrors())
-				.containsAll(errors.getGlobalErrors())
-				.containsAll(errors.getFieldErrors());
-
-		assertThat(errors.hasGlobalErrors()).isTrue();
-		assertThat(errors.getGlobalErrorCount()).isEqualTo(2);
-		assertThat(errors.getGlobalError().getCode()).isEqualTo("NAME_TOUCHY_MISMATCH");
-		assertThat((errors.getGlobalErrors().get(0)).getCode()).isEqualTo("NAME_TOUCHY_MISMATCH");
-		assertThat((errors.getGlobalErrors().get(0)).getObjectName()).isEqualTo("tb");
-		assertThat((errors.getGlobalErrors().get(1)).getCode()).isEqualTo("GENERAL_ERROR");
-		assertThat((errors.getGlobalErrors().get(1)).getDefaultMessage()).isEqualTo("msg");
-		assertThat((errors.getGlobalErrors().get(1)).getArguments()[0]).isEqualTo("arg");
-
-		assertThat(errors.hasFieldErrors()).isTrue();
-		assertThat(errors.getFieldErrorCount()).isEqualTo(3);
-		assertThat(errors.getFieldError().getCode()).isEqualTo("TOO_YOUNG");
-		assertThat((errors.getFieldErrors().get(0)).getCode()).isEqualTo("TOO_YOUNG");
-		assertThat((errors.getFieldErrors().get(0)).getField()).isEqualTo("age");
-		assertThat((errors.getFieldErrors().get(1)).getCode()).isEqualTo("AGE_NOT_ODD");
-		assertThat((errors.getFieldErrors().get(1)).getField()).isEqualTo("age");
-		assertThat((errors.getFieldErrors().get(2)).getCode()).isEqualTo("NOT_ROD");
-		assertThat((errors.getFieldErrors().get(2)).getField()).isEqualTo("name");
-
-		assertThat(errors.hasFieldErrors("age")).isTrue();
-		assertThat(errors.getFieldErrorCount("age")).isEqualTo(2);
-		assertThat(errors.getFieldError("age").getCode()).isEqualTo("TOO_YOUNG");
-		assertThat((errors.getFieldErrors("age").get(0)).getCode()).isEqualTo("TOO_YOUNG");
-		assertThat((errors.getFieldErrors("age").get(0)).getObjectName()).isEqualTo("tb");
-		assertThat((errors.getFieldErrors("age").get(0)).getField()).isEqualTo("age");
-		assertThat((errors.getFieldErrors("age").get(0)).getRejectedValue()).isEqualTo(0);
-		assertThat((errors.getFieldErrors("age").get(1)).getCode()).isEqualTo("AGE_NOT_ODD");
-
-		assertThat(errors.hasFieldErrors("name")).isTrue();
-		assertThat(errors.getFieldErrorCount("name")).isEqualTo(1);
-		assertThat(errors.getFieldError("name").getCode()).isEqualTo("NOT_ROD");
-		assertThat((errors.getFieldErrors("name").get(0)).getField()).isEqualTo("name");
-		assertThat((errors.getFieldErrors("name").get(0)).getRejectedValue()).isNull();
-	}
-
-	@Test
-	void validatorWithNestedObjectNull() {
-		TestBean tb = new TestBean();
-		Errors errors = new DataBinder(tb, "tb").getBindingResult();
-
-		Validator testValidator = new TestBeanValidator();
-		testValidator.validate(tb, errors);
-
 		errors.setNestedPath("spouse.");
 		assertThat(errors.getNestedPath()).isEqualTo("spouse.");
+		Validator spouseValidator = new SpouseValidator();
 		spouseValidator.validate(tb.getSpouse(), errors);
 		errors.setNestedPath("");
 
@@ -1426,39 +1322,44 @@ class DataBinderTests {
 		assertThat(errors.getFieldErrorCount("spouse")).isEqualTo(1);
 		assertThat(errors.getFieldError("spouse").getCode()).isEqualTo("SPOUSE_NOT_AVAILABLE");
 		assertThat((errors.getFieldErrors("spouse").get(0)).getObjectName()).isEqualTo("tb");
-		assertThat((errors.getFieldErrors("spouse").get(0)).getRejectedValue()).isNull();
+		assertThat((errors.getFieldErrors("spouse").get(0)).getRejectedValue()).isEqualTo(null);
 	}
 
 	@Test
-	void nestedValidatorWithoutNestedPath() {
+	public void testNestedValidatorWithoutNestedPath() {
 		TestBean tb = new TestBean();
 		tb.setName("XXX");
-		Errors errors = spouseValidator.validateObject(tb);
+		Errors errors = new BeanPropertyBindingResult(tb, "tb");
+		Validator spouseValidator = new SpouseValidator();
+		spouseValidator.validate(tb, errors);
 
 		assertThat(errors.hasGlobalErrors()).isTrue();
 		assertThat(errors.getGlobalErrorCount()).isEqualTo(1);
 		assertThat(errors.getGlobalError().getCode()).isEqualTo("SPOUSE_NOT_AVAILABLE");
-		assertThat((errors.getGlobalErrors().get(0)).getObjectName()).isEqualTo("TestBean");
+		assertThat((errors.getGlobalErrors().get(0)).getObjectName()).isEqualTo("tb");
 	}
 
 	@Test
-	@SuppressWarnings("unchecked")
-	void bindingStringArrayToIntegerSet() {
+	public void testBindingStringArrayToIntegerSet() {
 		IndexedTestBean tb = new IndexedTestBean();
 		DataBinder binder = new DataBinder(tb, "tb");
 		binder.registerCustomEditor(Set.class, new CustomCollectionEditor(TreeSet.class) {
 			@Override
 			protected Object convertElement(Object element) {
-				return Integer.valueOf(element.toString());
+				return new Integer(element.toString());
 			}
 		});
 		MutablePropertyValues pvs = new MutablePropertyValues();
-		pvs.add("set", new String[] {"10", "20", "30"});
+		pvs.add("set", new String[]{"10", "20", "30"});
 		binder.bind(pvs);
 
 		assertThat(binder.getBindingResult().getFieldValue("set")).isEqualTo(tb.getSet());
-		assertThat(tb.getSet()).isInstanceOf(TreeSet.class);
-		assertThat((Set<Integer>) tb.getSet()).containsExactly(10, 20, 30);
+		boolean condition = tb.getSet() instanceof TreeSet;
+		assertThat(condition).isTrue();
+		assertThat(tb.getSet().size()).isEqualTo(3);
+		assertThat(tb.getSet().contains(new Integer(10))).isTrue();
+		assertThat(tb.getSet().contains(new Integer(20))).isTrue();
+		assertThat(tb.getSet().contains(new Integer(30))).isTrue();
 
 		pvs = new MutablePropertyValues();
 		pvs.add("set", null);
@@ -1468,7 +1369,7 @@ class DataBinderTests {
 	}
 
 	@Test
-	void bindingNullToEmptyCollection() {
+	public void testBindingNullToEmptyCollection() {
 		IndexedTestBean tb = new IndexedTestBean();
 		DataBinder binder = new DataBinder(tb, "tb");
 		binder.registerCustomEditor(Set.class, new CustomCollectionEditor(TreeSet.class, true));
@@ -1476,12 +1377,13 @@ class DataBinderTests {
 		pvs.add("set", null);
 		binder.bind(pvs);
 
-		assertThat(tb.getSet()).isInstanceOf(TreeSet.class);
-		assertThat(tb.getSet()).isEmpty();
+		boolean condition = tb.getSet() instanceof TreeSet;
+		assertThat(condition).isTrue();
+		assertThat(tb.getSet().isEmpty()).isTrue();
 	}
 
 	@Test
-	void bindingToIndexedField() {
+	public void testBindingToIndexedField() {
 		IndexedTestBean tb = new IndexedTestBean();
 		DataBinder binder = new DataBinder(tb, "tb");
 		binder.registerCustomEditor(String.class, "array.name", new PropertyEditorSupport() {
@@ -1520,7 +1422,7 @@ class DataBinderTests {
 	}
 
 	@Test
-	void bindingToNestedIndexedField() {
+	public void testBindingToNestedIndexedField() {
 		IndexedTestBean tb = new IndexedTestBean();
 		tb.getArray()[0].setNestedIndexedBean(new IndexedTestBean());
 		tb.getArray()[1].setNestedIndexedBean(new IndexedTestBean());
@@ -1551,7 +1453,7 @@ class DataBinderTests {
 	}
 
 	@Test
-	void editorForNestedIndexedField() {
+	public void testEditorForNestedIndexedField() {
 		IndexedTestBean tb = new IndexedTestBean();
 		tb.getArray()[0].setNestedIndexedBean(new IndexedTestBean());
 		tb.getArray()[1].setNestedIndexedBean(new IndexedTestBean());
@@ -1561,6 +1463,7 @@ class DataBinderTests {
 			public void setAsText(String text) throws IllegalArgumentException {
 				setValue("list" + text);
 			}
+
 			@Override
 			public String getAsText() {
 				return ((String) getValue()).substring(4);
@@ -1577,7 +1480,7 @@ class DataBinderTests {
 	}
 
 	@Test
-	void specificEditorForNestedIndexedField() {
+	public void testSpecificEditorForNestedIndexedField() {
 		IndexedTestBean tb = new IndexedTestBean();
 		tb.getArray()[0].setNestedIndexedBean(new IndexedTestBean());
 		tb.getArray()[1].setNestedIndexedBean(new IndexedTestBean());
@@ -1587,6 +1490,7 @@ class DataBinderTests {
 			public void setAsText(String text) throws IllegalArgumentException {
 				setValue("list" + text);
 			}
+
 			@Override
 			public String getAsText() {
 				return ((String) getValue()).substring(4);
@@ -1603,7 +1507,7 @@ class DataBinderTests {
 	}
 
 	@Test
-	void innerSpecificEditorForNestedIndexedField() {
+	public void testInnerSpecificEditorForNestedIndexedField() {
 		IndexedTestBean tb = new IndexedTestBean();
 		tb.getArray()[0].setNestedIndexedBean(new IndexedTestBean());
 		tb.getArray()[1].setNestedIndexedBean(new IndexedTestBean());
@@ -1613,6 +1517,7 @@ class DataBinderTests {
 			public void setAsText(String text) throws IllegalArgumentException {
 				setValue("list" + text);
 			}
+
 			@Override
 			public String getAsText() {
 				return ((String) getValue()).substring(4);
@@ -1629,7 +1534,7 @@ class DataBinderTests {
 	}
 
 	@Test
-	void directBindingToIndexedField() {
+	public void testDirectBindingToIndexedField() {
 		IndexedTestBean tb = new IndexedTestBean();
 		DataBinder binder = new DataBinder(tb, "tb");
 		binder.registerCustomEditor(TestBean.class, "array", new PropertyEditorSupport() {
@@ -1639,6 +1544,7 @@ class DataBinderTests {
 				tb.setName("array" + text);
 				setValue(tb);
 			}
+
 			@Override
 			public String getAsText() {
 				return ((TestBean) getValue()).getName();
@@ -1659,7 +1565,7 @@ class DataBinderTests {
 		assertThat(errors.getFieldError("array[0]").getCodes()[1]).isEqualTo("NOT_ROD.tb.array");
 		assertThat(errors.getFieldError("array[0]").getCodes()[2]).isEqualTo("NOT_ROD.array[0]");
 		assertThat(errors.getFieldError("array[0]").getCodes()[3]).isEqualTo("NOT_ROD.array");
-		assertThat(errors.getFieldError("array[0]").getCodes()[4]).isEqualTo("NOT_ROD.org.springframework.beans.testfixture.beans.DerivedTestBean");
+		assertThat(errors.getFieldError("array[0]").getCodes()[4]).isEqualTo("NOT_ROD.org.springframework.tests.sample.beans.DerivedTestBean");
 		assertThat(errors.getFieldError("array[0]").getCodes()[5]).isEqualTo("NOT_ROD");
 		assertThat(errors.getFieldValue("array[0]")).isEqualTo("arraya");
 
@@ -1669,7 +1575,7 @@ class DataBinderTests {
 		assertThat(errors.getFieldError("map[key1]").getCodes()[1]).isEqualTo("NOT_ROD.tb.map");
 		assertThat(errors.getFieldError("map[key1]").getCodes()[2]).isEqualTo("NOT_ROD.map[key1]");
 		assertThat(errors.getFieldError("map[key1]").getCodes()[3]).isEqualTo("NOT_ROD.map");
-		assertThat(errors.getFieldError("map[key1]").getCodes()[4]).isEqualTo("NOT_ROD.org.springframework.beans.testfixture.beans.TestBean");
+		assertThat(errors.getFieldError("map[key1]").getCodes()[4]).isEqualTo("NOT_ROD.org.springframework.tests.sample.beans.TestBean");
 		assertThat(errors.getFieldError("map[key1]").getCodes()[5]).isEqualTo("NOT_ROD");
 
 		assertThat(errors.getFieldErrorCount("map[key0]")).isEqualTo(1);
@@ -1682,7 +1588,7 @@ class DataBinderTests {
 	}
 
 	@Test
-	void directBindingToEmptyIndexedFieldWithRegisteredSpecificEditor() {
+	public void testDirectBindingToEmptyIndexedFieldWithRegisteredSpecificEditor() {
 		IndexedTestBean tb = new IndexedTestBean();
 		DataBinder binder = new DataBinder(tb, "tb");
 		binder.registerCustomEditor(TestBean.class, "map[key0]", new PropertyEditorSupport() {
@@ -1692,6 +1598,7 @@ class DataBinderTests {
 				tb.setName("array" + text);
 				setValue(tb);
 			}
+
 			@Override
 			public String getAsText() {
 				return ((TestBean) getValue()).getName();
@@ -1708,12 +1615,12 @@ class DataBinderTests {
 		assertThat(errors.getFieldError("map[key0]").getCodes()[3]).isEqualTo("NOT_NULL.map");
 		// This next code is only generated because of the registered editor, using the
 		// registered type of the editor as guess for the content type of the collection.
-		assertThat(errors.getFieldError("map[key0]").getCodes()[4]).isEqualTo("NOT_NULL.org.springframework.beans.testfixture.beans.TestBean");
+		assertThat(errors.getFieldError("map[key0]").getCodes()[4]).isEqualTo("NOT_NULL.org.springframework.tests.sample.beans.TestBean");
 		assertThat(errors.getFieldError("map[key0]").getCodes()[5]).isEqualTo("NOT_NULL");
 	}
 
 	@Test
-	void directBindingToEmptyIndexedFieldWithRegisteredGenericEditor() {
+	public void testDirectBindingToEmptyIndexedFieldWithRegisteredGenericEditor() {
 		IndexedTestBean tb = new IndexedTestBean();
 		DataBinder binder = new DataBinder(tb, "tb");
 		binder.registerCustomEditor(TestBean.class, "map", new PropertyEditorSupport() {
@@ -1723,6 +1630,7 @@ class DataBinderTests {
 				tb.setName("array" + text);
 				setValue(tb);
 			}
+
 			@Override
 			public String getAsText() {
 				return ((TestBean) getValue()).getName();
@@ -1739,12 +1647,12 @@ class DataBinderTests {
 		assertThat(errors.getFieldError("map[key0]").getCodes()[3]).isEqualTo("NOT_NULL.map");
 		// This next code is only generated because of the registered editor, using the
 		// registered type of the editor as guess for the content type of the collection.
-		assertThat(errors.getFieldError("map[key0]").getCodes()[4]).isEqualTo("NOT_NULL.org.springframework.beans.testfixture.beans.TestBean");
+		assertThat(errors.getFieldError("map[key0]").getCodes()[4]).isEqualTo("NOT_NULL.org.springframework.tests.sample.beans.TestBean");
 		assertThat(errors.getFieldError("map[key0]").getCodes()[5]).isEqualTo("NOT_NULL");
 	}
 
 	@Test
-	void customEditorWithSubclass() {
+	public void testCustomEditorWithSubclass() {
 		IndexedTestBean tb = new IndexedTestBean();
 		DataBinder binder = new DataBinder(tb, "tb");
 		binder.registerCustomEditor(TestBean.class, new PropertyEditorSupport() {
@@ -1754,6 +1662,7 @@ class DataBinderTests {
 				tb.setName("array" + text);
 				setValue(tb);
 			}
+
 			@Override
 			public String getAsText() {
 				return ((TestBean) getValue()).getName();
@@ -1772,13 +1681,13 @@ class DataBinderTests {
 		assertThat(errors.getFieldError("array[0]").getCodes()[1]).isEqualTo("NOT_ROD.tb.array");
 		assertThat(errors.getFieldError("array[0]").getCodes()[2]).isEqualTo("NOT_ROD.array[0]");
 		assertThat(errors.getFieldError("array[0]").getCodes()[3]).isEqualTo("NOT_ROD.array");
-		assertThat(errors.getFieldError("array[0]").getCodes()[4]).isEqualTo("NOT_ROD.org.springframework.beans.testfixture.beans.DerivedTestBean");
+		assertThat(errors.getFieldError("array[0]").getCodes()[4]).isEqualTo("NOT_ROD.org.springframework.tests.sample.beans.DerivedTestBean");
 		assertThat(errors.getFieldError("array[0]").getCodes()[5]).isEqualTo("NOT_ROD");
 		assertThat(errors.getFieldValue("array[0]")).isEqualTo("arraya");
 	}
 
 	@Test
-	void bindToStringArrayWithArrayEditor() {
+	public void testBindToStringArrayWithArrayEditor() {
 		TestBean tb = new TestBean();
 		DataBinder binder = new DataBinder(tb, "tb");
 		binder.registerCustomEditor(String[].class, "stringArray", new PropertyEditorSupport() {
@@ -1790,12 +1699,15 @@ class DataBinderTests {
 		MutablePropertyValues pvs = new MutablePropertyValues();
 		pvs.add("stringArray", "a1-b2");
 		binder.bind(pvs);
-		assertThat(binder.getBindingResult().hasErrors()).isFalse();
-		assertThat(tb.getStringArray()).containsExactly("a1", "b2");
+		boolean condition = !binder.getBindingResult().hasErrors();
+		assertThat(condition).isTrue();
+		assertThat(tb.getStringArray().length).isEqualTo(2);
+		assertThat(tb.getStringArray()[0]).isEqualTo("a1");
+		assertThat(tb.getStringArray()[1]).isEqualTo("b2");
 	}
 
 	@Test
-	void bindToStringArrayWithComponentEditor() {
+	public void testBindToStringArrayWithComponentEditor() {
 		TestBean tb = new TestBean();
 		DataBinder binder = new DataBinder(tb, "tb");
 		binder.registerCustomEditor(String.class, "stringArray", new PropertyEditorSupport() {
@@ -1805,16 +1717,17 @@ class DataBinderTests {
 			}
 		});
 		MutablePropertyValues pvs = new MutablePropertyValues();
-		pvs.add("stringArray", new String[] {"a1", "b2"});
+		pvs.add("stringArray", new String[]{"a1", "b2"});
 		binder.bind(pvs);
-		assertThat(binder.getBindingResult().hasErrors()).isFalse();
-		assertThat(tb.getStringArray()).hasSize(2);
+		boolean condition = !binder.getBindingResult().hasErrors();
+		assertThat(condition).isTrue();
+		assertThat(tb.getStringArray().length).isEqualTo(2);
 		assertThat(tb.getStringArray()[0]).isEqualTo("Xa1");
 		assertThat(tb.getStringArray()[1]).isEqualTo("Xb2");
 	}
 
 	@Test
-	void bindingErrors() {
+	public void testBindingErrors() {
 		TestBean rod = new TestBean();
 		DataBinder binder = new DataBinder(rod, "person");
 		MutablePropertyValues pvs = new MutablePropertyValues();
@@ -1841,7 +1754,7 @@ class DataBinderTests {
 	}
 
 	@Test
-	void addAllErrors() {
+	public void testAddAllErrors() {
 		TestBean rod = new TestBean();
 		DataBinder binder = new DataBinder(rod, "person");
 		MutablePropertyValues pvs = new MutablePropertyValues();
@@ -1849,7 +1762,7 @@ class DataBinderTests {
 		binder.bind(pvs);
 		Errors errors = binder.getBindingResult();
 
-		Errors errors2 = new SimpleErrors(rod, "person");
+		BeanPropertyBindingResult errors2 = new BeanPropertyBindingResult(rod, "person");
 		errors.rejectValue("name", "badName");
 		errors.addAllErrors(errors2);
 
@@ -1860,8 +1773,7 @@ class DataBinderTests {
 	}
 
 	@Test
-	@SuppressWarnings("unchecked")
-	void bindingWithResortedList() {
+	public void testBindingWithResortedList() {
 		IndexedTestBean tb = new IndexedTestBean();
 		DataBinder binder = new DataBinder(tb, "tb");
 		MutablePropertyValues pvs = new MutablePropertyValues();
@@ -1879,25 +1791,25 @@ class DataBinderTests {
 	}
 
 	@Test
-	void rejectWithoutDefaultMessage() {
+	public void testRejectWithoutDefaultMessage() {
 		TestBean tb = new TestBean();
 		tb.setName("myName");
 		tb.setAge(99);
 
-		Errors errors = new SimpleErrors(tb, "tb");
-		errors.reject("invalid");
-		errors.rejectValue("age", "invalidField");
+		BeanPropertyBindingResult ex = new BeanPropertyBindingResult(tb, "tb");
+		ex.reject("invalid");
+		ex.rejectValue("age", "invalidField");
 
 		StaticMessageSource ms = new StaticMessageSource();
 		ms.addMessage("invalid", Locale.US, "general error");
 		ms.addMessage("invalidField", Locale.US, "invalid field");
 
-		assertThat(ms.getMessage(errors.getGlobalError(), Locale.US)).isEqualTo("general error");
-		assertThat(ms.getMessage(errors.getFieldError("age"), Locale.US)).isEqualTo("invalid field");
+		assertThat(ms.getMessage(ex.getGlobalError(), Locale.US)).isEqualTo("general error");
+		assertThat(ms.getMessage(ex.getFieldError("age"), Locale.US)).isEqualTo("invalid field");
 	}
 
 	@Test
-	void bindExceptionSerializable() throws Exception {
+	public void testBindExceptionSerializable() throws Exception {
 		SerializablePerson tb = new SerializablePerson();
 		tb.setName("myName");
 		tb.setAge(99);
@@ -1917,7 +1829,7 @@ class DataBinderTests {
 		assertThat(ex2.getGlobalError().getCode()).isEqualTo("invalid");
 		assertThat(ex2.hasFieldErrors("age")).isTrue();
 		assertThat(ex2.getFieldError("age").getCode()).isEqualTo("invalidField");
-		assertThat(ex2.getFieldValue("age")).isEqualTo(99);
+		assertThat(ex2.getFieldValue("age")).isEqualTo(new Integer(99));
 
 		ex2.rejectValue("name", "invalidField", "someMessage");
 		assertThat(ex2.hasFieldErrors("name")).isTrue();
@@ -1926,27 +1838,27 @@ class DataBinderTests {
 	}
 
 	@Test
-	void trackDisallowedFields() {
+	public void testTrackDisallowedFields() {
 		TestBean testBean = new TestBean();
 		DataBinder binder = new DataBinder(testBean, "testBean");
 		binder.setAllowedFields("name", "age");
 
 		String name = "Rob Harrop";
-		int age = 42;
+		String beanName = "foobar";
 
 		MutablePropertyValues mpvs = new MutablePropertyValues();
 		mpvs.add("name", name);
-		mpvs.add("age", age);
-		mpvs.add("beanName", "foobar");
+		mpvs.add("beanName", beanName);
 		binder.bind(mpvs);
 
 		assertThat(testBean.getName()).isEqualTo(name);
-		assertThat(testBean.getAge()).isEqualTo(age);
-		assertThat(binder.getBindingResult().getSuppressedFields()).containsExactly("beanName");
+		String[] disallowedFields = binder.getBindingResult().getSuppressedFields();
+		assertThat(disallowedFields.length).isEqualTo(1);
+		assertThat(disallowedFields[0]).isEqualTo("beanName");
 	}
 
 	@Test
-	void autoGrowWithinDefaultLimit() {
+	public void testAutoGrowWithinDefaultLimit() {
 		TestBean testBean = new TestBean();
 		DataBinder binder = new DataBinder(testBean, "testBean");
 
@@ -1954,24 +1866,23 @@ class DataBinderTests {
 		mpvs.add("friends[4]", "");
 		binder.bind(mpvs);
 
-		assertThat(testBean.getFriends()).hasSize(5);
+		assertThat(testBean.getFriends().size()).isEqualTo(5);
 	}
 
 	@Test
-	void autoGrowBeyondDefaultLimit() {
+	public void testAutoGrowBeyondDefaultLimit() {
 		TestBean testBean = new TestBean();
 		DataBinder binder = new DataBinder(testBean, "testBean");
+
 		MutablePropertyValues mpvs = new MutablePropertyValues();
 		mpvs.add("friends[256]", "");
-
-		assertThatExceptionOfType(InvalidPropertyException.class)
-				.isThrownBy(() -> binder.bind(mpvs))
-				.havingRootCause()
-				.isInstanceOf(IndexOutOfBoundsException.class);
+		assertThatExceptionOfType(InvalidPropertyException.class).isThrownBy(() ->
+						binder.bind(mpvs))
+				.satisfies(ex -> assertThat(ex.getRootCause()).isInstanceOf(IndexOutOfBoundsException.class));
 	}
 
 	@Test
-	void autoGrowWithinCustomLimit() {
+	public void testAutoGrowWithinCustomLimit() {
 		TestBean testBean = new TestBean();
 		DataBinder binder = new DataBinder(testBean, "testBean");
 		binder.setAutoGrowCollectionLimit(10);
@@ -1980,25 +1891,24 @@ class DataBinderTests {
 		mpvs.add("friends[4]", "");
 		binder.bind(mpvs);
 
-		assertThat(testBean.getFriends()).hasSize(5);
+		assertThat(testBean.getFriends().size()).isEqualTo(5);
 	}
 
 	@Test
-	void autoGrowBeyondCustomLimit() {
+	public void testAutoGrowBeyondCustomLimit() {
 		TestBean testBean = new TestBean();
 		DataBinder binder = new DataBinder(testBean, "testBean");
 		binder.setAutoGrowCollectionLimit(10);
+
 		MutablePropertyValues mpvs = new MutablePropertyValues();
 		mpvs.add("friends[16]", "");
-
-		assertThatExceptionOfType(InvalidPropertyException.class)
-				.isThrownBy(() -> binder.bind(mpvs))
-				.havingRootCause()
-				.isInstanceOf(IndexOutOfBoundsException.class);
+		assertThatExceptionOfType(InvalidPropertyException.class).isThrownBy(() ->
+						binder.bind(mpvs))
+				.satisfies(ex -> assertThat(ex.getRootCause()).isInstanceOf(IndexOutOfBoundsException.class));
 	}
 
 	@Test
-	void nestedGrowingList() {
+	public void testNestedGrowingList() {
 		Form form = new Form();
 		DataBinder binder = new DataBinder(form, "form");
 		MutablePropertyValues mpv = new MutablePropertyValues();
@@ -2008,11 +1918,13 @@ class DataBinderTests {
 		assertThat(binder.getBindingResult().hasErrors()).isFalse();
 		@SuppressWarnings("unchecked")
 		List<Object> list = (List<Object>) form.getF().get("list");
-		assertThat(list).containsExactly("firstValue", "secondValue");
+		assertThat(list.get(0)).isEqualTo("firstValue");
+		assertThat(list.get(1)).isEqualTo("secondValue");
+		assertThat(list.size()).isEqualTo(2);
 	}
 
 	@Test
-	void fieldErrorAccessVariations() {
+	public void testFieldErrorAccessVariations() {
 		TestBean testBean = new TestBean();
 		DataBinder binder = new DataBinder(testBean, "testBean");
 		assertThat(binder.getBindingResult().getGlobalError()).isNull();
@@ -2033,7 +1945,7 @@ class DataBinderTests {
 	}
 
 	@Test  // SPR-14888
-	void setAutoGrowCollectionLimit() {
+	public void testSetAutoGrowCollectionLimit() {
 		BeanWithIntegerList tb = new BeanWithIntegerList();
 		DataBinder binder = new DataBinder(tb);
 		binder.setAutoGrowCollectionLimit(257);
@@ -2041,22 +1953,22 @@ class DataBinderTests {
 		pvs.add("integerList[256]", "1");
 
 		binder.bind(pvs);
-		assertThat(tb.getIntegerList()).hasSize(257);
-		assertThat(tb.getIntegerList(), IntegerAssert.class).element(256).isEqualTo(1);
-		assertThat(binder.getBindingResult().getFieldValue("integerList[256]")).isEqualTo(1);
+		assertThat(tb.getIntegerList().size()).isEqualTo(257);
+		assertThat(tb.getIntegerList().get(256)).isEqualTo(Integer.valueOf(1));
+		assertThat(binder.getBindingResult().getFieldValue("integerList[256]")).isEqualTo(Integer.valueOf(1));
 	}
 
 	@Test  // SPR-14888
-	void setAutoGrowCollectionLimitAfterInitialization() {
+	public void testSetAutoGrowCollectionLimitAfterInitialization() {
 		DataBinder binder = new DataBinder(new BeanWithIntegerList());
 		binder.registerCustomEditor(String.class, new StringTrimmerEditor(true));
 		assertThatIllegalStateException().isThrownBy(() ->
-				binder.setAutoGrowCollectionLimit(257))
-			.withMessageContaining("DataBinder is already initialized - call setAutoGrowCollectionLimit before other configuration methods");
+						binder.setAutoGrowCollectionLimit(257))
+				.withMessageContaining("DataBinder is already initialized - call setAutoGrowCollectionLimit before other configuration methods");
 	}
 
 	@Test // SPR-15009
-	void setCustomMessageCodesResolverBeforeInitializeBindingResultForBeanPropertyAccess() {
+	public void testSetCustomMessageCodesResolverBeforeInitializeBindingResultForBeanPropertyAccess() {
 		TestBean testBean = new TestBean();
 		DataBinder binder = new DataBinder(testBean, "testBean");
 		DefaultMessageCodesResolver messageCodesResolver = new DefaultMessageCodesResolver();
@@ -2069,11 +1981,11 @@ class DataBinderTests {
 		mpv.add("age", "invalid");
 		binder.bind(mpv);
 		assertThat(binder.getBindingResult().getFieldError("age").getCode()).isEqualTo("errors.typeMismatch");
-		assertThat(((BeanWrapper) binder.getInternalBindingResult().getPropertyAccessor()).getAutoGrowCollectionLimit()).isEqualTo(512);
+		assertThat(BeanWrapper.class.cast(binder.getInternalBindingResult().getPropertyAccessor()).getAutoGrowCollectionLimit()).isEqualTo(512);
 	}
 
 	@Test // SPR-15009
-	void setCustomMessageCodesResolverBeforeInitializeBindingResultForDirectFieldAccess() {
+	public void testSetCustomMessageCodesResolverBeforeInitializeBindingResultForDirectFieldAccess() {
 		TestBean testBean = new TestBean();
 		DataBinder binder = new DataBinder(testBean, "testBean");
 		DefaultMessageCodesResolver messageCodesResolver = new DefaultMessageCodesResolver();
@@ -2088,7 +2000,7 @@ class DataBinderTests {
 	}
 
 	@Test  // SPR-15009
-	void setCustomMessageCodesResolverAfterInitializeBindingResult() {
+	public void testSetCustomMessageCodesResolverAfterInitializeBindingResult() {
 		TestBean testBean = new TestBean();
 		DataBinder binder = new DataBinder(testBean, "testBean");
 		binder.initBeanPropertyAccess();
@@ -2103,7 +2015,7 @@ class DataBinderTests {
 	}
 
 	@Test  // SPR-15009
-	void setMessageCodesResolverIsNullAfterInitializeBindingResult() {
+	public void testSetMessageCodesResolverIsNullAfterInitializeBindingResult() {
 		TestBean testBean = new TestBean();
 		DataBinder binder = new DataBinder(testBean, "testBean");
 		binder.initBeanPropertyAccess();
@@ -2117,24 +2029,16 @@ class DataBinderTests {
 	}
 
 	@Test  // SPR-15009
-	void callSetMessageCodesResolverTwice() {
+	public void testCallSetMessageCodesResolverTwice() {
+
 		TestBean testBean = new TestBean();
 		DataBinder binder = new DataBinder(testBean, "testBean");
 		binder.setMessageCodesResolver(new DefaultMessageCodesResolver());
 		assertThatIllegalStateException().isThrownBy(() ->
-				binder.setMessageCodesResolver(new DefaultMessageCodesResolver()))
-			.withMessageContaining("DataBinder is already initialized with MessageCodesResolver");
-	}
+						binder.setMessageCodesResolver(new DefaultMessageCodesResolver()))
+				.withMessageContaining("DataBinder is already initialized with MessageCodesResolver");
 
-	@Test // gh-24347
-	void overrideBindingResultType() {
-		TestBean testBean = new TestBean();
-		DataBinder binder = new DataBinder(testBean, "testBean");
-		binder.initDirectFieldAccess();
-		binder.initBeanPropertyAccess();
-		assertThat(binder.getBindingResult()).isInstanceOf(BeanPropertyBindingResult.class);
 	}
-
 
 	@SuppressWarnings("unused")
 	private static class BeanWithIntegerList {
@@ -2163,7 +2067,6 @@ class DataBinderTests {
 			return Title;
 		}
 
-		@SuppressWarnings("unused")
 		public void setTitle(String title) {
 			Title = title;
 		}
@@ -2172,7 +2075,6 @@ class DataBinderTests {
 			return ISBN;
 		}
 
-		@SuppressWarnings("unused")
 		public void setISBN(String ISBN) {
 			this.ISBN = ISBN;
 		}
@@ -2181,7 +2083,6 @@ class DataBinderTests {
 			return nInStock;
 		}
 
-		@SuppressWarnings("unused")
 		public void setNInStock(int nInStock) {
 			this.nInStock = nInStock;
 		}
@@ -2198,7 +2099,6 @@ class DataBinderTests {
 			return id;
 		}
 
-		@SuppressWarnings("unused")
 		public void setId(String id) {
 			this.id = id;
 		}
@@ -2207,7 +2107,6 @@ class DataBinderTests {
 			return name;
 		}
 
-		@SuppressWarnings("unused")
 		public void setName(Optional<String> name) {
 			this.name = name;
 		}
@@ -2238,6 +2137,27 @@ class DataBinderTests {
 			}
 			if (tb.getAge() == 0) {
 				errors.reject("GENERAL_ERROR", new String[] {"arg"}, "msg");
+			}
+		}
+	}
+
+
+	private static class SpouseValidator implements Validator {
+
+		@Override
+		public boolean supports(Class<?> clazz) {
+			return TestBean.class.isAssignableFrom(clazz);
+		}
+
+		@Override
+		public void validate(@Nullable Object obj, Errors errors) {
+			TestBean tb = (TestBean) obj;
+			if (tb == null || "XXX".equals(tb.getName())) {
+				errors.rejectValue("", "SPOUSE_NOT_AVAILABLE");
+				return;
+			}
+			if (tb.getAge() < 32) {
+				errors.rejectValue("age", "TOO_YOUNG", "simply too young");
 			}
 		}
 	}
