@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2024 the original author or authors.
+ * Copyright 2002-2019 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,41 +16,31 @@
 
 package org.springframework.core.type;
 
+import org.junit.jupiter.api.Test;
+import org.springframework.core.annotation.AliasFor;
+import org.springframework.core.annotation.AnnotationAttributes;
+import org.springframework.core.type.classreading.MetadataReader;
+import org.springframework.core.type.classreading.MetadataReaderFactory;
+import org.springframework.core.type.classreading.SimpleMetadataReaderFactory;
+import org.springframework.stereotype.Component;
+
 import java.io.Serializable;
-import java.lang.annotation.Annotation;
-import java.lang.annotation.Documented;
-import java.lang.annotation.ElementType;
-import java.lang.annotation.Inherited;
-import java.lang.annotation.Repeatable;
-import java.lang.annotation.Retention;
-import java.lang.annotation.RetentionPolicy;
-import java.lang.annotation.Target;
+import java.lang.annotation.*;
 import java.util.Arrays;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
 
-import org.junit.jupiter.api.Test;
-
-import org.springframework.core.annotation.AliasFor;
-import org.springframework.core.annotation.AnnotatedElementUtils;
-import org.springframework.core.annotation.AnnotationAttributes;
-import org.springframework.core.testfixture.stereotype.Component;
-import org.springframework.core.type.classreading.MetadataReader;
-import org.springframework.core.type.classreading.MetadataReaderFactory;
-import org.springframework.core.type.classreading.SimpleMetadataReaderFactory;
-
 import static org.assertj.core.api.Assertions.assertThat;
 
 /**
  * Unit tests demonstrating that the reflection-based {@link StandardAnnotationMetadata}
- * and ASM-based {@code SimpleAnnotationMetadata} produce <em>almost</em> identical output.
+ * and ASM-based {@code AnnotationMetadataReadingVisitor} produce identical output.
  *
  * @author Juergen Hoeller
  * @author Chris Beams
  * @author Phillip Webb
  * @author Sam Brannen
- * @see InheritedAnnotationsAnnotationMetadataTests
  */
 class AnnotationMetadataTests {
 
@@ -73,7 +63,7 @@ class AnnotationMetadataTests {
 	@Test
 	void standardAnnotationMetadataForSubclass() {
 		AnnotationMetadata metadata = AnnotationMetadata.introspect(AnnotatedComponentSubClass.class);
-		doTestSubClassAnnotationInfo(metadata, false);
+		doTestSubClassAnnotationInfo(metadata);
 	}
 
 	@Test
@@ -81,10 +71,10 @@ class AnnotationMetadataTests {
 		MetadataReaderFactory metadataReaderFactory = new SimpleMetadataReaderFactory();
 		MetadataReader metadataReader = metadataReaderFactory.getMetadataReader(AnnotatedComponentSubClass.class.getName());
 		AnnotationMetadata metadata = metadataReader.getAnnotationMetadata();
-		doTestSubClassAnnotationInfo(metadata, true);
+		doTestSubClassAnnotationInfo(metadata);
 	}
 
-	private void doTestSubClassAnnotationInfo(AnnotationMetadata metadata, boolean asm) {
+	private void doTestSubClassAnnotationInfo(AnnotationMetadata metadata) {
 		assertThat(metadata.getClassName()).isEqualTo(AnnotatedComponentSubClass.class.getName());
 		assertThat(metadata.isInterface()).isFalse();
 		assertThat(metadata.isAnnotation()).isFalse();
@@ -92,32 +82,17 @@ class AnnotationMetadataTests {
 		assertThat(metadata.isConcrete()).isTrue();
 		assertThat(metadata.hasSuperClass()).isTrue();
 		assertThat(metadata.getSuperClassName()).isEqualTo(AnnotatedComponent.class.getName());
-		assertThat(metadata.getInterfaceNames()).isEmpty();
+		assertThat(metadata.getInterfaceNames().length).isEqualTo(0);
 		assertThat(metadata.isAnnotated(Component.class.getName())).isFalse();
 		assertThat(metadata.isAnnotated(Scope.class.getName())).isFalse();
 		assertThat(metadata.isAnnotated(SpecialAttr.class.getName())).isFalse();
-
-		if (asm) {
-			assertThat(metadata.isAnnotated(NamedComposedAnnotation.class.getName())).isFalse();
-			assertThat(metadata.hasAnnotation(NamedComposedAnnotation.class.getName())).isFalse();
-			assertThat(metadata.getAnnotationTypes()).isEmpty();
-		}
-		else {
-			assertThat(metadata.isAnnotated(NamedComposedAnnotation.class.getName())).isTrue();
-			assertThat(metadata.hasAnnotation(NamedComposedAnnotation.class.getName())).isTrue();
-			assertThat(metadata.getAnnotationTypes()).containsExactly(NamedComposedAnnotation.class.getName());
-		}
-
 		assertThat(metadata.hasAnnotation(Component.class.getName())).isFalse();
 		assertThat(metadata.hasAnnotation(Scope.class.getName())).isFalse();
 		assertThat(metadata.hasAnnotation(SpecialAttr.class.getName())).isFalse();
-		assertThat(metadata.hasMetaAnnotation(Component.class.getName())).isFalse();
-		assertThat(metadata.hasMetaAnnotation(MetaAnnotation.class.getName())).isFalse();
+		assertThat(metadata.getAnnotationTypes()).hasSize(0);
 		assertThat(metadata.getAnnotationAttributes(Component.class.getName())).isNull();
-		assertThat(metadata.getAnnotationAttributes(MetaAnnotation.class.getName(), false)).isNull();
-		assertThat(metadata.getAnnotationAttributes(MetaAnnotation.class.getName(), true)).isNull();
-		assertThat(metadata.getAnnotatedMethods(DirectAnnotation.class.getName())).isEmpty();
-		assertThat(metadata.isAnnotated(IsAnnotatedAnnotation.class.getName())).isFalse();
+		assertThat(metadata.getAnnotatedMethods(DirectAnnotation.class.getName()).size()).isEqualTo(0);
+		assertThat(metadata.isAnnotated(IsAnnotatedAnnotation.class.getName())).isEqualTo(false);
 		assertThat(metadata.getAllAnnotationAttributes(DirectAnnotation.class.getName())).isNull();
 	}
 
@@ -143,10 +118,10 @@ class AnnotationMetadataTests {
 		assertThat(metadata.isConcrete()).isFalse();
 		assertThat(metadata.hasSuperClass()).isFalse();
 		assertThat(metadata.getSuperClassName()).isNull();
-		assertThat(metadata.getInterfaceNames()).hasSize(2);
+		assertThat(metadata.getInterfaceNames().length).isEqualTo(2);
 		assertThat(metadata.getInterfaceNames()[0]).isEqualTo(ClassMetadata.class.getName());
 		assertThat(metadata.getInterfaceNames()[1]).isEqualTo(AnnotatedTypeMetadata.class.getName());
-		assertThat(metadata.getAnnotationTypes()).isEmpty();
+		assertThat(metadata.getAnnotationTypes()).hasSize(0);
 	}
 
 	@Test
@@ -171,7 +146,7 @@ class AnnotationMetadataTests {
 		assertThat(metadata.isConcrete()).isFalse();
 		assertThat(metadata.hasSuperClass()).isFalse();
 		assertThat(metadata.getSuperClassName()).isNull();
-		assertThat(metadata.getInterfaceNames()).hasSize(1);
+		assertThat(metadata.getInterfaceNames().length).isEqualTo(1);
 		assertThat(metadata.getInterfaceNames()[0]).isEqualTo(Annotation.class.getName());
 		assertThat(metadata.isAnnotated(Documented.class.getName())).isFalse();
 		assertThat(metadata.isAnnotated(Scope.class.getName())).isFalse();
@@ -190,8 +165,8 @@ class AnnotationMetadataTests {
 	 * 'true' as is done in the main test above.
 	 */
 	@Test
+	@Deprecated
 	void standardAnnotationMetadata_nestedAnnotationsAsMap_false() {
-		@SuppressWarnings("deprecation")
 		AnnotationMetadata metadata = new StandardAnnotationMetadata(AnnotatedComponent.class);
 		AnnotationAttributes specialAttrs = (AnnotationAttributes) metadata.getAnnotationAttributes(SpecialAttr.class.getName());
 		Annotation[] nestedAnnoArray = (Annotation[]) specialAttrs.get("nestedAnnoArray");
@@ -199,14 +174,14 @@ class AnnotationMetadataTests {
 	}
 
 	@Test
+	@Deprecated
 	void metaAnnotationOverridesUsingStandardAnnotationMetadata() {
-		@SuppressWarnings("deprecation")
 		AnnotationMetadata metadata = new StandardAnnotationMetadata(ComposedConfigurationWithAttributeOverridesClass.class);
 		assertMetaAnnotationOverrides(metadata);
 	}
 
 	@Test
-	void metaAnnotationOverridesUsingSimpleAnnotationMetadata() throws Exception {
+	void metaAnnotationOverridesUsingAnnotationMetadataReadingVisitor() throws Exception {
 		MetadataReaderFactory metadataReaderFactory = new SimpleMetadataReaderFactory();
 		MetadataReader metadataReader = metadataReaderFactory.getMetadataReader(ComposedConfigurationWithAttributeOverridesClass.class.getName());
 		AnnotationMetadata metadata = metadataReader.getAnnotationMetadata();
@@ -216,8 +191,8 @@ class AnnotationMetadataTests {
 	private void assertMetaAnnotationOverrides(AnnotationMetadata metadata) {
 		AnnotationAttributes attributes = (AnnotationAttributes) metadata.getAnnotationAttributes(
 				TestComponentScan.class.getName(), false);
-		assertThat(attributes.getStringArray("value")).containsExactly("org.example.componentscan");
 		assertThat(attributes.getStringArray("basePackages")).containsExactly("org.example.componentscan");
+		assertThat(attributes.getStringArray("value")).isEmpty();
 		assertThat(attributes.getClassArray("basePackageClasses")).isEmpty();
 	}
 
@@ -228,7 +203,7 @@ class AnnotationMetadataTests {
 	}
 
 	@Test  // SPR-11649
-	void multipleAnnotationsWithIdenticalAttributeNamesUsingSimpleAnnotationMetadata() throws Exception {
+	void multipleAnnotationsWithIdenticalAttributeNamesUsingAnnotationMetadataReadingVisitor() throws Exception {
 		MetadataReaderFactory metadataReaderFactory = new SimpleMetadataReaderFactory();
 		MetadataReader metadataReader = metadataReaderFactory.getMetadataReader(NamedAnnotationsClass.class.getName());
 		AnnotationMetadata metadata = metadataReader.getAnnotationMetadata();
@@ -242,125 +217,21 @@ class AnnotationMetadataTests {
 	}
 
 	@Test  // SPR-11649
-	void composedAnnotationWithMetaAnnotationsWithIdenticalAttributeNamesUsingSimpleAnnotationMetadata() throws Exception {
+	void composedAnnotationWithMetaAnnotationsWithIdenticalAttributeNamesUsingAnnotationMetadataReadingVisitor() throws Exception {
 		MetadataReaderFactory metadataReaderFactory = new SimpleMetadataReaderFactory();
 		MetadataReader metadataReader = metadataReaderFactory.getMetadataReader(NamedComposedAnnotationClass.class.getName());
 		AnnotationMetadata metadata = metadataReader.getAnnotationMetadata();
 		assertMultipleAnnotationsWithIdenticalAttributeNames(metadata);
 	}
 
-	@Test  // gh-31041
-	void multipleComposedRepeatableAnnotationsUsingStandardAnnotationMetadata() {
-		AnnotationMetadata metadata = AnnotationMetadata.introspect(MultipleComposedRepeatableAnnotationsClass.class);
-		assertRepeatableAnnotations(metadata);
-	}
-
-	@Test  // gh-31041
-	void multipleComposedRepeatableAnnotationsUsingSimpleAnnotationMetadata() throws Exception {
-		MetadataReaderFactory metadataReaderFactory = new SimpleMetadataReaderFactory();
-		MetadataReader metadataReader = metadataReaderFactory.getMetadataReader(MultipleComposedRepeatableAnnotationsClass.class.getName());
-		AnnotationMetadata metadata = metadataReader.getAnnotationMetadata();
-		assertRepeatableAnnotations(metadata);
-	}
-
-	@Test  // gh-31074
-	void multipleComposedRepeatableAnnotationsSortedByReversedMetaDistanceUsingStandardAnnotationMetadata() {
-		AnnotationMetadata metadata = AnnotationMetadata.introspect(MultipleComposedRepeatableAnnotationsClass.class);
-		assertRepeatableAnnotationsSortedByReversedMetaDistance(metadata);
-	}
-
-	@Test  // gh-31074
-	void multipleComposedRepeatableAnnotationsSortedByReversedMetaDistanceUsingSimpleAnnotationMetadata() throws Exception {
-		MetadataReaderFactory metadataReaderFactory = new SimpleMetadataReaderFactory();
-		MetadataReader metadataReader = metadataReaderFactory.getMetadataReader(MultipleComposedRepeatableAnnotationsClass.class.getName());
-		AnnotationMetadata metadata = metadataReader.getAnnotationMetadata();
-		assertRepeatableAnnotationsSortedByReversedMetaDistance(metadata);
-	}
-
-	@Test  // gh-31041
-	void multipleRepeatableAnnotationsInContainersUsingStandardAnnotationMetadata() {
-		AnnotationMetadata metadata = AnnotationMetadata.introspect(MultipleRepeatableAnnotationsInContainersClass.class);
-		assertRepeatableAnnotations(metadata);
-	}
-
-	@Test  // gh-31041
-	void multipleRepeatableAnnotationsInContainersUsingSimpleAnnotationMetadata() throws Exception {
-		MetadataReaderFactory metadataReaderFactory = new SimpleMetadataReaderFactory();
-		MetadataReader metadataReader = metadataReaderFactory.getMetadataReader(MultipleRepeatableAnnotationsInContainersClass.class.getName());
-		AnnotationMetadata metadata = metadataReader.getAnnotationMetadata();
-		assertRepeatableAnnotations(metadata);
-	}
-
-	/**
-	 * Tests {@code AnnotatedElementUtils#getMergedRepeatableAnnotations()} variants to ensure that
-	 * {@link AnnotationMetadata#getMergedRepeatableAnnotationAttributes(Class, Class, boolean)}
-	 * behaves the same.
-	 */
-	@Test  // gh-31041
-	void multipleComposedRepeatableAnnotationsUsingAnnotatedElementUtils() {
-		Class<?> element = MultipleComposedRepeatableAnnotationsClass.class;
-
-		Set<TestComponentScan> annotations = AnnotatedElementUtils.getMergedRepeatableAnnotations(element, TestComponentScan.class);
-		assertRepeatableAnnotations(annotations);
-
-		annotations = AnnotatedElementUtils.getMergedRepeatableAnnotations(element, TestComponentScan.class, TestComponentScans.class);
-		assertRepeatableAnnotations(annotations);
-	}
-
-	/**
-	 * Tests {@code AnnotatedElementUtils#getMergedRepeatableAnnotations()} variants to ensure that
-	 * {@link AnnotationMetadata#getMergedRepeatableAnnotationAttributes(Class, Class, boolean)}
-	 * behaves the same.
-	 */
-	@Test  // gh-31041
-	void multipleRepeatableAnnotationsInContainersUsingAnnotatedElementUtils() {
-		Class<?> element = MultipleRepeatableAnnotationsInContainersClass.class;
-
-		Set<TestComponentScan> annotations = AnnotatedElementUtils.getMergedRepeatableAnnotations(element, TestComponentScan.class);
-		assertRepeatableAnnotations(annotations);
-
-		annotations = AnnotatedElementUtils.getMergedRepeatableAnnotations(element, TestComponentScan.class, TestComponentScans.class);
-		assertRepeatableAnnotations(annotations);
-	}
-
-	private static void assertRepeatableAnnotations(AnnotationMetadata metadata) {
-		Set<AnnotationAttributes> attributesSet =
-				metadata.getMergedRepeatableAnnotationAttributes(TestComponentScan.class, TestComponentScans.class, true);
-		assertThat(attributesSet.stream().map(attributes -> attributes.getStringArray("value")).flatMap(Arrays::stream))
-				.containsExactly("A", "B", "C", "D");
-		assertThat(attributesSet.stream().map(attributes -> attributes.getStringArray("basePackages")).flatMap(Arrays::stream))
-				.containsExactly("A", "B", "C", "D");
-		assertThat(attributesSet.stream().map(attributes -> attributes.getStringArray("basePackageClasses")).flatMap(Arrays::stream))
-				.containsExactly("java.lang.String", "java.lang.Integer");
-	}
-
-	private static void assertRepeatableAnnotationsSortedByReversedMetaDistance(AnnotationMetadata metadata) {
-		// Note: although the real @ComponentScan annotation is not looked up using
-		// "sortByReversedMetaDistance" semantics, we can still use @TestComponentScan
-		// to verify the expected behavior.
-		Set<AnnotationAttributes> attributesSet =
-				metadata.getMergedRepeatableAnnotationAttributes(TestComponentScan.class, TestComponentScans.class, false, true);
-		assertThat(attributesSet.stream().map(attributes -> attributes.getStringArray("value")).flatMap(Arrays::stream))
-				.containsExactly("C", "D", "A", "B");
-		assertThat(attributesSet.stream().map(attributes -> attributes.getStringArray("basePackages")).flatMap(Arrays::stream))
-				.containsExactly("C", "D", "A", "B");
-	}
-
-	private static void assertRepeatableAnnotations(Set<TestComponentScan> annotations) {
-		assertThat(annotations.stream().map(TestComponentScan::value).flatMap(Arrays::stream))
-				.containsExactly("A", "B", "C", "D");
-		assertThat(annotations.stream().map(TestComponentScan::basePackages).flatMap(Arrays::stream))
-				.containsExactly("A", "B", "C", "D");
-	}
-
 	@Test
 	void inheritedAnnotationWithMetaAnnotationsWithIdenticalAttributeNamesUsingStandardAnnotationMetadata() {
 		AnnotationMetadata metadata = AnnotationMetadata.introspect(NamedComposedAnnotationExtended.class);
-		assertThat(metadata.hasAnnotation(NamedComposedAnnotation.class.getName())).isTrue();
+		assertThat(metadata.hasAnnotation(NamedComposedAnnotation.class.getName())).isFalse();
 	}
 
 	@Test
-	void inheritedAnnotationWithMetaAnnotationsWithIdenticalAttributeNamesUsingSimpleAnnotationMetadata() throws Exception {
+	void inheritedAnnotationWithMetaAnnotationsWithIdenticalAttributeNamesUsingAnnotationMetadataReadingVisitor() throws Exception {
 		MetadataReaderFactory metadataReaderFactory = new SimpleMetadataReaderFactory();
 		MetadataReader metadataReader = metadataReaderFactory.getMetadataReader(NamedComposedAnnotationExtended.class.getName());
 		AnnotationMetadata metadata = metadataReader.getAnnotationMetadata();
@@ -393,23 +264,16 @@ class AnnotationMetadataTests {
 		assertThat(metadata.isConcrete()).isTrue();
 		assertThat(metadata.hasSuperClass()).isTrue();
 		assertThat(metadata.getSuperClassName()).isEqualTo(Object.class.getName());
-		assertThat(metadata.getInterfaceNames()).hasSize(1);
+		assertThat(metadata.getInterfaceNames().length).isEqualTo(1);
 		assertThat(metadata.getInterfaceNames()[0]).isEqualTo(Serializable.class.getName());
-
-		assertThat(metadata.isAnnotated(Component.class.getName())).isTrue();
-
-		assertThat(metadata.isAnnotated(NamedComposedAnnotation.class.getName())).isTrue();
 
 		assertThat(metadata.hasAnnotation(Component.class.getName())).isTrue();
 		assertThat(metadata.hasAnnotation(Scope.class.getName())).isTrue();
 		assertThat(metadata.hasAnnotation(SpecialAttr.class.getName())).isTrue();
-
-		assertThat(metadata.hasAnnotation(NamedComposedAnnotation.class.getName())).isTrue();
-		assertThat(metadata.getAnnotationTypes()).containsExactlyInAnyOrder(
-				Component.class.getName(), Scope.class.getName(),
-				SpecialAttr.class.getName(), DirectAnnotation.class.getName(),
-				MetaMetaAnnotation.class.getName(), EnumSubclasses.class.getName(),
-				NamedComposedAnnotation.class.getName());
+		assertThat(metadata.getAnnotationTypes()).hasSize(6);
+		assertThat(metadata.getAnnotationTypes().contains(Component.class.getName())).isTrue();
+		assertThat(metadata.getAnnotationTypes().contains(Scope.class.getName())).isTrue();
+		assertThat(metadata.getAnnotationTypes().contains(SpecialAttr.class.getName())).isTrue();
 
 		AnnotationAttributes compAttrs = (AnnotationAttributes) metadata.getAnnotationAttributes(Component.class.getName());
 		assertThat(compAttrs).hasSize(1);
@@ -425,7 +289,7 @@ class AnnotationMetadataTests {
 		List<Object> allMeta = method.getAllAnnotationAttributes(DirectAnnotation.class.getName()).get("value");
 		assertThat(new HashSet<>(allMeta)).isEqualTo(new HashSet<Object>(Arrays.asList("direct", "meta")));
 		allMeta = method.getAllAnnotationAttributes(DirectAnnotation.class.getName()).get("additional");
-		assertThat(new HashSet<>(allMeta)).isEqualTo(new HashSet<Object>(List.of("direct")));
+		assertThat(new HashSet<>(allMeta)).isEqualTo(new HashSet<Object>(Arrays.asList("direct")));
 
 		assertThat(metadata.isAnnotated(IsAnnotatedAnnotation.class.getName())).isTrue();
 
@@ -436,12 +300,12 @@ class AnnotationMetadataTests {
 			assertThat(specialAttrs.getEnum("state").equals(Thread.State.NEW)).isTrue();
 
 			AnnotationAttributes nestedAnno = specialAttrs.getAnnotation("nestedAnno");
-			assertThat(nestedAnno.getString("value")).isEqualTo("na");
+			assertThat("na").isEqualTo(nestedAnno.getString("value"));
 			assertThat(nestedAnno.getEnum("anEnum").equals(SomeEnum.LABEL1)).isTrue();
 			assertThat((Class<?>[]) nestedAnno.get("classArray")).isEqualTo(new Class<?>[] {String.class});
 
 			AnnotationAttributes[] nestedAnnoArray = specialAttrs.getAnnotationArray("nestedAnnoArray");
-			assertThat(nestedAnnoArray).hasSize(2);
+			assertThat(nestedAnnoArray.length).isEqualTo(2);
 			assertThat(nestedAnnoArray[0].getString("value")).isEqualTo("default");
 			assertThat(nestedAnnoArray[0].getEnum("anEnum").equals(SomeEnum.DEFAULT)).isTrue();
 			assertThat((Class<?>[]) nestedAnnoArray[0].get("classArray")).isEqualTo(new Class<?>[] {Void.class});
@@ -457,7 +321,7 @@ class AnnotationMetadataTests {
 			assertThat(optional.getClassArray("classArray")).isEqualTo(new Class<?>[] {Void.class});
 
 			AnnotationAttributes[] optionalArray = specialAttrs.getAnnotationArray("optionalArray");
-			assertThat(optionalArray).hasSize(1);
+			assertThat(optionalArray.length).isEqualTo(1);
 			assertThat(optionalArray[0].getString("value")).isEqualTo("optional");
 			assertThat(optionalArray[0].getEnum("anEnum").equals(SomeEnum.DEFAULT)).isTrue();
 			assertThat((Class<?>[]) optionalArray[0].get("classArray")).isEqualTo(new Class<?>[] {Void.class});
@@ -469,7 +333,7 @@ class AnnotationMetadataTests {
 			allMeta = metadata.getAllAnnotationAttributes(DirectAnnotation.class.getName()).get("additional");
 			assertThat(new HashSet<>(allMeta)).isEqualTo(new HashSet<Object>(Arrays.asList("direct", "")));
 			assertThat(metadata.getAnnotationAttributes(DirectAnnotation.class.getName()).get("additional")).isEqualTo("");
-			assertThat(((String[]) metadata.getAnnotationAttributes(DirectAnnotation.class.getName()).get("additionalArray"))).isEmpty();
+			assertThat(((String[]) metadata.getAnnotationAttributes(DirectAnnotation.class.getName()).get("additionalArray")).length).isEqualTo(0);
 		}
 		{ // perform tests with classValuesAsString = true
 			AnnotationAttributes specialAttrs = (AnnotationAttributes) metadata.getAnnotationAttributes(
@@ -503,7 +367,6 @@ class AnnotationMetadataTests {
 	}
 
 	private void doTestMethodAnnotationInfo(AnnotationMetadata classMetadata) {
-		assertThat(classMetadata.getDeclaredMethods()).hasSize(3);
 		Set<MethodMetadata> methods = classMetadata.getAnnotatedMethods(TestAutowired.class.getName());
 		assertThat(methods).hasSize(1);
 		for (MethodMetadata methodMetadata : methods) {
@@ -514,7 +377,7 @@ class AnnotationMetadataTests {
 
 	// -------------------------------------------------------------------------
 
-	public enum SomeEnum {
+	public static enum SomeEnum {
 		LABEL1, LABEL2, DEFAULT
 	}
 
@@ -607,11 +470,7 @@ class AnnotationMetadataTests {
 	@DirectAnnotation(value = "direct", additional = "", additionalArray = {})
 	@MetaMetaAnnotation
 	@EnumSubclasses({SubclassEnum.FOO, SubclassEnum.BAR})
-	@NamedComposedAnnotation
 	private static class AnnotatedComponent implements Serializable {
-
-		public AnnotatedComponent() {
-		}
 
 		@TestAutowired
 		public void doWork(@TestQualifier("myColor") java.awt.Color color) {
@@ -640,20 +499,10 @@ class AnnotationMetadataTests {
 
 	@Retention(RetentionPolicy.RUNTIME)
 	@Target(ElementType.TYPE)
-	public @interface TestComponentScans {
-
-		TestComponentScan[] value();
-	}
-
-	@Retention(RetentionPolicy.RUNTIME)
-	@Target(ElementType.TYPE)
-	@Repeatable(TestComponentScans.class)
 	public @interface TestComponentScan {
 
-		@AliasFor("basePackages")
 		String[] value() default {};
 
-		@AliasFor("value")
 		String[] basePackages() default {};
 
 		Class<?>[] basePackageClasses() default {};
@@ -665,47 +514,11 @@ class AnnotationMetadataTests {
 	@Target(ElementType.TYPE)
 	public @interface ComposedConfigurationWithAttributeOverrides {
 
-		// Do NOT use @AliasFor here until Spring 6.1
-		// @AliasFor(annotation = TestComponentScan.class)
 		String[] basePackages() default {};
 	}
 
 	@ComposedConfigurationWithAttributeOverrides(basePackages = "org.example.componentscan")
 	public static class ComposedConfigurationWithAttributeOverridesClass {
-	}
-
-	@Retention(RetentionPolicy.RUNTIME)
-	@Target(ElementType.TYPE)
-	@TestComponentScan("C")
-	public @interface ScanPackageC {
-	}
-
-	@Retention(RetentionPolicy.RUNTIME)
-	@Target(ElementType.TYPE)
-	@TestComponentScan("D")
-	public @interface ScanPackageD {
-	}
-
-	@Retention(RetentionPolicy.RUNTIME)
-	@Target(ElementType.TYPE)
-	@TestComponentScans({
-		@TestComponentScan("C"),
-		@TestComponentScan("D")
-	})
-	public @interface ScanPackagesCandD {
-	}
-
-	@TestComponentScan(basePackages = "A", basePackageClasses = String.class)
-	@ScanPackageC
-	@ScanPackageD
-	@TestComponentScan(basePackages = "B", basePackageClasses = Integer.class)
-	static class MultipleComposedRepeatableAnnotationsClass {
-	}
-
-	@TestComponentScan(basePackages = "A", basePackageClasses = String.class)
-	@ScanPackagesCandD
-	@TestComponentScans(@TestComponentScan(basePackages = "B", basePackageClasses = Integer.class))
-	static class MultipleRepeatableAnnotationsInContainersClass {
 	}
 
 	@Retention(RetentionPolicy.RUNTIME)
