@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2023 the original author or authors.
+ * Copyright 2002-2019 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,25 +16,15 @@
 
 package org.springframework.jms.listener.adapter;
 
-import java.io.ByteArrayInputStream;
-import java.io.Serializable;
-
-import jakarta.jms.BytesMessage;
-import jakarta.jms.InvalidDestinationException;
-import jakarta.jms.JMSException;
-import jakarta.jms.Message;
-import jakarta.jms.MessageProducer;
-import jakarta.jms.ObjectMessage;
-import jakarta.jms.Queue;
-import jakarta.jms.QueueSender;
-import jakarta.jms.QueueSession;
-import jakarta.jms.Session;
-import jakarta.jms.TextMessage;
 import org.junit.jupiter.api.Test;
+import org.mockito.invocation.InvocationOnMock;
 import org.mockito.stubbing.Answer;
-
 import org.springframework.jms.support.converter.MessageConversionException;
 import org.springframework.jms.support.converter.SimpleMessageConverter;
+
+import javax.jms.*;
+import java.io.ByteArrayInputStream;
+import java.io.Serializable;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatExceptionOfType;
@@ -49,11 +39,11 @@ import static org.mockito.Mockito.verify;
  * @author Juergen Hoeller
  * @author Chris Beams
  */
-class MessageListenerAdapterTests {
+public class MessageListenerAdapterTests {
 
 	private static final String TEXT = "I fancy a good cuppa right now";
 
-	private static final Integer NUMBER = 1;
+	private static final Integer NUMBER = new Integer(1);
 
 	private static final SerializableObject OBJECT = new SerializableObject();
 
@@ -63,12 +53,12 @@ class MessageListenerAdapterTests {
 
 
 	@Test
-	void testWithMessageContentsDelegateForTextMessage() throws Exception {
-		TextMessage textMessage = mock();
+	public void testWithMessageContentsDelegateForTextMessage() throws Exception {
+		TextMessage textMessage = mock(TextMessage.class);
 		// TextMessage contents must be unwrapped...
 		given(textMessage.getText()).willReturn(TEXT);
 
-		MessageContentsDelegate delegate = mock();
+		MessageContentsDelegate delegate = mock(MessageContentsDelegate.class);
 
 		MessageListenerAdapter adapter = new MessageListenerAdapter(delegate);
 		adapter.onMessage(textMessage);
@@ -77,17 +67,20 @@ class MessageListenerAdapterTests {
 	}
 
 	@Test
-	void testWithMessageContentsDelegateForBytesMessage() throws Exception {
-		BytesMessage bytesMessage = mock();
+	public void testWithMessageContentsDelegateForBytesMessage() throws Exception {
+		BytesMessage bytesMessage = mock(BytesMessage.class);
 		// BytesMessage contents must be unwrapped...
-		given(bytesMessage.getBodyLength()).willReturn(Long.valueOf(TEXT.getBytes().length));
-		given(bytesMessage.readBytes(any(byte[].class))).willAnswer((Answer<Integer>) invocation -> {
-			byte[] bytes = (byte[]) invocation.getArguments()[0];
-			ByteArrayInputStream inputStream = new ByteArrayInputStream(TEXT.getBytes());
-			return inputStream.read(bytes);
+		given(bytesMessage.getBodyLength()).willReturn(new Long(TEXT.getBytes().length));
+		given(bytesMessage.readBytes(any(byte[].class))).willAnswer(new Answer<Integer>() {
+			@Override
+			public Integer answer(InvocationOnMock invocation) throws Throwable {
+				byte[] bytes = (byte[]) invocation.getArguments()[0];
+				ByteArrayInputStream inputStream = new ByteArrayInputStream(TEXT.getBytes());
+				return inputStream.read(bytes);
+			}
 		});
 
-		MessageContentsDelegate delegate = mock();
+		MessageContentsDelegate delegate = mock(MessageContentsDelegate.class);
 
 		MessageListenerAdapter adapter = new MessageListenerAdapter(delegate);
 		adapter.onMessage(bytesMessage);
@@ -96,11 +89,11 @@ class MessageListenerAdapterTests {
 	}
 
 	@Test
-	void testWithMessageContentsDelegateForObjectMessage() throws Exception {
-		ObjectMessage objectMessage = mock();
+	public void testWithMessageContentsDelegateForObjectMessage() throws Exception {
+		ObjectMessage objectMessage = mock(ObjectMessage.class);
 		given(objectMessage.getObject()).willReturn(NUMBER);
 
-		MessageContentsDelegate delegate = mock();
+		MessageContentsDelegate delegate = mock(MessageContentsDelegate.class);
 
 		MessageListenerAdapter adapter = new MessageListenerAdapter(delegate);
 		adapter.onMessage(objectMessage);
@@ -109,11 +102,11 @@ class MessageListenerAdapterTests {
 	}
 
 	@Test
-	void testWithMessageContentsDelegateForObjectMessageWithPlainObject() throws Exception {
-		ObjectMessage objectMessage = mock();
+	public void testWithMessageContentsDelegateForObjectMessageWithPlainObject() throws Exception {
+		ObjectMessage objectMessage = mock(ObjectMessage.class);
 		given(objectMessage.getObject()).willReturn(OBJECT);
 
-		MessageContentsDelegate delegate = mock();
+		MessageContentsDelegate delegate = mock(MessageContentsDelegate.class);
 
 		MessageListenerAdapter adapter = new MessageListenerAdapter(delegate);
 		adapter.onMessage(objectMessage);
@@ -122,10 +115,10 @@ class MessageListenerAdapterTests {
 	}
 
 	@Test
-	void testWithMessageDelegate() {
-		TextMessage textMessage = mock();
+	public void testWithMessageDelegate() throws Exception {
+		TextMessage textMessage = mock(TextMessage.class);
 
-		MessageDelegate delegate = mock();
+		MessageDelegate delegate = mock(MessageDelegate.class);
 
 		MessageListenerAdapter adapter = new MessageListenerAdapter(delegate);
 		// we DON'T want the default SimpleMessageConversion happening...
@@ -136,8 +129,8 @@ class MessageListenerAdapterTests {
 	}
 
 	@Test
-	void testWhenTheAdapterItselfIsTheDelegate() throws Exception {
-		TextMessage textMessage = mock();
+	public void testWhenTheAdapterItselfIsTheDelegate() throws Exception {
+		TextMessage textMessage = mock(TextMessage.class);
 		// TextMessage contents must be unwrapped...
 		given(textMessage.getText()).willReturn(TEXT);
 
@@ -147,8 +140,8 @@ class MessageListenerAdapterTests {
 	}
 
 	@Test
-	void testRainyDayWithNoApplicableHandlingMethods() throws Exception {
-		TextMessage textMessage = mock();
+	public void testRainyDayWithNoApplicableHandlingMethods() throws Exception {
+		TextMessage textMessage = mock(TextMessage.class);
 		// TextMessage contents must be unwrapped...
 		given(textMessage.getText()).willReturn(TEXT);
 
@@ -159,11 +152,11 @@ class MessageListenerAdapterTests {
 	}
 
 	@Test
-	void testThatAnExceptionThrownFromTheHandlingMethodIsSimplySwallowedByDefault() {
+	public void testThatAnExceptionThrownFromTheHandlingMethodIsSimplySwallowedByDefault() throws Exception {
 		final IllegalArgumentException exception = new IllegalArgumentException();
 
-		TextMessage textMessage = mock();
-		MessageDelegate delegate = mock();
+		TextMessage textMessage = mock(TextMessage.class);
+		MessageDelegate delegate = mock(MessageDelegate.class);
 		willThrow(exception).given(delegate).handleMessage(textMessage);
 
 		MessageListenerAdapter adapter = new MessageListenerAdapter(delegate) {
@@ -184,7 +177,7 @@ class MessageListenerAdapterTests {
 	}
 
 	@Test
-	void testThatTheDefaultMessageConverterisIndeedTheSimpleMessageConverter() {
+	public void testThatTheDefaultMessageConverterisIndeedTheSimpleMessageConverter() throws Exception {
 		MessageListenerAdapter adapter = new MessageListenerAdapter();
 		assertThat(adapter.getMessageConverter()).as("The default [MessageConverter] must never be null.").isNotNull();
 		boolean condition = adapter.getMessageConverter() instanceof SimpleMessageConverter;
@@ -192,21 +185,21 @@ class MessageListenerAdapterTests {
 	}
 
 	@Test
-	void testThatWhenNoDelegateIsSuppliedTheDelegateIsAssumedToBeTheMessageListenerAdapterItself() {
+	public void testThatWhenNoDelegateIsSuppliedTheDelegateIsAssumedToBeTheMessageListenerAdapterItself() throws Exception {
 		MessageListenerAdapter adapter = new MessageListenerAdapter();
 		assertThat(adapter.getDelegate()).isSameAs(adapter);
 	}
 
 	@Test
-	void testThatTheDefaultMessageHandlingMethodNameIsTheConstantDefault() {
+	public void testThatTheDefaultMessageHandlingMethodNameIsTheConstantDefault() throws Exception {
 		MessageListenerAdapter adapter = new MessageListenerAdapter();
 		assertThat(adapter.getDefaultListenerMethod()).isEqualTo(MessageListenerAdapter.ORIGINAL_DEFAULT_LISTENER_METHOD);
 	}
 
 	@Test
-	void testWithResponsiveMessageDelegate_DoesNotSendReturnTextMessageIfNoSessionSupplied() {
-		TextMessage textMessage = mock();
-		ResponsiveMessageDelegate delegate = mock();
+	public void testWithResponsiveMessageDelegate_DoesNotSendReturnTextMessageIfNoSessionSupplied() throws Exception {
+		TextMessage textMessage = mock(TextMessage.class);
+		ResponsiveMessageDelegate delegate = mock(ResponsiveMessageDelegate.class);
 		given(delegate.handleMessage(textMessage)).willReturn(TEXT);
 
 		MessageListenerAdapter adapter = new MessageListenerAdapter(delegate);
@@ -216,23 +209,23 @@ class MessageListenerAdapterTests {
 	}
 
 	@Test
-	void testWithResponsiveMessageDelegateWithDefaultDestination_SendsReturnTextMessageWhenSessionSupplied() throws Exception {
-		Queue destination = mock();
-		TextMessage sentTextMessage = mock();
+	public void testWithResponsiveMessageDelegateWithDefaultDestination_SendsReturnTextMessageWhenSessionSupplied() throws Exception {
+		Queue destination = mock(Queue.class);
+		TextMessage sentTextMessage = mock(TextMessage.class);
 		// correlation ID is queried when response is being created...
 		given(sentTextMessage.getJMSCorrelationID()).willReturn(
 				CORRELATION_ID);
 		// Reply-To is queried when response is being created...
 		given(sentTextMessage.getJMSReplyTo()).willReturn(null); // we want to fall back to the default...
 
-		TextMessage responseTextMessage = mock();
+		TextMessage responseTextMessage = mock(TextMessage.class);
 
-		QueueSender queueSender = mock();
-		Session session = mock();
+		QueueSender queueSender = mock(QueueSender.class);
+		Session session = mock(Session.class);
 		given(session.createTextMessage(RESPONSE_TEXT)).willReturn(responseTextMessage);
 		given(session.createProducer(destination)).willReturn(queueSender);
 
-		ResponsiveMessageDelegate delegate = mock();
+		ResponsiveMessageDelegate delegate = mock(ResponsiveMessageDelegate.class);
 		given(delegate.handleMessage(sentTextMessage)).willReturn(RESPONSE_TEXT);
 
 		MessageListenerAdapter adapter = new MessageListenerAdapter(delegate) {
@@ -251,22 +244,22 @@ class MessageListenerAdapterTests {
 	}
 
 	@Test
-	void testWithResponsiveMessageDelegateNoDefaultDestination_SendsReturnTextMessageWhenSessionSupplied() throws Exception {
-		Queue destination = mock();
-		TextMessage sentTextMessage = mock();
+	public void testWithResponsiveMessageDelegateNoDefaultDestination_SendsReturnTextMessageWhenSessionSupplied() throws Exception {
+		Queue destination = mock(Queue.class);
+		TextMessage sentTextMessage = mock(TextMessage.class);
 		// correlation ID is queried when response is being created...
 		given(sentTextMessage.getJMSCorrelationID()).willReturn(null);
 		given(sentTextMessage.getJMSMessageID()).willReturn(CORRELATION_ID);
 		// Reply-To is queried when response is being created...
 		given(sentTextMessage.getJMSReplyTo()).willReturn(destination);
 
-		TextMessage responseTextMessage = mock();
-		MessageProducer messageProducer = mock();
-		Session session = mock();
+		TextMessage responseTextMessage = mock(TextMessage.class);
+		MessageProducer messageProducer = mock(MessageProducer.class);
+		Session session = mock(Session.class);
 		given(session.createTextMessage(RESPONSE_TEXT)).willReturn(responseTextMessage);
 		given(session.createProducer(destination)).willReturn(messageProducer);
 
-		ResponsiveMessageDelegate delegate = mock();
+		ResponsiveMessageDelegate delegate = mock(ResponsiveMessageDelegate.class);
 		given(delegate.handleMessage(sentTextMessage)).willReturn(RESPONSE_TEXT);
 
 		MessageListenerAdapter adapter = new MessageListenerAdapter(delegate) {
@@ -284,18 +277,18 @@ class MessageListenerAdapterTests {
 	}
 
 	@Test
-	void testWithResponsiveMessageDelegateNoDefaultDestinationAndNoReplyToDestination_SendsReturnTextMessageWhenSessionSupplied() throws Exception {
-		final TextMessage sentTextMessage = mock();
+	public void testWithResponsiveMessageDelegateNoDefaultDestinationAndNoReplyToDestination_SendsReturnTextMessageWhenSessionSupplied() throws Exception {
+		final TextMessage sentTextMessage = mock(TextMessage.class);
 		// correlation ID is queried when response is being created...
 		given(sentTextMessage.getJMSCorrelationID()).willReturn(CORRELATION_ID);
 		// Reply-To is queried when response is being created...
 		given(sentTextMessage.getJMSReplyTo()).willReturn(null);
 
-		TextMessage responseTextMessage = mock();
-		final QueueSession session = mock();
+		TextMessage responseTextMessage = mock(TextMessage.class);
+		final QueueSession session = mock(QueueSession.class);
 		given(session.createTextMessage(RESPONSE_TEXT)).willReturn(responseTextMessage);
 
-		ResponsiveMessageDelegate delegate = mock();
+		ResponsiveMessageDelegate delegate = mock(ResponsiveMessageDelegate.class);
 		given(delegate.handleMessage(sentTextMessage)).willReturn(RESPONSE_TEXT);
 
 		final MessageListenerAdapter adapter = new MessageListenerAdapter(delegate) {
@@ -313,24 +306,24 @@ class MessageListenerAdapterTests {
 	}
 
 	@Test
-	void testWithResponsiveMessageDelegateNoDefaultDestination_SendsReturnTextMessageWhenSessionSupplied_AndSendingThrowsJMSException() throws Exception {
-		Queue destination = mock();
+	public void testWithResponsiveMessageDelegateNoDefaultDestination_SendsReturnTextMessageWhenSessionSupplied_AndSendingThrowsJMSException() throws Exception {
+		Queue destination = mock(Queue.class);
 
-		final TextMessage sentTextMessage = mock();
+		final TextMessage sentTextMessage = mock(TextMessage.class);
 		// correlation ID is queried when response is being created...
 		given(sentTextMessage.getJMSCorrelationID()).willReturn(CORRELATION_ID);
 		// Reply-To is queried when response is being created...
 		given(sentTextMessage.getJMSReplyTo()).willReturn(destination);
 
-		TextMessage responseTextMessage = mock();
-		MessageProducer messageProducer = mock();
+		TextMessage responseTextMessage = mock(TextMessage.class);
+		MessageProducer messageProducer = mock(MessageProducer.class);
 		willThrow(new JMSException("Doe!")).given(messageProducer).send(responseTextMessage);
 
-		final QueueSession session = mock();
+		final QueueSession session = mock(QueueSession.class);
 		given(session.createTextMessage(RESPONSE_TEXT)).willReturn(responseTextMessage);
 		given(session.createProducer(destination)).willReturn(messageProducer);
 
-		ResponsiveMessageDelegate delegate = mock();
+		ResponsiveMessageDelegate delegate = mock(ResponsiveMessageDelegate.class);
 		given(delegate.handleMessage(sentTextMessage)).willReturn(RESPONSE_TEXT);
 
 		final MessageListenerAdapter adapter = new MessageListenerAdapter(delegate) {
@@ -349,11 +342,11 @@ class MessageListenerAdapterTests {
 	}
 
 	@Test
-	void testWithResponsiveMessageDelegateDoesNotSendReturnTextMessageWhenSessionSupplied_AndListenerMethodThrowsException() {
-		final TextMessage message = mock();
-		final QueueSession session = mock();
+	public void testWithResponsiveMessageDelegateDoesNotSendReturnTextMessageWhenSessionSupplied_AndListenerMethodThrowsException() throws Exception {
+		final TextMessage message = mock(TextMessage.class);
+		final QueueSession session = mock(QueueSession.class);
 
-		ResponsiveMessageDelegate delegate = mock();
+		ResponsiveMessageDelegate delegate = mock(ResponsiveMessageDelegate.class);
 		willThrow(new IllegalArgumentException("Doe!")).given(delegate).handleMessage(message);
 
 		final MessageListenerAdapter adapter = new MessageListenerAdapter(delegate) {
@@ -367,10 +360,10 @@ class MessageListenerAdapterTests {
 	}
 
 	@Test
-	void testWithResponsiveMessageDelegateWhenReturnTypeIsNotAJMSMessageAndNoMessageConverterIsSupplied() {
-		final TextMessage sentTextMessage = mock();
-		final Session session = mock();
-		ResponsiveMessageDelegate delegate = mock();
+	public void testWithResponsiveMessageDelegateWhenReturnTypeIsNotAJMSMessageAndNoMessageConverterIsSupplied() throws Exception {
+		final TextMessage sentTextMessage = mock(TextMessage.class);
+		final Session session = mock(Session.class);
+		ResponsiveMessageDelegate delegate = mock(ResponsiveMessageDelegate.class);
 		given(delegate.handleMessage(sentTextMessage)).willReturn(RESPONSE_TEXT);
 
 		final MessageListenerAdapter adapter = new MessageListenerAdapter(delegate) {
@@ -386,21 +379,21 @@ class MessageListenerAdapterTests {
 	}
 
 	@Test
-	void testWithResponsiveMessageDelegateWhenReturnTypeIsAJMSMessageAndNoMessageConverterIsSupplied() throws Exception {
-		Queue destination = mock();
-		final TextMessage sentTextMessage = mock();
+	public void testWithResponsiveMessageDelegateWhenReturnTypeIsAJMSMessageAndNoMessageConverterIsSupplied() throws Exception {
+		Queue destination = mock(Queue.class);
+		final TextMessage sentTextMessage = mock(TextMessage.class);
 		// correlation ID is queried when response is being created...
 		given(sentTextMessage.getJMSCorrelationID()).willReturn(CORRELATION_ID);
 		// Reply-To is queried when response is being created...
 		given(sentTextMessage.getJMSReplyTo()).willReturn(destination);
 
-		TextMessage responseMessage = mock();
-		QueueSender queueSender = mock();
+		TextMessage responseMessage = mock(TextMessage.class);
+		QueueSender queueSender = mock(QueueSender.class);
 
-		Session session = mock();
+		Session session = mock(Session.class);
 		given(session.createProducer(destination)).willReturn(queueSender);
 
-		ResponsiveJmsTextMessageReturningMessageDelegate delegate = mock();
+		ResponsiveJmsTextMessageReturningMessageDelegate delegate = mock(ResponsiveJmsTextMessageReturningMessageDelegate.class);
 		given(delegate.handleMessage(sentTextMessage)).willReturn(responseMessage);
 
 		final MessageListenerAdapter adapter = new MessageListenerAdapter(delegate) {
