@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2023 the original author or authors.
+ * Copyright 2002-2019 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -22,19 +22,19 @@ import java.util.Collections;
 import java.util.Date;
 import java.util.HashMap;
 import java.util.Map;
-import java.util.Objects;
+
+import javax.jms.BytesMessage;
+import javax.jms.JMSException;
+import javax.jms.Session;
+import javax.jms.TextMessage;
 
 import com.fasterxml.jackson.annotation.JsonView;
-import jakarta.jms.BytesMessage;
-import jakarta.jms.JMSException;
-import jakarta.jms.Session;
-import jakarta.jms.TextMessage;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+import org.mockito.invocation.InvocationOnMock;
 import org.mockito.stubbing.Answer;
 
 import org.springframework.core.MethodParameter;
-import org.springframework.lang.Nullable;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatIllegalArgumentException;
@@ -49,23 +49,25 @@ import static org.mockito.Mockito.verify;
  * @author Dave Syer
  * @author Stephane Nicoll
  */
-class MappingJackson2MessageConverterTests {
+public class MappingJackson2MessageConverterTests {
 
-	private MappingJackson2MessageConverter converter = new MappingJackson2MessageConverter();
+	private MappingJackson2MessageConverter converter;
 
-	private Session sessionMock = mock();
+	private Session sessionMock;
 
 
 	@BeforeEach
-	void setup() {
+	public void setup() {
+		sessionMock = mock(Session.class);
+		converter = new MappingJackson2MessageConverter();
 		converter.setEncodingPropertyName("__encoding__");
 		converter.setTypeIdPropertyName("__typeid__");
 	}
 
 
 	@Test
-	void toBytesMessage() throws Exception {
-		BytesMessage bytesMessageMock = mock();
+	public void toBytesMessage() throws Exception {
+		BytesMessage bytesMessageMock = mock(BytesMessage.class);
 		Date toBeMarshalled = new Date();
 
 		given(sessionMock.createBytesMessage()).willReturn(bytesMessageMock);
@@ -78,8 +80,8 @@ class MappingJackson2MessageConverterTests {
 	}
 
 	@Test
-	void fromBytesMessage() throws Exception {
-		BytesMessage bytesMessageMock = mock();
+	public void fromBytesMessage() throws Exception {
+		BytesMessage bytesMessageMock = mock(BytesMessage.class);
 		Map<String, String> unmarshalled = Collections.singletonMap("foo", "bar");
 
 		byte[] bytes = "{\"foo\":\"bar\"}".getBytes();
@@ -87,18 +89,23 @@ class MappingJackson2MessageConverterTests {
 
 		given(bytesMessageMock.getStringProperty("__typeid__")).willReturn(Object.class.getName());
 		given(bytesMessageMock.propertyExists("__encoding__")).willReturn(false);
-		given(bytesMessageMock.getBodyLength()).willReturn(Long.valueOf(bytes.length));
+		given(bytesMessageMock.getBodyLength()).willReturn(new Long(bytes.length));
 		given(bytesMessageMock.readBytes(any(byte[].class))).willAnswer(
-				(Answer<Integer>) invocation -> byteStream.read((byte[]) invocation.getArguments()[0]));
+				new Answer<Integer>() {
+					@Override
+					public Integer answer(InvocationOnMock invocation) throws Throwable {
+						return byteStream.read((byte[]) invocation.getArguments()[0]);
+					}
+				});
 
 		Object result = converter.fromMessage(bytesMessageMock);
 		assertThat(unmarshalled).as("Invalid result").isEqualTo(result);
 	}
 
 	@Test
-	void toTextMessageWithObject() throws Exception {
+	public void toTextMessageWithObject() throws Exception {
 		converter.setTargetType(MessageType.TEXT);
-		TextMessage textMessageMock = mock();
+		TextMessage textMessageMock = mock(TextMessage.class);
 		Date toBeMarshalled = new Date();
 
 		given(sessionMock.createTextMessage(isA(String.class))).willReturn(textMessageMock);
@@ -108,9 +115,9 @@ class MappingJackson2MessageConverterTests {
 	}
 
 	@Test
-	void toTextMessageWithMap() throws Exception {
+	public void toTextMessageWithMap() throws Exception {
 		converter.setTargetType(MessageType.TEXT);
-		TextMessage textMessageMock = mock();
+		TextMessage textMessageMock = mock(TextMessage.class);
 		Map<String, String> toBeMarshalled = new HashMap<>();
 		toBeMarshalled.put("foo", "bar");
 
@@ -121,8 +128,8 @@ class MappingJackson2MessageConverterTests {
 	}
 
 	@Test
-	void fromTextMessage() throws Exception {
-		TextMessage textMessageMock = mock();
+	public void fromTextMessage() throws Exception {
+		TextMessage textMessageMock = mock(TextMessage.class);
 		MyBean unmarshalled = new MyBean("bar");
 
 		String text = "{\"foo\":\"bar\"}";
@@ -134,8 +141,8 @@ class MappingJackson2MessageConverterTests {
 	}
 
 	@Test
-	void fromTextMessageWithUnknownProperty() throws Exception {
-		TextMessage textMessageMock = mock();
+	public void fromTextMessageWithUnknownProperty() throws Exception {
+		TextMessage textMessageMock = mock(TextMessage.class);
 		MyBean unmarshalled = new MyBean("bar");
 
 		String text = "{\"foo\":\"bar\", \"unknownProperty\":\"value\"}";
@@ -147,8 +154,8 @@ class MappingJackson2MessageConverterTests {
 	}
 
 	@Test
-	void fromTextMessageAsObject() throws Exception {
-		TextMessage textMessageMock = mock();
+	public void fromTextMessageAsObject() throws Exception {
+		TextMessage textMessageMock = mock(TextMessage.class);
 		Map<String, String> unmarshalled = Collections.singletonMap("foo", "bar");
 
 		String text = "{\"foo\":\"bar\"}";
@@ -160,8 +167,8 @@ class MappingJackson2MessageConverterTests {
 	}
 
 	@Test
-	void fromTextMessageAsMap() throws Exception {
-		TextMessage textMessageMock = mock();
+	public void fromTextMessageAsMap() throws Exception {
+		TextMessage textMessageMock = mock(TextMessage.class);
 		Map<String, String> unmarshalled = Collections.singletonMap("foo", "bar");
 
 		String text = "{\"foo\":\"bar\"}";
@@ -173,7 +180,7 @@ class MappingJackson2MessageConverterTests {
 	}
 
 	@Test
-	void toTextMessageWithReturnType() throws JMSException, NoSuchMethodException {
+	public void toTextMessageWithReturnType() throws JMSException, NoSuchMethodException {
 		Method method = this.getClass().getDeclaredMethod("summary");
 		MethodParameter returnType = new MethodParameter(method, -1);
 		testToTextMessageWithReturnType(returnType);
@@ -181,13 +188,13 @@ class MappingJackson2MessageConverterTests {
 	}
 
 	@Test
-	void toTextMessageWithNullReturnType() throws JMSException, NoSuchMethodException {
+	public void toTextMessageWithNullReturnType() throws JMSException, NoSuchMethodException {
 		testToTextMessageWithReturnType(null);
 		verify(sessionMock).createTextMessage("{\"name\":\"test\",\"description\":\"lengthy description\"}");
 	}
 
 	@Test
-	void toTextMessageWithReturnTypeAndNoJsonView() throws JMSException, NoSuchMethodException {
+	public void toTextMessageWithReturnTypeAndNoJsonView() throws JMSException, NoSuchMethodException {
 		Method method = this.getClass().getDeclaredMethod("none");
 		MethodParameter returnType = new MethodParameter(method, -1);
 
@@ -196,7 +203,7 @@ class MappingJackson2MessageConverterTests {
 	}
 
 	@Test
-	void toTextMessageWithReturnTypeAndMultipleJsonViews() throws NoSuchMethodException {
+	public void toTextMessageWithReturnTypeAndMultipleJsonViews() throws JMSException, NoSuchMethodException {
 		Method method = this.getClass().getDeclaredMethod("invalid");
 		MethodParameter returnType = new MethodParameter(method, -1);
 
@@ -204,9 +211,9 @@ class MappingJackson2MessageConverterTests {
 				testToTextMessageWithReturnType(returnType));
 	}
 
-	private void testToTextMessageWithReturnType(MethodParameter returnType) throws JMSException {
+	private void testToTextMessageWithReturnType(MethodParameter returnType) throws JMSException, NoSuchMethodException {
 		converter.setTargetType(MessageType.TEXT);
-		TextMessage textMessageMock = mock();
+		TextMessage textMessageMock = mock(TextMessage.class);
 
 		MyAnotherBean bean = new MyAnotherBean("test", "lengthy description");
 		given(sessionMock.createTextMessage(isA(String.class))).willReturn(textMessageMock);
@@ -215,9 +222,9 @@ class MappingJackson2MessageConverterTests {
 	}
 
 	@Test
-	void toTextMessageWithJsonViewClass() throws JMSException {
+	public void toTextMessageWithJsonViewClass() throws JMSException {
 		converter.setTargetType(MessageType.TEXT);
-		TextMessage textMessageMock = mock();
+		TextMessage textMessageMock = mock(TextMessage.class);
 
 		MyAnotherBean bean = new MyAnotherBean("test", "lengthy description");
 		given(sessionMock.createTextMessage(isA(String.class))).willReturn(textMessageMock);
@@ -229,9 +236,9 @@ class MappingJackson2MessageConverterTests {
 	}
 
 	@Test
-	void toTextMessageWithAnotherJsonViewClass() throws JMSException {
+	public void toTextMessageWithAnotherJsonViewClass() throws JMSException {
 		converter.setTargetType(MessageType.TEXT);
-		TextMessage textMessageMock = mock();
+		TextMessage textMessageMock = mock(TextMessage.class);
 
 		MyAnotherBean bean = new MyAnotherBean("test", "lengthy description");
 		given(sessionMock.createTextMessage(isA(String.class))).willReturn(textMessageMock);
@@ -278,7 +285,7 @@ class MappingJackson2MessageConverterTests {
 		}
 
 		@Override
-		public boolean equals(@Nullable Object o) {
+		public boolean equals(Object o) {
 			if (this == o) {
 				return true;
 			}
@@ -286,7 +293,10 @@ class MappingJackson2MessageConverterTests {
 				return false;
 			}
 			MyBean bean = (MyBean) o;
-			return Objects.equals(this.foo, bean.foo);
+			if (foo != null ? !foo.equals(bean.foo) : bean.foo != null) {
+				return false;
+			}
+			return true;
 		}
 
 		@Override
@@ -296,12 +306,11 @@ class MappingJackson2MessageConverterTests {
 	}
 
 
-	private interface Summary {}
+	private interface Summary {};
 
-	private interface Full extends Summary {}
+	private interface Full extends Summary {};
 
 
-	@SuppressWarnings("unused")
 	private static class MyAnotherBean {
 
 		@JsonView(Summary.class)
