@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2024 the original author or authors.
+ * Copyright 2002-2019 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -23,9 +23,7 @@ import java.util.List;
 import org.junit.jupiter.api.Test;
 
 import org.springframework.core.Ordered;
-import org.springframework.core.annotation.AliasFor;
 import org.springframework.core.annotation.AnnotationConfigurationException;
-import org.springframework.test.context.event.ApplicationEventsTestExecutionListener;
 import org.springframework.test.context.event.EventPublishingTestExecutionListener;
 import org.springframework.test.context.jdbc.SqlScriptsTestExecutionListener;
 import org.springframework.test.context.support.AbstractTestExecutionListener;
@@ -34,7 +32,6 @@ import org.springframework.test.context.support.DirtiesContextBeforeModesTestExe
 import org.springframework.test.context.support.DirtiesContextTestExecutionListener;
 import org.springframework.test.context.transaction.TransactionalTestExecutionListener;
 import org.springframework.test.context.web.ServletTestExecutionListener;
-import org.springframework.util.ClassUtils;
 
 import static java.util.Arrays.asList;
 import static java.util.stream.Collectors.toList;
@@ -43,7 +40,7 @@ import static org.assertj.core.api.Assertions.assertThatExceptionOfType;
 import static org.springframework.test.context.TestExecutionListeners.MergeMode.MERGE_WITH_DEFAULTS;
 
 /**
- * Tests for the {@link TestExecutionListeners @TestExecutionListeners}
+ * Unit tests for the {@link TestExecutionListeners @TestExecutionListeners}
  * annotation, which verify:
  * <ul>
  * <li>Proper registering of {@linkplain TestExecutionListener listeners} in
@@ -57,21 +54,12 @@ import static org.springframework.test.context.TestExecutionListeners.MergeMode.
  */
 class TestExecutionListenersTests {
 
-	private static final Class<?> micrometerListenerClass =
-			ClassUtils.resolveClassName("org.springframework.test.context.observation.MicrometerObservationRegistryTestExecutionListener", null);
-
 	@Test
 	void defaultListeners() {
-		List<Class<?>> expected = asList(ServletTestExecutionListener.class,//
-				DirtiesContextBeforeModesTestExecutionListener.class,//
-				ApplicationEventsTestExecutionListener.class,//
-				DependencyInjectionTestExecutionListener.class,//
-				micrometerListenerClass,//
-				DirtiesContextTestExecutionListener.class,//
-				TransactionalTestExecutionListener.class,//
-				SqlScriptsTestExecutionListener.class,//
-				EventPublishingTestExecutionListener.class
-			);
+		List<Class<?>> expected = asList(ServletTestExecutionListener.class,
+				DirtiesContextBeforeModesTestExecutionListener.class, DependencyInjectionTestExecutionListener.class,
+				DirtiesContextTestExecutionListener.class, TransactionalTestExecutionListener.class,
+				SqlScriptsTestExecutionListener.class, EventPublishingTestExecutionListener.class);
 		assertRegisteredListeners(DefaultListenersTestCase.class, expected);
 	}
 
@@ -80,17 +68,10 @@ class TestExecutionListenersTests {
 	 */
 	@Test
 	void defaultListenersMergedWithCustomListenerPrepended() {
-		List<Class<?>> expected = asList(QuuxTestExecutionListener.class,//
-				ServletTestExecutionListener.class,//
-				DirtiesContextBeforeModesTestExecutionListener.class,//
-				ApplicationEventsTestExecutionListener.class,//
-				DependencyInjectionTestExecutionListener.class,//
-				micrometerListenerClass,//
-				DirtiesContextTestExecutionListener.class,//
-				TransactionalTestExecutionListener.class,//
-				SqlScriptsTestExecutionListener.class,//
-				EventPublishingTestExecutionListener.class
-			);
+		List<Class<?>> expected = asList(QuuxTestExecutionListener.class, ServletTestExecutionListener.class,
+				DirtiesContextBeforeModesTestExecutionListener.class, DependencyInjectionTestExecutionListener.class,
+				DirtiesContextTestExecutionListener.class, TransactionalTestExecutionListener.class,
+				SqlScriptsTestExecutionListener.class, EventPublishingTestExecutionListener.class);
 		assertRegisteredListeners(MergedDefaultListenersWithCustomListenerPrependedTestCase.class, expected);
 	}
 
@@ -99,17 +80,11 @@ class TestExecutionListenersTests {
 	 */
 	@Test
 	void defaultListenersMergedWithCustomListenerAppended() {
-		List<Class<?>> expected = asList(ServletTestExecutionListener.class,//
-				DirtiesContextBeforeModesTestExecutionListener.class,//
-				ApplicationEventsTestExecutionListener.class,//
-				DependencyInjectionTestExecutionListener.class,//
-				micrometerListenerClass,//
-				DirtiesContextTestExecutionListener.class,//
-				TransactionalTestExecutionListener.class,
-				SqlScriptsTestExecutionListener.class,//
-				EventPublishingTestExecutionListener.class,//
-				BazTestExecutionListener.class
-			);
+		List<Class<?>> expected = asList(ServletTestExecutionListener.class,
+				DirtiesContextBeforeModesTestExecutionListener.class, DependencyInjectionTestExecutionListener.class,
+				DirtiesContextTestExecutionListener.class, TransactionalTestExecutionListener.class,
+				SqlScriptsTestExecutionListener.class, EventPublishingTestExecutionListener.class,
+				BazTestExecutionListener.class);
 		assertRegisteredListeners(MergedDefaultListenersWithCustomListenerAppendedTestCase.class, expected);
 	}
 
@@ -118,29 +93,23 @@ class TestExecutionListenersTests {
 	 */
 	@Test
 	void defaultListenersMergedWithCustomListenerInserted() {
-		List<Class<?>> expected = asList(ServletTestExecutionListener.class,//
-				DirtiesContextBeforeModesTestExecutionListener.class,//
-				ApplicationEventsTestExecutionListener.class,//
-				DependencyInjectionTestExecutionListener.class,//
-				BarTestExecutionListener.class,//
-				micrometerListenerClass,//
-				DirtiesContextTestExecutionListener.class,//
-				TransactionalTestExecutionListener.class,//
-				SqlScriptsTestExecutionListener.class,//
-				EventPublishingTestExecutionListener.class
-			);
+		List<Class<?>> expected = asList(ServletTestExecutionListener.class,
+				DirtiesContextBeforeModesTestExecutionListener.class, DependencyInjectionTestExecutionListener.class,
+				BarTestExecutionListener.class, DirtiesContextTestExecutionListener.class,
+				TransactionalTestExecutionListener.class, SqlScriptsTestExecutionListener.class,
+				EventPublishingTestExecutionListener.class);
 		assertRegisteredListeners(MergedDefaultListenersWithCustomListenerInsertedTestCase.class, expected);
 	}
 
 	@Test
 	void nonInheritedDefaultListeners() {
-		assertRegisteredListeners(NonInheritedDefaultListenersTestCase.class, List.of(QuuxTestExecutionListener.class));
+		assertRegisteredListeners(NonInheritedDefaultListenersTestCase.class, asList(QuuxTestExecutionListener.class));
 	}
 
 	@Test
 	void inheritedDefaultListeners() {
-		assertRegisteredListeners(InheritedDefaultListenersTestCase.class, List.of(QuuxTestExecutionListener.class));
-		assertRegisteredListeners(SubInheritedDefaultListenersTestCase.class, List.of(QuuxTestExecutionListener.class));
+		assertRegisteredListeners(InheritedDefaultListenersTestCase.class, asList(QuuxTestExecutionListener.class));
+		assertRegisteredListeners(SubInheritedDefaultListenersTestCase.class, asList(QuuxTestExecutionListener.class));
 		assertRegisteredListeners(SubSubInheritedDefaultListenersTestCase.class,
 				asList(QuuxTestExecutionListener.class, EnigmaTestExecutionListener.class));
 	}
@@ -208,7 +177,7 @@ class TestExecutionListenersTests {
 	}
 
 	private List<String> names(List<Class<?>> classes) {
-		return classes.stream().map(Class::getSimpleName).toList();
+		return classes.stream().map(Class::getSimpleName).collect(toList());
 	}
 
 	private void assertRegisteredListeners(Class<?> testClass, List<Class<?>> expected) {
@@ -218,7 +187,7 @@ class TestExecutionListenersTests {
 
 	private void assertNumRegisteredListeners(Class<?> testClass, int expected) {
 		TestContextManager testContextManager = new TestContextManager(testClass);
-		assertThat(testContextManager.getTestExecutionListeners()).as("Num registered TELs for " + testClass).hasSize(expected);
+		assertThat(testContextManager.getTestExecutionListeners().size()).as("Num registered TELs for " + testClass).isEqualTo(expected);
 	}
 
 
@@ -303,7 +272,6 @@ class TestExecutionListenersTests {
 	@Retention(RetentionPolicy.RUNTIME)
 	@interface MetaListenersWithOverrides {
 
-		@AliasFor(annotation = TestExecutionListeners.class)
 		Class<? extends TestExecutionListener>[] listeners() default
 				{FooTestExecutionListener.class, BarTestExecutionListener.class};
 	}
@@ -312,10 +280,8 @@ class TestExecutionListenersTests {
 	@Retention(RetentionPolicy.RUNTIME)
 	@interface MetaInheritedListenersWithOverrides {
 
-		@AliasFor(annotation = TestExecutionListeners.class)
 		Class<? extends TestExecutionListener>[] listeners() default QuuxTestExecutionListener.class;
 
-		@AliasFor(annotation = TestExecutionListeners.class)
 		boolean inheritListeners() default true;
 	}
 
@@ -323,10 +289,8 @@ class TestExecutionListenersTests {
 	@Retention(RetentionPolicy.RUNTIME)
 	@interface MetaNonInheritedListenersWithOverrides {
 
-		@AliasFor(annotation = TestExecutionListeners.class)
 		Class<? extends TestExecutionListener>[] listeners() default QuuxTestExecutionListener.class;
 
-		@AliasFor(annotation = TestExecutionListeners.class)
 		boolean inheritListeners() default false;
 	}
 
@@ -369,9 +333,9 @@ class TestExecutionListenersTests {
 
 		@Override
 		public int getOrder() {
-			// 2250 is between DependencyInjectionTestExecutionListener (2000) and
-			// MicrometerObservationRegistryTestExecutionListener (2500)
-			return 2250;
+			// 2500 is between DependencyInjectionTestExecutionListener (2000) and
+			// DirtiesContextTestExecutionListener (3000)
+			return 2500;
 		}
 	}
 
