@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2024 the original author or authors.
+ * Copyright 2002-2019 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,6 +16,9 @@
 
 package org.springframework.http;
 
+import org.springframework.lang.Nullable;
+import org.springframework.util.*;
+
 import java.io.Serializable;
 import java.net.InetSocketAddress;
 import java.net.URI;
@@ -30,27 +33,10 @@ import java.time.ZoneId;
 import java.time.ZonedDateTime;
 import java.time.format.DateTimeFormatter;
 import java.time.format.DateTimeParseException;
-import java.util.ArrayList;
-import java.util.Base64;
-import java.util.Collection;
-import java.util.Collections;
-import java.util.List;
-import java.util.Locale;
-import java.util.Map;
-import java.util.Set;
-import java.util.StringJoiner;
-import java.util.function.BiConsumer;
+import java.util.*;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 import java.util.stream.Collectors;
-
-import org.springframework.lang.Nullable;
-import org.springframework.util.Assert;
-import org.springframework.util.CollectionUtils;
-import org.springframework.util.LinkedCaseInsensitiveMap;
-import org.springframework.util.LinkedMultiValueMap;
-import org.springframework.util.MultiValueMap;
-import org.springframework.util.StringUtils;
 
 /**
  * A data structure representing HTTP request or response headers, mapping String header names
@@ -99,12 +85,6 @@ public class HttpHeaders implements MultiValueMap<String, String>, Serializable 
 	 * @see <a href="https://tools.ietf.org/html/rfc7231#section-5.3.5">Section 5.3.5 of RFC 7231</a>
 	 */
 	public static final String ACCEPT_LANGUAGE = "Accept-Language";
-	/**
-	 * The HTTP {@code Accept-Patch} header field name.
-	 * @since 5.3.6
-	 * @see <a href="https://tools.ietf.org/html/rfc5789#section-3.1">Section 3.1 of RFC 5789</a>
-	 */
-	public static final String ACCEPT_PATCH = "Accept-Patch";
 	/**
 	 * The HTTP {@code Accept-Ranges} header field name.
 	 * @see <a href="https://tools.ietf.org/html/rfc7233#section-2.3">Section 5.3.5 of RFC 7233</a>
@@ -389,9 +369,10 @@ public class HttpHeaders implements MultiValueMap<String, String>, Serializable 
 
 	/**
 	 * An empty {@code HttpHeaders} instance (immutable).
+	 *
 	 * @since 5.0
 	 */
-	public static final HttpHeaders EMPTY = new ReadOnlyHttpHeaders(new LinkedMultiValueMap<>());
+	public static final HttpHeaders EMPTY = new ReadOnlyHttpHeaders(new HttpHeaders(new LinkedMultiValueMap<>(0)));
 
 	/**
 	 * Pattern matching ETag multiple field values in headers such as "If-Match", "If-None-Match".
@@ -420,7 +401,6 @@ public class HttpHeaders implements MultiValueMap<String, String>, Serializable 
 	};
 
 
-	@SuppressWarnings("serial")
 	final MultiValueMap<String, String> headers;
 
 
@@ -486,7 +466,7 @@ public class HttpHeaders implements MultiValueMap<String, String>, Serializable 
 						range.getWeight() == Locale.LanguageRange.MAX_WEIGHT ?
 								range.getRange() :
 								range.getRange() + ";q=" + decimal.format(range.getWeight()))
-				.toList();
+				.collect(Collectors.toList());
 		set(ACCEPT_LANGUAGE, toCommaDelimitedString(values));
 	}
 
@@ -511,7 +491,7 @@ public class HttpHeaders implements MultiValueMap<String, String>, Serializable 
 	public void setAcceptLanguageAsLocales(List<Locale> locales) {
 		setAcceptLanguage(locales.stream()
 				.map(locale -> new Locale.LanguageRange(locale.toLanguageTag()))
-				.toList());
+				.collect(Collectors.toList()));
 	}
 
 	/**
@@ -529,26 +509,7 @@ public class HttpHeaders implements MultiValueMap<String, String>, Serializable 
 		return ranges.stream()
 				.map(range -> Locale.forLanguageTag(range.getRange()))
 				.filter(locale -> StringUtils.hasText(locale.getDisplayName()))
-				.toList();
-	}
-
-	/**
-	 * Set the list of acceptable {@linkplain MediaType media types} for
-	 * {@code PATCH} methods, as specified by the {@code Accept-Patch} header.
-	 * @since 5.3.6
-	 */
-	public void setAcceptPatch(List<MediaType> mediaTypes) {
-		set(ACCEPT_PATCH, MediaType.toString(mediaTypes));
-	}
-
-	/**
-	 * Return the list of acceptable {@linkplain MediaType media types} for
-	 * {@code PATCH} methods, as specified by the {@code Accept-Patch} header.
-	 * <p>Returns an empty list when the acceptable media types are unspecified.
-	 * @since 5.3.6
-	 */
-	public List<MediaType> getAcceptPatch() {
-		return MediaType.parseMediaTypes(get(ACCEPT_PATCH));
+				.collect(Collectors.toList());
 	}
 
 	/**
@@ -590,19 +551,18 @@ public class HttpHeaders implements MultiValueMap<String, String>, Serializable 
 	 * Return the value of the {@code Access-Control-Allow-Methods} response header.
 	 */
 	public List<HttpMethod> getAccessControlAllowMethods() {
+		List<HttpMethod> result = new ArrayList<>();
 		String value = getFirst(ACCESS_CONTROL_ALLOW_METHODS);
 		if (value != null) {
 			String[] tokens = StringUtils.tokenizeToStringArray(value, ",");
-			List<HttpMethod> result = new ArrayList<>(tokens.length);
 			for (String token : tokens) {
-				HttpMethod method = HttpMethod.valueOf(token);
-				result.add(method);
+				HttpMethod resolved = HttpMethod.resolve(token);
+				if (resolved != null) {
+					result.add(resolved);
+				}
 			}
-			return result;
 		}
-		else {
-			return Collections.emptyList();
-		}
+		return result;
 	}
 
 	/**
@@ -684,13 +644,7 @@ public class HttpHeaders implements MultiValueMap<String, String>, Serializable 
 	 */
 	@Nullable
 	public HttpMethod getAccessControlRequestMethod() {
-		String requestMethod = getFirst(ACCESS_CONTROL_REQUEST_METHOD);
-		if (requestMethod != null) {
-			return HttpMethod.valueOf(requestMethod);
-		}
-		else {
-			return null;
-		}
+		return HttpMethod.resolve(getFirst(ACCESS_CONTROL_REQUEST_METHOD));
 	}
 
 	/**
@@ -751,15 +705,17 @@ public class HttpHeaders implements MultiValueMap<String, String>, Serializable 
 		String value = getFirst(ALLOW);
 		if (StringUtils.hasLength(value)) {
 			String[] tokens = StringUtils.tokenizeToStringArray(value, ",");
-			Set<HttpMethod> result = CollectionUtils.newLinkedHashSet(tokens.length);
+			List<HttpMethod> result = new ArrayList<>(tokens.length);
 			for (String token : tokens) {
-				HttpMethod method = HttpMethod.valueOf(token);
-				result.add(method);
+				HttpMethod resolved = HttpMethod.resolve(token);
+				if (resolved != null) {
+					result.add(resolved);
+				}
 			}
-			return result;
+			return EnumSet.copyOf(result);
 		}
 		else {
-			return Collections.emptySet();
+			return EnumSet.noneOf(HttpMethod.class);
 		}
 	}
 
@@ -879,23 +835,15 @@ public class HttpHeaders implements MultiValueMap<String, String>, Serializable 
 	}
 
 	/**
-	 * Set the {@code Content-Disposition} header when creating a
-	 * {@code "multipart/form-data"} request.
-	 * <p>Applications typically would not set this header directly but
-	 * rather prepare a {@code MultiValueMap<String, Object>}, containing an
-	 * Object or a {@link org.springframework.core.io.Resource} for each part,
-	 * and then pass that to the {@code RestTemplate} or {@code WebClient}.
-	 * @param name the control name
-	 * @param filename the filename (may be {@code null})
-	 * @see #getContentDisposition()
+	 * Return an {@code HttpHeaders} object that can only be read, not written to.
 	 */
-	public void setContentDispositionFormData(String name, @Nullable String filename) {
-		Assert.notNull(name, "Name must not be null");
-		ContentDisposition.Builder disposition = ContentDisposition.formData().name(name);
-		if (StringUtils.hasText(filename)) {
-			disposition.filename(filename);
+	public static HttpHeaders readOnlyHttpHeaders(HttpHeaders headers) {
+		Assert.notNull(headers, "HttpHeaders must not be null");
+		if (headers instanceof ReadOnlyHttpHeaders) {
+			return headers;
+		} else {
+			return new ReadOnlyHttpHeaders(headers);
 		}
-		setContentDisposition(disposition.build());
 	}
 
 	/**
@@ -913,16 +861,19 @@ public class HttpHeaders implements MultiValueMap<String, String>, Serializable 
 	}
 
 	/**
-	 * Return a parsed representation of the {@literal Content-Disposition} header.
-	 * @since 5.0
-	 * @see #setContentDisposition(ContentDisposition)
+	 * Return an {@code HttpHeaders} object that can be read and written to.
+	 *
+	 * @since 5.1.1
 	 */
-	public ContentDisposition getContentDisposition() {
-		String contentDisposition = getFirst(CONTENT_DISPOSITION);
-		if (StringUtils.hasText(contentDisposition)) {
-			return ContentDisposition.parse(contentDisposition);
+	public static HttpHeaders writableHttpHeaders(HttpHeaders headers) {
+		Assert.notNull(headers, "HttpHeaders must not be null");
+		if (headers == EMPTY) {
+			return new HttpHeaders();
+		} else if (headers instanceof ReadOnlyHttpHeaders) {
+			return new HttpHeaders(headers.headers);
+		} else {
+			return headers;
 		}
-		return ContentDisposition.empty();
 	}
 
 	/**
@@ -937,21 +888,24 @@ public class HttpHeaders implements MultiValueMap<String, String>, Serializable 
 	}
 
 	/**
-	 * Get the first {@link Locale} of the content languages, as specified by the
-	 * {@code Content-Language} header.
-	 * <p>Use {@link #getValuesAsList(String)} if you need to get multiple content
-	 * languages.
-	 * @return the first {@code Locale} of the content languages, or {@code null}
-	 * if unknown
-	 * @since 5.0
+	 * Set the {@code Content-Disposition} header when creating a
+	 * {@code "multipart/form-data"} request.
+	 * <p>Applications typically would not set this header directly but
+	 * rather prepare a {@code MultiValueMap<String, Object>}, containing an
+	 * Object or a {@link org.springframework.core.io.Resource} for each part,
+	 * and then pass that to the {@code RestTemplate} or {@code WebClient}.
+	 *
+	 * @param name     the control name
+	 * @param filename the filename (may be {@code null})
+	 * @see #getContentDisposition()
 	 */
-	@Nullable
-	public Locale getContentLanguage() {
-		return getValuesAsList(CONTENT_LANGUAGE)
-				.stream()
-				.findFirst()
-				.map(Locale::forLanguageTag)
-				.orElse(null);
+	public void setContentDispositionFormData(String name, @Nullable String filename) {
+		Assert.notNull(name, "Name must not be null");
+		ContentDisposition.Builder disposition = ContentDisposition.builder("form-data").name(name);
+		if (filename != null) {
+			disposition.filename(filename);
+		}
+		setContentDisposition(disposition.build());
 	}
 
 	/**
@@ -990,8 +944,7 @@ public class HttpHeaders implements MultiValueMap<String, String>, Serializable 
 	/**
 	 * Return the {@linkplain MediaType media type} of the body, as specified
 	 * by the {@code Content-Type} header.
-	 * <p>Returns {@code null} when the {@code Content-Type} header is not set.
-	 * @throws InvalidMediaTypeException if the media type value cannot be parsed
+	 * <p>Returns {@code null} when the content-type is unknown.
 	 */
 	@Nullable
 	public MediaType getContentType() {
@@ -1173,7 +1126,6 @@ public class HttpHeaders implements MultiValueMap<String, String>, Serializable 
 
 	/**
 	 * Return the value of the {@code If-Match} header.
-	 * @throws IllegalArgumentException if parsing fails
 	 * @since 4.3
 	 */
 	public List<String> getIfMatch() {
@@ -1233,7 +1185,6 @@ public class HttpHeaders implements MultiValueMap<String, String>, Serializable 
 
 	/**
 	 * Return the value of the {@code If-None-Match} header.
-	 * @throws IllegalArgumentException if parsing fails
 	 */
 	public List<String> getIfNoneMatch() {
 		return getETagValuesAsList(IF_NONE_MATCH);
@@ -1537,11 +1488,8 @@ public class HttpHeaders implements MultiValueMap<String, String>, Serializable 
 	}
 
 	/**
-	 * Return all values of a given header name, even if this header is set
-	 * multiple times.
-	 * <p>This method supports double-quoted values, as described in
-	 * <a href="https://www.rfc-editor.org/rfc/rfc9110.html#section-5.5-8">RFC
-	 * 9110, section 5.5</a>.
+	 * Return all values of a given header name,
+	 * even if this header is set multiple times.
 	 * @param headerName the header name
 	 * @return all associated values
 	 * @since 4.3
@@ -1552,7 +1500,7 @@ public class HttpHeaders implements MultiValueMap<String, String>, Serializable 
 			List<String> result = new ArrayList<>();
 			for (String value : values) {
 				if (value != null) {
-					result.addAll(tokenizeQuoted(value));
+					Collections.addAll(result, StringUtils.tokenizeToStringArray(value, ","));
 				}
 			}
 			return result;
@@ -1560,74 +1508,10 @@ public class HttpHeaders implements MultiValueMap<String, String>, Serializable 
 		return Collections.emptyList();
 	}
 
-	private static List<String> tokenizeQuoted(String str) {
-		List<String> tokens = new ArrayList<>();
-		boolean quoted = false;
-		boolean trim = true;
-		StringBuilder builder = new StringBuilder(str.length());
-		for (int i = 0; i < str.length(); ++i) {
-			char ch = str.charAt(i);
-			if (ch == '"') {
-				if (builder.isEmpty()) {
-					quoted = true;
-				}
-				else if (quoted) {
-					quoted = false;
-					trim = false;
-				}
-				else {
-					builder.append(ch);
-				}
-			}
-			else if (ch == '\\' && quoted && i < str.length() - 1) {
-				builder.append(str.charAt(++i));
-			}
-			else if (ch == ',' && !quoted) {
-				addToken(builder, tokens, trim);
-				builder.setLength(0);
-				trim = false;
-			}
-			else if (quoted || (!builder.isEmpty() && trim) || !Character.isWhitespace(ch)) {
-				builder.append(ch);
-			}
-		}
-		if (!builder.isEmpty()) {
-			addToken(builder, tokens, trim);
-		}
-		return tokens;
-	}
-
-	private static void addToken(StringBuilder builder, List<String> tokens, boolean trim) {
-		String token = builder.toString();
-		if (trim) {
-			token = token.trim();
-		}
-		if (!token.isEmpty()) {
-			tokens.add(token);
-		}
-	}
-
-	/**
-	 * Remove the well-known {@code "Content-*"} HTTP headers.
-	 * <p>Such headers should be cleared from the response if the intended
-	 * body can't be written due to errors.
-	 * @since 5.2.3
-	 */
-	public void clearContentHeaders() {
-		this.headers.remove(HttpHeaders.CONTENT_DISPOSITION);
-		this.headers.remove(HttpHeaders.CONTENT_ENCODING);
-		this.headers.remove(HttpHeaders.CONTENT_LANGUAGE);
-		this.headers.remove(HttpHeaders.CONTENT_LENGTH);
-		this.headers.remove(HttpHeaders.CONTENT_LOCATION);
-		this.headers.remove(HttpHeaders.CONTENT_RANGE);
-		this.headers.remove(HttpHeaders.CONTENT_TYPE);
-	}
-
 	/**
 	 * Retrieve a combined result from the field values of the ETag header.
 	 * @param headerName the header name
 	 * @return the combined result
-	 * @throws IllegalArgumentException if parsing fails
 	 * @since 4.3
 	 */
 	protected List<String> getETagValuesAsList(String headerName) {
@@ -1657,7 +1541,7 @@ public class HttpHeaders implements MultiValueMap<String, String>, Serializable 
 	}
 
 	/**
-	 * Retrieve a combined result from the field values of multivalued headers.
+	 * Retrieve a combined result from the field values of multi-valued headers.
 	 * @param headerName the header name
 	 * @return the combined result
 	 * @since 4.3
@@ -1821,20 +1705,18 @@ public class HttpHeaders implements MultiValueMap<String, String>, Serializable 
 		return this.headers.entrySet();
 	}
 
-	@Override
-	public void forEach(BiConsumer<? super String, ? super List<String>> action) {
-		this.headers.forEach(action);
-	}
-
-	@Override
-	public List<String> putIfAbsent(String key, List<String> value) {
-		return this.headers.putIfAbsent(key, value);
-	}
-
-
-	@Override
-	public boolean equals(@Nullable Object other) {
-		return (this == other || (other instanceof HttpHeaders that && unwrap(this).equals(unwrap(that))));
+	/**
+	 * Return a parsed representation of the {@literal Content-Disposition} header.
+	 *
+	 * @see #setContentDisposition(ContentDisposition)
+	 * @since 5.0
+	 */
+	public ContentDisposition getContentDisposition() {
+		String contentDisposition = getFirst(CONTENT_DISPOSITION);
+		if (contentDisposition != null) {
+			return ContentDisposition.parse(contentDisposition);
+		}
+		return ContentDisposition.empty();
 	}
 
 	@Override
@@ -1847,44 +1729,34 @@ public class HttpHeaders implements MultiValueMap<String, String>, Serializable 
 		return formatHeaders(this.headers);
 	}
 
-
 	/**
-	 * Apply a read-only {@code HttpHeaders} wrapper around the given headers, if necessary.
-	 * <p>Also caches the parsed representations of the "Accept" and "Content-Type" headers.
-	 * @param headers the headers to expose
-	 * @return a read-only variant of the headers, or the original headers as-is
-	 * (in case it happens to be a read-only {@code HttpHeaders} instance already)
-	 * @since 5.3
+	 * Return the first {@link Locale} of the content languages,
+	 * as specified by the {@literal Content-Language} header.
+	 * <p>Returns {@code null} when the content language is unknown.
+	 * <p>Use {@code getValuesAsList(CONTENT_LANGUAGE)} if you need
+	 * to get multiple content languages.</p>
+	 *
+	 * @since 5.0
 	 */
-	public static HttpHeaders readOnlyHttpHeaders(MultiValueMap<String, String> headers) {
-		return (headers instanceof HttpHeaders httpHeaders ? readOnlyHttpHeaders(httpHeaders) :
-				new ReadOnlyHttpHeaders(headers));
+	@Nullable
+	public Locale getContentLanguage() {
+		return getValuesAsList(CONTENT_LANGUAGE)
+				.stream()
+				.findFirst()
+				.map(Locale::forLanguageTag)
+				.orElse(null);
 	}
 
-	/**
-	 * Apply a read-only {@code HttpHeaders} wrapper around the given headers, if necessary.
-	 * <p>Also caches the parsed representations of the "Accept" and "Content-Type" headers.
-	 * @param headers the headers to expose
-	 * @return a read-only variant of the headers, or the original headers as-is
-	 */
-	public static HttpHeaders readOnlyHttpHeaders(HttpHeaders headers) {
-		Assert.notNull(headers, "HttpHeaders must not be null");
-		return (headers instanceof ReadOnlyHttpHeaders ? headers : new ReadOnlyHttpHeaders(headers.headers));
-	}
-
-	/**
-	 * Remove any read-only wrapper that may have been previously applied around
-	 * the given headers via {@link #readOnlyHttpHeaders(HttpHeaders)}.
-	 * @param headers the headers to expose
-	 * @return a writable variant of the headers, or the original headers as-is
-	 * @since 5.1.1
-	 */
-	public static HttpHeaders writableHttpHeaders(HttpHeaders headers) {
-		Assert.notNull(headers, "HttpHeaders must not be null");
-		if (headers == EMPTY) {
-			return new HttpHeaders();
+	@Override
+	public boolean equals(@Nullable Object other) {
+		if (this == other) {
+			return true;
 		}
-		return (headers instanceof ReadOnlyHttpHeaders ? new HttpHeaders(headers.headers) : headers);
+		if (!(other instanceof HttpHeaders)) {
+			return false;
+		}
+		HttpHeaders otherHeaders = (HttpHeaders) other;
+		return this.headers.equals(otherHeaders.headers);
 	}
 
 	/**
@@ -1939,14 +1811,6 @@ public class HttpHeaders implements MultiValueMap<String, String>, Serializable 
 		String credentialsString = username + ":" + password;
 		byte[] encodedBytes = Base64.getEncoder().encode(credentialsString.getBytes(charset));
 		return new String(encodedBytes, charset);
-	}
-
-
-	private static MultiValueMap<String, String> unwrap(HttpHeaders headers) {
-		while (headers.headers instanceof HttpHeaders httpHeaders) {
-			headers = httpHeaders;
-		}
-		return headers.headers;
 	}
 
 	// Package-private: used in ResponseCookie
