@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2023 the original author or authors.
+ * Copyright 2002-2019 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,12 +16,8 @@
 
 package org.springframework.web.cors.reactive;
 
-import java.util.ArrayList;
-import java.util.List;
-
 import org.apache.commons.logging.Log;
 import org.apache.commons.logging.LogFactory;
-
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpMethod;
 import org.springframework.http.HttpStatus;
@@ -32,13 +28,17 @@ import org.springframework.util.CollectionUtils;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.server.ServerWebExchange;
 
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.List;
+
 /**
  * The default implementation of {@link CorsProcessor},
  * as defined by the <a href="https://www.w3.org/TR/cors/">CORS W3C recommendation</a>.
  *
- * <p>Note that when the supplied {@link CorsConfiguration} is {@code null}, this
+ * <p>Note that when input {@link CorsConfiguration} is {@code null}, this
  * implementation does not reject simple or actual requests outright but simply
- * avoids adding CORS headers to the response. CORS processing is also skipped
+ * avoid adding CORS headers to the response. CORS processing is also skipped
  * if the response already contains CORS headers.
  *
  * @author Sebastien Deleuze
@@ -49,45 +49,22 @@ public class DefaultCorsProcessor implements CorsProcessor {
 
 	private static final Log logger = LogFactory.getLog(DefaultCorsProcessor.class);
 
-	private static final List<String> VARY_HEADERS = List.of(
+	private static final List<String> VARY_HEADERS = Arrays.asList(
 			HttpHeaders.ORIGIN, HttpHeaders.ACCESS_CONTROL_REQUEST_METHOD, HttpHeaders.ACCESS_CONTROL_REQUEST_HEADERS);
-
-	/**
-	 * The {@code Access-Control-Request-Private-Network} request header field name.
-	 * @see <a href="https://wicg.github.io/private-network-access/">Private Network Access specification</a>
-	 */
-	static final String ACCESS_CONTROL_REQUEST_PRIVATE_NETWORK = "Access-Control-Request-Private-Network";
-
-	/**
-	 * The {@code Access-Control-Allow-Private-Network} response header field name.
-	 * @see <a href="https://wicg.github.io/private-network-access/">Private Network Access specification</a>
-	 */
-	static final String ACCESS_CONTROL_ALLOW_PRIVATE_NETWORK = "Access-Control-Allow-Private-Network";
 
 
 	@Override
 	public boolean process(@Nullable CorsConfiguration config, ServerWebExchange exchange) {
+
 		ServerHttpRequest request = exchange.getRequest();
 		ServerHttpResponse response = exchange.getResponse();
-		HttpHeaders responseHeaders = response.getHeaders();
-
-		List<String> varyHeaders = responseHeaders.get(HttpHeaders.VARY);
-		if (varyHeaders == null) {
-			responseHeaders.addAll(HttpHeaders.VARY, VARY_HEADERS);
-		}
-		else {
-			for (String header : VARY_HEADERS) {
-				if (!varyHeaders.contains(header)) {
-					responseHeaders.add(HttpHeaders.VARY, header);
-				}
-			}
-		}
+		response.getHeaders().addAll(HttpHeaders.VARY, VARY_HEADERS);
 
 		if (!CorsUtils.isCorsRequest(request)) {
 			return true;
 		}
 
-		if (responseHeaders.getFirst(HttpHeaders.ACCESS_CONTROL_ALLOW_ORIGIN) != null) {
+		if (response.getHeaders().getFirst(HttpHeaders.ACCESS_CONTROL_ALLOW_ORIGIN) != null) {
 			logger.trace("Skip: response already contains \"Access-Control-Allow-Origin\"");
 			return true;
 		}
@@ -165,11 +142,6 @@ public class DefaultCorsProcessor implements CorsProcessor {
 			responseHeaders.setAccessControlAllowCredentials(true);
 		}
 
-		if (Boolean.TRUE.equals(config.getAllowPrivateNetwork()) &&
-				Boolean.parseBoolean(request.getHeaders().getFirst(ACCESS_CONTROL_REQUEST_PRIVATE_NETWORK))) {
-			responseHeaders.set(ACCESS_CONTROL_ALLOW_PRIVATE_NETWORK, Boolean.toString(true));
-		}
-
 		if (preFlightRequest && config.getMaxAge() != null) {
 			responseHeaders.setAccessControlMaxAge(config.getMaxAge());
 		}
@@ -190,7 +162,7 @@ public class DefaultCorsProcessor implements CorsProcessor {
 	/**
 	 * Check the HTTP method and determine the methods for the response of a
 	 * pre-flight request. The default implementation simply delegates to
-	 * {@link CorsConfiguration#checkHttpMethod(HttpMethod)}.
+	 * {@link CorsConfiguration#checkOrigin(String)}.
 	 */
 	@Nullable
 	protected List<HttpMethod> checkMethods(CorsConfiguration config, @Nullable HttpMethod requestMethod) {
@@ -205,9 +177,10 @@ public class DefaultCorsProcessor implements CorsProcessor {
 	/**
 	 * Check the headers and determine the headers for the response of a
 	 * pre-flight request. The default implementation simply delegates to
-	 * {@link CorsConfiguration#checkHeaders(List)}.
+	 * {@link CorsConfiguration#checkOrigin(String)}.
 	 */
 	@Nullable
+
 	protected List<String> checkHeaders(CorsConfiguration config, List<String> requestHeaders) {
 		return config.checkHeaders(requestHeaders);
 	}
