@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2023 the original author or authors.
+ * Copyright 2002-2018 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,15 +16,7 @@
 
 package org.springframework.web.reactive.function;
 
-import java.util.List;
-import java.util.Optional;
-import java.util.function.Function;
-import java.util.function.Supplier;
-
 import org.reactivestreams.Publisher;
-import reactor.core.publisher.Flux;
-import reactor.core.publisher.Mono;
-
 import org.springframework.core.ParameterizedTypeReference;
 import org.springframework.core.ResolvableType;
 import org.springframework.core.io.buffer.DataBuffer;
@@ -36,6 +28,14 @@ import org.springframework.http.codec.HttpMessageReader;
 import org.springframework.http.codec.multipart.Part;
 import org.springframework.http.server.reactive.ServerHttpRequest;
 import org.springframework.util.MultiValueMap;
+import reactor.core.publisher.Flux;
+import reactor.core.publisher.Mono;
+
+import java.util.List;
+import java.util.Optional;
+import java.util.function.Function;
+import java.util.function.Supplier;
+import java.util.stream.Collectors;
 
 /**
  * Static factory methods for {@link BodyExtractor} implementations.
@@ -136,9 +136,6 @@ public abstract class BodyExtractors {
 
 	/**
 	 * Extractor to read multipart data into a {@code MultiValueMap<String, Part>}.
-	 * <p><strong>Note:</strong> that resources used for part handling,
-	 * like storage for the uploaded files, is not deleted automatically, but
-	 * should be done via {@link Part#delete()}.
 	 * @return {@code BodyExtractor} for multipart data
 	 */
 	// Parameterized for server-side use
@@ -153,9 +150,6 @@ public abstract class BodyExtractors {
 
 	/**
 	 * Extractor to read multipart data into {@code Flux<Part>}.
-	 * <p><strong>Note:</strong> that resources used for part handling,
-	 * like storage for the uploaded files, is not deleted automatically, but
-	 * should be done via {@link Part#delete()}.
 	 * @return {@code BodyExtractor} for multipart request parts
 	 */
 	// Parameterized for server-side use
@@ -194,16 +188,18 @@ public abstract class BodyExtractors {
 		MediaType contentType = Optional.ofNullable(message.getHeaders().getContentType())
 				.orElse(MediaType.APPLICATION_OCTET_STREAM);
 
-		for (HttpMessageReader<?> messageReader : context.messageReaders()) {
-			if (messageReader.canRead(elementType, contentType)) {
-				return readerFunction.apply(cast(messageReader));
-			}
-		}
-		List<MediaType> mediaTypes = context.messageReaders().stream()
-				.flatMap(reader -> reader.getReadableMediaTypes(elementType).stream())
-				.toList();
-		return errorFunction.apply(
-				new UnsupportedMediaTypeException(contentType, mediaTypes, elementType));
+		return context.messageReaders().stream()
+				.filter(reader -> reader.canRead(elementType, contentType))
+				.findFirst()
+				.map(BodyExtractors::<T>cast)
+				.map(readerFunction)
+				.orElseGet(() -> {
+					List<MediaType> mediaTypes = context.messageReaders().stream()
+							.flatMap(reader -> reader.getReadableMediaTypes().stream())
+							.collect(Collectors.toList());
+					return errorFunction.apply(
+							new UnsupportedMediaTypeException(contentType, mediaTypes, elementType));
+				});
 	}
 
 	private static <T> Mono<T> readToMono(ReactiveHttpInputMessage message, BodyExtractor.Context context,
@@ -227,7 +223,7 @@ public abstract class BodyExtractors {
 
 		Flux<T> result;
 		if (message.getHeaders().getContentType() == null) {
-			// Maybe it's okay there is no content type, if there is no content.
+			// Maybe it's okay there is no content type, if there is no content..
 			result = message.getBody().map(buffer -> {
 				DataBufferUtils.release(buffer);
 				throw ex;
@@ -243,13 +239,12 @@ public abstract class BodyExtractors {
 	private static <T> HttpMessageReader<T> findReader(
 			ResolvableType elementType, MediaType mediaType, BodyExtractor.Context context) {
 
-		for (HttpMessageReader<?> messageReader : context.messageReaders()) {
-			if (messageReader.canRead(elementType, mediaType)) {
-				return cast(messageReader);
-			}
-		}
-		throw new IllegalStateException(
-						"No HttpMessageReader for \"" + mediaType + "\" and \"" + elementType + "\"");
+		return context.messageReaders().stream()
+				.filter(messageReader -> messageReader.canRead(elementType, mediaType))
+				.findFirst()
+				.map(BodyExtractors::<T>cast)
+				.orElseThrow(() -> new IllegalStateException(
+						"No HttpMessageReader for \"" + mediaType + "\" and \"" + elementType + "\""));
 	}
 
 	@SuppressWarnings("unchecked")
@@ -268,11 +263,18 @@ public abstract class BodyExtractors {
 				() -> consumeAndCancel(message).then(Mono.empty()) : Mono::empty;
 	}
 
-	private static Flux<DataBuffer> consumeAndCancel(ReactiveHttpInputMessage message) {
-		return message.getBody().takeWhile(buffer -> {
-			DataBufferUtils.release(buffer);
-			return false;
-		});
+	private static Mono<Void> consumeAndCancel(ReactiveHttpInputMessage message) {
+		return message.getBody()
+				.map(buffer -> {
+					DataBufferUtils.release(buffer);
+					throw new ReadCancellationException();
+				})
+				.onErrorResume(ReadCancellationException.class, ex -> Mono.empty())
+				.then();
+	}
+
+	@SuppressWarnings("serial")
+	private static class ReadCancellationException extends RuntimeException {
 	}
 
 }
