@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2023 the original author or authors.
+ * Copyright 2002-2019 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,17 +16,10 @@
 
 package org.springframework.web.reactive.result.condition;
 
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.LinkedHashSet;
-import java.util.List;
-import java.util.Set;
-
 import org.springframework.http.MediaType;
 import org.springframework.lang.Nullable;
 import org.springframework.util.CollectionUtils;
-import org.springframework.util.MimeType;
-import org.springframework.util.ObjectUtils;
+import org.springframework.util.StringUtils;
 import org.springframework.web.accept.ContentNegotiationManager;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.cors.reactive.CorsUtils;
@@ -35,6 +28,8 @@ import org.springframework.web.reactive.accept.RequestedContentTypeResolverBuild
 import org.springframework.web.server.NotAcceptableStatusException;
 import org.springframework.web.server.ServerWebExchange;
 import org.springframework.web.server.UnsupportedMediaTypeStatusException;
+
+import java.util.*;
 
 /**
  * A logical disjunction (' || ') request condition to match a request's 'Accept' header
@@ -57,7 +52,7 @@ public final class ProducesRequestCondition extends AbstractRequestCondition<Pro
 
 
 	private final List<ProduceMediaTypeExpression> mediaTypeAllList =
-			List.of(new ProduceMediaTypeExpression(MediaType.ALL_VALUE));
+			Collections.singletonList(new ProduceMediaTypeExpression(MediaType.ALL_VALUE));
 
 	private final List<ProduceMediaTypeExpression> expressions;
 
@@ -93,33 +88,9 @@ public final class ProducesRequestCondition extends AbstractRequestCondition<Pro
 	 * @param resolver used to determine requested content type
 	 */
 	public ProducesRequestCondition(String[] produces, String[] headers, RequestedContentTypeResolver resolver) {
-		this.expressions = parseExpressions(produces, headers);
-		if (this.expressions.size() > 1) {
-			Collections.sort(this.expressions);
-		}
+		this.expressions = new ArrayList<>(parseExpressions(produces, headers));
+		Collections.sort(this.expressions);
 		this.contentTypeResolver = resolver != null ? resolver : DEFAULT_CONTENT_TYPE_RESOLVER;
-	}
-
-	private List<ProduceMediaTypeExpression> parseExpressions(String[] produces, String[] headers) {
-		Set<ProduceMediaTypeExpression> result = null;
-		if (!ObjectUtils.isEmpty(headers)) {
-			for (String header : headers) {
-				HeadersRequestCondition.HeaderExpression expr = new HeadersRequestCondition.HeaderExpression(header);
-				if ("Accept".equalsIgnoreCase(expr.name)) {
-					for (MediaType mediaType : MediaType.parseMediaTypes(expr.value)) {
-						result = (result != null ? result : new LinkedHashSet<>());
-						result.add(new ProduceMediaTypeExpression(mediaType, expr.isNegated));
-					}
-				}
-			}
-		}
-		if (!ObjectUtils.isEmpty(produces)) {
-			for (String produce : produces) {
-				result = (result != null ? result : new LinkedHashSet<>());
-				result.add(new ProduceMediaTypeExpression(produce));
-			}
-		}
-		return (result != null ? new ArrayList<>(result) : Collections.emptyList());
 	}
 
 	/**
@@ -131,6 +102,26 @@ public final class ProducesRequestCondition extends AbstractRequestCondition<Pro
 		this.contentTypeResolver = other.contentTypeResolver;
 	}
 
+
+	private Set<ProduceMediaTypeExpression> parseExpressions(String[] produces, String[] headers) {
+		Set<ProduceMediaTypeExpression> result = new LinkedHashSet<>();
+		if (headers != null) {
+			for (String header : headers) {
+				HeadersRequestCondition.HeaderExpression expr = new HeadersRequestCondition.HeaderExpression(header);
+				if ("Accept".equalsIgnoreCase(expr.name)) {
+					for (MediaType mediaType : MediaType.parseMediaTypes(expr.value)) {
+						result.add(new ProduceMediaTypeExpression(mediaType, expr.isNegated));
+					}
+				}
+			}
+		}
+		if (produces != null) {
+			for (String produce : produces) {
+				result.add(new ProduceMediaTypeExpression(produce));
+			}
+		}
+		return result;
+	}
 
 	/**
 	 * Return the contained "produces" expressions.
@@ -232,14 +223,13 @@ public final class ProducesRequestCondition extends AbstractRequestCondition<Pro
 	 * Compares this and another "produces" condition as follows:
 	 * <ol>
 	 * <li>Sort 'Accept' header media types by quality value via
-	 * {@link org.springframework.util.MimeTypeUtils#sortBySpecificity(List)}
-	 * and iterate the list.
+	 * {@link MediaType#sortByQualityValue(List)} and iterate the list.
 	 * <li>Get the first index of matching media types in each "produces"
 	 * condition first matching with {@link MediaType#equals(Object)} and
 	 * then with {@link MediaType#includes(MediaType)}.
 	 * <li>If a lower index is found, the condition at that index wins.
 	 * <li>If both indexes are equal, the media types at the index are
-	 * compared further with {@link MediaType#isMoreSpecific(MimeType)}.
+	 * compared further with {@link MediaType#SPECIFICITY_COMPARATOR}.
 	 * </ol>
 	 * <p>It is assumed that both instances have been obtained via
 	 * {@link #getMatchingCondition(ServerWebExchange)} and each instance
@@ -248,9 +238,6 @@ public final class ProducesRequestCondition extends AbstractRequestCondition<Pro
 	 */
 	@Override
 	public int compareTo(ProducesRequestCondition other, ServerWebExchange exchange) {
-		if (this.expressions.isEmpty() && other.expressions.isEmpty()) {
-			return 0;
-		}
 		try {
 			List<MediaType> acceptedMediaTypes = getAcceptedMediaTypes(exchange);
 			for (MediaType acceptedMediaType : acceptedMediaTypes) {
@@ -325,7 +312,7 @@ public final class ProducesRequestCondition extends AbstractRequestCondition<Pro
 	 * with a {@value MediaType#ALL_VALUE} expression.
 	 */
 	private List<ProduceMediaTypeExpression> getExpressionsToCompare() {
-		return (this.expressions.isEmpty() ? this.mediaTypeAllList : this.expressions);
+		return (this.expressions.isEmpty() ? this.mediaTypeAllList  : this.expressions);
 	}
 
 
@@ -362,6 +349,17 @@ public final class ProducesRequestCondition extends AbstractRequestCondition<Pro
 				}
 			}
 			return false;
+		}
+
+		private boolean matchParameters(MediaType acceptedMediaType) {
+			for (String name : getMediaType().getParameters().keySet()) {
+				String s1 = getMediaType().getParameter(name);
+				String s2 = acceptedMediaType.getParameter(name);
+				if (StringUtils.hasText(s1) && StringUtils.hasText(s2) && !s1.equalsIgnoreCase(s2)) {
+					return false;
+				}
+			}
+			return true;
 		}
 	}
 
