@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2023 the original author or authors.
+ * Copyright 2002-2019 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,41 +16,23 @@
 
 package org.springframework.web.reactive.result.method;
 
-import java.lang.reflect.Method;
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.Comparator;
-import java.util.LinkedHashSet;
-import java.util.List;
-import java.util.Map;
-import java.util.Set;
-import java.util.stream.Collectors;
-import java.util.stream.Stream;
-
-import reactor.core.publisher.Mono;
-
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpMethod;
 import org.springframework.http.InvalidMediaTypeException;
 import org.springframework.http.MediaType;
 import org.springframework.http.server.PathContainer;
 import org.springframework.http.server.reactive.ServerHttpRequest;
-import org.springframework.http.server.reactive.observation.ServerRequestObservationContext;
 import org.springframework.util.Assert;
-import org.springframework.util.CollectionUtils;
 import org.springframework.util.MultiValueMap;
-import org.springframework.web.bind.annotation.RequestMethod;
 import org.springframework.web.method.HandlerMethod;
 import org.springframework.web.reactive.HandlerMapping;
 import org.springframework.web.reactive.result.condition.NameValueExpression;
-import org.springframework.web.reactive.result.condition.ProducesRequestCondition;
-import org.springframework.web.server.MethodNotAllowedException;
-import org.springframework.web.server.NotAcceptableStatusException;
-import org.springframework.web.server.ServerWebExchange;
-import org.springframework.web.server.ServerWebInputException;
-import org.springframework.web.server.UnsatisfiedRequestParameterException;
-import org.springframework.web.server.UnsupportedMediaTypeStatusException;
+import org.springframework.web.server.*;
 import org.springframework.web.util.pattern.PathPattern;
+
+import java.lang.reflect.Method;
+import java.util.*;
+import java.util.stream.Collectors;
 
 /**
  * Abstract base class for classes for which {@link RequestMappingInfo} defines
@@ -75,11 +57,6 @@ public abstract class RequestMappingInfoHandlerMapping extends AbstractHandlerMe
 	}
 
 
-	@Override
-	protected Set<String> getDirectPaths(RequestMappingInfo info) {
-		return info.getDirectPaths();
-	}
-
 	/**
 	 * Check if the given RequestMappingInfo matches the current request and
 	 * return a (potentially new) instance with conditions that match the
@@ -99,13 +76,6 @@ public abstract class RequestMappingInfoHandlerMapping extends AbstractHandlerMe
 		return (info1, info2) -> info1.compareTo(info2, exchange);
 	}
 
-	@Override
-	public Mono<HandlerMethod> getHandlerInternal(ServerWebExchange exchange) {
-		exchange.getAttributes().remove(HandlerMapping.PRODUCIBLE_MEDIA_TYPES_ATTRIBUTE);
-		return super.getHandlerInternal(exchange)
-				.doOnTerminate(() -> ProducesRequestCondition.clearMediaTypesAttribute(exchange));
-	}
-
 	/**
 	 * Expose URI template variables, matrix variables, and producible media types in the request.
 	 * @see HandlerMapping#URI_TEMPLATE_VARIABLES_ATTRIBUTE
@@ -113,7 +83,6 @@ public abstract class RequestMappingInfoHandlerMapping extends AbstractHandlerMe
 	 * @see HandlerMapping#PRODUCIBLE_MEDIA_TYPES_ATTRIBUTE
 	 */
 	@Override
-	@SuppressWarnings("removal")
 	protected void handleMatch(RequestMappingInfo info, HandlerMethod handlerMethod,
 			ServerWebExchange exchange) {
 
@@ -142,20 +111,12 @@ public abstract class RequestMappingInfoHandlerMapping extends AbstractHandlerMe
 
 		exchange.getAttributes().put(BEST_MATCHING_HANDLER_ATTRIBUTE, handlerMethod);
 		exchange.getAttributes().put(BEST_MATCHING_PATTERN_ATTRIBUTE, bestPattern);
-		org.springframework.web.filter.reactive.ServerHttpObservationFilter
-				.findObservationContext(exchange)
-				.ifPresent(context -> context.setPathPattern(bestPattern.toString()));
-		ServerRequestObservationContext.findCurrent(exchange.getAttributes())
-				.ifPresent(context -> context.setPathPattern(bestPattern.toString()));
 		exchange.getAttributes().put(URI_TEMPLATE_VARIABLES_ATTRIBUTE, uriVariables);
 		exchange.getAttributes().put(MATRIX_VARIABLES_ATTRIBUTE, matrixVariables);
 
-		ProducesRequestCondition producesCondition = info.getProducesCondition();
-		if (!producesCondition.isEmpty()) {
-			Set<MediaType> mediaTypes = producesCondition.getProducibleMediaTypes();
-			if (!mediaTypes.isEmpty()) {
-				exchange.getAttributes().put(PRODUCIBLE_MEDIA_TYPES_ATTRIBUTE, mediaTypes);
-			}
+		if (!info.getProducesCondition().getProducibleMediaTypes().isEmpty()) {
+			Set<MediaType> mediaTypes = info.getProducesCondition().getProducibleMediaTypes();
+			exchange.getAttributes().put(PRODUCIBLE_MEDIA_TYPES_ATTRIBUTE, mediaTypes);
 		}
 	}
 
@@ -174,11 +135,8 @@ public abstract class RequestMappingInfoHandlerMapping extends AbstractHandlerMe
 	protected HandlerMethod handleNoMatch(Set<RequestMappingInfo> infos,
 			ServerWebExchange exchange) throws Exception {
 
-		if (CollectionUtils.isEmpty(infos)) {
-			return null;
-		}
-
 		PartialMatchHelper helper = new PartialMatchHelper(infos, exchange);
+
 		if (helper.isEmpty()) {
 			return null;
 		}
@@ -186,11 +144,10 @@ public abstract class RequestMappingInfoHandlerMapping extends AbstractHandlerMe
 		ServerHttpRequest request = exchange.getRequest();
 
 		if (helper.hasMethodsMismatch()) {
-			HttpMethod httpMethod = request.getMethod();
+			String httpMethod = request.getMethodValue();
 			Set<HttpMethod> methods = helper.getAllowedMethods();
-			if (HttpMethod.OPTIONS.equals(httpMethod)) {
-				Set<MediaType> mediaTypes = helper.getConsumablePatchMediaTypes();
-				HttpOptionsHandler handler = new HttpOptionsHandler(methods, mediaTypes);
+			if (HttpMethod.OPTIONS.matches(httpMethod)) {
+				HttpOptionsHandler handler = new HttpOptionsHandler(methods);
 				return new HandlerMethod(handler, HTTP_OPTIONS_HANDLE_METHOD);
 			}
 			throw new MethodNotAllowedException(httpMethod, methods);
@@ -203,10 +160,9 @@ public abstract class RequestMappingInfoHandlerMapping extends AbstractHandlerMe
 				contentType = request.getHeaders().getContentType();
 			}
 			catch (InvalidMediaTypeException ex) {
-				throw new UnsupportedMediaTypeStatusException(ex.getMessage(), new ArrayList<>(mediaTypes));
+				throw new UnsupportedMediaTypeStatusException(ex.getMessage());
 			}
-			throw new UnsupportedMediaTypeStatusException(
-					contentType, new ArrayList<>(mediaTypes), exchange.getRequest().getMethod());
+			throw new UnsupportedMediaTypeStatusException(contentType, new ArrayList<>(mediaTypes));
 		}
 
 		if (helper.hasProducesMismatch()) {
@@ -215,9 +171,9 @@ public abstract class RequestMappingInfoHandlerMapping extends AbstractHandlerMe
 		}
 
 		if (helper.hasParamsMismatch()) {
-			throw new UnsatisfiedRequestParameterException(
-					helper.getParamConditions().stream().map(Object::toString).toList(),
-					request.getQueryParams());
+			throw new ServerWebInputException(
+					"Unsatisfied query parameter conditions: " + helper.getParamConditions() +
+							", actual parameters: " + request.getQueryParams());
 		}
 
 		return null;
@@ -227,21 +183,21 @@ public abstract class RequestMappingInfoHandlerMapping extends AbstractHandlerMe
 	/**
 	 * Aggregate all partial matches and expose methods checking across them.
 	 */
-	private static final class PartialMatchHelper {
+	private static class PartialMatchHelper {
 
 		private final List<PartialMatch> partialMatches = new ArrayList<>();
 
 
-		PartialMatchHelper(Set<RequestMappingInfo> infos, ServerWebExchange exchange) {
-			for (RequestMappingInfo info : infos) {
-				if (info.getPatternsCondition().getMatchingCondition(exchange) != null) {
-					this.partialMatches.add(new PartialMatch(info, exchange));
-				}
-			}
+		public PartialMatchHelper(Set<RequestMappingInfo> infos, ServerWebExchange exchange) {
+			this.partialMatches.addAll(infos.stream().
+					filter(info -> info.getPatternsCondition().getMatchingCondition(exchange) != null).
+					map(info -> new PartialMatch(info, exchange)).
+					collect(Collectors.toList()));
 		}
 
+
 		/**
-		 * Whether there are any partial matches.
+		 * Whether there any partial matches.
 		 */
 		public boolean isEmpty() {
 			return this.partialMatches.isEmpty();
@@ -251,38 +207,42 @@ public abstract class RequestMappingInfoHandlerMapping extends AbstractHandlerMe
 		 * Any partial matches for "methods"?
 		 */
 		public boolean hasMethodsMismatch() {
-			return this.partialMatches.stream().noneMatch(PartialMatch::hasMethodsMatch);
+			return this.partialMatches.stream().
+					noneMatch(PartialMatch::hasMethodsMatch);
 		}
 
 		/**
 		 * Any partial matches for "methods" and "consumes"?
 		 */
 		public boolean hasConsumesMismatch() {
-			return this.partialMatches.stream().noneMatch(PartialMatch::hasConsumesMatch);
+			return this.partialMatches.stream().
+					noneMatch(PartialMatch::hasConsumesMatch);
 		}
 
 		/**
 		 * Any partial matches for "methods", "consumes", and "produces"?
 		 */
 		public boolean hasProducesMismatch() {
-			return this.partialMatches.stream().noneMatch(PartialMatch::hasProducesMatch);
+			return this.partialMatches.stream().
+					noneMatch(PartialMatch::hasProducesMatch);
 		}
 
 		/**
 		 * Any partial matches for "methods", "consumes", "produces", and "params"?
 		 */
 		public boolean hasParamsMismatch() {
-			return this.partialMatches.stream().noneMatch(PartialMatch::hasParamsMatch);
+			return this.partialMatches.stream().
+					noneMatch(PartialMatch::hasParamsMatch);
 		}
 
 		/**
 		 * Return declared HTTP methods.
 		 */
 		public Set<HttpMethod> getAllowedMethods() {
-			return this.partialMatches.stream()
-					.flatMap(m -> m.getInfo().getMethodsCondition().getMethods().stream())
-					.map(requestMethod -> HttpMethod.valueOf(requestMethod.name()))
-					.collect(Collectors.toSet());
+			return this.partialMatches.stream().
+					flatMap(m -> m.getInfo().getMethodsCondition().getMethods().stream()).
+					map(requestMethod -> HttpMethod.resolve(requestMethod.name())).
+					collect(Collectors.toSet());
 		}
 
 		/**
@@ -290,10 +250,9 @@ public abstract class RequestMappingInfoHandlerMapping extends AbstractHandlerMe
 		 * match the "methods" condition.
 		 */
 		public Set<MediaType> getConsumableMediaTypes() {
-			return this.partialMatches.stream()
-					.filter(PartialMatch::hasMethodsMatch)
-					.flatMap(m -> m.getInfo().getConsumesCondition().getConsumableMediaTypes().stream())
-					.collect(Collectors.toCollection(LinkedHashSet::new));
+			return this.partialMatches.stream().filter(PartialMatch::hasMethodsMatch).
+					flatMap(m -> m.getInfo().getConsumesCondition().getConsumableMediaTypes().stream()).
+					collect(Collectors.toCollection(LinkedHashSet::new));
 		}
 
 		/**
@@ -301,10 +260,9 @@ public abstract class RequestMappingInfoHandlerMapping extends AbstractHandlerMe
 		 * match the "methods" and "consumes" conditions.
 		 */
 		public Set<MediaType> getProducibleMediaTypes() {
-			return this.partialMatches.stream()
-					.filter(PartialMatch::hasConsumesMatch)
-					.flatMap(m -> m.getInfo().getProducesCondition().getProducibleMediaTypes().stream())
-					.collect(Collectors.toCollection(LinkedHashSet::new));
+			return this.partialMatches.stream().filter(PartialMatch::hasConsumesMatch).
+					flatMap(m -> m.getInfo().getProducesCondition().getProducibleMediaTypes().stream()).
+					collect(Collectors.toCollection(LinkedHashSet::new));
 		}
 
 		/**
@@ -312,27 +270,10 @@ public abstract class RequestMappingInfoHandlerMapping extends AbstractHandlerMe
 		 * match the "methods", "consumes", and "params" conditions.
 		 */
 		public List<Set<NameValueExpression<String>>> getParamConditions() {
-			return this.partialMatches.stream()
-					.filter(PartialMatch::hasProducesMatch)
-					.map(match -> match.getInfo().getParamsCondition().getExpressions())
-					.toList();
+			return this.partialMatches.stream().filter(PartialMatch::hasProducesMatch).
+					map(match -> match.getInfo().getParamsCondition().getExpressions()).
+					collect(Collectors.toList());
 		}
-
-		/**
-		 * Return declared "consumable" types but only among those that have
-		 * PATCH specified, or that have no methods at all.
-		 */
-		public Set<MediaType> getConsumablePatchMediaTypes() {
-			Set<MediaType> result = new LinkedHashSet<>();
-			for (PartialMatch match : this.partialMatches) {
-				Set<RequestMethod> methods = match.getInfo().getMethodsCondition().getMethods();
-				if (methods.isEmpty() || methods.contains(RequestMethod.PATCH)) {
-					result.addAll(match.getInfo().getConsumesCondition().getConsumableMediaTypes());
-				}
-			}
-			return result;
-		}
-
 
 
 		/**
@@ -400,15 +341,14 @@ public abstract class RequestMappingInfoHandlerMapping extends AbstractHandlerMe
 		private final HttpHeaders headers = new HttpHeaders();
 
 
-		public HttpOptionsHandler(Set<HttpMethod> declaredMethods, Set<MediaType> acceptPatch) {
+		public HttpOptionsHandler(Set<HttpMethod> declaredMethods) {
 			this.headers.setAllow(initAllowedHttpMethods(declaredMethods));
-			this.headers.setAcceptPatch(new ArrayList<>(acceptPatch));
 		}
 
 		private static Set<HttpMethod> initAllowedHttpMethods(Set<HttpMethod> declaredMethods) {
 			if (declaredMethods.isEmpty()) {
-				return Stream.of(HttpMethod.values())
-						.filter(method -> !HttpMethod.TRACE.equals(method))
+				return EnumSet.allOf(HttpMethod.class).stream()
+						.filter(method -> method != HttpMethod.TRACE)
 						.collect(Collectors.toSet());
 			}
 			else {
