@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2024 the original author or authors.
+ * Copyright 2002-2019 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,47 +16,44 @@
 
 package org.springframework.web.reactive.result.condition;
 
-import java.util.Arrays;
-import java.util.Iterator;
-
 import org.junit.jupiter.api.Test;
-
+import org.springframework.mock.web.test.server.MockServerWebExchange;
 import org.springframework.web.server.ServerWebExchange;
-import org.springframework.web.testfixture.server.MockServerWebExchange;
 import org.springframework.web.util.pattern.PathPattern;
 import org.springframework.web.util.pattern.PathPatternParser;
 
+import java.util.Arrays;
+import java.util.Iterator;
+import java.util.stream.Collectors;
+
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.springframework.web.testfixture.http.server.reactive.MockServerHttpRequest.get;
+import static org.springframework.mock.http.server.reactive.test.MockServerHttpRequest.get;
 
 /**
- * Tests for {@link PatternsRequestCondition}.
+ * Unit tests for {@link PatternsRequestCondition}.
  *
  * @author Rossen Stoyanchev
  */
-class PatternsRequestConditionTests {
+public class PatternsRequestConditionTests {
 
 	private final PathPatternParser parser = new PathPatternParser();
 
 	@Test
-	void prependNonEmptyPatternsOnly() {
+	public void prependNonEmptyPatternsOnly() {
 		PatternsRequestCondition c = createPatternsCondition("");
-		assertThat(c.getPatterns().iterator().next().getPatternString())
-				.as("Do not prepend empty patterns (SPR-8255)").isEmpty();
+		assertThat(c.getPatterns().iterator().next().getPatternString()).as("Do not prepend empty patterns (SPR-8255)").isEqualTo("");
 	}
 
 	@Test
-	void combineEmptySets() {
+	public void combineEmptySets() {
 		PatternsRequestCondition c1 = new PatternsRequestCondition();
 		PatternsRequestCondition c2 = new PatternsRequestCondition();
-		PatternsRequestCondition c3 = c1.combine(c2);
 
-		assertThat(c1.getPatterns()).isSameAs(c2.getPatterns()).containsExactly(this.parser.parse(""));
-		assertThat(c3.toString()).isEqualTo("[/ || ]");
+		assertThat(c1.combine(c2)).isEqualTo(createPatternsCondition());
 	}
 
 	@Test
-	void combineOnePatternWithEmptySet() {
+	public void combineOnePatternWithEmptySet() {
 		PatternsRequestCondition c1 = createPatternsCondition("/type1", "/type2");
 		PatternsRequestCondition c2 = new PatternsRequestCondition();
 
@@ -69,7 +66,7 @@ class PatternsRequestConditionTests {
 	}
 
 	@Test
-	void combineMultiplePatterns() {
+	public void combineMultiplePatterns() {
 		PatternsRequestCondition c1 = createPatternsCondition("/t1", "/t2");
 		PatternsRequestCondition c2 = createPatternsCondition("/m1", "/m2");
 
@@ -77,7 +74,7 @@ class PatternsRequestConditionTests {
 	}
 
 	@Test
-	void matchDirectPath() {
+	public void matchDirectPath() throws Exception {
 		PatternsRequestCondition condition = createPatternsCondition("/foo");
 		MockServerWebExchange exchange = MockServerWebExchange.from(get("/foo"));
 		PatternsRequestCondition match = condition.getMatchingCondition(exchange);
@@ -86,7 +83,7 @@ class PatternsRequestConditionTests {
 	}
 
 	@Test
-	void matchPattern() {
+	public void matchPattern() throws Exception {
 		PatternsRequestCondition condition = createPatternsCondition("/foo/*");
 		MockServerWebExchange exchange = MockServerWebExchange.from(get("/foo/bar"));
 		PatternsRequestCondition match = condition.getMatchingCondition(exchange);
@@ -95,7 +92,7 @@ class PatternsRequestConditionTests {
 	}
 
 	@Test
-	void matchSortPatterns() {
+	public void matchSortPatterns() throws Exception {
 		PatternsRequestCondition condition = createPatternsCondition("/*/*", "/foo/bar", "/foo/*");
 		MockServerWebExchange exchange = MockServerWebExchange.from(get("/foo/bar"));
 		PatternsRequestCondition match = condition.getMatchingCondition(exchange);
@@ -105,28 +102,20 @@ class PatternsRequestConditionTests {
 	}
 
 	@Test
-	@SuppressWarnings("deprecation")
-	public void matchTrailingSlash() {
+	public void matchTrailingSlash() throws Exception {
 		MockServerWebExchange exchange = MockServerWebExchange.from(get("/foo/"));
 
-		PathPatternParser patternParser = new PathPatternParser();
-		patternParser.setMatchOptionalTrailingSeparator(true);
-
-		PatternsRequestCondition condition = new PatternsRequestCondition(patternParser.parse("/foo"));
+		PatternsRequestCondition condition = createPatternsCondition("/foo");
 		PatternsRequestCondition match = condition.getMatchingCondition(exchange);
 
 		assertThat(match).isNotNull();
-		assertThat(match.getPatterns().iterator().next().getPatternString())
-				.as("Should match by default")
-				.isEqualTo("/foo");
+		assertThat(match.getPatterns().iterator().next().getPatternString()).as("Should match by default").isEqualTo("/foo");
 
-		condition = new PatternsRequestCondition(patternParser.parse("/foo"));
+		condition = createPatternsCondition("/foo");
 		match = condition.getMatchingCondition(exchange);
 
 		assertThat(match).isNotNull();
-		assertThat(match.getPatterns().iterator().next().getPatternString())
-				.as("Trailing slash should be insensitive to useSuffixPatternMatch settings (SPR-6164, SPR-5636)")
-				.isEqualTo("/foo");
+		assertThat(match.getPatterns().iterator().next().getPatternString()).as("Trailing slash should be insensitive to useSuffixPatternMatch settings (SPR-6164, SPR-5636)").isEqualTo("/foo");
 
 		PathPatternParser parser = new PathPatternParser();
 		parser.setMatchOptionalTrailingSeparator(false);
@@ -137,7 +126,7 @@ class PatternsRequestConditionTests {
 	}
 
 	@Test
-	void matchPatternContainsExtension() {
+	public void matchPatternContainsExtension() throws Exception {
 		PatternsRequestCondition condition = createPatternsCondition("/foo.jpg");
 		MockServerWebExchange exchange = MockServerWebExchange.from(get("/foo.html"));
 		PatternsRequestCondition match = condition.getMatchingCondition(exchange);
@@ -148,16 +137,18 @@ class PatternsRequestConditionTests {
 	@Test // gh-22543
 	public void matchWithEmptyPatterns() {
 		PatternsRequestCondition condition = new PatternsRequestCondition();
+		assertThat(condition).isEqualTo(new PatternsRequestCondition(this.parser.parse("")));
 		assertThat(condition.getMatchingCondition(MockServerWebExchange.from(get("")))).isNotNull();
 		assertThat(condition.getMatchingCondition(MockServerWebExchange.from(get("/anything")))).isNull();
 
 		condition = condition.combine(new PatternsRequestCondition());
+		assertThat(condition).isEqualTo(new PatternsRequestCondition(this.parser.parse("")));
 		assertThat(condition.getMatchingCondition(MockServerWebExchange.from(get("")))).isNotNull();
 		assertThat(condition.getMatchingCondition(MockServerWebExchange.from(get("/anything")))).isNull();
 	}
 
 	@Test
-	void compareToConsistentWithEquals() {
+	public void compareToConsistentWithEquals() throws Exception {
 		PatternsRequestCondition c1 = createPatternsCondition("/foo*");
 		PatternsRequestCondition c2 = createPatternsCondition("/foo*");
 
@@ -165,16 +156,16 @@ class PatternsRequestConditionTests {
 	}
 
 	@Test
-	void equallyMatchingPatternsAreBothPresent() {
+	public void equallyMatchingPatternsAreBothPresent() throws Exception {
 		PatternsRequestCondition c = createPatternsCondition("/a", "/b");
-		assertThat(c.getPatterns()).hasSize(2);
+		assertThat(c.getPatterns().size()).isEqualTo(2);
 		Iterator<PathPattern> itr = c.getPatterns().iterator();
 		assertThat(itr.next().getPatternString()).isEqualTo("/a");
 		assertThat(itr.next().getPatternString()).isEqualTo("/b");
 	}
 
 	@Test
-	void comparePatternSpecificity() {
+	public void comparePatternSpecificity() throws Exception {
 		ServerWebExchange exchange = MockServerWebExchange.from(get("/foo"));
 
 		PatternsRequestCondition c1 = createPatternsCondition("/fo*");
@@ -185,13 +176,11 @@ class PatternsRequestConditionTests {
 		c1 = createPatternsCondition("/fo*");
 		c2 = createPatternsCondition("/*oo");
 
-		assertThat(c1.compareTo(c2, exchange))
-				.as("Patterns are equally specific even if not the same")
-				.isEqualTo(0);
+		assertThat(c1.compareTo(c2, exchange)).as("Patterns are equally specific even if not the same").isEqualTo(0);
 	}
 
 	@Test
-	void compareNumberOfMatchingPatterns() {
+	public void compareNumberOfMatchingPatterns() throws Exception {
 		ServerWebExchange exchange = MockServerWebExchange.from(get("/foo.html"));
 
 		PatternsRequestCondition c1 = createPatternsCondition("/foo.*", "/foo.jpeg");
@@ -207,8 +196,8 @@ class PatternsRequestConditionTests {
 	private PatternsRequestCondition createPatternsCondition(String... patterns) {
 		return new PatternsRequestCondition(Arrays
 				.stream(patterns)
-				.map(this.parser::parse)
-				.toList());
+				.map(rawPattern -> this.parser.parse(rawPattern))
+				.collect(Collectors.toList()));
 	}
 
 }
