@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2023 the original author or authors.
+ * Copyright 2002-2019 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,6 +16,28 @@
 
 package org.springframework.web.servlet.function;
 
+import org.reactivestreams.Publisher;
+import org.reactivestreams.Subscriber;
+import org.reactivestreams.Subscription;
+import org.springframework.core.ParameterizedTypeReference;
+import org.springframework.http.*;
+import org.springframework.http.converter.GenericHttpMessageConverter;
+import org.springframework.http.converter.HttpMessageConverter;
+import org.springframework.http.server.ServletServerHttpResponse;
+import org.springframework.lang.Nullable;
+import org.springframework.util.Assert;
+import org.springframework.util.ClassUtils;
+import org.springframework.util.LinkedMultiValueMap;
+import org.springframework.util.MultiValueMap;
+import org.springframework.web.HttpMediaTypeNotAcceptableException;
+import org.springframework.web.servlet.ModelAndView;
+
+import javax.servlet.AsyncContext;
+import javax.servlet.ServletException;
+import javax.servlet.http.Cookie;
+import javax.servlet.http.HttpServletRequest;
+import javax.servlet.http.HttpServletResponse;
+import javax.servlet.http.HttpServletResponseWrapper;
 import java.io.IOException;
 import java.lang.reflect.Type;
 import java.net.URI;
@@ -25,62 +47,28 @@ import java.util.Arrays;
 import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Set;
-import java.util.concurrent.CompletionException;
 import java.util.concurrent.CompletionStage;
 import java.util.function.Consumer;
-
-import jakarta.servlet.ServletException;
-import jakarta.servlet.http.Cookie;
-import jakarta.servlet.http.HttpServletRequest;
-import jakarta.servlet.http.HttpServletResponse;
-import jakarta.servlet.http.HttpServletResponseWrapper;
-import org.reactivestreams.Publisher;
-import org.reactivestreams.Subscriber;
-import org.reactivestreams.Subscription;
-
-import org.springframework.core.ParameterizedTypeReference;
-import org.springframework.core.ReactiveAdapter;
-import org.springframework.core.ReactiveAdapterRegistry;
-import org.springframework.core.io.InputStreamResource;
-import org.springframework.core.io.Resource;
-import org.springframework.core.io.support.ResourceRegion;
-import org.springframework.http.CacheControl;
-import org.springframework.http.HttpHeaders;
-import org.springframework.http.HttpMethod;
-import org.springframework.http.HttpRange;
-import org.springframework.http.HttpStatus;
-import org.springframework.http.HttpStatusCode;
-import org.springframework.http.InvalidMediaTypeException;
-import org.springframework.http.MediaType;
-import org.springframework.http.converter.GenericHttpMessageConverter;
-import org.springframework.http.converter.HttpMessageConverter;
-import org.springframework.http.server.ServletServerHttpResponse;
-import org.springframework.lang.Nullable;
-import org.springframework.util.Assert;
-import org.springframework.util.LinkedMultiValueMap;
-import org.springframework.util.MultiValueMap;
-import org.springframework.web.HttpMediaTypeNotAcceptableException;
-import org.springframework.web.context.request.async.DeferredResult;
-import org.springframework.web.servlet.ModelAndView;
+import java.util.stream.Collectors;
 
 /**
  * Default {@link EntityResponse.Builder} implementation.
  *
+ * @param <T> the entity type
  * @author Arjen Poutsma
  * @since 5.2
- * @param <T> the entity type
  */
 final class DefaultEntityResponseBuilder<T> implements EntityResponse.Builder<T> {
 
-	private static final Type RESOURCE_REGION_LIST_TYPE =
-				new ParameterizedTypeReference<List<ResourceRegion>>() { }.getType();
+	private static final boolean reactiveStreamsPresent = ClassUtils.isPresent(
+			"org.reactivestreams.Publisher", DefaultEntityResponseBuilder.class.getClassLoader());
 
 
 	private final T entity;
 
 	private final Type entityType;
 
-	private HttpStatusCode status = HttpStatus.OK;
+	private int status = HttpStatus.OK.value();
 
 	private final HttpHeaders headers = new HttpHeaders();
 
@@ -93,15 +81,16 @@ final class DefaultEntityResponseBuilder<T> implements EntityResponse.Builder<T>
 	}
 
 	@Override
-	public EntityResponse.Builder<T> status(HttpStatusCode status) {
-		Assert.notNull(status, "HttpStatusCode must not be null");
-		this.status = status;
+	public EntityResponse.Builder<T> status(HttpStatus status) {
+		Assert.notNull(status, "HttpStatus must not be null");
+		this.status = status.value();
 		return this;
 	}
 
 	@Override
 	public EntityResponse.Builder<T> status(int status) {
-		return status(HttpStatusCode.valueOf(status));
+		this.status = status;
+		return this;
 	}
 
 	@Override
@@ -114,14 +103,12 @@ final class DefaultEntityResponseBuilder<T> implements EntityResponse.Builder<T>
 	@Override
 	public EntityResponse.Builder<T> cookies(
 			Consumer<MultiValueMap<String, Cookie>> cookiesConsumer) {
-		Assert.notNull(cookiesConsumer, "cookiesConsumer must not be null");
 		cookiesConsumer.accept(this.cookies);
 		return this;
 	}
 
 	@Override
 	public EntityResponse.Builder<T> header(String headerName, String... headerValues) {
-		Assert.notNull(headerName, "headerName must not be null");
 		for (String headerValue : headerValues) {
 			this.headers.add(headerName, headerValue);
 		}
@@ -130,21 +117,18 @@ final class DefaultEntityResponseBuilder<T> implements EntityResponse.Builder<T>
 
 	@Override
 	public EntityResponse.Builder<T> headers(Consumer<HttpHeaders> headersConsumer) {
-		Assert.notNull(headersConsumer, "headersConsumer must not be null");
 		headersConsumer.accept(this.headers);
 		return this;
 	}
 
 	@Override
 	public EntityResponse.Builder<T> allow(HttpMethod... allowedMethods) {
-		Assert.notNull(allowedMethods, "allowedMethods must not be null");
 		this.headers.setAllow(new LinkedHashSet<>(Arrays.asList(allowedMethods)));
 		return this;
 	}
 
 	@Override
 	public EntityResponse.Builder<T> allow(Set<HttpMethod> allowedMethods) {
-		Assert.notNull(allowedMethods, "allowedMethods must not be null");
 		this.headers.setAllow(allowedMethods);
 		return this;
 	}
@@ -157,7 +141,6 @@ final class DefaultEntityResponseBuilder<T> implements EntityResponse.Builder<T>
 
 	@Override
 	public EntityResponse.Builder<T> contentType(MediaType contentType) {
-		Assert.notNull(contentType, "contentType must not be null");
 		this.headers.setContentType(contentType);
 		return this;
 	}
@@ -176,28 +159,24 @@ final class DefaultEntityResponseBuilder<T> implements EntityResponse.Builder<T>
 
 	@Override
 	public EntityResponse.Builder<T> lastModified(ZonedDateTime lastModified) {
-		Assert.notNull(lastModified, "lastModified must not be null");
 		this.headers.setLastModified(lastModified);
 		return this;
 	}
 
 	@Override
 	public EntityResponse.Builder<T> lastModified(Instant lastModified) {
-		Assert.notNull(lastModified, "lastModified must not be null");
 		this.headers.setLastModified(lastModified);
 		return this;
 	}
 
 	@Override
 	public EntityResponse.Builder<T> location(URI location) {
-		Assert.notNull(location, "location must not be null");
 		this.headers.setLocation(location);
 		return this;
 	}
 
 	@Override
 	public EntityResponse.Builder<T> cacheControl(CacheControl cacheControl) {
-		Assert.notNull(cacheControl, "cacheControl must not be null");
 		this.headers.setCacheControl(cacheControl);
 		return this;
 	}
@@ -211,18 +190,18 @@ final class DefaultEntityResponseBuilder<T> implements EntityResponse.Builder<T>
 	@SuppressWarnings({"rawtypes", "unchecked"})
 	@Override
 	public EntityResponse<T> build() {
-		if (this.entity instanceof CompletionStage completionStage) {
+		if (this.entity instanceof CompletionStage) {
+			CompletionStage completionStage = (CompletionStage) this.entity;
 			return new CompletionStageEntityResponse(this.status, this.headers, this.cookies,
 					completionStage, this.entityType);
 		}
-		else if (DefaultAsyncServerResponse.reactiveStreamsPresent) {
-			ReactiveAdapter adapter = ReactiveAdapterRegistry.getSharedInstance().getAdapter(this.entity.getClass());
-			if (adapter != null) {
-				Publisher<T> publisher = adapter.toPublisher(this.entity);
-				return new PublisherEntityResponse(this.status, this.headers, this.cookies, publisher, this.entityType);
-			}
+		else if (reactiveStreamsPresent && PublisherEntityResponse.isPublisher(this.entity)) {
+			Publisher publisher = (Publisher) this.entity;
+			return new PublisherEntityResponse(this.status, this.headers, this.cookies, publisher, this.entityType);
 		}
-		return new DefaultEntityResponse<>(this.status, this.headers, this.cookies, this.entity, this.entityType);
+		else {
+			return new DefaultEntityResponse<>(this.status, this.headers, this.cookies, this.entity, this.entityType);
+		}
 	}
 
 
@@ -244,13 +223,14 @@ final class DefaultEntityResponseBuilder<T> implements EntityResponse.Builder<T>
 	/**
 	 * Default {@link EntityResponse} implementation for synchronous bodies.
 	 */
-	private static class DefaultEntityResponse<T> extends AbstractServerResponse implements EntityResponse<T> {
+	private static class DefaultEntityResponse<T> extends DefaultServerResponseBuilder.AbstractServerResponse
+			implements EntityResponse<T> {
 
 		private final T entity;
 
 		private final Type entityType;
 
-		public DefaultEntityResponse(HttpStatusCode statusCode, HttpHeaders headers,
+		public DefaultEntityResponse(int statusCode, HttpHeaders headers,
 				MultiValueMap<String, Cookie> cookies, T entity, Type entityType) {
 
 			super(statusCode, headers, cookies);
@@ -272,7 +252,7 @@ final class DefaultEntityResponseBuilder<T> implements EntityResponse.Builder<T>
 			return null;
 		}
 
-		@SuppressWarnings({ "unchecked", "resource", "rawtypes" })
+		@SuppressWarnings({ "unchecked", "resource" })
 		protected void writeEntityWithMessageConverters(Object entity, HttpServletRequest request,
 				HttpServletResponse response, ServerResponse.Context context)
 				throws ServletException, IOException {
@@ -280,36 +260,18 @@ final class DefaultEntityResponseBuilder<T> implements EntityResponse.Builder<T>
 			ServletServerHttpResponse serverResponse = new ServletServerHttpResponse(response);
 			MediaType contentType = getContentType(response);
 			Class<?> entityClass = entity.getClass();
-			Type entityType = this.entityType;
-
-			if (entityClass != InputStreamResource.class && Resource.class.isAssignableFrom(entityClass)) {
-				serverResponse.getHeaders().set(HttpHeaders.ACCEPT_RANGES, "bytes");
-				String rangeHeader = request.getHeader(HttpHeaders.RANGE);
-				if (rangeHeader != null) {
-					Resource resource = (Resource) entity;
-					try {
-						List<HttpRange> httpRanges = HttpRange.parseRanges(rangeHeader);
-						serverResponse.getServletResponse().setStatus(HttpStatus.PARTIAL_CONTENT.value());
-						entity = HttpRange.toResourceRegions(httpRanges, resource);
-						entityClass = entity.getClass();
-						entityType = RESOURCE_REGION_LIST_TYPE;
-					}
-					catch (IllegalArgumentException ex) {
-						serverResponse.getHeaders().set(HttpHeaders.CONTENT_RANGE, "bytes */" + resource.contentLength());
-						serverResponse.getServletResponse().setStatus(HttpStatus.REQUESTED_RANGE_NOT_SATISFIABLE.value());
-					}
-				}
-			}
 
 			for (HttpMessageConverter<?> messageConverter : context.messageConverters()) {
-				if (messageConverter instanceof GenericHttpMessageConverter genericMessageConverter) {
-					if (genericMessageConverter.canWrite(entityType, entityClass, contentType)) {
-						genericMessageConverter.write(entity, entityType, contentType, serverResponse);
+				if (messageConverter instanceof GenericHttpMessageConverter<?>) {
+					GenericHttpMessageConverter<Object> genericMessageConverter =
+							(GenericHttpMessageConverter<Object>) messageConverter;
+					if (genericMessageConverter.canWrite(this.entityType, entityClass, contentType)) {
+						genericMessageConverter.write(entity, this.entityType, contentType, serverResponse);
 						return;
 					}
 				}
 				if (messageConverter.canWrite(entityClass, contentType)) {
-					((HttpMessageConverter<Object>) messageConverter).write(entity, contentType, serverResponse);
+					((HttpMessageConverter<Object>)messageConverter).write(entity, contentType, serverResponse);
 					return;
 				}
 			}
@@ -329,7 +291,7 @@ final class DefaultEntityResponseBuilder<T> implements EntityResponse.Builder<T>
 		}
 
 		protected void tryWriteEntityWithMessageConverters(Object entity, HttpServletRequest request,
-				HttpServletResponse response, ServerResponse.Context context) throws ServletException, IOException {
+				HttpServletResponse response, ServerResponse.Context context) {
 			try {
 				writeEntityWithMessageConverters(entity, request, response, context);
 			}
@@ -344,8 +306,8 @@ final class DefaultEntityResponseBuilder<T> implements EntityResponse.Builder<T>
 
 			return messageConverters.stream()
 					.filter(messageConverter -> messageConverter.canWrite(entityClass, null))
-					.flatMap(messageConverter -> messageConverter.getSupportedMediaTypes(entityClass).stream())
-					.toList();
+					.flatMap(messageConverter -> messageConverter.getSupportedMediaTypes().stream())
+					.collect(Collectors.toList());
 		}
 
 	}
@@ -356,106 +318,82 @@ final class DefaultEntityResponseBuilder<T> implements EntityResponse.Builder<T>
 	 */
 	private static class CompletionStageEntityResponse<T> extends DefaultEntityResponse<CompletionStage<T>> {
 
-		public CompletionStageEntityResponse(HttpStatusCode statusCode, HttpHeaders headers,
+		public CompletionStageEntityResponse(int statusCode, HttpHeaders headers,
 				MultiValueMap<String, Cookie> cookies, CompletionStage<T> entity, Type entityType) {
 
 			super(statusCode, headers, cookies, entity, entityType);
 		}
 
 		@Override
-		protected ModelAndView writeToInternal(HttpServletRequest servletRequest, HttpServletResponse servletResponse,
-				Context context) throws ServletException, IOException {
+		protected ModelAndView writeToInternal(HttpServletRequest servletRequest,
+				HttpServletResponse servletResponse, Context context) {
 
-			DeferredResult<ServerResponse> deferredResult = createDeferredResult(servletRequest, servletResponse, context);
-			DefaultAsyncServerResponse.writeAsync(servletRequest, servletResponse, deferredResult);
-			return null;
-		}
+			AsyncContext asyncContext = servletRequest.startAsync(servletRequest, servletResponse);
+			entity().whenComplete((entity, throwable) -> {
+				try {
+					if (entity != null) {
 
-		private DeferredResult<ServerResponse> createDeferredResult(HttpServletRequest request, HttpServletResponse response,
-				Context context) {
-
-			DeferredResult<ServerResponse> result = new DeferredResult<>();
-			entity().whenComplete((value, ex) -> {
-				if (ex != null) {
-					if (ex instanceof CompletionException && ex.getCause() != null) {
-						ex = ex.getCause();
+						tryWriteEntityWithMessageConverters(entity,
+								(HttpServletRequest) asyncContext.getRequest(),
+								(HttpServletResponse) asyncContext.getResponse(),
+								context);
 					}
-					ServerResponse errorResponse = errorResponse(ex, request);
-					if (errorResponse != null) {
-						result.setResult(errorResponse);
-					}
-					else {
-						result.setErrorResult(ex);
+					else if (throwable != null) {
+						handleError(throwable, servletRequest, servletResponse, context);
 					}
 				}
-				else {
-					try {
-						tryWriteEntityWithMessageConverters(value, request, response, context);
-						result.setResult(null);
-					}
-					catch (ServletException | IOException writeException) {
-						result.setErrorResult(writeException);
-					}
+				finally {
+					asyncContext.complete();
 				}
 			});
-			return result;
+			return null;
 		}
-
 	}
 
 
-	/**
-	 * {@link EntityResponse} implementation for asynchronous {@link Publisher} bodies.
-	 */
 	private static class PublisherEntityResponse<T> extends DefaultEntityResponse<Publisher<T>> {
 
-		public PublisherEntityResponse(HttpStatusCode statusCode, HttpHeaders headers,
+		public PublisherEntityResponse(int statusCode, HttpHeaders headers,
 				MultiValueMap<String, Cookie> cookies, Publisher<T> entity, Type entityType) {
 
 			super(statusCode, headers, cookies, entity, entityType);
 		}
 
 		@Override
-		protected ModelAndView writeToInternal(HttpServletRequest servletRequest, HttpServletResponse servletResponse,
-				Context context) throws ServletException, IOException {
+		protected ModelAndView writeToInternal(HttpServletRequest servletRequest,
+				HttpServletResponse servletResponse, Context context) {
 
-			DeferredResult<?> deferredResult = new DeferredResult<>();
-			DefaultAsyncServerResponse.writeAsync(servletRequest, servletResponse, deferredResult);
-
-			entity().subscribe(new DeferredResultSubscriber(servletRequest, servletResponse, context, deferredResult));
+			AsyncContext asyncContext = servletRequest.startAsync(servletRequest,
+					new NoContentLengthResponseWrapper(servletResponse));
+			entity().subscribe(new ProducingSubscriber(asyncContext, context));
 			return null;
 		}
 
+		public static boolean isPublisher(Object entity) {
+			return (entity instanceof Publisher);
+		}
 
-		private class DeferredResultSubscriber implements Subscriber<T> {
 
-			private final HttpServletRequest servletRequest;
+		@SuppressWarnings("SubscriberImplementation")
+		private class ProducingSubscriber implements Subscriber<T> {
 
-			private final HttpServletResponse servletResponse;
+			private final AsyncContext asyncContext;
 
 			private final Context context;
-
-			private final DeferredResult<?> deferredResult;
 
 			@Nullable
 			private Subscription subscription;
 
-
-			public DeferredResultSubscriber(HttpServletRequest servletRequest,
-					HttpServletResponse servletResponse, Context context,
-					DeferredResult<?> deferredResult) {
-
-				this.servletRequest = servletRequest;
-				this.servletResponse = new NoContentLengthResponseWrapper(servletResponse);
+			public ProducingSubscriber(AsyncContext asyncContext, Context context) {
+				this.asyncContext = asyncContext;
 				this.context = context;
-				this.deferredResult = deferredResult;
 			}
 
 			@Override
 			public void onSubscribe(Subscription s) {
 				if (this.subscription == null) {
 					this.subscription = s;
-					this.subscription.request(1);
+					this.subscription.request(Long.MAX_VALUE);
 				}
 				else {
 					s.cancel();
@@ -463,39 +401,22 @@ final class DefaultEntityResponseBuilder<T> implements EntityResponse.Builder<T>
 			}
 
 			@Override
-			public void onNext(T t) {
-				Assert.state(this.subscription != null, "No subscription");
-				try {
-					tryWriteEntityWithMessageConverters(t, this.servletRequest, this.servletResponse, this.context);
-					this.servletResponse.getOutputStream().flush();
-					this.subscription.request(1);
-				}
-				catch (ServletException | IOException ex) {
-					this.subscription.cancel();
-					this.deferredResult.setErrorResult(ex);
-				}
+			public void onNext(T element) {
+				HttpServletRequest servletRequest = (HttpServletRequest) this.asyncContext.getRequest();
+				HttpServletResponse servletResponse = (HttpServletResponse) this.asyncContext.getResponse();
+				tryWriteEntityWithMessageConverters(element, servletRequest, servletResponse, this.context);
 			}
 
 			@Override
 			public void onError(Throwable t) {
-				try {
-					handleError(t, this.servletRequest, this.servletResponse, this.context);
-				}
-				catch (ServletException | IOException handlingThrowable) {
-					this.deferredResult.setErrorResult(handlingThrowable);
-				}
+				handleError(t, (HttpServletRequest) this.asyncContext.getRequest(),
+						(HttpServletResponse) this.asyncContext.getResponse(), this.context);
+				this.asyncContext.complete();
 			}
 
 			@Override
 			public void onComplete() {
-				try {
-					this.servletResponse.getOutputStream().flush();
-					this.deferredResult.setResult(null);
-				}
-				catch (IOException ex) {
-					this.deferredResult.setErrorResult(ex);
-				}
-
+				this.asyncContext.complete();
 			}
 		}
 
