@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2023 the original author or authors.
+ * Copyright 2002-2019 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,21 +16,6 @@
 
 package org.springframework.web.servlet.mvc.method.annotation;
 
-import java.io.IOException;
-import java.lang.reflect.Type;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.HashSet;
-import java.util.LinkedHashSet;
-import java.util.List;
-import java.util.Locale;
-import java.util.Set;
-
-import jakarta.servlet.ServletRequest;
-import jakarta.servlet.http.HttpServletRequest;
-import jakarta.servlet.http.HttpServletResponse;
-
 import org.springframework.core.GenericTypeResolver;
 import org.springframework.core.MethodParameter;
 import org.springframework.core.ParameterizedTypeReference;
@@ -39,14 +24,7 @@ import org.springframework.core.io.InputStreamResource;
 import org.springframework.core.io.Resource;
 import org.springframework.core.io.support.ResourceRegion;
 import org.springframework.core.log.LogFormatUtils;
-import org.springframework.http.HttpEntity;
-import org.springframework.http.HttpHeaders;
-import org.springframework.http.HttpOutputMessage;
-import org.springframework.http.HttpRange;
-import org.springframework.http.HttpStatus;
-import org.springframework.http.MediaType;
-import org.springframework.http.MediaTypeFactory;
-import org.springframework.http.ProblemDetail;
+import org.springframework.http.*;
 import org.springframework.http.converter.GenericHttpMessageConverter;
 import org.springframework.http.converter.HttpMessageConverter;
 import org.springframework.http.converter.HttpMessageNotWritableException;
@@ -55,15 +33,21 @@ import org.springframework.http.server.ServletServerHttpResponse;
 import org.springframework.lang.Nullable;
 import org.springframework.util.Assert;
 import org.springframework.util.CollectionUtils;
-import org.springframework.util.MimeTypeUtils;
 import org.springframework.util.StringUtils;
 import org.springframework.web.HttpMediaTypeNotAcceptableException;
 import org.springframework.web.accept.ContentNegotiationManager;
+import org.springframework.web.accept.PathExtensionContentNegotiationStrategy;
 import org.springframework.web.context.request.NativeWebRequest;
 import org.springframework.web.context.request.ServletWebRequest;
 import org.springframework.web.method.support.HandlerMethodReturnValueHandler;
 import org.springframework.web.servlet.HandlerMapping;
 import org.springframework.web.util.UrlPathHelper;
+
+import javax.servlet.http.HttpServletRequest;
+import javax.servlet.http.HttpServletResponse;
+import java.io.IOException;
+import java.lang.reflect.Type;
+import java.util.*;
 
 /**
  * Extends {@link AbstractMessageConverterMethodArgumentResolver} with the ability to handle method
@@ -79,25 +63,35 @@ public abstract class AbstractMessageConverterMethodProcessor extends AbstractMe
 		implements HandlerMethodReturnValueHandler {
 
 	/* Extensions associated with the built-in message converters */
-	private static final Set<String> SAFE_EXTENSIONS = Set.of(
+	private static final Set<String> WHITELISTED_EXTENSIONS = new HashSet<>(Arrays.asList(
 			"txt", "text", "yml", "properties", "csv",
 			"json", "xml", "atom", "rss",
-			"png", "jpe", "jpeg", "jpg", "gif", "wbmp", "bmp");
+			"png", "jpe", "jpeg", "jpg", "gif", "wbmp", "bmp"));
 
-	private static final Set<String> SAFE_MEDIA_BASE_TYPES =
-			Set.of("audio", "image", "video");
+	private static final Set<String> WHITELISTED_MEDIA_BASE_TYPES = new HashSet<>(
+			Arrays.asList("audio", "image", "video"));
 
 	private static final List<MediaType> ALL_APPLICATION_MEDIA_TYPES =
-			List.of(MediaType.ALL, new MediaType("application"));
+			Arrays.asList(MediaType.ALL, new MediaType("application"));
 
 	private static final Type RESOURCE_REGION_LIST_TYPE =
-			new ParameterizedTypeReference<List<ResourceRegion>>() {}.getType();
+			new ParameterizedTypeReference<List<ResourceRegion>>() {
+			}.getType();
+
+
+	private static final UrlPathHelper decodingUrlPathHelper = new UrlPathHelper();
+
+	private static final UrlPathHelper rawUrlPathHelper = new UrlPathHelper();
+
+	static {
+		rawUrlPathHelper.setRemoveSemicolonContent(false);
+		rawUrlPathHelper.setUrlDecode(false);
+	}
 
 
 	private final ContentNegotiationManager contentNegotiationManager;
 
-	private final List<MediaType> problemMediaTypes =
-			Arrays.asList(MediaType.APPLICATION_PROBLEM_JSON, MediaType.APPLICATION_PROBLEM_XML);
+	private final PathExtensionContentNegotiationStrategy pathStrategy;
 
 	private final Set<String> safeExtensions = new HashSet<>();
 
@@ -123,18 +117,26 @@ public abstract class AbstractMessageConverterMethodProcessor extends AbstractMe
 	 * as request/response body advice instances.
 	 */
 	protected AbstractMessageConverterMethodProcessor(List<HttpMessageConverter<?>> converters,
-			@Nullable ContentNegotiationManager manager, @Nullable List<Object> requestResponseBodyAdvice) {
+													  @Nullable ContentNegotiationManager manager, @Nullable List<Object> requestResponseBodyAdvice) {
 
 		super(converters, requestResponseBodyAdvice);
 
 		this.contentNegotiationManager = (manager != null ? manager : new ContentNegotiationManager());
+		this.pathStrategy = initPathStrategy(this.contentNegotiationManager);
 		this.safeExtensions.addAll(this.contentNegotiationManager.getAllFileExtensions());
-		this.safeExtensions.addAll(SAFE_EXTENSIONS);
+		this.safeExtensions.addAll(WHITELISTED_EXTENSIONS);
+	}
+
+	private static PathExtensionContentNegotiationStrategy initPathStrategy(ContentNegotiationManager manager) {
+		Class<PathExtensionContentNegotiationStrategy> clazz = PathExtensionContentNegotiationStrategy.class;
+		PathExtensionContentNegotiationStrategy strategy = manager.getStrategy(clazz);
+		return (strategy != null ? strategy : new PathExtensionContentNegotiationStrategy());
 	}
 
 
 	/**
 	 * Creates a new {@link HttpOutputMessage} from the given {@link NativeWebRequest}.
+	 *
 	 * @param webRequest the web request to create an output message from
 	 * @return the output message
 	 */
@@ -219,48 +221,34 @@ public abstract class AbstractMessageConverterMethodProcessor extends AbstractMe
 		}
 		else {
 			HttpServletRequest request = inputMessage.getServletRequest();
-			List<MediaType> acceptableTypes;
-			try {
-				acceptableTypes = getAcceptableMediaTypes(request);
-			}
-			catch (HttpMediaTypeNotAcceptableException ex) {
-				int series = outputMessage.getServletResponse().getStatus() / 100;
-				if (body == null || series == 4 || series == 5) {
-					if (logger.isDebugEnabled()) {
-						logger.debug("Ignoring error response content (if any). " + ex);
-					}
-					return;
-				}
-				throw ex;
-			}
-
+			List<MediaType> acceptableTypes = getAcceptableMediaTypes(request);
 			List<MediaType> producibleTypes = getProducibleMediaTypes(request, valueType, targetType);
+
 			if (body != null && producibleTypes.isEmpty()) {
 				throw new HttpMessageNotWritableException(
 						"No converter found for return value of type: " + valueType);
 			}
-
-			List<MediaType> compatibleMediaTypes = new ArrayList<>();
-			determineCompatibleMediaTypes(acceptableTypes, producibleTypes, compatibleMediaTypes);
-
-			// For ProblemDetail, fall back on RFC 7807 format
-			if (compatibleMediaTypes.isEmpty() && ProblemDetail.class.isAssignableFrom(valueType)) {
-				determineCompatibleMediaTypes(this.problemMediaTypes, producibleTypes, compatibleMediaTypes);
-			}
-
-			if (compatibleMediaTypes.isEmpty()) {
-				if (logger.isDebugEnabled()) {
-					logger.debug("No match for " + acceptableTypes + ", supported: " + producibleTypes);
+			List<MediaType> mediaTypesToUse = new ArrayList<>();
+			for (MediaType requestedType : acceptableTypes) {
+				for (MediaType producibleType : producibleTypes) {
+					if (requestedType.isCompatibleWith(producibleType)) {
+						mediaTypesToUse.add(getMostSpecificMediaType(requestedType, producibleType));
+					}
 				}
+			}
+			if (mediaTypesToUse.isEmpty()) {
 				if (body != null) {
 					throw new HttpMediaTypeNotAcceptableException(producibleTypes);
+				}
+				if (logger.isDebugEnabled()) {
+					logger.debug("No match for " + acceptableTypes + ", supported: " + producibleTypes);
 				}
 				return;
 			}
 
-			MimeTypeUtils.sortBySpecificity(compatibleMediaTypes);
+			MediaType.sortBySpecificityAndQuality(mediaTypesToUse);
 
-			for (MediaType mediaType : compatibleMediaTypes) {
+			for (MediaType mediaType : mediaTypesToUse) {
 				if (mediaType.isConcrete()) {
 					selectedMediaType = mediaType;
 					break;
@@ -280,8 +268,8 @@ public abstract class AbstractMessageConverterMethodProcessor extends AbstractMe
 		if (selectedMediaType != null) {
 			selectedMediaType = selectedMediaType.removeQualityValue();
 			for (HttpMessageConverter<?> converter : this.messageConverters) {
-				GenericHttpMessageConverter genericConverter =
-						(converter instanceof GenericHttpMessageConverter ghmc ? ghmc : null);
+				GenericHttpMessageConverter genericConverter = (converter instanceof GenericHttpMessageConverter ?
+						(GenericHttpMessageConverter<?>) converter : null);
 				if (genericConverter != null ?
 						((GenericHttpMessageConverter) converter).canWrite(targetType, valueType, selectedMediaType) :
 						converter.canWrite(valueType, selectedMediaType)) {
@@ -311,15 +299,11 @@ public abstract class AbstractMessageConverterMethodProcessor extends AbstractMe
 		}
 
 		if (body != null) {
-			Set<MediaType> producibleMediaTypes =
-					(Set<MediaType>) inputMessage.getServletRequest()
-							.getAttribute(HandlerMapping.PRODUCIBLE_MEDIA_TYPES_ATTRIBUTE);
-
-			if (isContentTypePreset || !CollectionUtils.isEmpty(producibleMediaTypes)) {
+			if (isContentTypePreset) {
 				throw new HttpMessageNotWritableException(
 						"No converter for [" + valueType + "] with preset Content-Type '" + contentType + "'");
 			}
-			throw new HttpMediaTypeNotAcceptableException(getSupportedMediaTypes(body.getClass()));
+			throw new HttpMediaTypeNotAcceptableException(this.allSupportedMediaTypes);
 		}
 	}
 
@@ -381,18 +365,23 @@ public abstract class AbstractMessageConverterMethodProcessor extends AbstractMe
 		if (!CollectionUtils.isEmpty(mediaTypes)) {
 			return new ArrayList<>(mediaTypes);
 		}
-		Set<MediaType> result = new LinkedHashSet<>();
-		for (HttpMessageConverter<?> converter : this.messageConverters) {
-			if (converter instanceof GenericHttpMessageConverter<?> ghmc && targetType != null) {
-				if (ghmc.canWrite(targetType, valueClass, null)) {
-					result.addAll(converter.getSupportedMediaTypes(valueClass));
+		else if (!this.allSupportedMediaTypes.isEmpty()) {
+			List<MediaType> result = new ArrayList<>();
+			for (HttpMessageConverter<?> converter : this.messageConverters) {
+				if (converter instanceof GenericHttpMessageConverter && targetType != null) {
+					if (((GenericHttpMessageConverter<?>) converter).canWrite(targetType, valueClass, null)) {
+						result.addAll(converter.getSupportedMediaTypes());
+					}
+				}
+				else if (converter.canWrite(valueClass, null)) {
+					result.addAll(converter.getSupportedMediaTypes());
 				}
 			}
-			else if (converter.canWrite(valueClass, null)) {
-				result.addAll(converter.getSupportedMediaTypes(valueClass));
-			}
+			return result;
 		}
-		return (result.isEmpty() ? Collections.singletonList(MediaType.ALL) : new ArrayList<>(result));
+		else {
+			return Collections.singletonList(MediaType.ALL);
+		}
 	}
 
 	private List<MediaType> getAcceptableMediaTypes(HttpServletRequest request)
@@ -401,35 +390,18 @@ public abstract class AbstractMessageConverterMethodProcessor extends AbstractMe
 		return this.contentNegotiationManager.resolveMediaTypes(new ServletWebRequest(request));
 	}
 
-	private void determineCompatibleMediaTypes(
-			List<MediaType> acceptableTypes, List<MediaType> producibleTypes, List<MediaType> mediaTypesToUse) {
-
-		for (MediaType requestedType : acceptableTypes) {
-			for (MediaType producibleType : producibleTypes) {
-				if (requestedType.isCompatibleWith(producibleType)) {
-					mediaTypesToUse.add(getMostSpecificMediaType(requestedType, producibleType));
-				}
-			}
-		}
-	}
-
 	/**
 	 * Return the more specific of the acceptable and the producible media types
 	 * with the q-value of the former.
 	 */
 	private MediaType getMostSpecificMediaType(MediaType acceptType, MediaType produceType) {
 		MediaType produceTypeToUse = produceType.copyQualityValue(acceptType);
-		if (acceptType.isLessSpecific(produceTypeToUse)) {
-			return produceTypeToUse;
-		}
-		else {
-			return acceptType;
-		}
+		return (MediaType.SPECIFICITY_COMPARATOR.compare(acceptType, produceTypeToUse) <= 0 ? acceptType : produceTypeToUse);
 	}
 
 	/**
-	 * Check if the path has a file extension and whether the extension is either
-	 * on the list of {@link #SAFE_EXTENSIONS safe extensions} or explicitly
+	 * Check if the path has a file extension and whether the extension is
+	 * either {@link #WHITELISTED_EXTENSIONS whitelisted} or explicitly
 	 * {@link ContentNegotiationManager#getAllFileExtensions() registered}.
 	 * If not, and the status is in the 2xx range, a 'Content-Disposition'
 	 * header with a safe attachment file name ("f.txt") is added to prevent
@@ -443,7 +415,7 @@ public abstract class AbstractMessageConverterMethodProcessor extends AbstractMe
 
 		try {
 			int status = response.getServletResponse().getStatus();
-			if (status < 200 || (status > 299 && status < 400)) {
+			if (status < 200 || status > 299) {
 				return;
 			}
 		}
@@ -452,7 +424,7 @@ public abstract class AbstractMessageConverterMethodProcessor extends AbstractMe
 		}
 
 		HttpServletRequest servletRequest = request.getServletRequest();
-		String requestUri = UrlPathHelper.rawPathInstance.getOriginatingRequestUri(servletRequest);
+		String requestUri = rawUrlPathHelper.getOriginatingRequestUri(servletRequest);
 
 		int index = requestUri.lastIndexOf('/') + 1;
 		String filename = requestUri.substring(index);
@@ -464,10 +436,10 @@ public abstract class AbstractMessageConverterMethodProcessor extends AbstractMe
 			filename = filename.substring(0, index);
 		}
 
-		filename = UrlPathHelper.defaultInstance.decodeRequestString(servletRequest, filename);
+		filename = decodingUrlPathHelper.decodeRequestString(servletRequest, filename);
 		String ext = StringUtils.getFilenameExtension(filename);
 
-		pathParams = UrlPathHelper.defaultInstance.decodeRequestString(servletRequest, pathParams);
+		pathParams = decodingUrlPathHelper.decodeRequestString(servletRequest, pathParams);
 		String extInPathParams = StringUtils.getFilenameExtension(pathParams);
 
 		if (!safeExtension(servletRequest, ext) || !safeExtension(servletRequest, extInPathParams)) {
@@ -495,25 +467,29 @@ public abstract class AbstractMessageConverterMethodProcessor extends AbstractMe
 				return true;
 			}
 		}
-		MediaType mediaType = resolveMediaType(request, extension);
-		return (mediaType != null && (safeMediaType(mediaType)));
+		return safeMediaTypesForExtension(new ServletWebRequest(request), extension);
 	}
 
-	@Nullable
-	private MediaType resolveMediaType(ServletRequest request, String extension) {
-		MediaType result = null;
-		String rawMimeType = request.getServletContext().getMimeType("file." + extension);
-		if (StringUtils.hasText(rawMimeType)) {
-			result = MediaType.parseMediaType(rawMimeType);
+	private boolean safeMediaTypesForExtension(NativeWebRequest request, String extension) {
+		List<MediaType> mediaTypes = null;
+		try {
+			mediaTypes = this.pathStrategy.resolveMediaTypeKey(request, extension);
+		} catch (HttpMediaTypeNotAcceptableException ex) {
+			// Ignore
 		}
-		if (result == null || MediaType.APPLICATION_OCTET_STREAM.equals(result)) {
-			result = MediaTypeFactory.getMediaType("file." + extension).orElse(null);
+		if (CollectionUtils.isEmpty(mediaTypes)) {
+			return false;
 		}
-		return result;
+		for (MediaType mediaType : mediaTypes) {
+			if (!safeMediaType(mediaType)) {
+				return false;
+			}
+		}
+		return true;
 	}
 
 	private boolean safeMediaType(MediaType mediaType) {
-		return (SAFE_MEDIA_BASE_TYPES.contains(mediaType.getType()) ||
+		return (WHITELISTED_MEDIA_BASE_TYPES.contains(mediaType.getType()) ||
 				mediaType.getSubtype().endsWith("+xml"));
 	}
 
