@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2023 the original author or authors.
+ * Copyright 2002-2019 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,30 +16,22 @@
 
 package org.springframework.web.servlet.resource;
 
-import java.io.IOException;
-import java.net.URLDecoder;
-import java.nio.charset.Charset;
-import java.nio.charset.StandardCharsets;
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
-import java.util.StringTokenizer;
-
-import jakarta.servlet.http.HttpServletRequest;
-
 import org.springframework.core.io.ClassPathResource;
 import org.springframework.core.io.Resource;
 import org.springframework.core.io.UrlResource;
-import org.springframework.core.log.LogFormatUtils;
-import org.springframework.http.server.PathContainer;
 import org.springframework.lang.Nullable;
 import org.springframework.util.StringUtils;
 import org.springframework.web.context.support.ServletContextResource;
-import org.springframework.web.util.ServletRequestPathUtils;
 import org.springframework.web.util.UriUtils;
 import org.springframework.web.util.UrlPathHelper;
+
+import javax.servlet.http.HttpServletRequest;
+import java.io.IOException;
+import java.io.UnsupportedEncodingException;
+import java.net.URLDecoder;
+import java.nio.charset.Charset;
+import java.nio.charset.StandardCharsets;
+import java.util.*;
 
 /**
  * A simple {@code ResourceResolver} that tries to find a resource under the given
@@ -65,7 +57,7 @@ public class PathResourceResolver extends AbstractResourceResolver {
 
 
 	/**
-	 * By default, when a Resource is found, the path of the resolved resource is
+	 * By default when a Resource is found, the path of the resolved resource is
 	 * compared to ensure it's under the input location where it was found.
 	 * However sometimes that may not be the case, e.g. when
 	 * {@link org.springframework.web.servlet.resource.CssLinkResourceTransformer}
@@ -133,7 +125,6 @@ public class PathResourceResolver extends AbstractResourceResolver {
 
 
 	@Override
-	@Nullable
 	protected Resource resolveResourceInternal(@Nullable HttpServletRequest request, String requestPath,
 			List<? extends Resource> locations, ResourceResolverChain chain) {
 
@@ -141,7 +132,6 @@ public class PathResourceResolver extends AbstractResourceResolver {
 	}
 
 	@Override
-	@Nullable
 	protected String resolveUrlPathInternal(String resourcePath, List<? extends Resource> locations,
 			ResourceResolverChain chain) {
 
@@ -155,7 +145,7 @@ public class PathResourceResolver extends AbstractResourceResolver {
 
 		for (Resource location : locations) {
 			try {
-				String pathToUse = encodeOrDecodeIfNecessary(resourcePath, request, location);
+				String pathToUse = encodeIfNecessary(resourcePath, request, location);
 				Resource resource = getResource(pathToUse, location);
 				if (resource != null) {
 					return resource;
@@ -192,12 +182,11 @@ public class PathResourceResolver extends AbstractResourceResolver {
 				return resource;
 			}
 			else if (logger.isWarnEnabled()) {
-				Resource[] allowed = getAllowedLocations();
-				logger.warn(LogFormatUtils.formatValue(
-						"Resource path \"" + resourcePath + "\" was successfully resolved " +
-								"but resource \"" + resource + "\" is neither under " +
-								"the current location \"" + location + "\" nor under any of " +
-								"the allowed locations " + (allowed != null ? Arrays.asList(allowed) : "[]"), -1, true));
+				Resource[] allowedLocations = getAllowedLocations();
+				logger.warn("Resource path \"" + resourcePath + "\" was successfully resolved " +
+						"but resource \"" + resource.getURL() + "\" is neither under the " +
+						"current location \"" + location.getURL() + "\" nor under any of the " +
+						"allowed locations " + (allowedLocations != null ? Arrays.asList(allowedLocations) : "[]"));
 			}
 		}
 		return null;
@@ -205,12 +194,12 @@ public class PathResourceResolver extends AbstractResourceResolver {
 
 	/**
 	 * Perform additional checks on a resolved resource beyond checking whether the
-	 * resource exists and is readable. The default implementation also verifies
+	 * resources exists and is readable. The default implementation also verifies
 	 * the resource is either under the location relative to which it was found or
-	 * is under one of the {@linkplain #setAllowedLocations allowed locations}.
+	 * is under one of the {@link #setAllowedLocations allowed locations}.
 	 * @param resource the resource to check
 	 * @param location the location relative to which the resource was found
-	 * @return "true" if resource is in a valid location, "false" otherwise
+	 * @return "true" if resource is in a valid location, "false" otherwise.
 	 * @since 4.1.2
 	 */
 	protected boolean checkResource(Resource resource, Resource location) throws IOException {
@@ -240,12 +229,12 @@ public class PathResourceResolver extends AbstractResourceResolver {
 			resourcePath = resource.getURL().toExternalForm();
 			locationPath = StringUtils.cleanPath(location.getURL().toString());
 		}
-		else if (resource instanceof ClassPathResource classPathResource) {
-			resourcePath = classPathResource.getPath();
+		else if (resource instanceof ClassPathResource) {
+			resourcePath = ((ClassPathResource) resource).getPath();
 			locationPath = StringUtils.cleanPath(((ClassPathResource) location).getPath());
 		}
-		else if (resource instanceof ServletContextResource servletContextResource) {
-			resourcePath = servletContextResource.getPath();
+		else if (resource instanceof ServletContextResource) {
+			resourcePath = ((ServletContextResource) resource).getPath();
 			locationPath = StringUtils.cleanPath(((ServletContextResource) location).getPath());
 		}
 		else {
@@ -260,64 +249,45 @@ public class PathResourceResolver extends AbstractResourceResolver {
 		return (resourcePath.startsWith(locationPath) && !isInvalidEncodedPath(resourcePath));
 	}
 
-	private String encodeOrDecodeIfNecessary(String path, @Nullable HttpServletRequest request, Resource location) {
-		if (request != null) {
-			boolean usesPathPattern = (
-					ServletRequestPathUtils.hasCachedPath(request) &&
-					ServletRequestPathUtils.getCachedPath(request) instanceof PathContainer);
-
-			if (shouldDecodeRelativePath(location, usesPathPattern)) {
-				return UriUtils.decode(path, StandardCharsets.UTF_8);
+	private String encodeIfNecessary(String path, @Nullable HttpServletRequest request, Resource location) {
+		if (shouldEncodeRelativePath(location) && request != null) {
+			Charset charset = this.locationCharsets.getOrDefault(location, StandardCharsets.UTF_8);
+			StringBuilder sb = new StringBuilder();
+			StringTokenizer tokenizer = new StringTokenizer(path, "/");
+			while (tokenizer.hasMoreTokens()) {
+				String value = UriUtils.encode(tokenizer.nextToken(), charset);
+				sb.append(value);
+				sb.append("/");
 			}
-			else if (shouldEncodeRelativePath(location, usesPathPattern)) {
-				Charset charset = this.locationCharsets.getOrDefault(location, StandardCharsets.UTF_8);
-				StringBuilder sb = new StringBuilder();
-				StringTokenizer tokenizer = new StringTokenizer(path, "/");
-				while (tokenizer.hasMoreTokens()) {
-					String value = UriUtils.encode(tokenizer.nextToken(), charset);
-					sb.append(value);
-					sb.append('/');
-				}
-				if (!path.endsWith("/")) {
-					sb.setLength(sb.length() - 1);
-				}
-				return sb.toString();
+			if (!path.endsWith("/")) {
+				sb.setLength(sb.length() - 1);
 			}
+			return sb.toString();
 		}
-		return path;
+		else {
+			return path;
+		}
 	}
 
-	/**
-	 * When the {@code HandlerMapping} is set to not decode the URL path, the
-	 * path needs to be decoded for non-{@code UrlResource} locations.
-	 */
-	private boolean shouldDecodeRelativePath(Resource location, boolean usesPathPattern) {
-		return (!(location instanceof UrlResource) &&
-				(usesPathPattern || (this.urlPathHelper != null && !this.urlPathHelper.isUrlDecode())));
-	}
-
-	/**
-	 * When the {@code HandlerMapping} is set to decode the URL path, the path
-	 * needs to be encoded for {@code UrlResource} locations.
-	 */
-	private boolean shouldEncodeRelativePath(Resource location, boolean usesPathPattern) {
-		return (location instanceof UrlResource && !usesPathPattern &&
-				this.urlPathHelper != null && this.urlPathHelper.isUrlDecode());
+	private boolean shouldEncodeRelativePath(Resource location) {
+		return (location instanceof UrlResource && this.urlPathHelper != null && this.urlPathHelper.isUrlDecode());
 	}
 
 	private boolean isInvalidEncodedPath(String resourcePath) {
 		if (resourcePath.contains("%")) {
 			// Use URLDecoder (vs UriUtils) to preserve potentially decoded UTF-8 chars...
 			try {
-				String decodedPath = URLDecoder.decode(resourcePath, StandardCharsets.UTF_8);
+				String decodedPath = URLDecoder.decode(resourcePath, "UTF-8");
 				if (decodedPath.contains("../") || decodedPath.contains("..\\")) {
-					logger.warn(LogFormatUtils.formatValue(
-							"Resolved resource path contains encoded \"../\" or \"..\\\": " + resourcePath, -1, true));
+					logger.warn("Resolved resource path contains encoded \"../\" or \"..\\\": " + resourcePath);
 					return true;
 				}
 			}
 			catch (IllegalArgumentException ex) {
 				// May not be possible to decode...
+			}
+			catch (UnsupportedEncodingException ex) {
+				// Should never happen...
 			}
 		}
 		return false;
