@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2024 the original author or authors.
+ * Copyright 2002-2019 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,11 +16,12 @@
 
 package org.springframework.web.servlet.tags.form;
 
-import jakarta.servlet.jsp.tagext.Tag;
 import org.junit.jupiter.api.Test;
-
-import org.springframework.beans.testfixture.beans.TestBean;
+import org.springframework.tests.sample.beans.TestBean;
 import org.springframework.validation.BeanPropertyBindingResult;
+
+import javax.servlet.jsp.JspException;
+import javax.servlet.jsp.tagext.Tag;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatIllegalArgumentException;
@@ -28,13 +29,14 @@ import static org.assertj.core.api.Assertions.assertThatIllegalArgumentException
 /**
  * @author Rob Harrop
  */
-class HiddenInputTagTests extends AbstractFormTagTests {
+public class HiddenInputTagTests extends AbstractFormTagTests {
 
 	private HiddenInputTag tag;
 
 	private TestBean bean;
 
 	@Override
+	@SuppressWarnings("serial")
 	protected void onSetUp() {
 		this.tag = new HiddenInputTag() {
 			@Override
@@ -46,7 +48,7 @@ class HiddenInputTagTests extends AbstractFormTagTests {
 	}
 
 	@Test
-	void render() throws Exception {
+	public void render() throws Exception {
 		this.tag.setPath("name");
 		int result = this.tag.doStartTag();
 		assertThat(result).isEqualTo(Tag.SKIP_BODY);
@@ -62,7 +64,7 @@ class HiddenInputTagTests extends AbstractFormTagTests {
 	}
 
 	@Test
-	void withCustomBinder() throws Exception {
+	public void withCustomBinder() throws Exception {
 		this.tag.setPath("myFloat");
 
 		BeanPropertyBindingResult errors = new BeanPropertyBindingResult(this.bean, COMMAND_NAME);
@@ -81,14 +83,14 @@ class HiddenInputTagTests extends AbstractFormTagTests {
 	}
 
 	@Test
-	void dynamicTypeAttribute() {
+	public void dynamicTypeAttribute() throws JspException {
 		assertThatIllegalArgumentException().isThrownBy(() ->
 				this.tag.setDynamicAttribute(null, "type", "email"))
 			.withMessage("Attribute type=\"email\" is not allowed");
 	}
 
 	@Test
-	void disabledTrue() throws Exception {
+	public void disabledTrue() throws Exception {
 		this.tag.setDisabled(true);
 
 		this.tag.doStartTag();
@@ -104,7 +106,7 @@ class HiddenInputTagTests extends AbstractFormTagTests {
 	// SPR-8661
 
 	@Test
-	void disabledFalse() throws Exception {
+	public void disabledFalse() throws Exception {
 		this.tag.setDisabled(false);
 
 		this.tag.doStartTag();
@@ -118,18 +120,18 @@ class HiddenInputTagTests extends AbstractFormTagTests {
 	}
 
 	private void assertTagClosed(String output) {
-		assertThat(output).endsWith("/>");
+		assertThat(output.endsWith("/>")).isTrue();
 	}
 
 	private void assertTagOpened(String output) {
-		assertThat(output).startsWith("<input ");
+		assertThat(output.startsWith("<input ")).isTrue();
 	}
 
 	@Override
 	protected TestBean createTestBean() {
 		this.bean = new TestBean();
 		bean.setName("Sally Greenwood");
-		bean.setMyFloat(Float.valueOf("12.34"));
+		bean.setMyFloat(new Float("12.34"));
 		return bean;
 	}
 
