@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2024 the original author or authors.
+ * Copyright 2002-2019 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,32 +16,27 @@
 
 package org.springframework.web.servlet.tags.form;
 
-import java.beans.PropertyEditor;
-import java.io.StringReader;
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
-
-import jakarta.servlet.http.HttpServletRequest;
-import jakarta.servlet.jsp.tagext.BodyTag;
-import jakarta.servlet.jsp.tagext.Tag;
 import org.dom4j.Document;
 import org.dom4j.Element;
 import org.dom4j.Node;
 import org.dom4j.io.SAXReader;
 import org.junit.jupiter.api.Test;
-
-import org.springframework.beans.testfixture.beans.TestBean;
+import org.springframework.mock.web.test.MockHttpServletRequest;
+import org.springframework.mock.web.test.MockPageContext;
+import org.springframework.tests.sample.beans.TestBean;
 import org.springframework.validation.BeanPropertyBindingResult;
 import org.springframework.validation.BindingResult;
 import org.springframework.validation.Errors;
 import org.springframework.web.servlet.support.BindStatus;
 import org.springframework.web.servlet.support.RequestContext;
 import org.springframework.web.servlet.tags.RequestContextAwareTag;
-import org.springframework.web.testfixture.servlet.MockHttpServletRequest;
-import org.springframework.web.testfixture.servlet.MockPageContext;
+
+import javax.servlet.http.HttpServletRequest;
+import javax.servlet.jsp.tagext.BodyTag;
+import javax.servlet.jsp.tagext.Tag;
+import java.beans.PropertyEditor;
+import java.io.StringReader;
+import java.util.*;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
@@ -52,7 +47,7 @@ import static org.assertj.core.api.Assertions.assertThat;
  * @author Jeremy Grelle
  */
 @SuppressWarnings({ "rawtypes", "unchecked" })
-class OptionsTagTests extends AbstractHtmlElementTagTests {
+public class OptionsTagTests extends AbstractHtmlElementTagTests {
 
 	private static final String COMMAND_NAME = "testBean";
 
@@ -60,6 +55,7 @@ class OptionsTagTests extends AbstractHtmlElementTagTests {
 	private OptionsTag tag;
 
 	@Override
+	@SuppressWarnings("serial")
 	protected void onSetUp() {
 		this.tag = new OptionsTag() {
 			@Override
@@ -85,7 +81,7 @@ class OptionsTagTests extends AbstractHtmlElementTagTests {
 	}
 
 	@Test
-	void withCollection() throws Exception {
+	public void withCollection() throws Exception {
 		getPageContext().setAttribute(
 				SelectTag.LIST_VALUE_PAGE_ATTRIBUTE, new BindStatus(getRequestContext(), "testBean.country", false));
 
@@ -115,7 +111,7 @@ class OptionsTagTests extends AbstractHtmlElementTagTests {
 	}
 
 	@Test
-	void withCollectionAndDynamicAttributes() throws Exception {
+	public void withCollectionAndDynamicAttributes() throws Exception {
 		String dynamicAttribute1 = "attr1";
 		String dynamicAttribute2 = "attr2";
 
@@ -153,11 +149,11 @@ class OptionsTagTests extends AbstractHtmlElementTagTests {
 	}
 
 	@Test
-	void withCollectionAndCustomEditor() throws Exception {
+	public void withCollectionAndCustomEditor() throws Exception {
 		PropertyEditor propertyEditor = new SimpleFloatEditor();
 
 		TestBean target = new TestBean();
-		target.setMyFloat(Float.valueOf("12.34"));
+		target.setMyFloat(new Float("12.34"));
 
 		BeanPropertyBindingResult errors = new BeanPropertyBindingResult(target, COMMAND_NAME);
 		errors.getPropertyAccessor().registerCustomEditor(Float.class, propertyEditor);
@@ -167,12 +163,12 @@ class OptionsTagTests extends AbstractHtmlElementTagTests {
 				SelectTag.LIST_VALUE_PAGE_ATTRIBUTE, new BindStatus(getRequestContext(), "testBean.myFloat", false));
 
 		List<Float> floats = new ArrayList<>();
-		floats.add(Float.valueOf("12.30"));
-		floats.add(Float.valueOf("12.31"));
-		floats.add(Float.valueOf("12.32"));
-		floats.add(Float.valueOf("12.33"));
-		floats.add(Float.valueOf("12.34"));
-		floats.add(Float.valueOf("12.35"));
+		floats.add(new Float("12.30"));
+		floats.add(new Float("12.31"));
+		floats.add(new Float("12.32"));
+		floats.add(new Float("12.33"));
+		floats.add(new Float("12.34"));
+		floats.add(new Float("12.35"));
 
 		this.tag.setItems(floats);
 		int result = this.tag.doStartTag();
@@ -199,7 +195,7 @@ class OptionsTagTests extends AbstractHtmlElementTagTests {
 	}
 
 	@Test
-	void withItemsNullReference() throws Exception {
+	public void withItemsNullReference() throws Exception {
 		getPageContext().setAttribute(
 				SelectTag.LIST_VALUE_PAGE_ATTRIBUTE, new BindStatus(getRequestContext(), "testBean.country", false));
 
@@ -220,7 +216,7 @@ class OptionsTagTests extends AbstractHtmlElementTagTests {
 	}
 
 	@Test
-	void withoutItems() throws Exception {
+	public void withoutItems() throws Exception {
 		this.tag.setItemValue("isoCode");
 		this.tag.setItemLabel("name");
 		this.selectTag.setPath("testBean");
@@ -241,7 +237,7 @@ class OptionsTagTests extends AbstractHtmlElementTagTests {
 	}
 
 	@Test
-	void withoutItemsEnumParent() throws Exception {
+	public void withoutItemsEnumParent() throws Exception {
 		BeanWithEnum testBean = new BeanWithEnum();
 		testBean.setTestEnum(TestEnum.VALUE_2);
 		getPageContext().getRequest().setAttribute("testBean", testBean);
@@ -260,7 +256,7 @@ class OptionsTagTests extends AbstractHtmlElementTagTests {
 		Document document = reader.read(new StringReader(output));
 		Element rootElement = document.getRootElement();
 
-		assertThat(rootElement.elements()).hasSize(2);
+		assertThat(rootElement.elements().size()).isEqualTo(2);
 		Node value1 = rootElement.selectSingleNode("option[@value = 'VALUE_1']");
 		Node value2 = rootElement.selectSingleNode("option[@value = 'VALUE_2']");
 		assertThat(value1.getText()).isEqualTo("TestEnum: VALUE_1");
@@ -269,7 +265,7 @@ class OptionsTagTests extends AbstractHtmlElementTagTests {
 	}
 
 	@Test
-	void withoutItemsEnumParentWithExplicitLabelsAndValues() throws Exception {
+	public void withoutItemsEnumParentWithExplicitLabelsAndValues() throws Exception {
 		BeanWithEnum testBean = new BeanWithEnum();
 		testBean.setTestEnum(TestEnum.VALUE_2);
 		getPageContext().getRequest().setAttribute("testBean", testBean);
@@ -290,7 +286,7 @@ class OptionsTagTests extends AbstractHtmlElementTagTests {
 		Document document = reader.read(new StringReader(output));
 		Element rootElement = document.getRootElement();
 
-		assertThat(rootElement.elements()).hasSize(2);
+		assertThat(rootElement.elements().size()).isEqualTo(2);
 		Node value1 = rootElement.selectSingleNode("option[@value = 'Value: VALUE_1']");
 		Node value2 = rootElement.selectSingleNode("option[@value = 'Value: VALUE_2']");
 		assertThat(value1.getText()).isEqualTo("Label: VALUE_1");
@@ -303,16 +299,16 @@ class OptionsTagTests extends AbstractHtmlElementTagTests {
 		TestBean bean = new TestBean();
 		bean.setName("foo");
 		bean.setCountry("UK");
-		bean.setMyFloat(Float.valueOf("12.34"));
+		bean.setMyFloat(new Float("12.34"));
 		request.setAttribute(COMMAND_NAME, bean);
 
 		List floats = new ArrayList();
-		floats.add(Float.valueOf("12.30"));
-		floats.add(Float.valueOf("12.31"));
-		floats.add(Float.valueOf("12.32"));
-		floats.add(Float.valueOf("12.33"));
-		floats.add(Float.valueOf("12.34"));
-		floats.add(Float.valueOf("12.35"));
+		floats.add(new Float("12.30"));
+		floats.add(new Float("12.31"));
+		floats.add(new Float("12.32"));
+		floats.add(new Float("12.33"));
+		floats.add(new Float("12.34"));
+		floats.add(new Float("12.35"));
 
 		request.setAttribute("floats", floats);
 	}
