@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2024 the original author or authors.
+ * Copyright 2002-2019 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,33 +16,22 @@
 
 package org.springframework.web.servlet.view;
 
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.List;
-import java.util.Locale;
-import java.util.Map;
-import java.util.Set;
-
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-
 import org.springframework.http.MediaType;
-import org.springframework.web.accept.ContentNegotiationManager;
-import org.springframework.web.accept.FixedContentNegotiationStrategy;
-import org.springframework.web.accept.HeaderContentNegotiationStrategy;
-import org.springframework.web.accept.MappingMediaTypeFileExtensionResolver;
-import org.springframework.web.accept.ParameterContentNegotiationStrategy;
+import org.springframework.mock.web.test.MockHttpServletRequest;
+import org.springframework.mock.web.test.MockHttpServletResponse;
+import org.springframework.mock.web.test.MockServletContext;
+import org.springframework.web.accept.*;
 import org.springframework.web.context.request.RequestContextHolder;
 import org.springframework.web.context.request.ServletRequestAttributes;
 import org.springframework.web.context.support.StaticWebApplicationContext;
 import org.springframework.web.servlet.HandlerMapping;
 import org.springframework.web.servlet.View;
 import org.springframework.web.servlet.ViewResolver;
-import org.springframework.web.testfixture.servlet.MockHttpServletRequest;
-import org.springframework.web.testfixture.servlet.MockHttpServletResponse;
-import org.springframework.web.testfixture.servlet.MockServletContext;
+
+import java.util.*;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.BDDMockito.given;
@@ -51,14 +40,14 @@ import static org.mockito.Mockito.mock;
 /**
  * @author Arjen Poutsma
  */
-class ContentNegotiatingViewResolverTests {
+public class ContentNegotiatingViewResolverTests {
 
 	private ContentNegotiatingViewResolver viewResolver;
 
 	private MockHttpServletRequest request;
 
 	@BeforeEach
-	void createViewResolver() {
+	public void createViewResolver() {
 		StaticWebApplicationContext wac = new StaticWebApplicationContext();
 		wac.setServletContext(new MockServletContext());
 		wac.refresh();
@@ -69,32 +58,25 @@ class ContentNegotiatingViewResolverTests {
 	}
 
 	@AfterEach
-	void resetRequestContextHolder() {
+	public void resetRequestContextHolder() {
 		RequestContextHolder.resetRequestAttributes();
 	}
 
 	@Test
-	void getMediaTypeAcceptHeaderWithProduces() {
+	public void getMediaTypeAcceptHeaderWithProduces() throws Exception {
 		Set<MediaType> producibleTypes = Collections.singleton(MediaType.APPLICATION_XHTML_XML);
 		request.setAttribute(HandlerMapping.PRODUCIBLE_MEDIA_TYPES_ATTRIBUTE, producibleTypes);
 		request.addHeader("Accept", "text/html,application/xml;q=0.9,application/xhtml+xml,*/*;q=0.8");
 		viewResolver.afterPropertiesSet();
 		List<MediaType> result = viewResolver.getMediaTypes(request);
-		assertThat(result).element(0).as("Invalid content type").isEqualTo(new MediaType("application", "xhtml+xml"));
+		assertThat(result.get(0)).as("Invalid content type").isEqualTo(new MediaType("application", "xhtml+xml"));
 	}
 
 	@Test
-	void resolveViewNameWithPathExtension() throws Exception {
-		request.setRequestURI("/test");
-		request.setParameter("format", "xls");
+	public void resolveViewNameWithPathExtension() throws Exception {
+		request.setRequestURI("/test.xls");
 
-		String mediaType = "application/vnd.ms-excel";
-		ContentNegotiationManager manager = new ContentNegotiationManager(
-				new ParameterContentNegotiationStrategy(
-						Collections.singletonMap("xls", MediaType.parseMediaType(mediaType))));
-
-		ViewResolver viewResolverMock = mock();
-		viewResolver.setContentNegotiationManager(manager);
+		ViewResolver viewResolverMock = mock(ViewResolver.class);
 		viewResolver.setViewResolvers(Collections.singletonList(viewResolverMock));
 		viewResolver.afterPropertiesSet();
 
@@ -105,14 +87,14 @@ class ContentNegotiatingViewResolverTests {
 
 		given(viewResolverMock.resolveViewName(viewName, locale)).willReturn(null);
 		given(viewResolverMock.resolveViewName(viewName + ".xls", locale)).willReturn(viewMock);
-		given(viewMock.getContentType()).willReturn(mediaType);
+		given(viewMock.getContentType()).willReturn("application/vnd.ms-excel");
 
 		View result = viewResolver.resolveViewName(viewName, locale);
 		assertThat(result).as("Invalid view").isSameAs(viewMock);
 	}
 
 	@Test
-	void resolveViewNameWithAcceptHeader() throws Exception {
+	public void resolveViewNameWithAcceptHeader() throws Exception {
 		request.addHeader("Accept", "application/vnd.ms-excel");
 
 		Map<String, MediaType> mapping = Collections.singletonMap("xls", MediaType.valueOf("application/vnd.ms-excel"));
@@ -121,7 +103,7 @@ class ContentNegotiatingViewResolverTests {
 		manager.addFileExtensionResolvers(extensionsResolver);
 		viewResolver.setContentNegotiationManager(manager);
 
-		ViewResolver viewResolverMock = mock();
+		ViewResolver viewResolverMock = mock(ViewResolver.class);
 		viewResolver.setViewResolvers(Collections.singletonList(viewResolverMock));
 
 		View viewMock = mock(View.class, "application_xls");
@@ -138,10 +120,10 @@ class ContentNegotiatingViewResolverTests {
 	}
 
 	@Test
-	void resolveViewNameWithInvalidAcceptHeader() throws Exception {
+	public void resolveViewNameWithInvalidAcceptHeader() throws Exception {
 		request.addHeader("Accept", "application");
 
-		ViewResolver viewResolverMock = mock();
+		ViewResolver viewResolverMock = mock(ViewResolver.class);
 		viewResolver.setViewResolvers(Collections.singletonList(viewResolverMock));
 		viewResolver.afterPropertiesSet();
 
@@ -150,14 +132,14 @@ class ContentNegotiatingViewResolverTests {
 	}
 
 	@Test
-	void resolveViewNameWithRequestParameter() throws Exception {
+	public void resolveViewNameWithRequestParameter() throws Exception {
 		request.addParameter("format", "xls");
 
 		Map<String, MediaType> mapping = Collections.singletonMap("xls", MediaType.valueOf("application/vnd.ms-excel"));
 		ParameterContentNegotiationStrategy paramStrategy = new ParameterContentNegotiationStrategy(mapping);
 		viewResolver.setContentNegotiationManager(new ContentNegotiationManager(paramStrategy));
 
-		ViewResolver viewResolverMock = mock();
+		ViewResolver viewResolverMock = mock(ViewResolver.class);
 		viewResolver.setViewResolvers(Collections.singletonList(viewResolverMock));
 		viewResolver.afterPropertiesSet();
 
@@ -175,7 +157,7 @@ class ContentNegotiatingViewResolverTests {
 	}
 
 	@Test
-	void resolveViewNameWithDefaultContentType() throws Exception {
+	public void resolveViewNameWithDefaultContentType() throws Exception {
 		request.addHeader("Accept", "text/html,application/xhtml+xml,application/xml;q=0.9,*/*;q=0.8");
 
 		MediaType mediaType = new MediaType("application", "xml");
@@ -203,11 +185,11 @@ class ContentNegotiatingViewResolverTests {
 	}
 
 	@Test
-	void resolveViewNameAcceptHeader() throws Exception {
+	public void resolveViewNameAcceptHeader() throws Exception {
 		request.addHeader("Accept", "text/html,application/xhtml+xml,application/xml;q=0.9,*/*;q=0.8");
 
-		ViewResolver viewResolverMock1 = mock();
-		ViewResolver viewResolverMock2 = mock();
+		ViewResolver viewResolverMock1 = mock(ViewResolver.class);
+		ViewResolver viewResolverMock2 = mock(ViewResolver.class);
 		viewResolver.setViewResolvers(Arrays.asList(viewResolverMock1, viewResolverMock2));
 
 		viewResolver.afterPropertiesSet();
@@ -230,13 +212,13 @@ class ContentNegotiatingViewResolverTests {
 	// SPR-9160
 
 	@Test
-	void resolveViewNameAcceptHeaderSortByQuality() throws Exception {
+	public void resolveViewNameAcceptHeaderSortByQuality() throws Exception {
 		request.addHeader("Accept", "text/plain;q=0.5, application/json");
 
 		viewResolver.setContentNegotiationManager(new ContentNegotiationManager(new HeaderContentNegotiationStrategy()));
 
-		ViewResolver htmlViewResolver = mock();
-		ViewResolver jsonViewResolver = mock();
+		ViewResolver htmlViewResolver = mock(ViewResolver.class);
+		ViewResolver jsonViewResolver = mock(ViewResolver.class);
 		viewResolver.setViewResolvers(Arrays.asList(htmlViewResolver, jsonViewResolver));
 
 		View htmlView = mock(View.class, "text_html");
@@ -257,11 +239,11 @@ class ContentNegotiatingViewResolverTests {
 	// SPR-9807
 
 	@Test
-	void resolveViewNameAcceptHeaderWithSuffix() throws Exception {
+	public void resolveViewNameAcceptHeaderWithSuffix() throws Exception {
 		request.addHeader("Accept", "application/vnd.example-v2+xml");
 
-		ViewResolver viewResolverMock = mock();
-		viewResolver.setViewResolvers(List.of(viewResolverMock));
+		ViewResolver viewResolverMock = mock(ViewResolver.class);
+		viewResolver.setViewResolvers(Arrays.asList(viewResolverMock));
 
 		viewResolver.afterPropertiesSet();
 
@@ -280,11 +262,11 @@ class ContentNegotiatingViewResolverTests {
 	}
 
 	@Test
-	void resolveViewNameAcceptHeaderDefaultView() throws Exception {
+	public void resolveViewNameAcceptHeaderDefaultView() throws Exception {
 		request.addHeader("Accept", "application/json");
 
-		ViewResolver viewResolverMock1 = mock();
-		ViewResolver viewResolverMock2 = mock();
+		ViewResolver viewResolverMock1 = mock(ViewResolver.class);
+		ViewResolver viewResolverMock2 = mock(ViewResolver.class);
 		viewResolver.setViewResolvers(Arrays.asList(viewResolverMock1, viewResolverMock2));
 
 		View viewMock1 = mock(View.class, "application_xml");
@@ -311,16 +293,11 @@ class ContentNegotiatingViewResolverTests {
 	}
 
 	@Test
-	@SuppressWarnings("deprecation")
 	public void resolveViewNameFilename() throws Exception {
 		request.setRequestURI("/test.html");
 
-		ContentNegotiationManager manager =
-				new ContentNegotiationManager(new org.springframework.web.accept.PathExtensionContentNegotiationStrategy());
-
 		ViewResolver viewResolverMock1 = mock(ViewResolver.class, "viewResolver1");
 		ViewResolver viewResolverMock2 = mock(ViewResolver.class, "viewResolver2");
-		viewResolver.setContentNegotiationManager(manager);
 		viewResolver.setViewResolvers(Arrays.asList(viewResolverMock1, viewResolverMock2));
 
 		viewResolver.afterPropertiesSet();
@@ -343,17 +320,15 @@ class ContentNegotiatingViewResolverTests {
 	}
 
 	@Test
-	@SuppressWarnings("deprecation")
 	public void resolveViewNameFilenameDefaultView() throws Exception {
 		request.setRequestURI("/test.json");
 
 		Map<String, MediaType> mapping = Collections.singletonMap("json", MediaType.APPLICATION_JSON);
-		org.springframework.web.accept.PathExtensionContentNegotiationStrategy pathStrategy =
-				new org.springframework.web.accept.PathExtensionContentNegotiationStrategy(mapping);
+		PathExtensionContentNegotiationStrategy pathStrategy = new PathExtensionContentNegotiationStrategy(mapping);
 		viewResolver.setContentNegotiationManager(new ContentNegotiationManager(pathStrategy));
 
-		ViewResolver viewResolverMock1 = mock();
-		ViewResolver viewResolverMock2 = mock();
+		ViewResolver viewResolverMock1 = mock(ViewResolver.class);
+		ViewResolver viewResolverMock2 = mock(ViewResolver.class);
 		viewResolver.setViewResolvers(Arrays.asList(viewResolverMock1, viewResolverMock2));
 
 		View viewMock1 = mock(View.class, "application_xml");
@@ -382,10 +357,10 @@ class ContentNegotiatingViewResolverTests {
 	}
 
 	@Test
-	void resolveViewContentTypeNull() throws Exception {
+	public void resolveViewContentTypeNull() throws Exception {
 		request.addHeader("Accept", "text/html,application/xhtml+xml,application/xml;q=0.9,*/*;q=0.8");
 
-		ViewResolver viewResolverMock = mock();
+		ViewResolver viewResolverMock = mock(ViewResolver.class);
 		viewResolver.setViewResolvers(Collections.singletonList(viewResolverMock));
 
 		viewResolver.afterPropertiesSet();
@@ -403,7 +378,7 @@ class ContentNegotiatingViewResolverTests {
 	}
 
 	@Test
-	void resolveViewNameRedirectView() throws Exception {
+	public void resolveViewNameRedirectView() throws Exception {
 		request.addHeader("Accept", "application/json");
 		request.setRequestURI("/test");
 
@@ -413,12 +388,12 @@ class ContentNegotiatingViewResolverTests {
 
 		UrlBasedViewResolver urlViewResolver = new InternalResourceViewResolver();
 		urlViewResolver.setApplicationContext(webAppContext);
-		ViewResolver xmlViewResolver = mock();
-		viewResolver.setViewResolvers(List.of(xmlViewResolver, urlViewResolver));
+		ViewResolver xmlViewResolver = mock(ViewResolver.class);
+		viewResolver.setViewResolvers(Arrays.<ViewResolver>asList(xmlViewResolver, urlViewResolver));
 
 		View xmlView = mock(View.class, "application_xml");
 		View jsonView = mock(View.class, "application_json");
-		viewResolver.setDefaultViews(List.of(jsonView));
+		viewResolver.setDefaultViews(Arrays.asList(jsonView));
 
 		viewResolver.afterPropertiesSet();
 
@@ -433,10 +408,10 @@ class ContentNegotiatingViewResolverTests {
 	}
 
 	@Test
-	void resolveViewNoMatch() throws Exception {
+	public void resolveViewNoMatch() throws Exception {
 		request.addHeader("Accept", "text/html,application/xhtml+xml,application/xml;q=0.9");
 
-		ViewResolver viewResolverMock = mock();
+		ViewResolver viewResolverMock = mock(ViewResolver.class);
 		viewResolver.setViewResolvers(Collections.singletonList(viewResolverMock));
 
 		viewResolver.afterPropertiesSet();
@@ -454,11 +429,11 @@ class ContentNegotiatingViewResolverTests {
 	}
 
 	@Test
-	void resolveViewNoMatchUseUnacceptableStatus() throws Exception {
+	public void resolveViewNoMatchUseUnacceptableStatus() throws Exception {
 		viewResolver.setUseNotAcceptableStatusCode(true);
 		request.addHeader("Accept", "text/html,application/xhtml+xml,application/xml;q=0.9");
 
-		ViewResolver viewResolverMock = mock();
+		ViewResolver viewResolverMock = mock(ViewResolver.class);
 		viewResolver.setViewResolvers(Collections.singletonList(viewResolverMock));
 
 		viewResolver.afterPropertiesSet();
@@ -479,7 +454,7 @@ class ContentNegotiatingViewResolverTests {
 	}
 
 	@Test
-	void nestedViewResolverIsNotSpringBean() throws Exception {
+	public void nestedViewResolverIsNotSpringBean() throws Exception {
 		StaticWebApplicationContext webAppContext = new StaticWebApplicationContext();
 		webAppContext.setServletContext(new MockServletContext());
 		webAppContext.refresh();
@@ -487,7 +462,7 @@ class ContentNegotiatingViewResolverTests {
 		InternalResourceViewResolver nestedResolver = new InternalResourceViewResolver();
 		nestedResolver.setApplicationContext(webAppContext);
 		nestedResolver.setViewClass(InternalResourceView.class);
-		viewResolver.setViewResolvers(new ArrayList<>(List.of(nestedResolver)));
+		viewResolver.setViewResolvers(new ArrayList<>(Arrays.asList(nestedResolver)));
 
 		FixedContentNegotiationStrategy fixedStrategy = new FixedContentNegotiationStrategy(MediaType.TEXT_HTML);
 		viewResolver.setContentNegotiationManager(new ContentNegotiationManager(fixedStrategy));
@@ -499,28 +474,6 @@ class ContentNegotiatingViewResolverTests {
 
 		View result = viewResolver.resolveViewName(viewName, locale);
 		assertThat(result).as("Invalid view").isNotNull();
-	}
-
-	@Test
-	void resolveQualityValue() throws Exception {
-		request.addHeader("Accept", "text/html;q=0.9");
-
-		ViewResolver viewResolverMock = mock();
-		viewResolver.setViewResolvers(Collections.singletonList(viewResolverMock));
-
-		viewResolver.afterPropertiesSet();
-
-		View viewMock = mock(View.class, "text_html");
-
-		String viewName = "view";
-		Locale locale = Locale.ENGLISH;
-
-		given(viewResolverMock.resolveViewName(viewName, locale)).willReturn(viewMock);
-		given(viewMock.getContentType()).willReturn("text/html");
-
-		viewResolver.resolveViewName(viewName, locale);
-
-		assertThat(request.getAttribute(View.SELECTED_CONTENT_TYPE)).isEqualTo(MediaType.TEXT_HTML);
 	}
 
 }
